Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I309400db749a2fe05e1b8877dcb3d2b61e402ce7

Former-commit-id: 9fb3aabc6b14ee64b06cba22d05d6f72a85907fc

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC ষ্টেক লগিঙৰ স্তৰ বৃদ্ধি কৰক"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC বিক্ৰেতাৰ ভাৰ্ব’ছ ডিবাগ লগ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"বাগ ৰিপ’ৰ্টসমূহত অতিৰিক্ত ডিভাইচ নিৰ্দিষ্ট বিক্ৰেতাৰ লগসমূহ অন্তৰ্ভুক্ত কৰক, য’ত ব্যক্তিগত তথ্য থাকিব পাৰে।"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCIৰ ফিল্টাৰ নকৰা স্নুপ লগ"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"সবিশেষ NFC পেকেট কেপচাৰ কৰক, য’ত ব্যক্তিগত তথ্য থাকিব পাৰে।"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ডিভাইচটো ৰিষ্টাৰ্ট কৰিবনে?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"সবিশেষ NFC লগিং কেৱল বিকাশৰ উদ্দেশ্যেৰে কৰা হয়। অতিৰিক্ত NFC ডেটা বাগ ৰিপ’ৰ্টসমূহত অন্তৰ্ভুক্ত কৰা হয়, য’ত ব্যক্তিগত তথ্য থাকিব পাৰে। এই ছেটিং সলনি কৰিবলৈ আপোনাৰ ডিভাইচটো ৰিষ্টাৰ্ট কৰক।"</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"বিভিন্ন শৈলী, ৱালপেপাৰ আৰু অধিক বস্তু ব্যৱহাৰ কৰি চাওক"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"স্ক্ৰীন ছেভাৰ"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"স্ক্ৰীনছেভাৰ"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"বেডটাইম ম’ড অন হৈ থকাৰ বাবে উপলব্ধ নহয়"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"স্ক্ৰীন ছেভাৰ ব্যৱহাৰ কৰক"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"চাৰ্জ কৰোঁতে বা ডক কৰি থওঁতে"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"চাৰ্জ কৰি থকাৰ সময়ত"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ব্লুটুথৰ যোগেৰে ফ\'নৰ ইণ্টাৰনেট শ্বেয়াৰ কৰক"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ইথাৰনেট টে\'ডাৰিং"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ইথাৰনেটৰ মাধ্যমেৰে ফ’নটোৰ ইণ্টাৰনেট সংযোগ শ্বেয়াৰ কৰক"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"আপোনাৰ ম\'বাইলৰ ডেটা ব্যৱহাৰ কৰি অন্য ডিভাইচবোৰক ইণ্টাৰনেট ব্যৱহাৰ কৰিব দিবলৈ হ\'টস্পট আৰু টেদৰিং সুবিধা ব্যৱহাৰ কৰক। নিকটবৰ্তী ডিভাইচসমূহৰ সৈতে সমল শ্ৱেয়াৰ কৰিবলৈ এপসমূহে হ\'টস্পট ও সৃষ্টি কৰিব পাৰে।"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"আপোনাৰ ৱাই-ফাই অথবা ম’বাইল ডেটাৰ জৰিয়তে অন্য ডিভাইচসমূহক ইণ্টাৰনেট প্ৰদান কৰিবলৈ হটস্পট আৰু টে\'ডাৰিং ব্যৱহাৰ কৰক। নিকটৱৰ্তী ডিভাইচসমূহৰ সৈতে সমল শ্বেয়াৰ কৰিবলৈ এপ্‌সমূহেও এটা হটস্পট সৃষ্টি কৰিব পাৰে।"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"সহায়"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ডেটাৰ ব্যৱহাৰ সীমিত কৰি থকা হৈছে"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"আপুনি ছেট কৰা ডেটা শেষ হোৱাৰ পাছত আপোনাৰ টে\'বলেটৰ ম’বাইল ডেটা অফ হ\'ব।\n\nযিহেতু, আপোনাৰ টে\'বলেটে ডেটাৰ ব্যৱহাৰ নিৰ্ধাৰণ কৰে আৰু আপোনাৰ বাহকে ব্যৱহাৰৰ ওপৰত ভিত্তি কৰি ডেটাৰ গণনা পৃথকভাৱে কৰিব পাৰে, সেয়েহে ভাবি চিন্তি ডেটাৰ সীমা নিৰ্ধাৰণ কৰক।"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"আপুনি ছেট কৰা সীমাত উপনীত হোৱাৰ লগে লগে ফ\'নটোৱে ম’বাইল ডেটা অফ কৰি দিব।\n\nযিহেতু ডেটাৰ ব্যৱহাৰ আপোনাৰ ফ\'নটোৱে গণনা কৰে যিটো আপোনাৰ বাহকৰ গণনাৰ সৈতে একে নহ\'বও পাৰে, গতিকে এক ৰক্ষণশীল সীমা বন্ধাৰ কথা বিবেচনা কৰক।"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"নেপথ্য ডেটা সীমিত কৰেনে?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"যদিহে আপুনি নেপথ্য ম’বাইল ডেটা সীমিত কৰে, তেতিয়া আপুনি কোনো ৱাই-ফাই নেটৱৰ্কৰ লগত সংযোগ নকৰালৈকে কিছুমান এপ্ আৰু সেৱাই কাম নকৰিব।"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"যদিহে আপুনি নেপথ্য ম’বাইল ডেটা সীমিত কৰে, তেতিয়া আপুনি কোনো ৱাই-ফাই নেটৱৰ্কৰ লগত সংযোগ নকৰালৈকে কিছুমান এপ্ আৰু সেৱাই কাম নকৰিব।\n\nএই ছেটিংটোৱে এই টে\'বলেটৰ সকলো ব্যৱহাৰকাৰীকে প্ৰভাৱান্বিত কৰিব।"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"যদিহে আপুনি নেপথ্য ডেটা ব্যৱহাৰৰ অনুমতি নিদিয়ে, তেতিয়া আপুনি কোনো ৱাই-ফাই নেটৱৰ্কৰ লগত সংযোগ নকৰালৈকে কিছুমান এপ আৰু সেৱাই কাম নকৰিব।\n\nএই ছেটিংটোৱে এই ফ\'নৰ সকলো ব্যৱহাৰকাৰীকে প্ৰভাৱান্বিত কৰিব।"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"সকীয়নি"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"সীমা"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"আঁতৰোৱা এপ্‌সমূহ"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (অনুমোদিত)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"এমএমএছ বাৰ্তা"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ম’বাইল ডেটা অফ থাকোঁতেও পঠিয়াওক আৰু গ্ৰহণ কৰক"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"কল চলি থকা সময়ত ডেটাৰ ব্যৱহাৰ"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"কেৱল কল চলি থকা সময়তহে এই ছিমখন ম\'বাইল ডেটাৰ বাবে ব্যৱহাৰ কৰিবলৈ অনুমতি দিয়ক"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"কৰ্মস্থানৰ ছিম"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"এপ্ আৰু সমলৰ এক্সেছ"</string>
     <string name="user_rename" msgid="8735940847878484249">"নতুন নাম দিয়ক"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"ৱাই-ফাই আৰু ম’বাইল ছেটিং সংশোধনৰ অনুমতি দিয়ক"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ব্লুটুথ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ব্লুটুথ যোৰসমূহ আৰু ছেটিং সংশোধন কৰিবলৈ অনুমতি দিয়ক"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>এ অইন এটা NFC ডিভাইচ স্পৰ্শ কৰিলে ডেটা বিনিময় কৰিবলৈ অনুমতি দিয়ক"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"টেবলেটটোৱে অইন এটা ডিভাইচ স্পৰ্শ কৰিলে ডেটা বিনিময় কৰিবলৈ অনুমতি দিয়ক"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"ফ\'নটোৱে অন্য ডিভাইচ স্পৰ্শ কৰিলে ডেটা বিনিময় কৰিবলৈ অনুমতি দিয়ক"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"অৱস্থান"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"এপক আপোনাৰ অৱস্থান সম্পৰ্কীয় তথ্য ব্যৱহাৰ কৰিবলৈ দিয়ক"</string>
     <string name="wizard_back" msgid="8257697435061870191">"উভতি যাওক"</string>
     <string name="wizard_next" msgid="3884832431439072471">"পৰৱৰ্তী"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"প’ৰ্টেবললৈ সলনি কৰক"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"অন্য ধৰণে ফৰ্মেট কৰক"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"ছিম কাৰ্ডবোৰ"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"জাননী পঠিওৱা প্ৰতিটো এপৰ বাবে ছেটিং সলনি কৰক"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"ডিভাইচত দেখুওৱা এপ্‌"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"এই এপ্‌টোৱে উন্নত ছেটিং সমৰ্থন নকৰে"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"অধিক ছেটিং"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"এই এপ্‌টোৰ ভিতৰত অধিক ছেটিং উপলব্ধ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"ভিআৰ সহায়ক সেৱা"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ইনষ্টল কৰি থোৱা কোনো এপে ভিআৰ সহায়ক সেৱা হিচাপে চলাবলৈ অনুৰোধ কৰা নাই।"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR সেৱাক <xliff:g id="SERVICE">%1$s</xliff:g>ৰ এক্সেছ দিবনে?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"আপোনাৰ ক্ৰেডিট প্ৰদানকাৰীয়ে অৱৰোধ কৰিছে"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"অভিভাৱক আৱশ্যক"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"এইটো ছেটআপ কৰাটো আৰম্ভ কৰিবলৈ আপোনাৰ অভিভাৱকক ফ’নটো দিয়ক"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"অধিক জানিবলৈ আপোনাৰ আইটি প্ৰশাসকৰ সৈতে যোগাযোগ কৰক"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"অধিক বিৱৰণ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"আপোনাৰ এডমিনে আপোনাৰ কৰ্মস্থানৰ প্ৰ\'ফাইলৰ ছেটিং, অনুমতি, কৰ্পৰেট এক্সেছ, নেটৱৰ্ক কাৰ্যকলাপ আৰু ডিভাইচৰ অৱস্থানৰ তথ্যৰ সৈতে জড়িত এপ্ আৰু ডেটা নিৰীক্ষণ কৰাৰ লগতে পৰিচালনা কৰিব পাৰে।"</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"অক্ষম কৰি থোৱা ডিফ’ল্ট সালসলনিসমূহ"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"কোনো এপ্‌ উপলব্ধ নহয়"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"এপৰ সুসমতা সম্পৰ্কীয় সালসলনিসমূহ ডিবাগ কৰিব পৰা এপ্‌সমূহৰ বাবেহে সংশোধন কৰিব পাৰি। এটা ডিবাগ কৰিব পৰা এপ্‌ ইনষ্টল কৰক আৰু পুনৰ চেষ্টা কৰক।"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"এইটো ফ\'নত ছেটিং ব্যৱহাৰ কৰিব নোৱাৰি"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"এইটো টেবলেটত ছেটিং ব্যৱহাৰ কৰিব নোৱাৰি"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"এইটো ডিভাইচত ছেটিং ব্যৱহাৰ কৰিব নোৱাৰি"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"চলিত ব্যৱহাৰকাৰীয়ে ছেটিং সলনি কৰিব নোৱাৰে"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"অইন এটা ছেটিঙৰ ওপৰত নিৰ্ভৰশীল"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"ছেটিং উপলব্ধ নহয়"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"একাউণ্ট"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"ডিভাইচৰ নাম"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"প্ৰাথমিক তথ্য"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"কোনো নেটৱৰ্ক নাই।"</string>
     <string name="network_query_error" msgid="6406348372070035274">"নেটৱৰ্ক বিচাৰি পোৱা নগ\'ল। আকৌ চেষ্টা কৰক।"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(নিষিদ্ধ)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"কোনো ছিম কাৰ্ড নাই"</string>
     <string name="sim_card" msgid="6381158752066377709">"ছিম"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"ছিম নাই"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"ছিমৰ একো তথ্য নাই"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"সলনি কৰক"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"সংযোজিত হৈ আছে"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"সংযোগ নাই"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ম’বাইল ডেটা স্বয়ংক্ৰিয়ভাৱে সংযুক্ত নহ’ব"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"ম’বাইল ডেটা অফ কৰিবনে?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ভুল পাছৱৰ্ড"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"শুনিবলৈ আৰম্ভ কৰিবলৈ, তলৰ মাজৰ অংশত কিউআৰ ক’ডটো ৰাখক"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"কিউআৰ ক’ডটো মান্য ফৰ্মেটৰ নহয়"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"বাণ্ডল কৰা ম’বাইল এপ্‌"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"বাণ্ডল কৰা ম’বাইল এপ্‌"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"বাণ্ডল কৰা ম’বাইল এপৰ স্বচ্ছতাৰ তথ্য"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"বিজ্ঞাপনযুক্ত"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"বিকাশকৰ্তা (সকল)ৰ তথ্য"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"যোগাযোগৰ তথ্য"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"বিৱৰণ"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"গোপনীয়তাৰ নীতি"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"শিতান"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"বাণ্ডল কৰা ম’বাইল এপ্‌"</string>
 </resources>
