--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -795,7 +795,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Увеличаване на нивото на регистриране за стека за NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Подробен рег. файл (NFC) за отстр. на грешки за доставчиците"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Включване на допълнителни регистрационни файлове за доставчиците на конкретни устройства в сигналите за програмни грешки, които може да съдържат лична информация."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Нефилтриран регистрационен файл за анализ на NFC чрез NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Запис на подробни NFC пакети, които може да съдържат лична информация."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Да се рестартира ли устройството?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Подробното записване в регистрационни файлове посредством NFC е предназначено само за програмни цели. В сигналите за програмни грешки, които може да съдържат лична информация, са включени допълнителни данни от NFC. За да промените тази настройка, рестартирайте устройството си."</string>
@@ -1179,8 +1180,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Изпробвайте различни стилове, тапети и др."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Скрийнсейвър"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"скрийнсейвър"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Не е налице, защото режимът „Време за сън“ е вкл."</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Използване на скрийнсейвър"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"При зареждане или връзка с докинг станция"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"При зареждане"</string>
@@ -1471,6 +1471,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Споделете връзката с интернет на телефона през Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Тетъринг чрез Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Споделете връзката с интернет на телефона чрез Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Използвайте точка за достъп и тетъринг, за да предоставите достъп до интернет на други устройства чрез мобилната си връзка за данни. Приложенията могат също да създават точки за достъп, за да споделят съдържание с устройства в близост."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Използвайте точка за достъп и тетъринг, за да предоставите достъп до интернет на други устройства чрез Wi-Fi или мобилната си връзка за данни. Приложенията могат също да създават точки за достъп, за да споделят съдържание с устройства в близост."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Помощ"</string>
@@ -2700,10 +2702,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Ограничаване на използването на данни"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Таблетът ви ще изключи мобилните данни, след като достигне зададеното от вас ограничение.\n\nТъй като преносът им се измерва от таблета ви, а операторът ви може да го отчита по различен начин, добре е да използвате умерен лимит."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Телефонът ви ще изключи мобилните данни, след като достигне зададеното от вас ограничение.\n\nТъй като преносът им се измерва от телефона ви, а операторът ви може да го отчита по различен начин, добре е да използвате умерен лимит."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Да се ограничат ли данните на заден план?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"В случай че ограничите мобилните данни на заден план, някои приложения и услуги няма да работят, освен ако не сте свързани с Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"В случай че ограничите мобилните данни на заден план, някои приложения и услуги няма да работят, освен ако не сте свързани с Wi‑Fi.\n\nНастройката засяга всички потребители на този таблет."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"В случай че ограничите мобилните данни на заден план, някои приложения и услуги няма да работят, освен ако не сте свързани с Wi‑Fi.\n\nНастройката засяга всички потребители на този телефон."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"предупреждение"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ограничение"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Премахнати приложения"</string>
@@ -2945,8 +2943,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (препоръчително)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS съобщения"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Изпращане и получаване при изключени мобилни данни"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Данни по време на обаждания"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Разрешаване тази SIM карта да се използва за мобилни данни само по време на обаждания"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Служебна SIM карта"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Достъп до прилож. и съдържанието"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПРЕИМЕНУВАНЕ"</string>
@@ -2958,15 +2958,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Разрешаване на промяна на настройките за Wi‑Fi и мобилни данни"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Разрешаване на промяна на сдвояванията и настройките на Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Разрешаване на обмен на данни, когато <xliff:g id="DEVICE_NAME">%1$s</xliff:g> докосне друго устройство с NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Разрешаване на обмен на данни, когато таблетът докосва друго устройство"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Разрешаване на обмен на данни, когато телефонът докосва друго устройство"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Местоположение"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Разрешаване на приложенията да използват информация за местоположението ви"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Назад"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Напред"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Превкл.: Преносимо хран."</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Форматиране по друг начин"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM карти"</string>
@@ -3418,10 +3413,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Промяна на настройките за всяко приложение, което изпраща известия"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Приложения, показвани на устройството"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Това приложение не поддържа подобрените настройки"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Още настройки"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Още настройки са налице в приложението"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Помощни услуги за VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Никое инсталирано приложение не е заявило да се изпълнява като помощна услуга за VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Искате ли <xliff:g id="SERVICE">%1$s</xliff:g> да има достъп като услуга за VR?"</string>
@@ -3886,6 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Блокирано от доставчика на кредити"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Необходим е родител"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Дайте телефона на родителя си, за да стартира настройването"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"За повече информация се свържете със системния администратор"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Още подробности"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администраторът ви може да наблюдава и управлява приложенията и данните, свързани със служебния ви потребителски профил, включително настройките, разрешенията, корпоративния достъп, мрежовата активност и информацията за местоположението на устройството."</string>
@@ -4331,12 +4326,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Промени, свързани с деактивирането по подразбиране"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Няма приложения"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Промени в съвместимостта на приложенията могат да се извършват само за приложения с възможност за отстраняване на грешки. Инсталирайте такова и опитайте отново."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Настройката не се поддържа на този телефон"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Настройката не се поддържа на този таблет"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Настройката не се поддържа на това устройство"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Настройката не може да бъде променена от текущия потребител"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Зависи от друга настройка"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Настройката не е налице"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Профил"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Име на устройството"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Основна информация"</string>
@@ -4371,7 +4361,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Няма намерени мрежи."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Не можаха да бъдат намерени мрежи. Опитайте отново."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(забранено)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Няма SIM карта"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Няма SIM карта"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Няма"</string>
@@ -4688,6 +4677,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Промяна"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Свързано"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Няма връзка"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Връзката за мобилни данни няма да е автоматична"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Да се изключат ли мобилните данни?"</string>
@@ -4842,14 +4835,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Грешна парола"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"За да започнете да слушате, центрирайте QR кода по-долу"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Невалиден формат на QR кода"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Групирани мобилни приложения"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Групирани мобилни приложения"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Информация за прозрачността на групираните мобилни приложения"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Съдържа реклами"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Информация за програмистите"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Информация за връзка"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Описание"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Декларация за поверителност"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категория"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Групирано мобилно приложение"</string>
 </resources>
