--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -795,7 +795,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC virna logimise taseme suurendamine"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC teenusepakkuja paljusõnaline silumise logi"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Veaaruannetesse kaasatakse täiendavad seadmepõhised teenusepakkuja logid, mis võivad sisaldada privaatset teavet."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI filtreerimata jälgimise logi"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Jäädvustatakse üksikasjalikud NFC-paketid, mis võivad sisaldada privaatset teavet."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Kas taaskäivitada seade?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Üksikasjalik NFC logimine on mõeldud ainult arenduseks. Veaaruannetesse kaasatakse täiendavad NFC andmed, mis võivad sisaldada privaatset teavet. Selle seade muutmiseks taaskäivitage oma seade."</string>
@@ -1179,8 +1180,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Proovige eri stiile, taustapilte ja muud"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekraanisäästja"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekraanisäästja"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Pole saadaval, kuna uneajarežiim on sees"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Kasuta ekraanisäästjat"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Laadimise ajal või dokis"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Laadimise ajal"</string>
@@ -1471,6 +1471,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Telefoni internetiühenduse jagamine Bluetoothi kaudu"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Jagamine Ethernetiga"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Telefoni internetiühenduse jagamine Etherneti kaudu"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Teistele seadmetele mobiilse andmesidevõrgu kaudu Interneti-ühenduse pakkumiseks kasutage kuumkohta ja ühenduse jagamist. Samuti saavad kuumkoha luua rakendused, et jagada sisu läheduses olevate seadmetega."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Teistele seadmetele WiFi- või mobiilse andmesidevõrgu kaudu internetiühenduse pakkumiseks kasutage kuumkohta ja ühenduse jagamist. Samuti saavad kuumkoha luua rakendused, et jagada sisu läheduses olevate seadmetega."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Abi"</string>
@@ -2700,10 +2702,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Andmekasutuse piiramine"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tahvelarvuti lülitab teie määratud piiranguni jõudes mobiilse andmeside välja.\n\nKuna andmekasutust mõõdab tahvelarvuti ja operaator võib andmekasutust teisiti mõõta, kaaluge konservatiivse piirangu määramist."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Telefon lülitab teie määratud piiranguni jõudes mobiilse andmeside välja.\n\nKuna andmekasutust mõõdab telefon ja teie operaator võib arvestada kasutust teisiti, siis võiksite määrata konservatiivse limiidi."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Kas soovite taustandmeid piirata?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Kui piirate taustal kasutatavat mobiilset andmesidet, siis toimivad mõned rakendused ja teenused ainult siis, kui seade on ühendatud WiFi-võrku."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Kui piirate taustal kasutatavat mobiilset andmesidet, siis toimivad mõned rakendused ja teenused ainult siis, kui seade on ühendatud WiFi-võrku.\n\nSee seade mõjutab kõiki selle tahvelarvuti kasutajaid."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Kui piirate taustal kasutatavat mobiilset andmesidet, siis toimivad mõned rakendused ja teenused ainult siis, kui seade on ühendatud WiFi-võrku.\n\nSee seade mõjutab kõiki selle telefoni kasutajaid."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"hoiatus"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"piir"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Eemaldatud rakendused"</string>
@@ -2945,8 +2943,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (soovitatav)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-sõnumid"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Saatmine ja vastuvõtmine, kui mobiilne andmeside on väljas"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Kõnede ajal andmeside lubamine"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Lubab kasutada seda SIM-i mobiilseks andmesideks ainult kõnede ajal"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Töökoha SIM-kaart"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Juurdepääs rakendusele ja sisule"</string>
     <string name="user_rename" msgid="8735940847878484249">"NIMETA ÜMBER"</string>
@@ -2958,15 +2958,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"WiFi, mobiilside ja Bluetoothi lähtestamine"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Bluetoothi sidumiste ja seadete muutmise lubamine"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Luba andmevahetus, kui <xliff:g id="DEVICE_NAME">%1$s</xliff:g> puudutab teist NFC-seadet"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Andmete vahetuse lubamine, kui tahvelarvuti puudutab teist seadet"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Andmete vahetuse lubamine, kui telefon puudutab teist seadet"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Asukoht"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Rakendustel asukohateabe kasutamise lubamine"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Tagasi"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Järgmine"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Vaheta teisaldatavale"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Muul viisil vormindamine"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-kaardid"</string>
@@ -3418,10 +3413,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Muutke seadeid iga rakenduse jaoks, mis saadab märguandeid"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Seadmes kuvatud rakendused"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"See rakendus ei toeta täiustatud seadeid"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Rohkem seadeid"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Selle rakenduse sees on saadaval rohkem seadeid"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR-abilise teenused"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Ükski installitud rakendus pole taotlenud VR-abilise teenusena käitamist."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Kas lubada VR-teenuse juurdepääs teenusele <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3886,6 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Blokeeris teie krediidipakkuja"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Vaja on vanema abi"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Anna telefon vanemale, et ta saaks selle seadistamist alustada"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Lisateabe saamiseks võtke ühendust IT-administraatoriga"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Rohkem üksikasju"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Teie administraator saab jälgida ja hallata teie tööprofiiliga seotud rakendusi ning andmeid, sh seadeid, lube, ettevõtte juurdepääsu, võrgutegevusi ja seadme asukohateavet."</string>
@@ -4331,12 +4326,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Vaikimisi keelatud rakenduste muudatused"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Rakendusi pole"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Rakenduse ühilduvuse muudatusi saab muuta silutavate rakenduste puhul. Installige silutav rakendus ja proovige uuesti."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Seadet selles telefonis ei toetata"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Seadet selles tahvelarvutis ei toetata"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Seadet selles seadmes ei toetata"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Praegune kasutaja ei saa seadet muuta"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Oleneb teisest seadest"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Seade pole saadaval"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Konto"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Seadme nimi"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Põhiteave"</string>
@@ -4371,7 +4361,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Võrke ei leitud."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Võrke ei õnnestunud leida. Proovige uuesti."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(keelatud)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM-kaarti pole"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM-kaart"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM-i pole"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Pole"</string>
@@ -4688,6 +4677,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Muutmine"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Ühendatud"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Ühendus puudub"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobiilset andmesideühendust ei looda automaatselt"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Kas lülitada mobiilne andmeside välja?"</string>
@@ -4842,14 +4835,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Vale parool"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Kuulamise alustamiseks paigutage QR-kood allpool keskele"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-kood ei ole sobilik vorming"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Sisseehitatud mobiilirakendused"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Sisseehitatud mobiilirakendused"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Sisseehitatud mobiilirakenduste läbipaistvuse teave"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Sisaldab reklaame"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Arendaja(te) teave"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktteave"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Kirjeldus"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Privaatsuseeskirjad"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategooria"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Sisseehitatud mobiilirakendus"</string>
 </resources>
