--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Nosta NFC-pinon lokikirjaustasoa"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Myyjien laajennettu NFC-virheenkorjausloki"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Sisällytä virheraportteihin muita laitekohtaisia myyjälokeja, jotka voivat sisältää yksityisiä tietoja."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI:n suodattamaton tarkkailuloki"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Tallenna NFC-pakettitietoja, jotka saattavat sisältää yksityisiä tietoja."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Käynnistetäänkö laite uudelleen?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFC-tietojen kirjaaminen on tarkoitettu vain kehittäjäkäyttöön. Virheraportit sisältävät muuta NFC-dataa, joka voi sisältää yksityisiä tietoja. Muuta asetusta käynnistämällä laite uudelleen."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Kokeile eri tyylejä, taustakuvia ja muuta"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Näytönsäästäjä"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"näytönsäästäjä"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Ei käytettävissä, kun nukkuma-aikamoodi on päällä"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Käytä näytönsäästäjää"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Latauksen aikana tai telakoituna"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Latauksen aikana"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Jaa puhelimen internetyhteys Bluetoothilla"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernetin jakaminen"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Jaa puhelimen internetyhteys Ethernetillä"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Hotspot- ja yhteyden jako ‑ominaisuuksien avulla voit jakaa internetyhteyden muille laitteille mobiilidatayhteydellä. Sovellukset voivat myös luoda hotspotin ja jakaa sisältöä lähellä oleville laitteille."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Jaa internetyhteys muille laitteille Wi-Fin tai mobiilidatan avulla hotspotilla tai käyttämällä puhelinta modeemina. Sovellukset voivat myös luoda hotspotin ja jakaa sisältöä lähellä oleville laitteille."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Ohjeet"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Datan käytön rajoittaminen"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tabletin mobiilidata poistetaan käytöstä, kun määritetty raja saavutetaan.\n\nTabletti mittaa tiedonsiirron. Operaattorisi voi kuitenkin käyttää eri mittaustapaa, joten suosittelemme määrittämään rajan todellista ylärajaa alemmaksi."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Puhelimen mobiilidata poistetaan käytöstä, kun määritetty raja saavutetaan.\n\nPuhelin mittaa datan käytön. Operaattorisi voi kuitenkin käyttää eri mittaustapaa, joten suosittelemme määrittämään rajan todellista ylärajaa alemmaksi."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Rajoitetaanko taustatiedonsiirtoa?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Jos rajoitat taustalla tapahtuvaa mobiilitiedonsiirtoa, osa sovelluksista ja palveluista toimii vain kun käytät Wi‑Fi-yhteyttä."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Jos rajoitat taustalla tapahtuvaa mobiilitiedonsiirtoa, osa sovelluksista ja palveluista toimii vain kun käytät Wi‑Fi-yhteyttä.\n\nAsetus vaikuttaa tämän tabletin kaikkiin käyttäjiin."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Jos rajoitat taustalla tapahtuvaa mobiilitiedonsiirtoa, osa sovelluksista ja palveluista toimii vain kun käytät Wi‑Fi-yhteyttä.\n\nAsetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"varoitus"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"rajoitus"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Poistetut sovellukset"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (suositus)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-viestit"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Lähetä ja vastaanota, kun mobiilidata ei ole käytössä."</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data puhelujen aikana"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Salli tämän SIM-kortin käyttö mobiilidataan vain puhelujen aikana."</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM-kortti (työ)"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Sovellusten ja sisällön käyttö"</string>
     <string name="user_rename" msgid="8735940847878484249">"NIMEÄ UUDELLEEN"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Salli Wi-Fi- ja mobiiliverkkoasetuksien muokkaaminen"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Salli Bluetooth-parien ja -asetuksien muokkaaminen"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Salli tiedonsiirto, kun <xliff:g id="DEVICE_NAME">%1$s</xliff:g> koskettaa toista NFC-laitetta"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Salli tiedonsiirto, kun tabletti koskettaa toista laitetta"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Salli tiedonsiirto, kun puhelin koskettaa toista laitetta."</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Sijainti"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Anna sovellusten käyttää sijaintitietojasi"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Takaisin"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Seuraava"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Vaihda siirrettävään"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Alusta toisella tavalla"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-kortit"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Muuta jokaisen ilmoituksia lähettävän sovelluksen asetuksia"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Laitteella näkyvät sovellukset"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Tämä sovellus ei tue tehostettuja asetuksia"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Lisää asetuksia"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Lisää asetuksia on saatavilla sovelluksen sisällä"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR-avustinpalvelut"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Asennettuja sovelluksia ei ole pyydetty toimimaan VR-avustinpalveluina."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Sallitaanko VR-palveluiden käyttöoikeus palvelulle <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Luoton myöntäjän estämä"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Tarvitset vanhemman apua"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Aloita käyttöönotto antamalla puhelin vanhemmalle"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Jos haluat lisätietoa, ota yhteyttä IT-järjestelmänvalvojaan"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Lisätietoja"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Järjestelmänvalvoja voi valvoa ja hallita työprofiiliisi liittyviä sovelluksia ja tietoja, mukaan lukien asetuksia, käyttöoikeuksia, yrityskäyttöä, verkkotoimintaa ja laitteen sijaintitietoja."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Oletusarvoisesti käytöstä poistettujen muutokset"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Ei sovelluksia"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Sovelluksen yhteensopivuusmuutoksia voi tehdä vain virheenkorjausta tukevissa sovelluksissa. Asenna virheenkorjausta tukeva sovellus ja yritä uudelleen."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Asetusta ei tueta tällä puhelimella."</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Asetusta ei tueta tällä tabletilla"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Asetusta ei tueta tällä laitteella"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Nykyinen käyttäjä ei voi muuttaa asetusta."</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Toinen asetus vaikuttaa siihen."</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Asetus ei ole käytettävissä"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Tili"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Laitteen nimi"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Perustiedot"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Ei verkkoja"</string>
     <string name="network_query_error" msgid="6406348372070035274">"Verkkoja ei löytynyt. Yritä uudelleen."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(kielletty)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Ei SIM-korttia"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM-kortti"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Ei SIM-korttia"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Ei mitään"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Muuta"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Yhdistetty"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Ei yhteyttä"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobiilidata ei yhdisty automaattisesti"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Laitetaanko mobiilidata pois päältä?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Väärä salasana"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Aloita kuuntelu keskittämällä alla olevaan QR-koodiin"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-koodin muoto ei kelpaa"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mukana tulevat mobiilisovellukset"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mukana tulevat mobiilisovellukset"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mukana tulevien mobiilisovellusten avoimuustiedot"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Sisältää mainoksia"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Kehittäjien tiedot"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Yhteystiedot"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Kuvaus"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Tietosuojakäytäntö"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Luokka"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mukana tuleva mobiilisovellus"</string>
 </resources>
