--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"एनएफ़सी स्टैक को लॉग करने का लेवल बढ़ाएं"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"एनएफ़सी वर्बोस वेंडर डीबग लॉग"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"गड़बड़ी की जानकारी वाली रिपोर्ट में, खास तौर पर डिवाइस से जुड़े वेंडर लॉग शामिल करें. इसमें निजी जानकारी भी शामिल हो सकती है."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"एनएफ़सी के NCI का स्नूप लॉग, जिसे फ़िल्टर नहीं किया गया है"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"पूरी जानकारी वाले एनएफ़सी पैकेट कैप्चर करें. इसमें निजी जानकारी भी शामिल हो सकती है."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"क्या आपको डिवाइस रीस्टार्ट करना है?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"एनएफ़सी का लाॅग सिर्फ़ डेवलपमेंट के मकसद से बनाया गया है. गड़बड़ी की रिपोर्ट में एनएफ़सी का अतिरिक्त डेटा शामिल होता है. इसमें निजी जानकारी भी शामिल हो सकती है. इस सेटिंग को बदलने के लिए, डिवाइस को रीस्टार्ट करें."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"अलग-अलग स्टाइल, वॉलपेपर, और बहुत कुछ आज़माएं"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"स्क्रीन सेवर"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"स्क्रीन सेवर"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"बेडटाइम मोड चालू होने पर यह सुविधा काम नहीं करती"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"स्क्रीन सेवर का इस्तेमाल करें"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"चार्ज करते समय या डॉक किए होने पर"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"चार्ज करते समय"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ब्लूटूथ से फ़ोन का इंटरनेट कनेक्शन शेयर करें"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ईथरनेट टेदरिंग"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ईथरनेट से फ़ोन का इंटरनेट कनेक्शन शेयर करें"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"अपने मोबाइल डेटा कनेक्शन से, दूसरे डिवाइस को इंटरनेट देने के लिए हॉटस्पॉट और टेदरिंग का इस्तेमाल करें. आस-पास के डिवाइस के साथ कॉन्टेंट शेयर करने के लिए, ऐप्लिकेशन भी हॉटस्पॉट बना सकते हैं."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"दूसरे डिवाइस के साथ अपना वाई-फ़ाई और मोबाइल डेटा कनेक्शन शेयर करने के लिए हॉटस्पॉट और टेदरिंग का इस्तेमाल करें. आस-पास के डिवाइस के साथ कॉन्टेंट शेयर करने के लिए, ऐप्लिकेशन भी हॉटस्पॉट बना सकते हैं."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"सहायता"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"डेटा खर्च सीमित करना"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"जैसे ही आपका टैबलेट डेटा, आपकी सेट की हुई सीमा पर पहुंचेगा, आपका टैबलेट उसे बंद कर देगा.\n\nचूंकि डेटा खर्च आपके टैबलेट से मापा जाता है और आपकी मोबाइल और इंटरनेट सेवा देने वाली कंपनी, इस्तेमाल किए गए डेटा का हिसाब अलग तरीके से लगा सकती है. इसलिए, सीमा को कम पर सेट कर सकते हैं."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"जैसे ही आपका मोबाइल डेटा आपकी सेट की हुई सीमा पर पहुंचेगा, आपका फ़ोन उसे बंद कर देगा.\n\nडेटा खर्च आपके फ़ोन से मापा जाता है और आपकी मोबाइल और इंटरनेट सेवा देने वाली कंपनी, इस्तेमाल किए गए डेटा का हिसाब अलग तरीके से लगा सकती है. इसलिए, सीमा को कम पर सेट करें."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"पृष्ठभूमि डेटा प्रतिबंधित करें?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"अगर आप बैकग्राउंड मोबाइल डेटा प्रतिबंधित करते हैं, तो जब तक आप वाई-फ़ाई से कनेक्ट नहीं हो जाते, तब तक कुछ ऐप्लिकेशन और सेवाएं काम नहीं करेंगी."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"अगर आप बैकग्राउंड मोबाइल डेटा प्रतिबंधित करते हैं, तो जब तक आप वाई-फ़ाई से कनेक्ट नहीं हो जाते, तब तक कुछ ऐप्लिकेशन और सेवाएं काम नहीं करेंगी.\n\nइस सेटिंग का इस टैबलेट पर मौजूद सभी उपयोगकर्ताओं पर असर पड़ेगा ."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"अगर आप बैकग्राउंड मोबाइल डेटा प्रतिबंधित करते हैं, तो जब तक आप वाई-फ़ाई से कनेक्ट नहीं हो जाते, तब तक कुछ ऐप्लिकेशन और सेवाएं काम नहीं करेंगी.\n\nइस सेटिंग का इस फ़ोन पर मौजूद सभी उपयोगकर्ताओं पर असर पड़ता है."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"चेतावनी"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"सीमा"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"निकाले गए ऐप्लिकेशन"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (सुझाया गया)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"मल्टीमीडिया मैसेज (एमएमएस)"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"मोबाइल डेटा बंद होने पर मल्टीमीडिया मैसेज (एमएमएस) भेजें और पाएं"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"कॉल के दौरान डेटा का इस्तेमाल"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"कॉल के दौरान इस सिम का इस्तेमाल सिर्फ़ मोबाइल डेटा के लिए करें"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"दफ़्तर सिम"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ऐप और सामग्री तक पहुंच"</string>
     <string name="user_rename" msgid="8735940847878484249">"नाम बदलें"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"वाई-फ़ाई और मोबाइल सेटिंग में बदलाव की अनुमति दें"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ब्लूटूथ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ब्लूटूथ से जोड़ने और सेटिंग में बदलाव की अनुमति दें"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"एनएफ़सी"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"जब यह <xliff:g id="DEVICE_NAME">%1$s</xliff:g> किसी अन्य NFC डिवाइस को स्पर्श करे तब डेटा का लेन-देन होने दें"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"जब टैबलेट अन्य डिवाइस को स्पर्श करे तो डेटा ट्रांसफर करने दें"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"जब फ़ोन दूसरे डिवाइस को टच करे तो डेटा ट्रांसफर करने दें"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"जगह"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ऐप को आपकी जगह की जानकारी का इस्तेमाल करने दें"</string>
     <string name="wizard_back" msgid="8257697435061870191">"वापस जाएं"</string>
     <string name="wizard_next" msgid="3884832431439072471">"आगे बढ़ें"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"पोर्टेबल पर स्विच करें"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"दूसरे तरीके से फ़ॉर्मैट करें"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"सिम कार्ड"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"सूचनाएं भेजने वाले हर ऐप्लिकेशन के लिए, सेटिंग बदलें"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"डिवाइस पर दिखने वाले ऐप्लिकेशन"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"यह ऐप्लिकेशन, बेहतर सेटिंग के साथ काम नहीं करता है"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"अन्य सेटिंग"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"इस ऐप्लिकेशन में ज़्यादा सेटिंग उपलब्ध हैं"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"वीआर सहायक सेवाएं"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"इंस्टॉल किए गए किसी भी ऐप्लिकेशन ने, वीआर सहायक सेवाओं के तौर पर चलाए जाने का अनुरोध नहीं किया है."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> के लिए VR सेवा के इस्तेमाल की अनुमति दें?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"क्रेडिट देने वाली कंपनी ने ब्लॉक किया है"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"माता-पिता की अनुमति ज़रूरी है"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"बायोमेट्रिक्स के ज़रिए पुष्टि करने की सुविधा सेट अप करने के लिए, अपने माता-पिता की मदद लें"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ज़्यादा जानकारी के लिए, अपने आईटी एडमिन से संपर्क करें"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ज़्यादा जानकारी"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"आपका एडमिन आपकी वर्क प्रोफ़ाइल से जुड़े ऐप और डेटा की निगरानी और उनका प्रबंधन कर सकता है, जिनमें सेटिंग, अनुमतियां, कॉर्पोरेट पहुंच, नेटवर्क गतिविधि और डिवाइस के जगह की जानकारी शामिल हैं."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"डिफ़ॉल्ट रूप से बंद किए गए बदलाव"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"डीबग करने लायक कोई ऐप्लिकेशन उपलब्ध नहीं है"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ऐप्लिकेशन के साथ काम करने के लिए किए जाने वाले बदलाव, सिर्फ़ डीबग करने लायक ऐप्लिकेशन में किए जा सकते हैं. डीबग करने लायक किसी ऐप्लिकेशन को इंस्टॉल करें और फिर से कोशिश करें."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"इस फ़ोन पर सेटिंग नहीं की जा सकती"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"इस टैबलेट पर सेटिंग नहीं की जा सकती"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"इस डिवाइस पर सेटिंग नहीं की जा सकती"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"मौजूदा उपयोगकर्ता सेटिंग को नहीं बदल सकते"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"यह किसी दूसरी सेटिंग पर निर्भर है"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"सेटिंग बदलने की सुविधा उपलब्ध नहीं है"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"खाता"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"डिवाइस का नाम"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"सामान्य जानकारी"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"कोई नेटवर्क नहीं मिला."</string>
     <string name="network_query_error" msgid="6406348372070035274">"कोई नेटवर्क नहीं मिला. फिर से कोशिश करें."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(मना है)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"कोई सिम कार्ड नहीं है"</string>
     <string name="sim_card" msgid="6381158752066377709">"सिम कार्ड"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"कोई सिम कार्ड नहीं लगाया गया है"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"इस वाई-फ़ाई नेटवर्क पर सिम कार्ड की कोई जानकारी नहीं है"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"बदलें"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"कनेक्ट हो गया"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"इंटरनेट कनेक्शन नहीं है"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"मोबाइल डेटा अपने-आप कनेक्ट नहीं होगा"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"क्या आप मोबाइल डेटा बंद करना चाहते हैं?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"पासवर्ड गलत है"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"सुनने के लिए, दिए गए क्यूआर कोड को बीच में लाएं"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"क्यूआर कोड का फ़ॉर्मैट गलत है"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"मोबाइल ऐप्लिकेशन बंडल"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"मोबाइल ऐप्लिकेशन बंडल"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"मोबाइल ऐप्लिकेशन बंडल के बारे में ट्रांसपेरेंसी से जुड़ी जानकारी"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ऐप्लिकेशन में विज्ञापन दिखाए जाते हैं"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"डेवलपर की जानकारी"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"संपर्क जानकारी"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ऐप्लिकेशन की जानकारी"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"निजता नीति"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"कैटगरी"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"मोबाइल ऐप्लिकेशन बंडल"</string>
 </resources>
