--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -808,7 +808,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Povećaj razinu zapisivanja za NFC stog"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Opširni zapisnik dobavljača o otklanjanju pogrešaka za NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Uključite dodatne zapisnike dobavljača pojedinog uređaja u izvješća o programskim pogreškama koja mogu sadržavati privatne podatke."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Nefiltrirani zapis za NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Snimite detaljne NFC pakete koji možda sadrže privatne informacije."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Ponovo pokrenuti?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detaljno zapisivanje za NFC namijenjeno je samo u razvojne svrhe. Dodatni podaci NFC-a uključeni su u izvješća o programskim pogreškama koja mogu sadržavati privatne podatke. Ponovo pokrenite uređaj da biste promijenili tu postavku."</string>
@@ -1195,8 +1196,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Isprobajte različite stilove, pozadine i drugo"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Čuvar zaslona"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"čuvar zaslona"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nije dostupno jer je uključen način rada u vrijeme spavanja"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Koristi čuvar zaslona"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Tijekom punjenja ili kada je na priključnoj stanici"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Tijekom punjenja"</string>
@@ -1488,6 +1488,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Dijelite internetsku vezu telefona putem Bluetootha"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Dijeljenje veze ethernetom"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Dijelite internetsku vezu telefona putem etherneta"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Pomoću žarišne točke i modemskog povezivanja drugi se uređaji mogu povezati s internetom putem podatkovne veze vašeg mobilnog uređaja. Žarišnu točku mogu izraditi i aplikacije radi dijeljenja sadržaja s uređajima u blizini."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Pomoću žarišne točke i modemskog povezivanja drugi se uređaji mogu povezati s internetom putem vašeg Wi-Fija ili podatkovne veze vašeg mobilnog uređaja. Žarišnu točku mogu izraditi i aplikacije radi dijeljenja sadržaja s uređajima u blizini."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Pomoć"</string>
@@ -2735,10 +2737,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Ograničenje podatkovnog prometa"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tablet će isključiti mobilne podatke kada dosegne ograničenje koje ste postavili.\n\nBudući da potrošnju podataka mjeri tablet i da se obračun mobilnog operatera može razlikovati, možda biste trebali postaviti strože ograničenje."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Telefon će isključiti mobilne podatke kada dosegne ograničenje koje ste postavili.\n\nBudući da potrošnju podataka mjeri telefon i da se obračun mobilnog operatera može razlikovati, možda biste trebali postaviti strože ograničenje."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Ograničenje pozadinskih podataka?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ako ograničite pozadinske mobilne podatke, neke aplikacije i usluge funkcionirat će samo ako se povežete s Wi‑Fi mrežom."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ako ograničite pozadinske mobilne podatke, neke aplikacije i usluge funkcionirat će samo ako se povežete s Wi‑Fi mrežom.\n\nTa postavka utječe na sve korisnike tableta."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ako ograničite pozadinske mobilne podatke, neke aplikacije i usluge funkcionirat će samo ako se povežete s Wi‑Fi mrežom.\n\nTa postavka utječe na sve korisnike telefona."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"Upozori na"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"Ograničeno na"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Uklonjene aplikacije"</string>
@@ -2982,8 +2980,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (preporučeno)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS poruke"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Slanje i primanje dok su mobilni podaci isključeni"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Podaci tijekom poziva"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Dopusti da se ovaj SIM koristi za mobilne podatke samo tijekom poziva"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Radni SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Pristup aplikacijama i sadržaju"</string>
     <string name="user_rename" msgid="8735940847878484249">"PREIMENOVANJE"</string>
@@ -2995,15 +2995,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Dopusti izmjenu postavki Wi‑Fi i mobilne mreže"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Dopusti izmjene uparivanja i postavki Bluetootha"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Dopusti razmjenu podataka kada <xliff:g id="DEVICE_NAME">%1$s</xliff:g> dodiruje drugi NFC uređaj"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Dopusti razmjenu podataka kada tablet dodiruje drugi uređaj"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Dopusti razmjenu podataka kada telefon dodiruje drugi uređaj"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Lokacija"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Dopusti aplikacijama da upotrebljavaju podatke o lokaciji"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Natrag"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Dalje"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Prebaci na prijenosno"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatiraj na drugi način"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kartice"</string>
@@ -3458,10 +3453,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Promijenite postavke za sve aplikacije koje šalju obavijesti"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Aplikacije koje se prikazuju na uređaju"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Ta aplikacija ne podržava napredne postavke"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Više postavki"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Više postavki dostupno je unutar aplikacije"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Pomoćne usluge za virtualnu stvarnost"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Nijedna instalirana aplikacija nije zatražila pokretanje kao pomoćna usluga za virtualnu stvarnost."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Želite li dopustiti pristup usluge virtualne stvarnosti za uslugu <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3938,6 +3931,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Blokirao zajmodavac"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Potreban roditelj"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Predaj telefon roditelju za početak postavljanja"</string>
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Predaj telefon roditelju kako bi odobrio promjenu te postavke."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Za više informacija obratite se IT administratoru"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Više pojedinosti"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Vaš administrator može nadzirati aplikacije i postavke povezane s vašim radnim profilom, uključujući postavke, dopuštenja, korporacijski pristup, aktivnost na mreži i podatke o lokaciji uređaja, te njima upravljati."</string>
@@ -4394,12 +4388,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Zadane onemogućene promjene"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Nema aplikacija"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Promjene kompatibilnosti aplikacija moguće su samo za aplikacije s mogućnošću otklanjanja pogrešaka. Instalirajte aplikaciju s mogućnošću otklanjanja pogrešaka i pokušajte ponovo."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Postavka nije podržana na telefonu"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Postavka nije podržana na tabletu"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Postavka nije podržana na uređaju"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Postavku ne može promijeniti trenutačni korisnik"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Ovisi o drugoj postavci"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Postavka nije dostupna"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Račun"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Naziv uređaja"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Osnovne informacije"</string>
@@ -4434,7 +4423,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nije pronađena nijedna mreža."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Nije pronađena nijedna mreža. Pokušajte ponovo."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(zabranjeno)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nema SIM kartice"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nema SIM kartice"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Nema"</string>
@@ -4752,6 +4740,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Promijeni"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Povezano"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Niste povezani"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobilni podaci neće se automatski povezati"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Isključiti mobilne podatke?"</string>
@@ -4906,14 +4898,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Pogrešna zaporka"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Da biste počeli slušati, centrirajte QR kôd u nastavku"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kôd nije u važećem formatu"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobilne skupne aplikacije"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobilne skupne aplikacije"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informacije o transparentnosti za mobilne skupne aplikacije"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Sadrži oglase"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informacije o razvojnim programerima"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Podaci za kontakt"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Opis"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Pravila o privatnosti"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategorija"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobilna skupna aplikacija"</string>
 </resources>
