--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC-verem naplózási szintjének emelése"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC részletes szolgáltatói hibakeresési napló"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"További olyan eszközspecifikus szolgáltatói naplók felvétele a hibajelentésekbe, amelyek tartalmazhatnak privát információkat."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI nem szűrt megfigyelési napló"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Részletes NFC-csomagok elfogása, amelyek privát információkat is tartalmazhatnak."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Újraindítja az eszközt?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"A részletes NFC-naplózás csak fejlesztési célokra szolgál. A hibajelentésekben további NFC-adatok is szerepelnek, amelyek között privát információk is lehetnek. A beállítás módosításához indítsa úja eszközét."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Próbáljon ki más stílusokat, háttérképeket és egyebeket"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Képernyővédő"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"képernyővédő"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nem áll rendelkezésre, mert az alvásidő mód aktív"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Képernyővédő használata"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Töltés és dokkolás közben"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Töltés közben"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Telefon internetkapcsolatának megosztása Bluetooth-on keresztül"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet megosztása"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"A telefon internetkapcsolatának megosztása Etherneten keresztül"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Hotspotot és internetmegosztást használhat annak érdekében, hogy internetet biztosítson más eszközöknek mobiladat-kapcsolat segítségével. Az alkalmazások is létrehozhatnak hotspotokat, hogy tartalmakat osszanak meg a közeli eszközökkel."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"A hotspot és az internetmegosztás funkcióval más eszközöknek biztosíthat internet-hozzáférést saját Wi‑Fi- vagy mobiladat-kapcsolatán keresztül. Az alkalmazások szintén létrehozhatnak hotspotot, hogy tartalmat osszanak meg a közeli eszközökkel."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Súgó"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Adatforgalom korlátozása"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Táblagépe kikapcsolja a mobiladat-kapcsolatot, amint eléri a beállított korlátot.\n\nMivel az adatforgalmat a táblagép méri, és a szolgáltató mérései ettől eltérhetnek, érdemes lehet szigorúbb korlátot megadnia."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Telefonja kikapcsolja a mobiladat-kapcsolatot, amint eléri a beállított korlátot.\n\nMivel az adatforgalmat a telefon méri, és a szolgáltató mérései ettől eltérhetnek, érdemes lehet szigorúbb korlátot megadnia."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Korlátozza a háttéradatokat?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ha korlátozza a háttérben zajló mobiladat-forgalmat, néhány alkalmazás és szolgáltatás nem fog működni, ha nem csatlakozik Wi-Fi-hálózathoz."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ha korlátozza a háttérben zajló mobiladat-forgalmat, néhány alkalmazás és szolgáltatás nem fog működni, ha nem csatlakozik Wi-Fi-hálózathoz.\n\nEz a beállítás minden felhasználót érint ezen a táblagépen."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ha korlátozza a háttérben zajló mobiladat-forgalmat, néhány alkalmazás és szolgáltatás nem fog működni, ha nem csatlakozik Wi-Fi-hálózathoz.\n\nEz a beállítás minden felhasználót érint ezen a telefonon."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"figyelmez-tetés"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"korlát"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Eltávolított alkalmazások"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (javasolt)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-üzenetek"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Küldés és fogadás mobiladat-kapcsolat nélkül"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Adathasználat hívások közben"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"A SIM-kártya mobiladatának használata kizárólag hívások alatt"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Munkahelyi SIM-kártya"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Alkalmazások és tartalmak elérése"</string>
     <string name="user_rename" msgid="8735940847878484249">"ÁTNEVEZÉS"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Lehetővé teszi a Wi‑Fi és mobilbeállítások módosítását."</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"A bluetoothos párosítások és beállítások engedélyezése"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Adatok cseréjének engedélyezése, amikor ez a(z) <xliff:g id="DEVICE_NAME">%1$s</xliff:g> hozzáér egy másik NFC-eszközhöz"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Lehetővé teszi az adatcserét, ha a táblagép érintkezik egy másik eszközzel."</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Lehetővé teszi az adatcserét, ha a telefon érintkezik egy másik készülékkel."</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Tartózkodási hely"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Az alkalmazások használhatják a helyadatokat."</string>
     <string name="wizard_back" msgid="8257697435061870191">"Vissza"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Tovább"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Váltás hordozható módra"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formázás más módszerrel"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kártyák"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Beállítások módosítása az egyes alkalmazásoknál, amelyek küldhetnek értesítéseket"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Az eszközön megjelenő alkalmazások"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Az alkalmazás nem támogatja a speciális beállításokat"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"További beállítások"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Ebben az alkalmazásban további beállítások állnak rendelkezésre"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Virtuálisvalóság-segédszolgáltatás"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Egy telepített alkalmazás sem kérte, hogy virtuálisvalóság-segédszolgáltatásként legyen futtatva."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Engedélyezi a(z) <xliff:g id="SERVICE">%1$s</xliff:g> számára a hozzáférést a virtuálisvalóság-szolgáltatáshoz?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Ezt tiltja a hitelszolgáltatója"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Szülő szükséges"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Add oda szüleidnek a telefont a funkció beállításának elkezdéséhez"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"További információért forduljon a rendszergazdához"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"További részletek"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"A rendszergazda figyelheti és kezelheti a munkaprofilhoz társított alkalmazásokat és adatokat, beleértve a beállításokat, az engedélyeket, a vállalati hozzáférést, a hálózati tevékenységeket és az eszköz helyadatait is."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Alapértelmezett letiltott változtatások"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Nem található app"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Az alkalmazáskompatibilitás csak a hibaelhárításra alkalmas alkalmazásoknál módosítható. Telepítsen hibaelhárításra alkalmas alkalmazást, és próbálja újra."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"A beállítás nem támogatott ezen a telefonon"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"A beállítás nem támogatott ezen a táblagépen"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"A beállítás nem támogatott ezen az eszközön"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"A jelenlegi felhasználó nem módosíthatja a beállítást"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Másik beállítástól függ"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"A beállítás nem áll rendelkezésre"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Fiók"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Eszköznév"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Alapvető adatok"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nem található hálózat."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Nincs hálózat. Próbálja újra."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(tiltott)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nincs SIM-kártya"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nincs SIM-kártya"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Nincs"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Módosítás"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> (<xliff:g id="NETWORKMODE">%2$s</xliff:g>)"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Csatlakozva"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Nincs kapcsolat"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Nincs automatikus mobiladat-kapcsolat"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Kikapcsolja a mobiladatokat?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Helytelen jelszó"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"A hallgatás megkezdéséhez igazítsa a QR-kódot az alábbi panel közepére"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"A QR-kód formátuma nem érvényes"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobilos alkalmazáscsomagok"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobilos alkalmazáscsomagok"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobilos alkalmazáscsomagok átláthatósági információi"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Hirdetéseket tartalmaz"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Fejlesztői információk"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kapcsolatfelvételi adatok"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Leírás"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Adatvédelmi irányelvek"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategória"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobilos alkalmazáscsomag"</string>
 </resources>
