--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"បង្កើន​កម្រិតធ្វើ​កំណត់ហេតុ​គំនរ NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"កំណត់ហេតុជួសជុល​រៀបរាប់អំពី​អ្នកផ្គត់ផ្គង់ NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"រួមបញ្ចូល​កំណត់ហេតុបន្ថែម​អំពីអ្នកផ្គត់ផ្គង់​សម្រាប់ឧបករណ៍ជាក់លាក់​នៅក្នុងរបាយការណ៍អំពីបញ្ហា ដែលអាច​មានព័ត៌មានឯកជន។"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"កំណត់ហេតុ snoop ដែលមិនមានការត្រង NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"ចាប់យកកញ្ចប់ NFC លម្អិត​ដែលអាចមានព័ត៌មានឯកជន។"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ចាប់ផ្តើម​ឧបករណ៍​ឡើង​វិញ​ឬ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ការកត់ត្រា NFC លម្អិត​គឺសម្រាប់តែការអភិវឌ្ឍប៉ុណ្ណោះ។ ទិន្នន័យ NFC បន្ថែម​ត្រូវបានរួមបញ្ចូល​ក្នុងរបាយការណ៍អំពីបញ្ហា​ដែលអាចមានព័ត៌មានឯកជន។ ចាប់ផ្ដើមឧបករណ៍​របស់អ្នក​ឡើងវិញ ដើម្បីប្ដូរ​ការកំណត់នេះ។"</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"សាកប្រើ​រចនាប័ទ្ម ផ្ទាំងរូបភាពផ្សេងៗគ្នា និង​អ្វីៗជាច្រើនទៀត"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"ធាតុរក្សាអេក្រង់"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ធាតុ​រក្សា​អេក្រង់"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"មិនអាច​ប្រើបានទេ ដោយសារ​បើកមុខងារ​ម៉ោងគេង"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ប្រើធាតុ​រក្សា​អេក្រង់"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ពេលសាកថ្ម ឬភ្ជាប់"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ពេលសាកថ្ម"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ចែក​រំលែក​ការ​ភ្ជាប់​អ៊ីនធឺណិត​របស់ទូរសព្ទ​តាមរយៈប៊្លូធូស"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ការ​ភ្ជាប់អ៊ីសឺរណិត"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ចែករំលែកការតភ្ជាប់អ៊ីនធឺណិតរបស់ទូរសព្ទតាមរយៈអ៊ីសឺរណិត"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"ប្រើហតស្ប៉ត និងការភ្ជាប់ ដើម្បីផ្តល់អ៊ីនធឺណិតដល់ឧបករណ៍ផ្សេងទៀតតាមរយៈការភ្ជាប់ទិន្នន័យទូរសព្ទចល័តរបស់អ្នក។ កម្មវិធីក៏អាចបង្កើតហតស្ប៉ត ដើម្បីចែករំលែកខ្លឹមសារជាមួយឧបករណ៍ដែលនៅជិតផងដែរ។"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"ប្រើ​ហតស្ប៉ត និង​ការភ្ជាប់ ដើម្បី​ផ្តល់​អ៊ីនធឺណិត​ដល់​ឧបករណ៍​ផ្សេងទៀត​តាមរយៈ​ការតភ្ជាប់ Wi-Fi ឬ​ទិន្នន័យ​ទូរសព្ទ​ចល័ត​របស់​អ្នក។ កម្មវិធី​ក៏​អាច​បង្កើត​ហតស្ប៉ត ដើម្បី​ចែករំលែក​ខ្លឹមសារ​ជាមួយ​ឧបករណ៍​ដែល​នៅជិត​បាន​ផងដែរ។"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"ជំនួយ"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ការដាក់កំហិតលើ​ការប្រើ​ទិន្នន័យ"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"ថេប្លេត​របស់​អ្នក​នឹង​បិទ​ទិន្នន័យ​ទូរសព្ទចល័ត ​នៅ​ពេល​ដែល​វា​ឈាន​ដល់កម្រិតដែល​អ្នក​បាន​កំណត់។\n\nដោយសារ​តែ​ការ​ប្រើ​ប្រាស់​ទិន្នន័យ​ត្រូវ​បាន​វាស់​ស្ទង់ដោយ​ថេប្លេតរបស់អ្នក ​ហើយក្រុមហ៊ុនបម្រើសេវាទូរសព្ទរបស់​អ្នកអាចគណនាលើការប្រើប្រាស់​ខុសពីនោះ សូមពិចារណា​កំណត់កម្រិតដែលទាបជាង។"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"ទូរសព្ទ​របស់​អ្នក​នឹង​បិទ​ទិន្នន័យ​ទូរសព្ទចល័ត ​នៅ​ពេល​ដែល​វា​ឈាន​ដល់កម្រិតដែល​អ្នក​បាន​កំណត់។\n\nដោយសារ​តែ​ការ​ប្រើ​ប្រាស់​ទិន្នន័យ​ត្រូវ​បាន​វាស់​ស្ទង់ដោយ​ទូរសព្ទ​របស់អ្នក ​ហើយក្រុមហ៊ុនបម្រើសេវាទូរសព្ទ​របស់​អ្នកអាចគណនាលើការប្រើប្រាស់​ខុសពីនោះ សូមពិចារណា​កំណត់កម្រិតដែលទាបជាង។"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"ដាក់កម្រិត​ទិន្នន័យ​ផ្ទៃ​​ខាង​ក្រោយ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"ប្រសិន​បើ​អ្នក​ដាក់​កំហិត​លើទិន្នន័យ​ចល័ត​ផ្ទៃ​ខាង​ក្រោយ​ កម្មវិធី និង​សេវាកម្ម​មួយ​ចំនួន​នឹង​មិន​ដំណើរការ​ទេ ​លុះត្រាតែ​​អ្នក​​ភ្ជាប់ Wi-Fi ។"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"ប្រសិន​បើ​អ្នក​ដាក់​កំហិត​លើទិន្នន័យ​ចល័ត​ផ្ទៃ​ខាង​ក្រោយ​ កម្មវិធី និង​សេវាកម្ម​មួយ​ចំនួន​នឹង​មិន​ដំណើរការ​ទេ ​លុះត្រាតែ​​អ្នក​​ភ្ជាប់ Wi-Fi ។\n\nការ​កំណត់​នេះ​ប៉ះពាល់​ដល់​អ្នក​ប្រើប្រាស់​ទាំងអស់​នៅ​លើ​ថេប្លេត​នេះ។"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"ប្រសិន​បើ​អ្នក​ដាក់​កំហិតលើ​ទិន្នន័យ​ចល័ត​ផ្ទៃ​ខាង​ក្រោយ​ កម្មវិធី និង​សេវាកម្ម​មួយ​ចំនួន​នឹង​មិន​ដំណើរការ​ទេ ​លុះត្រាតែ​​អ្នក​​ភ្ជាប់ Wi-Fi ។\n\nការ​កំណត់​នេះ​ប៉ះពាល់​ដល់​អ្នក​ប្រើប្រាស់​ទាំងអស់​នៅ​លើ​ទូរសព្ទ​នេះ។"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ការ​ព្រមាន"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ដែន​កំណត់"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"កម្មវិធី​ដែល​បាន​លុប"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (បាន​ណែនាំ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"សារ MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ផ្ញើ និង​ទទួលសារ នៅពេល​បិទ​ទិន្នន័យ​ទូរសព្ទចល័ត"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"ទិន្នន័យអំឡុងពេល​ហៅទូរសព្ទ"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"អនុញ្ញាតឱ្យប្រើ​ស៊ីមនេះ​សម្រាប់​ទិន្នន័យ​ទូរសព្ទចល័ត​តែប៉ុណ្ណោះ អំឡុងពេល​ហៅទូរសព្ទ"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"ស៊ីម​ការងារ"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"កម្មវិធី &amp; កា​រ​ចូល​ប្រើ​មាតិកា"</string>
     <string name="user_rename" msgid="8735940847878484249">"ប្ដូរ​ឈ្មោះ"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"អនុញ្ញាត​ការ​ជូន​ដំណឹង​វ៉ាយហ្វាយ និង​ការ​កំណត់​ចល័ត"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ប៊្លូធូស"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ឲ្យ​កែ​ការ​កំណត់ និង​ផ្គូផ្គង​ប៊្លូធូស"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"អនុញ្ញាត​ឲ្យផ្លាស់​ប្ដូរ​ទិន្នន័យគ្នា នៅ​ពេល​ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> នេះ ប៉ះ​ឧបករណ៍ NFC ផ្សេងទៀត"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"អនុញ្ញាតឱ្យផ្លាស់​ប្ដូរ​ទិន្នន័យគ្នា ​ពេលថេប្លេតនេះ​ប៉ះ​ឧបករណ៍​ផ្សេង"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"អនុញ្ញាតឱ្យផ្លាស់​ប្ដូរ​ទិន្នន័យគ្នា ​ពេល​ទូរសព្ទ​ប៉ះ​ឧបករណ៍​ផ្សេង"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"ទី​តាំង​"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ឲ្យ​កម្មវិធី​ប្រើ​ព័ត៌មាន​ទីតាំង​របស់​អ្នក"</string>
     <string name="wizard_back" msgid="8257697435061870191">"ថយក្រោយ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"បន្ទាប់​"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"ប្ដូរ​ទៅ​ទំហំផ្ទុក​ចល័ត"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"ឈូស​តាម​វិធី​ផ្សេង"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"ស៊ី​ម​កាត"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"ប្ដូរការកំណត់​សម្រាប់កម្មវិធី​នីមួយៗដែល​ផ្ញើការជូនដំណឹង"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"កម្មវិធីដែលបង្ហាញ​នៅលើឧបករណ៍"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"កម្មវិធីនេះមិនស្គាល់ការកំណត់ដែលប្រសើរឡើងទេ"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"ការកំណត់ច្រើនទៀត"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"អាចប្រើការកំណត់បានច្រើនទៀតនៅក្នុងកម្មវិធីនេះ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"សេវាកម្មជំនួយ VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"មិនមានកម្មវិធីដែលបានដំឡើងត្រូវបានស្នើឲ្យដំណើរការជាសេវាកម្មជំនួយ VR នោះទេ។"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"អនុញ្ញាតឲ្យសេវាកម្ម VR ចូលដំណើរការ <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"បានទប់ស្កាត់ដោយក្រុមហ៊ុនផ្ដល់សេវាឥណទានរបស់អ្នក"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ត្រូវយល់ព្រម​ពីមាតាបិតា"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ឱ្យ​ទូរសព្ទ​ទៅមាតាបិតា​របស់អ្នក ដើម្បីចាប់ផ្ដើម​រៀបចំ​ការផ្ទៀងផ្ទាត់​នេះ"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ដើម្បីទទួលបានព័ត៌មានបន្ថែម សូមទាក់ទងទៅអ្នកគ្រប់គ្រង​ផ្នែកព័ត៌មានវិទ្យារបស់អ្នក"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ព័ត៌មានលម្អិតបន្ថែម"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"អ្នកគ្រប់គ្រង​របស់អ្នក​អាច​តាមដាន និងគ្រប់គ្រងកម្មវិធី និងទិន្នន័យដែលពាក់ព័ន្ធជាមួយកម្រង​ព័ត៌មាន​ការងារ​របស់អ្នក ដោយរាប់បញ្ចូលទាំងការកំណត់ ការអនុញ្ញាត ការចូលលក្ខណៈក្រុមហ៊ុន សកម្មភាពបណ្តាញ និងព័ត៌មានអំពីទីតាំងរបស់ឧបករណ៍នេះផងដែរ។"</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"ការផ្លាស់ប្ដូរ​ដែលបានបិទ​តាម​លំនាំដើម"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"មិនមាន​កម្មវិធីទេ"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ការផ្លាស់ប្ដូរ​ភាពត្រូវគ្នា​នៃ​កម្មវិធី​អាចត្រូវបាន​កែប្រែសម្រាប់​តែកម្មវិធី​ដែលអាចជួសជុល​បានប៉ុណ្ណោះ។ ដំឡើង​កម្មវិធី​ដែលអាចជួសជុលបាន រួចព្យាយាមម្ដងទៀត។"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ការកំណត់​មិន​អាច​ប្រើ​នៅ​លើ​ទូរសព្ទ​នេះ​បាន​ទេ"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ការកំណត់​មិន​អាច​ប្រើនៅ​លើ​ថេប្លេត​នេះ​បាន​​ទេ"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ការកំណត់​មិន​អាច​ប្រើ​​នៅ​លើ​ឧបករណ៍​នេះ​បានទេ"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"ការកំណត់​មិន​អាច​ប្ដូរ​ដោយ​អ្នក​ប្រើប្រាស់​បច្ចុប្បន្ន​បាន​ទេ"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"ផ្អែក​លើ​ការកំណត់​ផ្សេង​ទៀត"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"មិន​អាចប្រើការកំណត់​បានទេ"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"គណនី"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"ឈ្មោះ​ឧបករណ៍"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"ព័ត៌មាន​មូលដ្ឋាន"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"រក​បណ្ដាញមិន​ឃើញ​ទេ។"</string>
     <string name="network_query_error" msgid="6406348372070035274">"រក​បណ្ដាញ​មិនឃើញទេ។ សូមព្យាយាម​ម្ដង​ទៀត។"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(ហាម)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"គ្មាន​ស៊ីម​កាត​ទេ"</string>
     <string name="sim_card" msgid="6381158752066377709">"ស៊ីម"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"មិនមានស៊ីមទេ"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"គ្មាន"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ផ្លាស់ប្ដូរ"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"បានភ្ជាប់"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"មិនមាន​ការតភ្ជាប់ទេ"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ទិន្នន័យទូរសព្ទចល័ត​នឹងមិនភ្ជាប់ដោយស្វ័យប្រវត្តិទេ"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"បិទទិន្នន័យ​ទូរសព្ទចល័តឬ?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ពាក្យសម្ងាត់មិនត្រឹមត្រូវទេ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ដើម្បីចាប់ផ្ដើមស្ដាប់ សូមដាក់កូដ QR ខាងក្រោមឱ្យ​នៅចំកណ្ដាល"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"កូដ QR មិនមែនជា​ទម្រង់​ដែលត្រឹមត្រូវ​ទេ"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"កម្មវិធីឧបករណ៍ចល័តដែលបានដាក់ជាក្រុម"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"កម្មវិធីឧបករណ៍ចល័តដែលបានដាក់ជាក្រុម"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ព័ត៌មានតម្លាភាពអំពីកម្មវិធីឧបករណ៍ចល័តដែលបានដាក់ជាក្រុម"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"មាន​ការផ្សាយ​ពាណិជ្ជកម្ម"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ព័ត៌មានអំពី​អ្នកអភិវឌ្ឍន៍"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ព័ត៌មាន​ទំនាក់ទំនង"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ការពណ៌នា"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"គោលការណ៍ឯកជនភាព"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ប្រភេទ"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"កម្មវិធីឧបករណ៍ចល័តដែលបានដាក់ជាក្រុម"</string>
 </resources>
