--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"ເພີ່ມລະດັບການບັນທຶກການວາງຊ້ອນ NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"ບັນທຶກດີບັກເວັນເດີແບບລະອຽດຂອງ NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"ຮວມບັນທຶກເວັນເດີເພີ່ມເຕີມສະເພາະອຸປະກອນໄວ້ໃນລາຍງານຂໍ້ຜິດພາດ, ເຊິ່ງອາດມີຂໍ້ມູນສ່ວນຕົວ."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"ບັນທຶກ snoop ທີ່ບໍ່ມີການກັ່ນຕອງຂອງ NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"ບັນທຶກລາຍລະອຽດຂອງແພັກເກັດ NFC ເຊິ່ງອາດມີຂໍ້ມູນສ່ວນຕົວ."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ຣີສະຕາດອຸປະກອນບໍ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ການບັນທຶກລາຍລະອຽດຂອງ NFC ແມ່ນສຳລັບຈຸດປະສົງການພັດທະນາເທົ່ານັ້ນ. ຂໍ້ມູນເພີ່ມເຕີມຂອງ NFC ຈະຮວມຢູ່ໃນລາຍງານຂໍ້ຜິດພາດ, ເຊິ່ງອາດມີຂໍ້ມູນສ່ວນຕົວ. ຣີສະຕາດອປະກອນເພື່ອປ່ຽນການຕັ້ງຄ່ານີ້."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"ລອງໃຊ້ຮູບແບບ, ຮູບພື້ນຫຼັງ ແລະ ອື່ນໆທີ່ແຕກຕ່າງກັນ"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"ພາບພັກໜ້າຈໍ"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ພາບພັກໜ້າຈໍ"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"ບໍ່ສາມາດໃຊ້ໄດ້ເນື່ອງຈາກເປີດໂໝດເວລານອນຢູ່"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ໃຊ້ພາບພັກໜ້າຈໍ"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ໃນຂະນະທີ່ກຳລັງສາກ ຫຼື ວາງໄວ້ບ່ອນຕັ້ງສາກ"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ໃນຂະນະທີ່ກຳລັງສາກໄຟ"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ແບ່ງປັນການເຊື່ອມຕໍ່ອິນເຕີເນັດຂອງໂທລະສັບຜ່ານທາງ Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ການປ່ອຍສັນຍານ Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ແບ່ງປັນອິນເຕີເນັດຂອງໂທລະສັບຜ່ານທາງ Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"ໃຊ້ຮັອດສະປອດ ແລະ ການປ່ອຍສັນຍານເພື່ອສະໜອງອິນເຕີເນັດໃຫ້ອຸປະກອນອື່ນຜ່ານທາງການເຊື່ອມຕໍ່ອິນເຕີເນັດມືຖືຂອງທ່ານ. ແອັບຕ່າງໆສາມາດສ້າງຮັອດສະປອດ ແລະ ແບ່ງປັນເນື້ອຫາກັບອຸປະກອນທີ່ຢູ່ໃກ້ຄຽງໄດ້."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"ໃຊ້ຮັອດສະປອດ ແລະ ການປ່ອຍສັນຍານເພື່ອສະໜອງອິນເຕີເນັດໃຫ້ກັບອຸປະກອນອື່ນຜ່ານການເຊື່ອມຕໍ່ Wi‑Fi ຫຼື ອິນເຕີເນັດມືຖືຂອງທ່ານ. ແອັບສາມາດສ້າງຮັອດສະປອດເພື່ອແບ່ງປັນເນື້ອຫາກັບອຸປະກອນທີ່ຢູ່ໃກ້ຄຽງໄດ້ນຳ."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"ຊ່ວຍເຫຼືອ"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ການຈຳກັດການນຳໃຊ້ຂໍ້ມູນ"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"ແທັບເລັດຂອງທ່ານຈະປິດການນຳໃຊ້ອິນເຕີເນັດມືຖືເມື່ອໃຊ້ຮອດປະລິມານທີ່ກຳນົດໄວ້.\n\nເນື່ອງຈາກການນຳໃຊ້ຂໍ້ມູນແມ່ນວັດແທກໂດຍແທັບເລັດຂອງທ່ານ ເຊິ່ງຜູ້ໃຫ້ບໍລິການຂອງທ່ານອາດນັບປະລິມານແຕກຕ່າງກັນ. ໃຫ້ທ່ານຈຳກັດປະລິມານໂດຍເຜື່ອຈຳນວນໄວ້ນຳ."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"ໂທລະສັບຂອງທ່ານຈະປິດການນຳໃຊ້ອິນເຕີເນັດມືຖືເມື່ອໃຊ້ຮອດປະລິມານທີ່ກຳນົດໄວ້.\n\nເນື່ອງຈາກການນຳໃຊ້ຂໍ້ມູນແມ່ນວັດແທກໂດຍໂທລະສັບຂອງທ່ານ ເຊິ່ງຜູ້ໃຫ້ບໍລິການຂອງທ່ານອາດນັບປະລິມານແຕກຕ່າງກັນ. ໃຫ້ທ່ານຈຳກັດປະລິມານໂດຍເຜື່ອຈຳນວນໄວ້ນຳ."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"ຈຳກັດການນຳໃຊ້ຂໍ້ມູນພື້ນຫຼັງ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"ຫາກທ່ານຈຳກັດການນຳໃຊ້ອິນເຕີເນັດມືຖືໃນພື້ນຫຼັງ, ບາງແອັບ ແລະ ບາງບໍລິການຈະບໍ່ເຮັດວຽກຈົນກວ່າທ່ານຈະເຊື່ອມຕໍ່ກັບເຄືອຂ່າຍ Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"ຫາກທ່ານຈຳກັດການນຳໃຊ້ອິນເຕີເນັດມືຖືໃນພື້ນຫຼັງ, ບາງແອັບ ແລະ ບາງບໍລິການຈະບໍ່ເຮັດວຽກຈົນກວ່າທ່ານຈະເຊື່ອມຕໍ່ກັບເຄືອຂ່າຍ Wi‑Fi.\n\nການຕັ້ງຄ່ານີ້ຈະມີຜົນກັບຜູ້ໃຊ້ທຸກຄົນໃນແທັບເລັດນີ້."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"ຫາກທ່ານຈຳກັດການນຳໃຊ້ອິນເຕີເນັດມືຖືໃນພື້ນຫຼັງ, ບາງແອັບ ແລະ ບາງບໍລິການຈະບໍ່ເຮັດວຽກຈົນກວ່າທ່ານຈະເຊື່ອມຕໍ່ກັບເຄືອຂ່າຍ Wi‑Fi.\n\nການຕັ້ງຄ່ານີ້ຈະມີຜົນກັບຜູ້ໃຊ້ທຸກຄົນໃນໂທລະສັບນີ້."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ຄຳເຕືອນ"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ຂີດຈຳກັດ"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"ແອັບຯທີ່ຖືກລຶບອອກແລ້ວ"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ແນະ​ນໍາ​)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"ຂໍ້ຄວາມ MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ສົ່ງ ແລະ ຮັບຂໍ້ມູນໃນເວລາປິດອິນເຕີເນັດມືຖື"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"ອິນເຕີເນັດໃນລະຫວ່າງໂທ"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"ອະນຸຍາດໃຫ້ SIM ນີ້ຖືກໃຊ້ສຳລັບອິນເຕີເນັດມືຖືສະເພາະໃນລະຫວ່າງການໂທ"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM ບ່ອນ​ເຮັດ​ວຽກ"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ແອັບຯ &amp; ການ​ເຈ​ຂ"</string>
     <string name="user_rename" msgid="8735940847878484249">"ປ່ຽນຊື່"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"ອະນຸຍາດໃຫ້ມີການແກ້ໄຂການຕັ້ງຄ່າ Wi-Fi ແລະມືຖື"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ອະນຸຍາດໃຫ້ແກ້ໄຂການຈັບຄູ່ ແລະການຕັ້ງຄ່າຂອງ Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"​ອະ​ນຸ​ຍາດ​ການ​ແລກ​ປ່ຽນ​ຂໍ້​ມູນ​ເມື່ອ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ​ແຕະ​ກັບ​ອຸ​ປະ​ກອນ NFC ອື່ນ"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"ອະນຸຍາດໃຫ້ສາມາດແລກປ່ຽນຂໍ້ມູນ ເມື່ອນຳແທັບເລັດໄປສຳພັດກັບອຸປະກອນອື່ນ"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"ອະນຸຍາດໃຫ້ສາມາດແລກປ່ຽນຂໍ້ມູນ ເມື່ອນຳໂທລະສັບໄປສຳພັດກັບອຸປະກອນອື່ນ"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"ສະຖານທີ່"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ໃຫ້ແອັບຯສາມາດໃຊ້ຂໍ້ມູນສະຖານທີ່ຂອງທ່ານໄດ້"</string>
     <string name="wizard_back" msgid="8257697435061870191">"ກັບຄືນ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"ຕໍ່ໄປ"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"ສະຫຼັບໄປໃຊ້ແບບພົກພາ"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"ຟໍແມັດດ້ວຍວິທີອື່ນ"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM ກາດ"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"ປ່ຽນການຕັ້ງຄ່າສຳລັບແຕ່ລະແອັບທີ່ສົ່ງການແຈ້ງເຕືອນ"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"ແອັບທີ່ສະແດງຢູ່ອຸປະກອນ"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"ແອັບນີ້ບໍ່ຮອງຮັບການຕັ້ງຄ່າທີ່ປັບປຸງໃຫ້ດີຂຶ້ນ"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"ການຕັ້ງຄ່າເພີ່ມເຕີມ"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"ການຕັ້ງຄ່າເພີ່ມເຕີມແມ່ນມີໃຫ້ຢູ່ພາຍໃນແອັບ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"ບໍລິການຕົວຊ່ວຍ VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ບໍ່ມີແອັບທີ່ຕິດຕັ້ງແລ້ວທີ່ຮ້ອງຂໍໃຫ້ໃຊ້ເປັນບໍລິການຕົວຊ່ວຍ VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"ອະນຸຍາດໃຫ້ເຂົ້າເຖິງບໍລິການ VR ສຳລັບ <xliff:g id="SERVICE">%1$s</xliff:g> ບໍ?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ຖືກບລັອກໂດຍຜູ້ໃຫ້ບໍລິການເຄຣດິດຂອງທ່ານ"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ຕ້ອງໃຫ້ພໍ່ແມ່ຕັ້ງຄ່າ"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ຍື່ນໂທລະສັບໃຫ້ພໍ່ແມ່ຂອງທ່ານເພື່ອເລີ່ມການຕັ້ງຄ່າຄຸນສົມບັດນີ້"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ສຳລັບຂໍ້ມູນເພີ່ມເຕີມ, ກະລຸນາຕິດຕໍ່ຜູ້ເບິ່ງແຍງໄອທີຂອງທ່ານ"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ລາຍລະອຽດເພີ່ມເຕີມ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"ຜູ້ເບິ່ງແຍງລະບົບຂອງທ່ານສາມາດຕິດຕາມ ແລະ ຈັດການແອັບ ແລະ ຂໍ້ມູນທີ່ເຊື່ອມໂຍງກັບໂປຣໄຟລ໌ບ່ອນເຮັດວຽກຂອງທ່ານໄດ້ ເຊິ່ງຮວມເຖິງການຕັ້ງຄ່າ, ການອະນຸຍາດ, ການເຂົ້າເຖິງອົງກອນ, ການເຄື່ອນໄຫວເຄືອຂ່າຍ ແລະ ຂໍ້ມູນສະຖານທີ່ຂອງອຸປະກອນ."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"ການປ່ຽນແປງທີ່ປິດການນຳໃຊ້ຕາມຄ່າເລີ່ມຕົ້ນ"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"ບໍ່ມີແອັບທີ່ໃຊ້ໄດ້"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ສາມາດແກ້ໄຂການປ່ຽນແປງຄວາມເຂົ້າກັນໄດ້ຂອງແອັບສຳລັບແອັບທີ່ດີບັກໄດ້ເທົ່ານັ້ນ. ກະລຸນາຕິດຕັ້ງແອັບທີ່ສາມາດດີບັກໄດ້ແລ້ວລອງໃໝ່."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ບໍ່ຮອງຮັບການຕັ້ງຢູ່ໂທລະສັບນີ້"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ບໍ່ຮອງຮັບການຕັ້ງຢູ່ແທັບເລັດນີ້"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ບໍ່ຮອງຮັບການຕັ້ງຢູ່ອຸປະກອນນີ້"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"ຜູ້ໃຊ້ປັດຈຸບັນບໍ່ສາມາດປ່ຽນການຕັ້ງຄ່າໄດ້"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"ຂຶ້ນກັບການຕັ້ງຄ່າອື່ນ"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"ບໍ່ສາມາດຕັ້ງຄ່າໄດ້"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"ບັນຊີ"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"ຊື່ອຸປະກອນ"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"ຂໍ້ມູນພື້ນຖານ"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"ບໍ່ພົບເຄືອຂ່າຍ."</string>
     <string name="network_query_error" msgid="6406348372070035274">"ບໍ່ພົບເຄືອຂ່າຍ. ກະລຸນາລອງໃໝ່ອີກເທື່ອໜຶ່ງ."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(ຕ້ອງຫ້າມ)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"ບໍ່ມີຊິມກາດ"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"ບໍ່ມີຊິມ"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"ບໍ່ມີ"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ປ່ຽນ"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"ເຊື່ອມຕໍ່ແລ້ວ"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ບໍ່ມີການເຊື່ອມຕໍ່"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ອິນເຕີເນັດມືຖືຈະບໍ່ເຊື່ອມຕໍ່ອັດຕະໂນມັດ"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"ປິດອິນເຕີເນັດມືຖືໄວ້ບໍ?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ລະຫັດຜ່ານບໍ່ຖືກຕ້ອງ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ເພື່ອເລີ່ມການຟັງ, ໃຫ້ວາງລະຫັດ QR ທາງລຸ່ມນີ້ໄວ້ທາງກາງ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"ຮູບແບບລະຫັດ QR ບໍ່ຖືກຕ້ອງ"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ຂໍ້ມູນຄວາມໂປ່ງໃສແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ມີໂຄສະນາ"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ຂໍ້ມູນນັກພັດທະນາ"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ຂໍ້ມູນການຕິດຕໍ່"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ຄຳອະທິບາຍ"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ນະໂຍບາຍຄວາມເປັນສ່ວນຕົວ"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ໝວດໝູ່"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
 </resources>
