--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -793,7 +793,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Зголеми го нивото на евиденција за NFC stack"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Речита евиденција за отстранување грешки за продавач на NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Вклучете дополнителни дневници за евиденција на продавачи за конкретен уред, коишто може да содржат приватни податоци."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NCI за нефилтрирана евиденција на пресретнување пакети за NFC"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Снимајте детални NFC-пакети, коишто може да содржат приватни податоци."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Да се рестартира уредот?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Деталното евидентирање на NFC е наменето само за развојни цели. Дополнителни податоци од NFC се вклучени во извештаите за грешки, коишто може да содржат приватни податоци. Рестартирајте го уредов за да ја промените оваа поставка."</string>
@@ -1468,6 +1469,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Споделете ја интернет-врската на телефонот преку Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Интернет преку етернет"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Споделете ја интернет-врската на телефонот преку етернет"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Користете точка на пристап и врзување за да овозможите интернет за другите уреди преку вашата мобилна интернет-врска. И апликациите може да создадат точка на пристап за споделување содржини со уредите во близина."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Користете точка на пристап и врзување за да им обезбедите пристап до интернет на други уреди преку Wi‑Fi врската или врската за мобилен интернет. Апликациите исто така може да создаваат точки на пристап за да споделуваат содржини со уредите во близина."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Помош"</string>
@@ -2697,10 +2700,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Ограничување за потрошен интернет"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Таблетот ќе го исклучи мобилниот интернет откако ќе се достигне ограничувањето што сте го поставиле.\n\nСо оглед на тоа што таблетот го мери потрошениот интернет, а операторот може да го мери поинаку, размислете за поставување пониско ограничување."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Телефонот ќе го исклучи мобилниот интернет откако ќе се достигне ограничувањето што сте го поставиле.\n\nТелефонот го мери потрошениот интернет, а операторот може да користи поинаква мерка, па размислете за поставување пониско ограничување."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Ограничи податоци во заднина?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ако го ограничите мобилниот интернет во заднина, некои апликации и услуги нема да се извршуваат освен ако не сте поврзани на Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ако го ограничите мобилниот интернет во заднина, некои апликации и услуги нема да се извршуваат освен ако не сте поврзани на Wi‑Fi.\n\nПоставката важи за сите корисници на таблетов."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ако го ограничите мобилниот интернет во заднина, некои апликации и услуги нема да се извршуваат освен ако не сте поврзани на Wi‑Fi.\n\nПоставката важи за сите корисници на телефонов."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"предупредување"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"граница"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Отстранети апликации"</string>
@@ -2942,8 +2941,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (препорачано)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-пораки"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Испраќајте и примајте кога мобилниот интернет е исклучен"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Интернет за време на повици"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Дозволете SIM-картичкава да се користи за мобилен интернет само за време на повици"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Службена SIM-картичка"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Пристап до апликации и содржини"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПРЕИМЕНУВАЈ"</string>
@@ -2955,15 +2956,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Дозволи промена на Wi-Fi и поставки на мобилен"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Дозволи промена на спарувања и поставки на Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Дозволете размена на податоци кога <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ќе допре друг уред со NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Овозможи размена на податоци кога таблетот допира друг уред"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Овозможи размена на податоци кога телефонот допира друг уред"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Локација"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Дозволете апликациите да ги користат информациите за вашата локација"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Назад"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Следно"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Префрли на пренослив"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Форматирај на друг начин"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-картички"</string>
@@ -3881,6 +3877,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Блокирано од давателот на кредит"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Потребен е родител"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Дај му го телефонот на родителот за да започне со поставување"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"За повеќе информации, контактирајте со IT-администраторот"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Повеќе детали"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администраторот може да ги следи и да управува со апликациите и податоците поврзани со вашиот работен профил, заедно со поставките, дозволите, корпоративниот пристап, мрежната активност и информациите за локацијата на уредот."</string>
@@ -4326,12 +4324,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Стандардно оневозможени промени"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Нема апликации"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Промени во компатибилноста на апликациите може да се вршат само за апликации во кои може да се отстрануваат грешки. Инсталирајте апликација во која може да се отстрануваат грешки и обидете се повторно."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Поставката не е поддржана на телефонов"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Поставката не е поддржана на таблетов"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Поставката не е поддржана на уредов"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Тековниот корисник не може да ја смени поставкава"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Зависи од друга поставка"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Поставката е недостапна"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Сметка"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Име на уредот"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Основни податоци"</string>
@@ -4366,7 +4359,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Не се најдени мрежи."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Не најдовме мрежи. Обидете се повторно."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(забранета)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Нема SIM-картичка"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Нема SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Нема"</string>
@@ -4683,6 +4675,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Измени"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Поврзано"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Нема интернет-врска"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мобилниот интернет не може да се поврзе автоматски"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Да се исклучи мобилниот интернет?"</string>
@@ -4837,14 +4833,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Погрешна лозинка"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"За да започне слушањето, центрирајте го QR-кодот долу"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-кодот не е во важечки формат"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мобилни групирани апликации"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мобилни групирани апликации"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Податоци за транспарентност за мобилни групирани апликации"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Содржи реклами"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Податоци за програмери"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Податоци за контакт"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Опис"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Политика за приватност"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категорија"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мобилна групирана апликација"</string>
 </resources>
