--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC സ്റ്റാക്ക് ലോഗിംഗ് ലെവൽ ഉയർത്തുക"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC വെർബോസ് വെണ്ടർ ഡീബഗ് ലോഗ്"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"ബഗ്റിപ്പോർട്ടുകളിൽ ഉപകരണത്തിന് പ്രത്യേകമായുള്ള അധിക ലോഗുകൾ ഉൾപ്പെടുത്തുക, അവയിൽ സ്വകാര്യ വിവരങ്ങൾ അടങ്ങിയേക്കാം."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI ഫിൽട്ടർ ചെയ്യാത്ത സ്‌നൂപ്പ് ലോഗ്"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"വിശദമായ NFC പാക്കറ്റുകൾ ക്യാപ്‌ചർ ചെയ്യുക, അവയിൽ സ്വകാര്യ വിവരങ്ങൾ അടങ്ങിയിരിക്കാം."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ഉപകരണം റീസ്റ്റാർട്ട് ചെയ്യണോ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ഡെവലപ്പ്മെന്റ് ആവശ്യങ്ങൾക്ക് മാത്രം ഉദ്ദേശിച്ചുള്ളതാണ് വിശദമായ NFC ലോഗ് ചെയ്യൽ. ബഗ് റിപ്പോർട്ടുകളിൽ അധിക NFC ഡാറ്റ ഉൾപ്പെടുത്തിയിരിക്കുന്നു, അവയിൽ സ്വകാര്യ വിവരങ്ങൾ അടങ്ങിയിരിക്കാം. ഈ ക്രമീകരണം മാറ്റാൻ നിങ്ങളുടെ ഉപകരണം റീസ്റ്റാർട്ട് ചെയ്യുക."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"വ്യത്യസ്‌ത സ്റ്റൈലുകളും വാൾപേപ്പറുകളും മറ്റും പരീക്ഷിക്കൂ"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"സ്ക്രീൻ സേവർ"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"സ്‌ക്രീൻ സേവർ"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"ഉറക്ക സമയ മോഡ് ഓണായതിനാൽ ലഭ്യമല്ല"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"സ്ക്രീൻ സേവർ ഉപയോഗിക്കുക"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ചാർജ്/ഡോക്ക് ചെയ്യുമ്പോൾ"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ചാർജ് ചെയ്യുമ്പോൾ"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Bluetooth വഴി, ഫോണിന്‍റെ ഇന്‍റർനെറ്റ് കണക്ഷൻ പങ്കിടുക"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ഇതർനെറ്റ് ടെതറിംഗ്"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ഇതർനെറ്റ് വഴി ഫോണിന്റെ ഇന്റർനെറ്റ് കണക്ഷൻ പങ്കിടുക"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"നിങ്ങളുടെ മൊബൈൽ ഡാറ്റാ കണക്ഷനിലൂടെ മറ്റ് ഉപകരണങ്ങളിലേക്ക് ഇന്‍റർനെറ്റ് നൽകാൻ ഹോട്ട്‌സ്പോട്ടും ‌ടെതറിംഗും ഉപയോഗിക്കുക. ചുറ്റുവട്ടത്തുള്ള ഉപകരണങ്ങളുമായി ഉള്ളടക്കം പങ്കിടാൻ ആപ്പുകൾക്കും ഹോട്ട്‌സ്പോട്ട് സൃഷ്ടിക്കാൻ കഴിയും."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"നിങ്ങളുടെ വൈഫൈ വഴിയോ മൊബൈൽ ഡാറ്റാ കണക്ഷൻ വഴിയോ മറ്റ് ഉപകരണങ്ങളിലേക്ക് ഇന്റർനെറ്റ് നൽകാൻ ഹോട്ട്‌സ്പോട്ടും ടെതറിംഗും ഉപയോഗിക്കുക. സമീപമുള്ള ഉപകരണങ്ങളുമായി ഉള്ളടക്കം പങ്കിടാൻ ആപ്പുകൾക്ക് ഹോട്ട്‌സ്പോട്ട് സൃഷ്‌ടിക്കാനുമാവും."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"സഹായം"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ഡാറ്റാ ഉപയോഗം നിയന്ത്രിക്കുന്നു"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"നിങ്ങൾ സജ്ജീകരിച്ച ‌പരിധിയെത്തിയാൽ ടാബ്‌ലെറ്റ്, മൊബൈൽ ഡാറ്റ ഓഫാക്കും.\n\nഡാറ്റ ഉപയോഗം കണക്കാക്കുന്നത് നിങ്ങളുടെ ടാബ്‌ലെറ്റ് ആയതിനാലും, നിങ്ങളുടെ കാരിയർ വ്യത്യസ്ത രീതിയിൽ ഉപയോഗം കണക്കാക്കിയേക്കാം എന്നതിനാലും, ഒരു മിതമായ ‌ഡാറ്റാ പരിധി ‌സജ്ജീകരിക്കാൻ ‌നോക്കുക."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"നിങ്ങൾ സജ്ജീകരിച്ച ‌പരിധിയിലെത്തിയാൽ ഫോൺ, മൊബൈൽ ഡാറ്റ ഓഫാക്കും.\n\nഡാറ്റാ ഉപയോഗം കണക്കാക്കുന്നത് നിങ്ങളുടെ ഫോൺ ആയതിനാലും, നിങ്ങളുടെ കാരിയർ വ്യത്യസ്‍ത രീതിയിൽ ഉപയോഗം കണക്കാക്കിയേക്കാം എന്നതിനാലും, ഒരു മിതമായ ‌ഡാറ്റാ പരിധി ‌സജ്ജീകരിക്കാൻ ശ്രമിക്കുക."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"പശ്ചാത്തല ഡാറ്റ നിയന്ത്രിക്കണോ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"പശ്ചാത്തല മൊബൈൽ ഡാറ്റയെ പരിമിതപ്പെടുത്തുകയാണെങ്കിൽ, ചില ആപ്‌സും സേവനങ്ങളും വൈഫൈയിൽ കണക്റ്റുചെയ്യുന്നതുവരെ പ്രവർത്തിക്കില്ല."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"പശ്ചാത്തലത്തിൽ മൊബൈൽ ഡാറ്റയെ പരിമിതപ്പെടുത്തുകയാണെങ്കിൽ, ചില ആപ്‌സും സേവനങ്ങളും വൈഫൈയിൽ കണക്റ്റുചെയ്യുന്നതുവരെ പ്രവർത്തിക്കില്ല.\n\nഈ ടാബ്‌ലെറ്റിലെ എല്ലാ ഉപയോക്താക്കൾക്കും ഈ ക്രമീകരണം ബാധകമാകും."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"പശ്ചാത്തലത്തിൽ മൊബൈൽ ഡാറ്റയെ പരിമിതപ്പെടുത്തുകയാണെങ്കിൽ, ചില ആപ്‌സും സേവനങ്ങളും വൈഫൈയിൽ കണക്റ്റുചെയ്യുന്നതുവരെ പ്രവർത്തിക്കില്ല.\n\nഈ ഫോണിലെ എല്ലാ ഉപയോക്താക്കൾക്കും ഈ ക്രമീകരണം ബാധകമാണ്."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"മുന്നറിയിപ്പ്"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"പരിധി"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"നീക്കംചെയ്‌ത അപ്ലിക്കേഷനുകൾ"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ശുപാർശചെയ്‌തത്)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS സന്ദേശങ്ങൾ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"മൊബൈൽ ഡാറ്റ ഓഫായിരിക്കുമ്പോൾ അയയ്ക്കുകയും സ്വീകരിക്കുകയും ചെയ്യുക"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"കോൾ നടക്കുമ്പോഴുള്ള ഡാറ്റയുടെ ഉപയോഗം"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"കോളുകൾ നടക്കുമ്പോൾ മൊബൈൽ ഡാറ്റ ഉപയോഗിക്കാൻ ഈ SIM-നെ അനുവദിക്കുക"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"ഔദ്യോഗിക സിം"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"അപ്ലിക്കേഷൻ &amp; ഉള്ളടക്ക ആക്‌സസ്സ്"</string>
     <string name="user_rename" msgid="8735940847878484249">"പേരുമാറ്റുക"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi‑Fi-യുടെയും മൊബൈൽ ക്രമീകരണങ്ങളുടെയും പരിഷ്‌ക്കരണം അനുവദിക്കുക"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ബ്ലൂടൂത്ത് ജോടിയാക്കലുകളും ക്രമീകരണങ്ങളും പരിഷ്‌ക്കരിക്കൽ അനുവദിക്കുക"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"ഈ <xliff:g id="DEVICE_NAME">%1$s</xliff:g>, മറ്റൊരു NFC ഉപകരണത്തെ സ്‌പർശിക്കുമ്പോൾ ഡാറ്റ കൈമാറ്റം അനുവദിക്കുക"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"ടാബ്‌ലെറ്റ് മറ്റൊരു ഉപകരണത്തിൽ സ്‌പർശിക്കുമ്പോൾ ഡാറ്റ കൈമാറ്റം അനുവദിക്കുക"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"ഫോൺ മറ്റൊരു ഉപകരണത്തിൽ സ്‌പർശിക്കുമ്പോൾ ഡാറ്റ കൈമാറ്റം അനുവദിക്കുക"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"ലൊക്കേഷൻ"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"നിങ്ങളുടെ ലൊക്കേഷൻ വിവരം ഉപയോഗിക്കാൻ അപ്ലിക്കേഷനുകളെ അനുവദിക്കുക"</string>
     <string name="wizard_back" msgid="8257697435061870191">"മടങ്ങുക"</string>
     <string name="wizard_next" msgid="3884832431439072471">"അടുത്തത്"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"പോർട്ടബിൾ ആക്കി മാറ്റുക"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"വേറെ രീതിയിൽ ഫോർമാറ്റ് ചെയ്യൂ"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"സിം കാർഡുകൾ"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"അറിയിപ്പുകൾ അയയ്ക്കുന്ന ഓരോ ആപ്പിനുള്ള ക്രമീകരണവും മാറ്റുക"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"ഉപകരണത്തിൽ കാണിക്കുന്ന ആപ്പുകൾ"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"മെച്ചപ്പെടുത്തിയ ക്രമീകരണത്തെ ഈ ആപ്പ് പിന്തുണയ്ക്കുന്നില്ല"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"കൂടുതൽ ക്രമീകരണം"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"ഈ ആപ്പിനുള്ളിൽ കൂടുതൽ ക്രമീകരണം ലഭ്യമാണ്"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR സഹായി സേവനങ്ങൾ"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ഇൻസ്റ്റാൾ ചെയ്ത ആപ്പുകളൊന്നും VR സഹായി സേവനങ്ങളായി റൺ ചെയ്യുന്നതിന് അഭ്യർത്ഥിച്ചിട്ടില്ല."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> എന്ന സേവനത്തിന് VR സേവന ആക്‌സസ് അനുവദിക്കണോ?"</string>
@@ -3880,6 +3873,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"നിങ്ങളുടെ ക്രെഡിറ്റ് ദാതാവ് ബ്ലോക്ക് ചെയ്തു"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"രക്ഷിതാവ് ആവശ്യമാണ്"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ഈ സജ്ജീകരണം ആരംഭിക്കാൻ നിങ്ങളുടെ രക്ഷിതാവിന് ഫോൺ കൈമാറുക"</string>
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"ഈ ക്രമീകരണം മാറ്റാൻ അനുവദിക്കുന്നതിന് നിങ്ങളുടെ രക്ഷിതാവിന് ഫോൺ കൈമാറുക."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"കൂടുതൽ വിവരങ്ങൾക്ക്, നിങ്ങളുടെ ഐടി അഡ്‌മിനെ ബന്ധപ്പെടുക"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"കൂടുതൽ‍ വിശദാംശങ്ങൾ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"ക്രമീകരണവും അനുമതികളും കോർപ്പറേറ്റ് ആക്‌സസ്സും നെറ്റ്‌വർക്ക് ആക്‌റ്റിവിറ്റിയും ഉപകരണത്തിന്റെ ലൊക്കേഷൻ വിവരങ്ങളും ഉൾപ്പെടെ, നിങ്ങളുടെ ഔദ്യോഗിക പ്രൊഫൈലുമായി ബന്ധപ്പെട്ട ആപ്‌സും ഡാറ്റയും നിരീക്ഷിക്കാനും മാനേജുചെയ്യാനും അഡ്‌മിന് കഴിയും."</string>
@@ -4325,12 +4319,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"ഡിഫോൾട്ട് ആയ, പ്രവർത്തനരഹിതമാക്കിയ മാറ്റങ്ങൾ"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"ആപ്പുകൾ ലഭ്യമല്ല"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ഡീബഗ് ചെയ്യാവുന്ന ആപ്പുകൾക്ക് വേണ്ടി മാത്രമേ ആപ്പ് അനുയോജ്യതാ മാറ്റങ്ങൾ പരിഷ്‌കരിക്കാൻ കഴിയൂ. ഡീബഗ് ചെയ്യാവുന്ന ആപ്പ് ഇന്‍സ്റ്റാള്‍ ചെയ്‌ത് വീണ്ടും ശ്രമിക്കുക."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ക്രമീകരണം ഈ ഫോണിൽ പിന്തുണക്കുന്നില്ല"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ക്രമീകരണം ഈ ടാബ്‌ലെറ്റിൽ പിന്തുണക്കുന്നില്ല"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ഈ ഉപകരണത്തിൽ ക്രമീകരണം പിന്തുണയ്‌ക്കുന്നില്ല"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"നിലവിലെ ഉപയോക്താവിന് ക്രമീകരണം മാറ്റാനാവില്ല"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"മറ്റൊരു ക്രമീകരണത്തെ ആശ്രയിച്ചിരിക്കുന്നു"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"ക്രമീകരണം ലഭ്യമല്ല"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"അക്കൗണ്ട്"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"ഉപകരണത്തിന്‍റെ പേര്"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"അടിസ്ഥാന വിവരങ്ങൾ"</string>
@@ -4365,7 +4354,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"നെറ്റ്‌വർക്കുകളൊന്നും കണ്ടെത്തിയില്ല."</string>
     <string name="network_query_error" msgid="6406348372070035274">"നെറ്റ്‌വർക്കുകൾ കണ്ടെത്താനായില്ല. വീണ്ടും ശ്രമിക്കുക."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(നിരോധിക്കപ്പെട്ടത്)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"സിം കാർഡില്ല"</string>
     <string name="sim_card" msgid="6381158752066377709">"സിം"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"സിം ഇല്ല"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"ഒന്നുമില്ല"</string>
@@ -4682,6 +4670,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"മാറ്റുക"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"കണക്റ്റ് ചെയ്തു"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"കണക്ഷനില്ല"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"മൊബൈൽ ഡാറ്റ സ്വയമേവ കണക്റ്റാകില്ല"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"മൊബൈൽ ഡാറ്റ ഓഫാക്കണോ?"</string>
@@ -4836,14 +4828,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"പാസ്‌വേഡ് തെറ്റാണ്"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"കേട്ട് തുടങ്ങാൻ ചുവടെയുള്ള QR കോഡിലേക്ക് കേന്ദ്രീകരിക്കുക"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR കോഡ് സാധുവായ ഫോർമാറ്റിൽ അല്ല"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പുകൾ"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പുകൾ"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പുകളെ സംബന്ധിച്ച സുതാര്യതാ വിവരം"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"പരസ്യങ്ങൾ അടങ്ങിയിരിക്കുന്നു"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ഡെവലപ്പറിൽ(മാരിൽ) നിന്നുള്ള വിവരം"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"കോൺടാക്റ്റ് വിവരങ്ങൾ"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"വിവരണം"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"സ്വകാര്യതാ നയം"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"വിഭാഗം"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പ്"</string>
 </resources>
