--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC स्टॅक लॉग करण्याची पातळी वाढवा"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC व्हर्बोझ विक्रेता डीबग लॉग"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"बगरिपोर्टमध्ये अतिरिक्त डिव्हाइस विशिष्ट विक्रेता लॉगचा समावेश करा, ज्यामध्ये खाजगी माहितीचा समावेश असू शकतो."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI फिल्‍टर न केलेले स्नूप लॉग"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"तपशीलवार NFC पॅकेट कॅप्चर करा, ज्यामध्ये खाजगी माहितीचा समावेश असू शकतो."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"डिव्हाइस रीस्टार्ट करायचे आहे का?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"तपशीलवार NFC लॉगिंग हे फक्त विकासाच्या उद्देशाने आहे. बग रिपोर्टमध्ये अतिरिक्त NFC डेटाचा समावेश केला आहे, ज्यामध्ये खाजगी माहितीचा समावेश असू शकतो. हे सेटिंग बदलण्यासाठी तुमचे डिव्हाइस रीस्टार्ट करा."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"वेगळी शैली, वॉलपेपर आणि बरेच काही वापरून पहा"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"स्क्रीन सेव्हर"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"स्क्रीनसेव्हर"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"बेडटाइम मोड सुरू असल्यामुळे उपलब्ध नाही"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"स्क्रीन सेव्हर वापरा"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"चार्ज होत असताना किंवा डॉक केलेले असताना"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"चार्ज होत असताना"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"फोनचे इंटरनेट कनेक्शन ब्लूटूथने शेअर करा"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"इथरनेट टेदरिंग"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"फोनचे इंटरनेट कनेक्शन इथरनेटमार्फत शेअर करा"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"तुमच्या मोबाइल डेटा कनेक्शनने इतर डिव्हाइसना इंटरनेट देण्यासाठी हॉटस्पॉट आणि टेदरिंगचा वापर करा. जवळपासच्या डिव्हाइससोबत आशय शेअर करण्यासाठी अ‍ॅप्स हॉटस्‍पॉट देखील तयार करू शकतात."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"तुमच्या मोबाइल डेटा कनेक्शन किंवा वाय-फाय द्वारे इतर डिव्हाइसना इंटरनेट पुरवण्यासाठी हॉटस्पॉट आणि टेदरिंगचा वापर करा. जवळपासच्या डिव्हाइससह आशय शेअर करण्यासाठी अ‍ॅप्स हॉटस्पॉटदेखील तयार करू शकतात."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"मदत"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"डेटा वापर मर्यादित करत आहे"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"आपल्या टॅबलेटने तुम्ही सेट केलेली मर्यादा गाठताच तो मोबाइल डेटा बंद करेल.\n\nआपल्या टॅबलेटद्वारे डेटा वापर मोजला जात असल्याने आणि तुमचा वाहक वापराची गणना वेगळ्या प्रकारे करू शकत असल्याने, कमी मर्यादा सेट करणे विचारात घ्या."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"मोबाइल डेटावर घातलेली मर्यादा गाठल्यावर तुमचा फोन मोबाइल डेटा बंद करेल.\n\nतुमचा डेटा वापर तुमच्या फोनद्वारे मोजला जात असल्याने आणि वाहक वापराची गणना वेगळ्या प्रकारे होत असल्याने, कमी मर्यादा सेट करण्याची शिफारस केली जाते."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"पार्श्वभूमीवरील डेटा प्रतिबंधित करायचा?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"तुम्ही पार्श्वभूमी मोबाइल डेटा प्रतिबंधित केल्यास, तुम्ही वाय-फाय शी कनेक्ट असल्याशिवाय काही अ‍ॅप्स आणि सेवा काम करणार नाहीत."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"तुम्ही पार्श्वभूमी मोबाइल डेटा प्रतिबंधित केल्यास, तुम्ही वाय-फाय शी कनेक्ट असल्याशिवाय काही अ‍ॅप्स आणि सेवा काम करणार नाहीत.\n\nहे सेटिंग या टॅबलेटवरील सर्व वापरकर्त्यांवर परिणाम करते."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"तुम्ही पार्श्वभूमी मोबाइल डेटा प्रतिबंधित केल्यास, तुम्ही वाय-फाय शी कनेक्ट असल्याशिवाय काही अ‍ॅप्स आणि सेवा काम करणार नाहीत.\n\nहे सेटिंग या फोनवरील सर्व वापरकर्त्यांवर परिणाम करते."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"चेतावणी"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"मर्यादा"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"काढलेले अ‍ॅप्स"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (शिफारस केलेले)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS मेसेज"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"मोबाइल डेटा बंद असताना पाठवा आणि मिळवा"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"कॉल दरम्‍यान डेटा"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"या सिमला फक्त कॉल दरम्यान मोबाइल डेटा वापरण्याची अनुमती द्या"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"कार्यालय सिम"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"अ‍ॅप आणि आशय प्रवेश"</string>
     <string name="user_rename" msgid="8735940847878484249">"नाव बदला"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"वाय-फाय आणि मोबाइल सेटिंग्जच्या सुधारणेस अनुमती द्या"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ब्लूटूथ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ब्लूटूथ जोडण्या आणि सेटिंग्जच्या सुधारणेस अनुमती द्या"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"जेव्हा हे <xliff:g id="DEVICE_NAME">%1$s</xliff:g> दुसर्‍या NFC डिव्हाइसला स्पर्श करते तेव्हा डेटा विनिमयास अनुमती द्या"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"टॅबलेट दुसर्‍या डिव्हाइसला स्पर्श करतो तेव्हा डेटा अदलाबदलीस अनुमती द्या"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"फोन दुसर्‍या डिव्हाइसला स्पर्श करतो तेव्हा डेटा अदलाबदलीस अनुमती द्या"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"स्थान"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ॲप्सना तुमची स्थान माहिती वापरु द्या"</string>
     <string name="wizard_back" msgid="8257697435061870191">"परत"</string>
     <string name="wizard_next" msgid="3884832431439072471">"पुढील"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"पोर्टेबलवर स्विच करा"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"इतर मार्गाने फॉरमॅट करा"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"सिम कार्ड"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"सूचना पाठवणाऱ्या प्रत्येक ॲपसाठी सेटिंग्ज बदला"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"डिव्हाइसवर दिसणारी ॲप्स"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"हे ॲप वर्धित सेटिंग्जना सपोर्ट करत नाही"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"अधिक सेटिंग्ज"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"या अ‍ॅपमध्ये अधिक सेटिंग्ज उपलब्ध आहेत"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR मदतनीस सेवा"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"कोणत्याही इंस्टॉल केलेल्या अ‍ॅप्सनी VR मदतनीस सेवा म्हणून चालवण्यासाठी विनंती केली नाही."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> साठी VR सेवा प्रवेशाची अनुमती द्यायची?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"तुमच्या क्रेडिट पुरवठाद्वारे ब्लॉक केले"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"पालकाची संमती आवश्यक आहे"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"हे सेट करणे सुरू करण्यासाठी तुमच्या पालकाला फोन द्या"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"अधिक माहितीसाठी, तुमच्या आयटी ॲडमिनशी संपर्क साधा"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"अधिक तपशील"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"तुमचा प्रशासक सेटिंग्ज, परवानग्या, कॉर्पोरेट अ‍ॅक्सेस, नेटवर्क ॲक्टिव्हिटी आणि डीव्हाइसची स्थान माहिती यांसह तुमच्या कार्य प्रोफाइलशी संबधित ॲप्सचे आणि डेटाचे परीक्षण व व्यवस्थापन करू शकतो."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"डीफॉल्ट बंद केलेले बदल"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"अ‍ॅप्स उपलब्ध नाहीत"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ॲप कंपॅटिबिलिटी संबंधित बदलांमध्ये फक्‍त डीबग करण्यायोग्य ॲप्‍सवरून बदल केले जाऊ शकतात. डीबग करण्यायोग्य ॲप इंस्टॉल करा आणि पुन्‍हा प्रयत्न करा."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"या फोनवर सेटिंगला सपोर्ट नाही"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"या टॅबलेटवर सेटिंगला सपोर्ट नाही"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"या डिव्हाइसवर सेटिंगला सपोर्ट नाही"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"वर्तमान वापरकर्त्याद्वारे सेटिंग बदलले जाऊ शकत नाही"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"दुसऱ्या सेटिंगवर अवलंबून आहे"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"सेटिंग उपलब्ध नाही"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"खाते"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"डिव्हाइसचे नाव"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"मूलभूत माहिती"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"कोणतीही नेटवर्क आढळली नाहीत."</string>
     <string name="network_query_error" msgid="6406348372070035274">"नेटवर्क मिळू शकले नाहीत. पुन्‍हा प्रयत्‍न करा."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(मनाई केलेले)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"सिम कार्ड नाही"</string>
     <string name="sim_card" msgid="6381158752066377709">"सिम"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"सिम नाही"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"काहीही नाही"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"बदला"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"कनेक्ट केले आहे"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"कोणतेही कनेक्शन नाही"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"मोबाइल डेटा ऑटो-कनेक्ट होणार नाही"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"मोबाइल डेटा बंद करायचा आहे का?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"चुकीचा पासवर्ड"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ऐकणे सुरू करण्यासाठी, खालील QR कोड मध्यभागी ठेवा"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR कोडचा फॉरमॅट चुकीचा आहे"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"बंडल केलेली मोबाइल अ‍ॅप्स"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"बंडल केलेली मोबाइल अ‍ॅप्स"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"बंडल केलेली मोबाइल अ‍ॅप्स पारदर्शकता माहिती"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"यामध्ये जाहिराती आहेत"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"डेव्हलपर माहिती"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"संपर्क माहिती"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"वर्णन"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"गोपनीयता धोरण"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"वर्गवारी"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"बंडल केलेले मोबाइल अ‍ॅप"</string>
 </resources>
