--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Tingkatkan tahap pengelogan tindanan NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Log nyahpepijat vendor berjela NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Menyertakan log vendor khusus peranti tambahan dalam laporan pepijat yang mungkin mengandungi maklumat peribadi."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Log intip NFC NCI yang tidak ditapis"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Menangkap butiran paket NFC yang mungkin mengandungi maklumat peribadi."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Mulakan Semula Peranti?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Pengelogan butiran NFC adalah khusus untuk tujuan pembangunan sahaja. Data tambahan NFC disertakan dalam laporan pepijat yang mungkin mengandungi maklumat peribadi. Mulakan semula peranti anda untuk menukar tetapan ini."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Cuba gaya serta kertas dinding yang berbeza dan pelbagai lagi"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Penyelamat skrin"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"penyelamat skrin"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Tidak tersedia kerana mod waktu tidur dihidupkan"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Gunakan penyelamat skrin"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Semasa dicas atau didok"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Semasa mengecas"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Kongsi sambungan Internet telefon melalui Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Penambatan Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Kongsi sambungan Internet telefon melalui Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Gunakan tempat liputan dan penambatan untuk menyediakan Internet kepada peranti lain melalui sambungan data mudah alih anda. Apl juga boleh membuat tempat liputan untuk berkongsi kandungan dengan peranti berdekatan."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Gunakan tempat liputan dan penambatan untuk menyediakan Internet kepada peranti lain melalui Wi-Fi atau sambungan data mudah alih anda. Apl juga boleh membuat tempat liputan untuk berkongsi kandungan dengan peranti berdekatan."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Bantuan"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Mengehadkan penggunaan data"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tablet anda akan mematikan data mudah alih setelah mencapai had yang anda tetapkan.\n\nMemandangkan penggunaan data diukur oleh tablet anda dan pembawa anda mungkin mengira penggunaan secara berbeza, anda disyorkan supaya menetapkan had yang konservatif."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Telefon anda akan mematikan data mudah alih setelah mencapai had yang anda tetapkan.\n\nMemandangkan penggunaan data diukur oleh telefon anda dan pembawa anda mungkin mengira penggunaan secara berbeza, anda disyorkan supaya menetapkan had yang konservatif."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Hadkan data latar belakang?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Jika anda mengehadkan data mudah alih latar belakang, sesetengah apl dan perkhidmatan tidak akan berfungsi melainkan anda dihubungkan ke rangkaian Wi-Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Jika anda mengehadkan data mudah alih latar belakang, sesetengah apl dan perkhidmatan tidak akan berfungsi melainkan anda dihubungkan ke rangkaian Wi-Fi.\n\nTetapan ini melibatkan semua pengguna pada tablet ini."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Jika anda mengehadkan data mudah alih latar belakang, sesetengah apl dan perkhidmatan tidak akan berfungsi melainkan anda bersambung ke rangkaian Wi-Fi.\n\nTetapan ini melibatkan semua pengguna pada telefon ini."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"amaran"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"had"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Apl dialih keluar"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (disyorkan)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mesej MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Hantar &amp; terima apabila data mudah alih dimatikan"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data semasa panggilan"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Benarkan SIM ini digunakan untuk data mudah alih hanya semasa panggilan"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM kerja"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Akses apl &amp; kandungan"</string>
     <string name="user_rename" msgid="8735940847878484249">"NAMAKAN SEMULA"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Benarkan pengubahsuaian tetapan Wi-Fi dan Mudah Alih"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Benarkan pengubahsuaian perpasangan dan tetapan Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Benarkan pertukaran data apabila <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ini menyentuh peranti NFC lain"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Benarkan pertukaran data apabila tablet menyentuh peranti lain"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Benarkan pertukaran data apabila telefon menyentuh peranti lain"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Lokasi"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Benarkan apl menggunakan maklumat lokasi anda"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Kembali"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Seterusnya"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Beralih kepada mudah alih"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatkan cara lain"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Kad SIM"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Tukar tetapan untuk setiap apl yang menghantar pemberitahuan"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Apl yang ditunjukkan pada peranti"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Apl ini tidak menyokong tetapan dipertingkatkan"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Lagi tetapan"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Lagi tetapan tersedia dalam apl ini"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Perkhidmatan pembantu VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Tiada apl terpasang yang telah meminta untuk dijalankan sebagai perkhidmatan pembantu VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Benarkan akses perkhidmatan VR untuk <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Disekat oleh penyedia kredit anda"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ibu bapa diperlukan"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Serahkan telefon kepada ibu bapa anda untuk mula menyediakan pengesahan ini"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Untuk mendapatkan maklumat lanjut, hubungi pentadbir IT anda"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Lagi butiran"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Pentadbir anda boleh memantau dan mengurus apl serta data yang berkaitan dengan profil kerja anda, termasuk tetapan, kebenaran, akses korporat, aktiviti rangkaian dan maklumat lokasi peranti."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Perubaan dilumpuhkan tetapan lalai"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Tiada apl tersedia"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Perubahan keserasian aplikasi hanya boleh diubah suai untuk apl boleh dinyahpepijat. Pasang apl boleh dinyahpepijat dan cuba lagi."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Tetapan tidak disokong pada telefon ini"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Tetapan tidak disokong pada tablet ini"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Tetapan tidak disokong pada peranti ini"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Tetapan tidak boleh ditukar oleh pengguna semasa"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Bergantung pada tetapan lain"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Tetapan tidak tersedia"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Akaun"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nama peranti"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Maklumat asas"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Tiada rangkaian ditemui."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Tidak menemui rangkaian. Cuba lagi."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(dilarang)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Tiada kad SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Tiada SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Tiada"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Tukar"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Disambungkan"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Tiada sambungan"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Data mudah alih tidak akan autosambung"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Matikan data mudah alih?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Kata laluan salah"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Untuk mula mendengar, pusatkan kod QR di bawah"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Kod QR bukan dalam format yang sah"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Apl himpunan mudah alih"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Apl himpunan mudah alih"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Maklumat ketelusan apl himpunan mudah alih"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Mengandungi iklan"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Maklumat Pembangun"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Maklumat Hubungan"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Perihalan"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Dasar Privasi"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategori"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Apl Himpunan Mudah Alih"</string>
 </resources>
