--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC ဖွဲ့စည်းပုံ မှတ်တမ်း အဆင့်ကို တိုးရန်"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC အကျယ်ရှင်းလင်းချက်ပံ့ပိုးသူ အမှားရှာပြင်ခြင်း မှတ်တမ်း"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"ချွတ်ယွင်းမှု အစီရင်ခံချက်များတွင် စက်ပစ္စည်းအလိုက် ထုတ်လုပ်သူမှတ်တမ်းများကို ထည့်သွင်းခြင်းဖြင့် ကိုယ်ရေးကိုယ်တာ အချက်အလက်များ ပါဝင်နိုင်သည်။"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI စစ်ထုတ်မထားသော စစ်ဆေးမှုမှတ်တမ်း"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"သီးသန့်အချက်အလက် ပါဝင်နိုင်သော အသေးစိတ် NFC ဒေတာများကို ရယူသည်။"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"စက်ကို ပြန်စမလား။"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"အသေးစိတ် NFC မှတ်တမ်းတင်ခြင်းကို ဆော့ဖ်ဝဲရေးရန်အတွက်သာ ရည်ရွယ်ထားသည်။ သီးသန့်အချက်အလက်များ ပါရှိနိုင်သော ချွတ်ယွင်းမှု အစီရင်ခံချက်များတွင် ထပ်ဆောင်း NFC ဒေတာ ပါဝင်သည်။ ဤဆက်တင်ပြောင်းရန် သင့်စက်ကို ပြန်စပါ။"</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"မတူသည့် ပုံစံများ၊ နောက်ခံများနှင့် အခြားအရာများကို စမ်းကြည့်ပါ"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"ဖန်သားပြင်ချွေတာစနစ်"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ဖန်သားပြင်နားချိန်"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"အိပ်ချိန်မုဒ်ကို ဖွင့်ထားသောကြောင့် မရရှိနိုင်ပါ"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ဖန်သားပြင်ချွေတာစနစ် သုံးခြင်း"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"အားသွင်းနေစဉ် သို့မဟုတ် တပ်ဆင်ထားစဉ်"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"အားသွင်းနေစဉ်"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ဖုန်း၏ အင်တာနက်ကို ဘလူးတုသ်မှတစ်ဆင့် မျှဝေရန်"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"အီသာနက် ချိတ်၍မျှဝေခြင်း"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ဖုန်း၏ အင်တာနက်ကို အီသာနက်မှတစ်ဆင့် မျှဝေရန်"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"သင်၏ Wi-Fi သို့မဟုတ် မိုဘိုင်းဒေတာ ချိတ်ဆက်မှုမှတစ်ဆင့် အခြားစက်ပစ္စည်းများသို့ အင်တာနက်လွှင့်ရန် ဟော့စပေါ့နှင့် မိုဘိုင်းသုံးတွဲချိတ်ခြင်းကို သုံးပါ။ အနီးရှိစက်ပစ္စည်းများသို့ အကြောင်းအရာ မျှဝေရန်အတွက် အက်ပ်များသည်လည်း ဟော့စပေါ့ပြုလုပ်နိုင်သည်။"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"သင်၏ Wi-Fi သို့မဟုတ် မိုဘိုင်းဒေတာ ချိတ်ဆက်မှုမှတစ်ဆင့် အခြားစက်ပစ္စည်းများသို့ အင်တာနက်လွှင့်ရန် ဟော့စပေါ့နှင့် မိုဘိုင်းသုံးတွဲချိတ်ခြင်းကို သုံးပါ။ အနီးရှိစက်ပစ္စည်းများသို့ အကြောင်းအရာ မျှဝေရန်အတွက် အက်ပ်များသည်လည်း ဟော့စပေါ့ပြုလုပ်နိုင်သည်။"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"အကူအညီ"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ဒေတာအသုံးပြုမှုအား ကန့်သတ်ခြင်း"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"သင်သတ်မှတ်ထားသည့် ကန့်သတ်ချက်ပြည့်သည်နှင့် သင့်တက်ဘလက်သည် မိုဘိုင်းဒေတာကို ပိတ်သွားပါမည်။\n\nဒေတာသုံးစွဲမှုကို သင်၏တက်ဘလက်က တိုင်းတာခြင်း ဖြစ်ပြီး ဖုန်းလိုင်းဝန်ဆောင်မှုပေးသူ၏ တွက်ချက်မှုနှင့် ကွာခြားနိုင်သောကြောင့် ကန့်သတ်ချက်ကို မယုတ်မလွန် သတ်မှတ်ပါ။"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"သင်သတ်မှတ်ထားသည့် ကန့်သတ်ချက်ပြည့်သည်နှင့် သင့်ဖုန်းသည် မိုဘိုင်းဒေတာကို ပိတ်သွားပါမည်။\n\nဒေတာသုံးစွဲမှုကို သင်၏ဖုန်းက တိုင်းတာခြင်းဖြစ်ပြီး ဖုန်းလိုင်းဝန်ဆောင်မှုပေးသူ၏ တွက်ချက်မှုနှင့် ကွာခြားနိုင်သောကြောင့် ကန့်သတ်ချက်ကို မကျော်လွန်အောင် သတ်မှတ်ပါ။"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"နောက်ခံဒေတာ ကန့်သတ်မည်လား?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"နောက်ခံတွင် မိုဘိုင်းဒေတာ အသုံးပြုမှုကို ကန့်သတ်လိုက်လျှင် Wi-Fi သို့ မချိတ်ဆက်မချင်း အချို့အက်ပ်နှင့် ဝန်ဆောင်မှုများသည် အလုပ်လုပ်မည် မဟုတ်ပါ။"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"နောက်ခံတွင် မိုဘိုင်းဒေတာ အသုံးပြုမှုကို ကန့်သတ်လိုက်လျှင် Wi-Fi သို့ မချိတ်ဆက်မချင်း အချို့အက်ပ်နှင့် ဝန်ဆောင်မှုများသည် အလုပ်လုပ်မည် မဟုတ်ပါ။\n\nဤဆက်တင်သည် ဤတက်ဘလက်ထဲရှိ အသုံးပြုသူအားလုံးအပေါ် သက်ရောက်မှု ရှိပါသည်။"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"နောက်ခံတွင် မိုဘိုင်းဒေတာ အသုံးပြုမှုကို ကန့်သတ်လိုက်လျှင် Wi-Fi သို့ မချိတ်ဆက်မချင်း အချို့အက်ပ်နှင့် ဝန်ဆောင်မှုများသည် အလုပ်လုပ်မည် မဟုတ်ပါ။\n\nဤဆက်တင်သည် ဤဖုန်းထဲရှိ အသုံးပြုသူအားလုံးအပေါ် သက်ရောက်မှု ရှိပါသည်။"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"သတိပေးချက်"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ကန့်သတ်မှု"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"ဖယ်ရှားထားသော အက်ပ်များ"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (အကြံပြုထား)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS မက်ဆေ့ဂျ်များ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"မိုဘိုင်းဒေတာ ပိတ်ထားချိန်တွင် ပို့ရန်နှင့် လက်ခံရန်"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"ဖုန်းဆက်ချိန် ဒေတာ"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"ဖုန်းဆက်ချိန်တွင်သာ မိုဘိုင်းဒေတာ အသုံးပြုရန် ဤ SIM ကတ်ကို ခွင့်ပြုသည်"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"အလုပ် ဆင်းမ်"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"အက်ပ်&amp; အကြောင်းအရာ ရယူသုံးရန်"</string>
     <string name="user_rename" msgid="8735940847878484249">"အမည်ပြောင်းပါ"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"ဝိုင်ဖိုင်နှင့် မိုဘိုင်းလ်ဆက်တင်းများကို ပြင်ဆင်ရန် ခွင့်ပြုခြင်း"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ဘလူးတုသ်"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ဘလူးတုသ် အတူတွဲချိတ်ခြင်းကို ပြင်ဆင်ရန်နှင့် ဆက်တင်များ"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"ဒီ<xliff:g id="DEVICE_NAME">%1$s</xliff:g>က အခြား NFC ကိရိယာကို ထိချိန်မှာ ဒေတာ ဖလှယ်မှု ခွင့်ပြုရန်"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"တက်ဘလက်နှင့် အခြားစက်ပစ္စည်း ထိလိုက်လျှင် အချက်အလက် ဖလှယ်ရန် ခွင့်ပြုသည်"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"ဖုန်းနှင့် အခြားစက်ပစ္စည်း ထိလိုက်လျှင် အချက်အလက် ဖလှယ်ရန် ခွင့်ပြုသည်"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"တည်နေရာ"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"သင့်တည်နေရာ သတင်းအချက်အလက်ကို အပလီကေးရှင်းများအား သုံးခွင့်ပြုရန်ံ။"</string>
     <string name="wizard_back" msgid="8257697435061870191">"နောက်သို့"</string>
     <string name="wizard_next" msgid="3884832431439072471">"ရှေ့သို့"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"ခရီးဆောင်သို့ ပြောင်းရန်"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"နောက်တစ်နည်းဖြင့်လုပ်ရန်"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"ဆင်းမ် ကဒ်များ"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"အကြောင်းကြားချက်များပို့သော အက်ပ်တစ်ခုစီအတွက် ဆက်တင်များကို ပြောင်းပါ"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"စက်တွင်ပြထားသော အက်ပ်များ"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"ဤအက်ပ်က အဆင့်မြှင့်ထားသော ဆက်တင်များကို မပံ့ပိုးပါ"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"နောက်ထပ်ဆက်တင်များ"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"ဤအက်ပ်အတွင်း ဆက်တင်များ ရရှိနိုင်သည်"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR အထောက်အကူပြု ဝန်ဆောင်မှုများ"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ထည့်သွင်းထားသည့် မည်သည့်အက်ပ်ကိုမျှ VR အထောက်အကူပြု ဝန်ဆောင်မှုများအဖြစ် ဖွင့်ရန် တောင်းဆိုမထားပါ။"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> အတွက် VR ဝန်ဆောင်မှု အသုံးပြုခွင့်ပြုမလား။"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"သင်၏ ခရက်ဒစ်ဝန်ဆောင်မှုပေးသူက ပိတ်ထားသည်"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"မိဘ လိုအပ်သည်"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"၎င်းကို စတင်ထည့်သွင်းရန် သင့်မိဘအား ဖုန်းပေးလိုက်ပါ"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ပိုမိုသိရှိလိုပါက IT စီမံခန့်ခွဲသူထံ ဆက်သွယ်ပါ"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"နောက်ထပ် အသေးစိတ်များ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"သင်၏စီမံခန့်ခွဲသူသည် ဆက်တင်များ၊ ခွင့်ပြုချက်များ၊ ပူးပေါင်းသုံးစွဲခွင့်များ၊ ကွန်ရက်လုပ်ဆောင်ချက်နှင့် စက်ပစ္စည်း၏ တည်နေရာ အချက်အလက်များအပါအဝင် သင်၏ အလုပ်ပရိုဖိုင်နှင့် ဆက်စပ်နေသည့် အက်ပ်နှင့် ဒေတာများကို စောင့်ကြည့်စီမံနိုင်ပါသည်။"</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"မူရင်းစနစ်အရ ပိတ်ထားသော အပြောင်းအလဲများ"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"မည်သည့်အက်ပ်မျှ မရှိ"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"အမှားရှာပြင်ကိရိယာအက်ပ်များ အတွက်သာလျှင် တွဲဖက်သုံးနိုင်သော အက်ပ် အပြောင်းအလဲများကို ပြုပြင်နိုင်သည်။ အမှားရှာပြင်ကိရိယာအက်ပ်တစ်ခု ထည့်သွင်းပြီး ထပ်စမ်းကြည့်ပါ။"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ဤဖုန်းတွင် ၎င်းဆက်တင်ကို ပံ့ပိုးမထားပါ"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ဤတက်ဘလက်တွင် ၎င်းဆက်တင်ကို ပံ့ပိုးမထားပါ"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ဤစက်ပစ္စည်းတွင် ၎င်းဆက်တင်ကို ပံ့ပိုးမထားပါ"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"လက်ရှိအသုံးပြုသူက ဆက်တင်ကို ပြောင်း၍မရပါ"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"အခြားဆက်တင်တစ်ခုအပေါ် မူတည်ပါသည်"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"ဆက်တင် မရနိုင်ပါ"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"အကောင့်"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"စက်ပစ္စည်း အမည်"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"အခြေခံ အချက်အလက်"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"ကွန်ရက်များ မတွေ့ပါ။"</string>
     <string name="network_query_error" msgid="6406348372070035274">"ကွန်ရက် ရှာမတွေ့ပါ။ ထပ်စမ်းကြည့်ပါ။"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(တားမြစ်ထားသည်)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"ဆင်းမ်ကတ် မရှိပါ"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"ဆင်းကဒ်မရှိပါ"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"မရှိ"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ပြောင်းရန်"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"ချိတ်ဆက်ထားသည်"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ချိတ်ဆက်မှုမရှိပါ"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"မိုဘိုင်းဒေတာက အလိုအလျောက် ချိတ်ဆက်မည်မဟုတ်ပါ"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"မိုဘိုင်းဒေတာ ပိတ်မလား။"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"စကားဝှက် မှားနေသည်"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"စတင်နားဆင်ရန် အောက်ရှိ QR ကုဒ်ကို အလယ်တွင်ထားပါ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR ကုဒ်သည် မှန်ကန်သောဖော်မက် မဟုတ်ပါ"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"မိုဘိုင်း တူရာစုထားသော အက်ပ်များ"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"မိုဘိုင်း တူရာစုထားသော အက်ပ်များ"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"မိုဘိုင်း တူရာစုထားသော အက်ပ်များ၏ ပွင့်လင်းမြင်သာမှု အချက်အလက်"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ကြော်ငြာများ ပါဝင်သည်"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ဆော့ဖ်ဝဲရေးသူ(များ) အချက်အလက်"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ဆက်သွယ်ရန် အချက်အလက်များ"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"အကြောင်းအရာ"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ကိုယ်ရေးအချက်အလက်လုံခြုံမှုဆိုင်ရာ မူဝါဒ"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"အမျိုးအစား"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"မိုဘိုင်း တူရာစုထားသော အက်ပ်"</string>
 </resources>
