--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC स्ट्याकको लगिङ लेभल बढाउनुहोस्"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC भर्बोस विक्रेताको डिबग लग"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"बग रिपोर्टहरूमा खास डिभाइससँग सम्बन्धित विक्रेताका अतिरिक्त लगहरू समावेश गरियोस्। यी लगमा निजी जानकारी समावेश हुन सक्छन्।"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI को फिल्टर नगरिएको स्नुप लग"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"NFC का विस्तृत प्याकेटहरू समावेश गरियोस्। यी प्याकेटमा निजी जानकारी समावेश हुन सक्छन्।"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"डिभाइस रिस्टार्ट गर्ने हो?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFC को विस्तृत लग राख्ने सुविधा सफ्टवेयर विकास गर्ने प्रयोजनका लागि मात्र बनाइएको हो। बग रिपोर्टहरूमा NFC का अतिरिक्त डेटा समावेश हुन्छ। यी डेटामा निजी जानकारी समावेश हुन सक्छन्। यो सेटिङ बदल्न आफ्नो डिभाइस रिस्टार्ट गर्नुहोस्।"</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"विभिन्न शैली, वालपेपर र थप कुरा चलाएर हेर्नुहोस्"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"स्क्रिन सेभर"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"स्क्रिनसेभर"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"बेडटाइम मोड अन भएकाले यो सुविधा उपलब्ध छैन"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"स्क्रिन सेभर प्रयोग गरियोस्"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"चार्ज वा डक गरिरहँदा"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"चार्ज गरिरहेका बेला"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ब्लुटुथमार्फत फोनको इन्टरनेट सेयर गरियोस्‌"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"इथरनेट टेदरिङ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"इथरनेटमार्फत फोनको इन्टरनेट सेयर गरियोस्"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"आफ्नो मोबाइल डेटा जडानमार्फत अन्य यन्त्रहरूलाई इन्टरनेट उपलब्ध गराउन हटस्पट र टेदरिङ प्रयोग गर्नुहोस्। नजिकैका डिभाइससँग सामग्री आदान प्रदान गर्नाका निम्ति एपहरूले हटस्पट सिर्जना गर्न पनि सक्छन्।"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"आफ्नो Wi‑Fi वा मोबाइल डेटा इन्टरनेटमार्फत अन्य डिभाइसमा इन्टरनेट उपलब्ध गराउन हटस्पट र टेदरिङ प्रयोग गर्नुहोस्। एपहरूले पनि वरपरका डिभाइसहरूसँग सामग्री सेयर गर्न हटस्पट सिर्जना गर्न सक्छन्।"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"मद्दत"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"डेटा खपतको सीमा तोक्दा"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"तपाईंको ट्याब्लेट तपाईंले सेट गर्नुभएको अधिकतम डेटा प्रयोगको सीमामा पुगेपछि यसले मोबाइल डेटालाई निष्क्रिय पार्नेछ।\n\nतपाईंको ट्याब्लेटले र तपाईंको सेवा प्रदायकले फरक तरिकाले डेटा प्रयोगको मापन गर्न सक्ने हुनाले विवेकपूर्ण तरिकाले यसको सीमा सेट गर्ने बारे विचार गर्नुहोस्।"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"तपाईंले सेट गर्नुभएको अधिकतम डेटाको सीमामा पुगेपछि तपाईंको फोनले मोबाइल डेटा अफ गर्ने छ।\n\nतपाईंको फोन र तपाईंको सेवा प्रदायकले फरक फरक तरिकाले डेटा खपतको मापन गर्न सक्ने भएकाले विवेकपूर्ण तरिकाले डेटाको सीमा तोक्नुहोस्।"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"ब्याकग्राउन्ड डेटा प्रतिबन्ध गर्न चाहनुहुन्छ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"तपाईंले पृष्ठभूमिको मोबाइल डेटालाई सीमित गर्नुहुन्छ भने केही एप र सेवाहरूले तपाईं Wi‑Fi मा जडान नहुँदासम्म काम गर्ने छैनन्।"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"तपाईंले पृष्ठभूमिको मोबाइल डेटालाई सीमित गर्नुहुन्छ भने केही एप र सेवाहरूले तपाईं Wi‑Fi मा जडान नहुँदासम्म काम गर्ने छैनन्।\n\nयस सेटिङले यस ट्याब्लेटमा भएका सबै प्रयोगकर्ताहरूलाई प्रभाव पार्दछ।"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"तपाईंले पृष्ठभूमिको मोबाइल डेटालाई सीमित गर्नुहुन्छ भने केही एप र सेवाहरूले तपाईं Wi‑Fi मा जडान नहुँदासम्म काम गर्ने छैनन्।\n\nयस सेटिङले यस फोनमा भएका सबै प्रयोगकर्ताहरूलाई प्रभाव पार्दछ।"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">" <xliff:g id="NUMBER">^1</xliff:g> "</font>" "<font size="9">" <xliff:g id="UNIT">^2</xliff:g> "</font>" \n "<font size="12">" चेतावनी "</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">" <xliff:g id="NUMBER">^1</xliff:g> "</font>" "<font size="9">" <xliff:g id="UNIT">^2</xliff:g> "</font>" \n "<font size="12">" सीमा "</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"हटाइएका एपहरू"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (सिफारिस गरिएको)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS सन्देश"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"मोबाइल डेटा अफ हुँदा पठाउन र प्राप्त गर्न सकियोस्"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"कलहरूको अवधिमा मोबाइल डेटा"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"केवल कल गरेको अवधिमा मात्र यो SIM लाई डेटा इन्टरनेटका लागि प्रयोग गर्न दिनुहोस्"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"कार्य SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"एप र सामग्री पहुँच"</string>
     <string name="user_rename" msgid="8735940847878484249">"पुनःनामाकरण गर्नुहोस्"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi-Fi र मोबाइल सेटिङहरूको परिमार्जनका लागि अनुमति दिनुहोस्"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ब्लुटुथ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ब्लुटुथ जोडा बाँध्ने कार्य र सेटिङहरूलाई अनुमति दिनुहोस्।"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"जब यो <xliff:g id="DEVICE_NAME">%1$s</xliff:g> अर्को NFC उपकरणले छुन्छ डेटा विनिमयको अनुमति दिनुहोस्"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"ट्याब्लेटले अर्को उपकरण छुँदा डेटा एक अर्कामा सर्ने अनुमति दिनुहोस्"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"फोनले अर्को उपकरण छुँदा डेटा एक अर्कामा सर्ने अनुमति दिनुहोस्"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"स्थान"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"अनुप्रयोगहरुलाई तपाईँको स्थान जानकारी प्रयोग गर्न दिनुहोस्"</string>
     <string name="wizard_back" msgid="8257697435061870191">"पछाडि जानुहोस्"</string>
     <string name="wizard_next" msgid="3884832431439072471">"अर्को"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"पोर्टेबल प्रयोग गर्नुहोस्"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"अर्को तरिकाले फर्म्याट गर्नुहोस्"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM कार्डहरू"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"सूचनाहरू पठाउने प्रत्येक एपको सेटिङ परिवर्तन गर्नुहोस्"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"डिभाइसमा देखाइने एपहरू"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"यो एपमा परिष्कृत सेटिङ प्रयोग गर्न मिल्दैन"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"थप सेटिङ"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"यस एपभित्र थप सेटिङ उपलब्ध छन्"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR का सहायक सेवाहरू"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"इन्स्टल गरिएका कुनै पनि एपहरूले VR का सहायक सेवाहरूको रूपमा चल्ने अनुरोध गरेका छैनन्।"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> लाई VR को सेवामा पहुँचका लागि अनुमति दिने हो?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"तपाईंको ऋणदाता कम्पनीले ब्लक गरेको छ"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"अभिभावकको सहमति चाहिन्छ"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"यो फोन सेट अप गर्ने प्रक्रिया सुरु गर्न यो फोन आफ्ना अभिभावकलाई देऊ"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"थप जानकारीका लागि आफ्ना सूचना प्रविधि व्यवस्थापकलाई सम्पर्क गर्नुहोस्"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"थप विवरणहरु"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"तपाईंको प्रशासकले तपाईंको कार्य प्रोफाइलसँग सम्बन्धित एप र डेटाका साथै सेटिङ। अनुमति, संस्थागत पहुँच, नेटवर्क सम्बन्धी गतिविधि र यस डिभाइसको स्थानसम्बन्धी जानकारीको अनुगमन र व्यवस्थापन गर्न सक्छ।"</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"असक्षम पारिएका डिफल्ट परिवर्तनहरू"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"कुनै पनि एप उपलब्ध छैन"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"डिबग गर्न मिल्ने एपहरूमा मात्र एपको कम्प्याटिबिलिटीसँग सम्बन्धित परिवर्तनहरू गर्न सकिन्छ। कुनै डिबग गर्न मिल्ने एप इन्स्टल गरी फेरि प्रयास गर्नुहोस्।"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"यो फोनमा सेटिङ समर्थित छैन"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"यो ट्याब्लेटमा सेटिङ समर्थित छैन"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"यो डिभाइसमा सेटिङ समर्थित छैन"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"हालको प्रयोगकर्ताले सेटिङ परिवर्तन गर्न सक्नुहुन्न"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"अर्को सेटिङमा भर पर्छ"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"सेटिङ उपलब्ध छैन"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"खाता"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"डिभाइसको नाम"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"आधारभूत जानकारी"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"कुनै पनि नेटवर्क भेटिएन।"</string>
     <string name="network_query_error" msgid="6406348372070035274">"नेटवर्कहरू फेला पार्न सकिएन। फेरि प्रयास गर्नुहोस्।"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(निषेध गरिएको)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM कार्ड छैन"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM कार्ड छैन"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"SIM कार्डसम्बन्धी कुनै पनि जानकारी दिइएको छैन"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"बदल्नुहोस्"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"इन्टरनेटमा कनेक्ट गरिएको छ"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"इन्टरनेट छैन"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"मोबाइल डेटा स्वतः अन हुँदैन"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"मोबाइल डेटा अफ गर्ने हो?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"गलत पासवर्ड"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"अडियो सुन्न तलको QR कोडलाई केन्द्र भागमा पार्नुहोस्"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR कोडको फर्म्याट वैध छैन"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"मोबाइल एपहरूको बन्डल"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"मोबाइल एपहरूको बन्डल"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"मोबाइल एपका बन्डलहरूका बारेमा पारदर्शितासम्बन्धी जानकारी"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"विज्ञापन समावेश हुन्छ"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"विकासकर्ता(हरू) सँग सम्बन्धित जानकारी"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"सम्पर्क जानकारी"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"विवरण"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"गोपनीयता नीति"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"कोटी"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"मोबाइल एपको बन्डल"</string>
 </resources>
