--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Verhoog registratieniveau voor NFC-stack"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Uitgebreid NFC-leverancierslogboek voor foutopsporing"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Neem aanvullende apparaatspecifieke leverancierslogboeken op in bugrapporten. Deze kunnen privé-informatie bevatten."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Niet-gefilterd NFC NCI Snoop-logbestand"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Gedetailleerde NFC-pakketten vastleggen, die privé-informatie kunnen bevatten."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Apparaat opnieuw opstarten?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Gedetailleerde NFC-logboekregistratie is alleen voor ontwikkelingsdoeleinden bedoeld. Aanvullende NFC-gegevens worden opgenomen in bugrapporten. Deze kunnen privé-informatie bevatten. Start je apparaat opnieuw om deze instelling te wijzigen."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Probeer verschillende stijlen, achtergronden en meer"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Screensaver"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"screensaver"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Niet beschikbaar omdat de bedtijdstand aanstaat"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Screensaver gebruiken"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Tijdens opladen of docken"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Tijdens het opladen"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Deel internetverbinding van telefoon via bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-tethering"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Deel internetverbinding van telefoon via ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Gebruik hotspot en tethering om internet aan andere apparaten te leveren via je mobiele dataverbinding. Apps kunnen ook hotspots maken om content te delen met apparaten in de buurt."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Gebruik hotspot en tethering om internet aan andere apparaten te leveren via je wifi- of mobiele dataverbinding. Apps kunnen ook hotspots maken om content te delen met apparaten in de buurt."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Hulp"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Datagebruik beperken"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Je tablet zet mobiele data uit zodra je de ingestelde limiet bereikt.\n\nAangezien het datagebruik wordt gemeten door je tablet, en je provider tot een ander totaal kan komen, kun je het beste een voorzichtige limiet instellen."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Je telefoon zet mobiele data uit zodra je de ingestelde limiet bereikt.\n\nAangezien het datagebruik wordt gemeten door je telefoon, en je provider tot een ander totaal kan komen, kun je het beste een voorzichtige limiet instellen."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Achtergrondgegevens beperken?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Als je mobiele data op de achtergrond beperkt, werken sommige apps en services alleen als je verbinding hebt via wifi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Als je mobiele data op de achtergrond beperkt, werken sommige apps en services alleen als je verbinding hebt via wifi.\n\nDeze instelling is van toepassing op alle gebruikers van deze tablet."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Als je mobiele data op de achtergrond beperkt, werken sommige apps en services alleen als je verbinding hebt via wifi.\n\nDeze instelling is van toepassing op alle gebruikers van deze telefoon."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"waar­schuwing"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"limiet"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Verwijderde apps"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (aanbevolen)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mms-berichten"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Sturen en ontvangen als mobiele data uitstaan"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data tijdens gesprekken"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Toestaan dat deze simkaart alleen voor mobiele data wordt gebruikt tijdens gesprekken"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Simkaart voor werk"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Toegang tot apps en content"</string>
     <string name="user_rename" msgid="8735940847878484249">"NAAM WIJZIGEN"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Aanpassing van mobiele en wifi-instellingen toestaan"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Aanpassing van Bluetooth-koppelingen en -instellingen toestaan"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Gegevensuitwisseling toestaan wanneer deze <xliff:g id="DEVICE_NAME">%1$s</xliff:g> een ander NFC-apparaat aanraakt"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Gegevensuitwisseling toestaan wanneer de tablet een ander apparaat fysiek raakt"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Gegevensuitwisseling toestaan wanneer de telefoon een ander apparaat fysiek raakt"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Locatie"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Apps je locatiegegevens laten gebruiken"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Terug"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Volgende"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Schakelen naar draagbaar"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Op een andere manier formatteren"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Simkaarten"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Verander de instellingen voor elke app die meldingen stuurt"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Apps getoond op apparaat"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Deze app ondersteunt geen uitgebreide instellingen"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Meer instellingen"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Er zijn meer instellingen beschikbaar in deze app"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR-helperservices"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Er zijn geen geïnstalleerde apps die hebben gevraagd om te worden uitgevoerd als VR-helperservices."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR-servicetoegang toestaan voor <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Geblokkeerd door je kredietverstrekker"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ouder nodig"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Geef de telefoon aan je ouder om dit in te stellen"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Neem voor meer informatie contact op met je IT-beheerder"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Meer informatie"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Je beheerder kan apps en gegevens bijhouden en beheren die aan je werkprofiel zijn gekoppeld (waaronder instellingen, rechten, zakelijke toegang, netwerkactiviteit en locatiegegevens van het apparaat)."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Standaard uitgezette wijzigingen"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Geen apps"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Wijzigingen in app-compatibiliteit kunnen alleen worden aangepast voor apps waarin fouten kunnen worden opgespoord. Installeer een app waarin fouten kunnen worden opgespoord en probeer het opnieuw."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Instelling wordt niet ondersteund op deze telefoon"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Instelling wordt niet ondersteund op deze tablet"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Instelling wordt niet ondersteund op dit apparaat"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Instelling kan niet worden gewijzigd door de huidige gebruiker"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Is afhankelijk van een andere instelling"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Instelling niet beschikbaar"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Account"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Apparaatnaam"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Basisinformatie"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Geen netwerken gevonden."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Kan geen netwerken vinden. Probeer het opnieuw."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(niet toegestaan)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Geen simkaart"</string>
     <string name="sim_card" msgid="6381158752066377709">"Simkaart"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Geen simkaart"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Geen"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Wijzigen"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>: <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Verbonden"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Geen verbinding"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobiele data maakt niet automatisch verbinding"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Mobiele data uitzetten?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Onjuist wachtwoord"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Centreer de onderstaande QR-code om te beginnen met luisteren"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-code heeft geen geldige indeling"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Gebundelde mobiele apps"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Gebundelde mobiele apps"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Transparantie-informatie voor gebundelde mobiele apps"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Bevat advertenties"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informatie over ontwikkelaar(s)"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Contactgegevens"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Beschrijving"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Privacybeleid"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Categorie"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Gebundelde mobiele app"</string>
 </resources>
