--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC ଷ୍ଟାକ୍ ଲଗିଂ ଲେଭେଲକୁ ବଢ଼ାନ୍ତୁ"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC ଭର୍ବୋସ ଭେଣ୍ଡର ଡିବଗ ଲଗ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"ବଗରିପୋର୍ଟଗୁଡ଼ିକରେ ଅତିରିକ୍ତ ଡିଭାଇସ-ନିର୍ଦ୍ଦିଷ୍ଟ ଭେଣ୍ଡର ଲଗଗୁଡ଼ିକ ଅନ୍ତର୍ଭୁକ୍ତ କରନ୍ତୁ, ଯେଉଁଥିରେ ବ୍ୟକ୍ତିଗତ ସୂଚନା ଥାଇପାରେ।"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI ଫିଲ୍ଟର କରାଯାଇନଥିବା ସ୍ନୁପ ଲଗ"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"ସବିଶେଷ NFC ପେକେଟଗୁଡ଼ିକୁ କେପଚର କରନ୍ତୁ, ଯେଉଁଥିରେ ବ୍ୟକ୍ତିଗତ ସୂଚନା ଥାଇପାରେ।"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ଡିଭାଇସକୁ ରିଷ୍ଟାର୍ଟ କରିବେ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ସବିଶେଷ NFC ଲଗିଂ କେବଳ ଉନ୍ନତି ପାଇଁ ଉଦ୍ଦିଷ୍ଟ। ବଗ ରିପୋର୍ଟରେ ଅତିରିକ୍ତ NFC ଡାଟା ଅନ୍ତର୍ଭୁକ୍ତ କରାଯାଏ, ଯେଉଁଥିରେ ବ୍ୟକ୍ତିଗତ ସୂଚନା ଥାଇପାରେ। ଏହି ସେଟିଂକୁ ପରିବର୍ତ୍ତନ କରିବା ପାଇଁ ଆପଣଙ୍କ ଡିଭାଇସକୁ ରିଷ୍ଟାର୍ଟ କରନ୍ତୁ।"</string>
@@ -1464,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ବ୍ଲୁଟୁଥ ମାଧ୍ୟମରେ ଫୋନର ଇଣ୍ଟରନେଟ କନେକ୍ସନ ସେୟାର କରନ୍ତୁ"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ଇଥରନେଟ୍ ଟିଥରିଂ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ଇଥରନେଟ ମାଧ୍ୟମରେ ଫୋନର ଇଣ୍ଟରନେଟ କନେକ୍ସନ ସେୟାର କରନ୍ତୁ"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"ଆପଣଙ୍କ ମୋବାଇଲ୍‌ ଡାଟା ସଂଯୋଗ ମାଧ୍ୟମରେ ଅନ୍ୟ ଡିଭାଇସଗୁଡିକୁ ଇଣ୍ଟରନେଟ୍‌ ପ୍ରଦାନ କରିବା ପାଇଁ ହଟସ୍ପଟ୍ ଏବଂ ଟିଥରିଂ ବ୍ୟବହାର କରନ୍ତୁ। ଆଖପାଖରେ ଥିବା ଡିଭାଇସ୍‌ଗୁଡ଼ିକ ସହ ବିଷୟବସ୍ତୁ ସେୟାର୍‌ କରିବାକୁ ଆପ୍‌ଗୁଡ଼ିକ ମଧ୍ୟ ଗୋଟିଏ ହଟ୍‌ସ୍ପଟ୍‌ ତିଆରି କରିପାରିବେ।"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"ଆପଣଙ୍କ ୱାଇ-ଫାଇ ବା ମୋବାଇଲ ଡାଟା କନେକ୍ସନ ମାଧ୍ୟମରେ ଅନ୍ୟ ଡିଭାଇସଗୁଡ଼ିକୁ ଇଣ୍ଟରନେଟ ପ୍ରଦାନ କରିବାକୁ ହଟସ୍ପଟ ଏବଂ ଟିଥରିଂ ବ୍ୟବହାର କରନ୍ତୁ। ନିକଟସ୍ଥ ଡିଭାଇସଗୁଡ଼ିକ ସହ ବିଷୟବସ୍ତୁ ସେୟାର କରିବାକୁ ଆପଗୁଡ଼ିକ ମଧ୍ୟ ଏକ ହଟସ୍ପଟ୍ ତିଆରି କରିପାରିବ।"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"ସାହାଯ୍ୟ"</string>
@@ -2693,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ଡାଟାର ବ୍ୟବହାର ସୀମିତ କରିବା"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"ସେଟ୍‌ କରାଯାଇଥିବା ସୀମାରେ ପହଞ୍ଚିବା ପରେ ଆପଣଙ୍କ ଟାବ୍‌ଲେଟ୍‌, ମୋବାଇଲ୍‌ ଡାଟାକୁ ବନ୍ଦ‌ କରିଦେବ।\n\nଆପଣଙ୍କ ଟାବ୍‌ଲେଟ୍‌ ଓ ମୋବାଇଲ୍‌ ନେଟ୍‍ୱର୍କ ବାହକଙ୍କର ଡାଟା ବ୍ୟବହାର ଗଣନା ଭିନ୍ନ ହୋଇଥିବାରୁ, ଏକ ସଂକୁଚିତ ସୀମା ନିର୍ଦ୍ଧାରଣ କରନ୍ତୁ।"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"ଡାଟାର ବ୍ୟବହାର ଆପଣ ସେଟ୍‌ କରିଥିବା ସୀମାରେ ପହଞ୍ଚିଗଲେ, ଆପଣଙ୍କ ଫୋନ୍‌ ମୋବାଇଲ୍‌ ଡାଟାକୁ ବନ୍ଦ କରିଦେବ।\n\nଯେହେତୁ ଡାଟା ବ୍ୟବହାରର ହିସାବ ଆପଣଙ୍କ ଫୋନ୍‌ ରଖିଥାଏ ଏବଂ ଆପଣଙ୍କ କ୍ୟାରିଅର୍ ଭିନ୍ନ ଭାବେ ଡାଟାର ବ୍ୟବହାରକୁ ଗଣନା କରିପାରେ, ତେଣୁ ଏକ କନଜାର୍ଭେଟିଭ୍ ସୀମା ସେଟ୍ କରିବା ବିଷୟରେ ବିଚାର କରନ୍ତୁ।"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"ବ୍ୟାକ୍‌ଗ୍ରାଉଣ୍ଡ ଡାଟାକୁ ସୀମିତ କରିବେ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"ଯଦି ଆପଣ ବ୍ୟାକ୍‌ଗ୍ରାଉଣ୍ଡ ମୋବାଇଲ୍‌ ଡାଟାକୁ ରୋକନ୍ତି, ତେବେ ୱାଇ-ଫାଇ ସହିତ ସଂଯୁକ୍ତ ନହେବା ପର୍ଯ୍ୟନ୍ତ କେତେକ ଆପ୍‍ ଓ ସେବା କାମ କରିବ ନାହିଁ।"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"ଯଦି ଆପଣ ବ୍ୟାକ୍‌ଗ୍ରାଉଣ୍ଡ ମୋବାଇଲ୍‌ ଡାଟାକୁ ରୋକନ୍ତି, ତେବେ ୱାଇ-ଫାଇ ସହିତ ସଂଯୁକ୍ତ ନହେବା ପର୍ଯ୍ୟନ୍ତ କେତେକ ଆପ୍‍ ଓ ସେବା କାମ କରିବ ନାହିଁ।\n\nଏହି ସେଟିଙ୍ଗ, ଟାବଲେଟ୍‌ରେ ଥିବା ସମସ୍ତ ଉପଯୋଗକର୍ତ୍ତାଙ୍କୁ ପ୍ରଭାବିତ କରିବ।"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"ମୋବାଇଲ ଡାଟା ପ୍ରତିବନ୍ଧିତ ହୋଇଥିଲେ, Wi‑Fi ସହ ସଂଯୋଗିତ ନହେବା ପର୍ଯ୍ୟନ୍ତ କିଛି ଏପ୍ସ ଓ ସେବା କାମ କରିବ ନାହିଁ।\n\nଏହି ଫୋନର ଉପଯୋଗକର୍ତ୍ତାଙ୍କୁ ଏହି ସେଟିଙ୍ଗ ପ୍ରଭାବିତ କରିବ।"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ଚେତାବନୀ"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ସୀମା"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"କଢ଼ାଯାଇଥିବା ଆପ୍‌ଗୁଡ଼ିକ"</string>
@@ -2938,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ପ୍ରସ୍ତାବିତ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS ମେସେଜ୍‌ଗୁଡ଼ିକ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ମୋବାଇଲ୍ ଡାଟା ବନ୍ଦ ଥିବା ବେଳେ ପଠାନ୍ତୁ ଏବଂ ପ୍ରାପ୍ତ କରନ୍ତୁ"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"କଲ୍ ସମୟର ଡାଟା"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"କେବଳ କଲ୍ ସମୟରେ ମୋବାଇଲ୍ ଡାଟା ପାଇଁ ଏହି SIMକୁ ବ୍ୟବହାର କରିବାକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"କାର୍ଯ୍ୟ SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ଆପ୍‌ ଓ କଣ୍ଟେଣ୍ଟ ଆକ୍‌ସେସ୍"</string>
     <string name="user_rename" msgid="8735940847878484249">"ରିନେମ କରନ୍ତୁ"</string>
@@ -2951,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"ୱାଇ-ଫାଇ ଏବଂ ମୋବାଇଲ୍‌ ସେଟିଂସ ବଦଳାଇବାକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ବ୍ଲୁଟୁଥ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"ବ୍ଲୁଟୂଥ୍‍‌ ପେୟାରିଂ ଏବଂ ସେଟିଂସ ପରିବର୍ତ୍ତନ କରିବାକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"ଏହି <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ଅନ୍ୟ NFC ଡିଭାଇସ୍‌ ସ୍ପର୍ଶ କରିବା ବେଳେ ଡାଟା ପ୍ରତିବଦଳ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"ଟାବ୍‌ଲେଟ୍‌ ଅନ୍ୟ ଡିଭାଇସ୍‌କୁ ଛୁଇଁଲେ ଡାଟା ଆଦାନପ୍ରଦାନର ଅନୁମତି ଦିଅନ୍ତୁ"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"ଫୋନ୍‌ଟି ଅନ୍ୟ ଡିଭାଇସ୍‌କୁ ଛୁଇଁଲେ ଡାଟା ପ୍ରତିବଦଳ କରିପାରିବ"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"ଲୋକେସନ୍‌"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ଆପଣଙ୍କ ଲୋକେସନ୍‌ ସୂଚନାକୁ ଆପ୍‌ଗୁଡ଼ିକୁ ବ୍ୟବହାର କରିବାକୁ ଦିଅନ୍ତୁ"</string>
     <string name="wizard_back" msgid="8257697435061870191">"ପଶ୍ଚାତ୍"</string>
     <string name="wizard_next" msgid="3884832431439072471">"ପରବର୍ତ୍ତୀ"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"ପୋର୍ଟେବଲକୁ ସ୍ୱିଚ କରନ୍ତୁ"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"ଅନ୍ୟ ଏକ ଉପାୟରେ ଫର୍ମାଟ କରନ୍ତୁ"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"ସିମ୍‌ କାର୍ଡଗୁଡ଼ିକ"</string>
@@ -3877,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ଆପଣଙ୍କ କ୍ରେଡିଟ୍ ପ୍ରଦାନକାରୀଙ୍କ ଦ୍ୱାରା ବ୍ଲକ୍ ହୋଇଛି"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ବାପାମାଙ୍କ ଅନୁମତି ଆବଶ୍ୟକ"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ଏହାକୁ ସେଟ୍ ଅପ୍ କରିବା ଆରମ୍ଭ କରିବାକୁ ଫୋନଟି ତୁମ ବାପାମାଙ୍କୁ ଦିଅ"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ଅଧିକ ସୂଚନା ପାଇଁ ଆପଣଙ୍କ IT ଆଡମିନଙ୍କ ସହ କଣ୍ଟାକ୍ଟ କରନ୍ତୁ"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ଅଧିକ ବିବରଣୀ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"ସେଟିଂସ, ଅନୁମତି, କର୍ପୋରେଟ୍‌ ଆକ୍ସେସ, ନେଟୱାର୍କ କାର୍ଯ୍ୟକଳାପ ଓ ଡିଭାଇସର ଲୋକେସନ ସୂଚନା ସମେତ ଆପଣଙ୍କର କାର୍ଯ୍ୟ ପ୍ରୋଫାଇଲ ସହ ଜଡ଼ିତ ଥିବା ଆପ୍ସ ଓ ଡାଟାକୁ ଆପଣଙ୍କ ଆଡମିନ ତଦାରଖ ଓ ପରିଚାଳନା କରିପାରିବେ।"</string>
@@ -4322,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"ଡିଫଲ୍ଟ ଭାବେ ଅକ୍ଷମ କରାଯାଇଥିବା ପରିବର୍ତ୍ତନଗୁଡ଼ିକ"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"ଆପ୍ ଉପଲବ୍ଧ ନାହିଁ"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ଆପ୍ କମ୍ପାଟିବିଲିଟୀ ପରିବର୍ତ୍ତନଗୁଡ଼ିକୁ କେବଳ ଡିବଗ୍ କରାଯାଇପାରୁଥିବା ଆପଗୁଡ଼ିକ ପାଇଁ ସଂଶୋଧନ କରାଯାଇପାରିବ। ଏକ ଡିବଗ୍ କରାଯାଇପାରୁଥିବା ଆପ୍ ଇନଷ୍ଟଲ୍ କରି ପୁଣି ଚେଷ୍ଟା କରନ୍ତୁ।"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ଏହି ଫୋନ୍‌ରେ ସେଟିଙ୍ଗ ସପୋର୍ଟ କରୁନାହିଁ"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ଏହି ଟାବଲେଟ୍‌ରେ ସେଟିଙ୍ଗ ସପୋର୍ଟ କରୁନାହିଁ"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ଏହି ଡିଭାଇସ୍‌ରେ ସେଟିଙ୍ଗ ସପୋର୍ଟ କରୁନାହିଁ"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"ସାମ୍ପ୍ରତିକ ୟୁଜର୍‌ଙ୍କ ସେଟିଙ୍ଗ ବଦଳାଇ ପାରିବେନାହିଁ"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"ଅନ୍ୟଏକ ସେଟିଙ୍ଗ ଉପରେ ନିର୍ଭର କରିଥାଏ"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"ସେଟିଙ୍ଗ ଉପଲବ୍ଧ ନାହିଁ"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"ଆକାଉଣ୍ଟ"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"ଡିଭାଇସ୍‌ର ନାମ"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"ମୌଳିକ ସୂଚନା"</string>
@@ -4362,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"କୌଣସି ନେଟ୍‌ୱର୍କ ମିଳୁନାହିଁ"</string>
     <string name="network_query_error" msgid="6406348372070035274">"ନେଟ୍‌ୱର୍କ ମିଳୁନାହିଁ। ପୁଣି ଚେଷ୍ଟା କରନ୍ତୁ।"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(ଅନୁମତିପ୍ରାପ୍ତ ନୁହେଁ)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM କାର୍ଡ ନାହିଁ"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"କୌଣସି SIM ନାହିଁ"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"କିଛି ନାହିଁ"</string>
@@ -4679,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ପରିବର୍ତ୍ତନ କରନ୍ତୁ"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"ସଂଯୋଗ କରାଯାଇଛି"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ସଂଯୋଗ ନାହିଁ"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ମୋବାଇଲ ଡାଟା ସ୍ୱତଃ-ସଂଯୋଗ ହେବ ନାହିଁ"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"ମୋବାଇଲ୍ ଡାଟା ବନ୍ଦ କରିବେ?"</string>
@@ -4833,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ଭୁଲ ପାସୱାର୍ଡ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ଶୁଣିବା ଆରମ୍ଭ କରିବା ପାଇଁ, ନିମ୍ନରେ ଥିବା QR କୋଡକୁ କେନ୍ଦ୍ରରେ ରଖନ୍ତୁ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR କୋଡ ଏକ ବୈଧ ଫର୍ମାଟ ନୁହେଁ"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ୍ସ"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ୍ସ"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ୍ସର ଟ୍ରାନ୍ସପରେନ୍ସି ସୂଚନା"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ଏଥିରେ ବିଜ୍ଞାପନଗୁଡ଼ିକ ଅଛି"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ଡେଭେଲପର(ମାନ)ଙ୍କ ସୂଚନା"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"କଣ୍ଟାକ୍ଟ ସୂଚନା"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ବର୍ଣ୍ଣନା"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ଗୋପନୀୟତା ନୀତି"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ବର୍ଗ"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ"</string>
 </resources>
