--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -823,7 +823,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Ведение подробного журнала стека NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Подробный журнал отладки NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Включать в отчеты об ошибках дополнительные записи поставщика об устройстве, которые могут содержать конфиденциальную информацию"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Журнал NFC NCI без фильтрации"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Сохранять пакеты NFC, которые могут содержать конфиденциальную информацию"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Перезапустить устройство?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Подробный журнал NFC ведется только в целях разработки. Дополнительные данные NFC будут включены в отчеты об ошибках и могут содержать конфиденциальную информацию. Чтобы изменить этот параметр, перезапустите устройство."</string>
@@ -1506,6 +1507,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Открыть доступ к интернет-подключению телефона через Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-модем"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Открыть доступ к интернет-подключению телефона через Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Точка доступа и режим модема позволяют подключать другие устройства к интернету через мобильную сеть. Приложения также могут создавать точки доступа, чтобы вы могли делиться контентом с устройствами поблизости."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Точка доступа и режим модема позволяют подключать другие устройства к интернету через Wi-Fi или мобильную сеть. Приложения также могут создавать точки доступа, чтобы вы могли делиться контентом с устройствами поблизости."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Справка"</string>
@@ -2771,10 +2774,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Лимит трафика данных"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"После достижения установленного лимита передача данных по мобильной сети будет отключена.\n\nСтатистика оператора может отличаться от статистики планшета, поэтому советуем установить ограничение чуть меньше заданного в вашем тарифном плане."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"После достижения установленного лимита передача данных по мобильной сети будет отключена.\n\nСтатистика оператора может отличаться от статистики телефона, поэтому советуем установить ограничение чуть меньше заданного в вашем тарифном плане."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Ограничение фонового режима"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Если ограничить передачу данных по мобильной сети в фоновом режиме, некоторые приложения и сервисы не будут работать без подключения к Wi-Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Если ограничить передачу данных по мобильной сети в фоновом режиме, некоторые приложения и сервисы не будут работать без подключения к Wi-Fi.\n\nНастройки будут изменены для всех пользователей планшета."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Если ограничить передачу данных по мобильной сети в фоновом режиме, некоторые приложения и сервисы не будут работать без подключения к Wi-Fi.\n\nНастройки будут изменены для всех пользователей телефона."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"Предупр."</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"Лимит"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Удаленные приложения"</string>
@@ -3020,8 +3019,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (рекомендуется)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-сообщения"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Получать и отправлять MMS-сообщения, когда передача данных по мобильной сети отключена"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Передача данных во время звонков"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Использовать эту SIM-карту для доступа к мобильному Интернету только во время звонков"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Рабочая SIM-карта"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Доступ к контенту и приложениям"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПЕРЕИМЕНОВАТЬ"</string>
@@ -3033,15 +3034,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Разрешить изменение настроек Wi‑Fi и мобильной сети"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Разрешить изменение настроек Bluetooth-подключения"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Разрешить обмен данными между устройством <xliff:g id="DEVICE_NAME">%1$s</xliff:g> и другими NFC-устройствами"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Разрешить обмен данными, когда вы подносите планшет к другому устройству"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Разрешить обмен данными, когда вы подносите телефон к другому устройству"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Местоположение"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Разрешить приложениям использовать данные о вашем местоположении"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Назад"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Далее"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Форматировать по-другому"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Форматировать по-другому"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-карты"</string>
@@ -3989,6 +3985,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Заблокировано организацией, предоставившей кредит"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Нужна помощь родителя"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Чтобы настроить эту функцию, попроси родителя тебе помочь."</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Чтобы узнать подробности, обратитесь к своему администратору"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Подробнее…"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администратор может контролировать настройки, приложения, разрешения и параметры доступа к корпоративным ресурсам в этом профиле, а также связанные с ним данные, например сведения о местоположении или действиях в сети."</string>
@@ -4456,12 +4454,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Изменения, отключенные по умолчанию"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Нет приложений"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Настраивать изменение параметров совместимости можно только для приложений, доступных для отладки. Установите такое приложение и повторите попытку."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Настройка не поддерживается на этом телефоне."</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Настройка не поддерживается на этом планшете."</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Настройка не поддерживается на этом устройстве."</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Текущий пользователь не может менять эту настройку."</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Эту настройку нельзя изменить, так как она зависит от других параметров."</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Настройка недоступна."</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Аккаунт"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Название устройства"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Основная информация"</string>
@@ -4496,7 +4489,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Сети не найдены."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Сети не найдены. Повторите попытку."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(доступ запрещен)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Нет SIM-карты."</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM-карта"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Нет SIM-карты"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Нет"</string>
@@ -4815,6 +4807,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Изменить настройки"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Подключено"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Нет подключения"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Без автоподключения к мобильному интернету"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Отключить мобильный интернет?"</string>
@@ -4969,14 +4965,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Пароль указан неверно."</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Чтобы прослушать аудио, поместите QR-код в центр."</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Недопустимый формат QR-кода."</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Наборы App Bundle для мобильных приложений"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Наборы App Bundle для мобильных приложений"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Доступность данных наборов App Bundle для мобильных приложений"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Есть реклама"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Информация от разработчиков"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Контактная информация"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Описание"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Политика конфиденциальности"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категория"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Набор App Bundle для мобильного приложения"</string>
 </resources>
