--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Rrit nivelin e regjistrimit të grumbullit të NFC-së"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Evidenca e zgjeruar i korrigjimit të shitësit të NFC-së"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Përfshi evidenca shtesë të shitësve, specifike për pajisjen, në raportet e defekteve në kod që mund të përfshijnë informacione private."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Evidenca eksploruese e pafiltruar për NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Kap paketat e detajuara të NFC-së, të cilat mund të përmbajnë informacione private."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Të riniset pajisja?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Regjistrimi i detajuar i lidhjes NFC është i planifikuar vetëm për qëllime zhvillimi. Të dhënat shtesë të lidhjes NFC përfshihen në raportet e defekteve në kod, të cilat mund të përmbajnë informacione private. Rinise pajisjen tënde për ta ndryshuar këtë cilësim."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Provo stile, imazhe sfondi të ndryshme etj."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Mbrojtësi i ekranit"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"mbrojtësi i ekranit"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nuk ofrohet sepse modaliteti i orarit të gjumit është aktiv"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Përdor mbrojtësin e ekranit"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Gjatë karikimit ose lidhjes me stacionin"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Gjatë karikimit"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Ndaj lidhjen e internetit të telefonit përmes Bluetooth-it"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ndarja e Ethernet-it"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Ndaj lidhjen e internetit të telefonit përmes Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Përdor zonën e qasjes dhe ndarjen e internetit për t\'u ofruar internet pajisjeve të tjera nëpërmjet lidhjes tënde të të dhënave celulare. Aplikacionet mund të krijojnë po ashtu një zonë qasjeje të internetit për të ndarë përmbajtje me pajisjet në afërsi."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Përdor zonën e qasjes dhe ndarjen e internetit për t\'u ofruar internet pajisjeve të tjera nëpërmjet lidhjes tënde Wi-Fi ose të të dhënave celulare. Aplikacionet mund të krijojnë po ashtu një zonë qasjeje të internetit për të ndarë përmbajtje me pajisjet në afërsi."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Ndihma"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Kufizimi i përdorimit të të dhënave"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tableti do të çaktivizojë të dhënat celulare sapo të arrijë kufirin që cakton ti.\n\nMeqenëse përdorimi i të dhënave matet nga tableti yt dhe operatori celular mund ta llogarisë ndryshe përdorimin, ki parasysh të vendosësh një kufi të menduar mirë."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Telefoni yt do t\'i çaktivizojë të dhënat celulare kur të arrihet kufiri që cakton ti.\n\nMeqenëse përdorimi i të dhënave matet nga telefoni yt dhe operatori celular mund ta llogarisë ndryshe përdorimin, ki parasysh të vendosësh një kufi të menduar mirë."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Të kufizohen të dhënat në sfond?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Nëse kufizon të dhënat celulare në sfond, disa aplikacione dhe shërbime nuk do të funksionojnë nëse nuk je i lidhur me Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Nëse kufizon të dhënat celulare në sfond, disa aplikacione dhe shërbime nuk do të funksionojnë nëse nuk je i lidhur me Wi‑Fi.\n\nKy cilësim ndikon te të gjithë përdoruesit në këtë tablet."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Nëse kufizon të dhënat celulare në sfond, disa aplikacione dhe shërbime nuk do të funksionojnë nëse nuk je i lidhur me Wi-Fi.\n\nKy cilësim ndikon te të gjithë përdoruesit në këtë telefon."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"paralajmërim"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284">"Kufiri "<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12"></font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Aplikacionet e hequra"</string>
@@ -2867,7 +2865,7 @@
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"Instalo aplikacionet e disponueshme"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Pagesat pa kontakt"</string>
     <string name="nfc_default_payment_settings_title" msgid="2150504446774382261">"Aplikacioni i parazgjedhur për pagesa"</string>
-    <string name="nfc_default_payment_footer" msgid="978535088340021360">"Për të paguar me aplikacionin për pagesa, mbaje pjesën e pasme të pajisjes te një pikë pagese"</string>
+    <string name="nfc_default_payment_footer" msgid="978535088340021360">"Për të paguar me një aplikacion për pagesa, mbaje pjesën e pasme të pajisjes te një terminal pagese"</string>
     <string name="nfc_more_details" msgid="1700713533074275233">"Mëso më shumë"</string>
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"Të parazgjidhet apl. i punës për pagesat?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Për të paguar me aplikacionin e punës:"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (rekomandohet)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mesazhet MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Dërgo dhe merr kur të dhënat celulare janë joaktive"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Të dhënat gjatë telefonatave"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Lejo që kjo kartë SIM të përdoret për të dhënat celulare vetëm gjatë telefonatave"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Karta SIM e punës"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Qasja tek aplikacioni e përmbajtja"</string>
     <string name="user_rename" msgid="8735940847878484249">"Riemërto"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Lejo modifikimin e cilësimeve Wi-Fi dhe atyre celulare"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth-i"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Lejo modifikimin e çiftimeve të \"Bluetooth-it\" dhe cilësimet"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Lejo shkëmbimin e të dhënave kur pajisja <xliff:g id="DEVICE_NAME">%1$s</xliff:g> prek një tjetër pajisje NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Lejo shkëmbimin e të dhënave kur tableti prek një tjetër pajisje"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Lejo shkëmbimin e të dhënave kur telefoni prek një tjetër pajisje"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Vendndodhja"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Lejo aplikacionet të përdorin informacionin e vendndodhjes tënde"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Prapa"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Para"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Kalo te hapësira ruajtëse e lëvizshme"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatoje në një mënyrë tjetër"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Kartat SIM"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Ndrysho cilësimet për secilin aplikacion që dërgon njoftime"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Aplikacionet që shfaqen në pajisje"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Ky aplikacion nuk i mbështet cilësimet e përmirësuara"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Cilësime të tjera"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Brenda këtij aplikacioni ofrohen cilësime të tjera"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Shërbimet e ndihmësit VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Asnjë aplikacion i instaluar nuk ka kërkuar të ekzekutohet si shërbim ndihmësi VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Të lejohet qasja e shërbimit VR për <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Bllokuar nga ofruesi i kreditit"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Nevojitet prindi"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Jepja telefonin prindit për të filluar konfigurimin e kësaj"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Për më shumë informacione, kontakto me administratorin e teknologjisë së informacionit"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Më shumë detaje"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratori yt mund të monitorojë dhe të menaxhojë aplikacionet dhe të dhënat e lidhura me profilin tënd të punës, duke përfshirë cilësimet, lejet, qasjen e korporatës, aktivitetin e rrjetit dhe informacionet e vendndodhjes së pajisjes."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Ndryshimet të çaktivizuara si parazgjedhje"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Nuk ofrohet asnjë aplikacion"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Ndryshimet e pajtueshmërisë së aplikacionit mund të modifikohen vetëm për aplikacionet e korrigjueshme. Instalo një aplikacion të korrigjueshëm dhe provo përsëri."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Cilësimi nuk mbështetet në këtë telefon"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Cilësimi nuk mbështetet në këtë tablet"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Cilësimi nuk mbështetet në këtë pajisje"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Cilësimi nuk mund të ndryshohet nga përdoruesi aktual"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Varet nga një cilësim tjetër"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Cilësimi nuk ofrohet"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Llogaria"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Emri i pajisjes"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Informacionet bazë"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nuk u gjetën rrjete."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Rrjetet nuk mund të gjendeshin. Provo përsëri."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(ndalohet)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nuk ka kartë SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nuk ka kartë SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Asnjë"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Ndrysho"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Lidhur"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Nuk ka lidhje"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Të dhënat celulare nuk do të lidhen automatikisht"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Të çaktivizohen të dhënat celulare?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Fjalëkalim i gabuar"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Që të fillosh të dëgjosh, vendos në qendër kodin QR më poshtë"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Kodi QR nuk është në format të vlefshëm"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Aplikacionet e vendosura në paketë për celularin"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Aplikacionet e vendosura në paketë për celularin"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informacione për transparencën e aplikacioneve të vendosura në paketë për celularin"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Përmban reklama"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informacionet e zhvilluesve"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Informacionet i kontaktit"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Përshkrimi"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Politika e privatësisë"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategoria"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Aplikacionet e vendosura në paketë për celularin"</string>
 </resources>
