--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC அடுக்கின் நுழைவு அளவை அதிகரிக்கும்"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC வெர்போஸ் வெண்டார் பிழைதிருத்தப் பதிவு"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"சாதனத்திற்கேற்ற கூடுதல் வெண்டார் பதிவுகளைப் பிழை அறிக்கைகளில் சேர்க்கவும். இது தனிப்பட்ட தகவல்களைக் கொண்டிருக்கக்கூடும்."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI வடிகட்டப்படாத ஸ்னூப் பதிவு"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"தனிப்பட்ட தகவல்களைக் கொண்டிருக்கக்கூடிய விரிவான NFC பாக்கெட்டுகளைப் படமெடுக்கவும்."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"சாதனத்தை மீண்டும் தொடங்கவா?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"விரிவான NFC பதிவானது மேம்பாட்டு நோக்கங்களுக்காக மட்டுமே உருவாக்கப்பட்டது. பிழை அறிக்கைகளில் கூடுதல் NFC தரவு சேர்க்கப்பட்டுள்ளது. இவற்றில் தனிப்பட்ட தகவல்கள் இருக்கக்கூடும். இந்த அமைப்பை மாற்ற உங்கள் சாதனத்தை மீண்டும் தொடங்கவும்."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"மாறுபட்ட ஸ்டைல்கள், வால்பேப்பர்கள் மற்றும் பலவற்றை முயல்க"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"ஸ்கிரீன் சேவர்"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ஸ்கிரீன் சேவர்"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"உறக்கநேரப் பயன்முறை ஆனில் உள்ளதால் கிடைக்காது"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ஸ்கிரீன் சேவரை உபயோகித்தல்"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"இரண்டின் போதும்"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"சார்ஜ் செய்யப்படும்போது"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"புளூடூத் மூலம் ஃபோனின் இண்டர்நெட்டைப் பகிரவும்"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ஈத்தர்நெட் இணைப்புமுறை"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ஈத்தர்நெட் மூலம் மொபைலின் இணைய இணைப்பைப் பகிரும்"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"மொபைல் டேட்டா இணைப்பு வழியாக, மற்ற சாதனங்களுக்கு இண்டர்நெட்டை வழங்க, ஹாட்ஸ்பாட் மற்றும் டெதெரிங் முறையை பயன்படுத்தவும். அருகிலுள்ள சாதனங்களுடன் உள்ளடக்கத்தைப் பகிர, ஆப்ஸும் ஹாட்ஸ்பாட்டை உருவாக்கலாம்."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"உங்கள் வைஃபை அல்லது மொபைல் டேட்டா மூலம் வேறு சாதனங்களுக்கு இணைய இணைப்பை வழங்க ஹாட்ஸ்பாட்டையும் டெதரிங் இணைப்பு முறையையும் பயன்படுத்தும். மேலும், அருகிலுள்ள சாதனங்களுடன் உள்ளடக்கத்தைப் பகிர, தனியாக ஒரு ஹாட்ஸ்பாட்டையும் ஆப்ஸ் உருவாக்கலாம்."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"உதவி"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"டேட்டா உபயோகத்தை வரம்பிடுக"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"நீங்கள் அமைத்துள்ள வரம்பை அடைந்ததும், மொபைல் டேட்டாவை டேப்லெட் முடக்கும்.\n\nடேட்டா உபயோகத்தை டேப்லெட் அளவிட்டாலும், உங்கள் தொலைத்தொடர்பு நிறுவனம் வேறுவிதமாக அளவிடலாம். எனவே, பாதுகாப்பான அளவில் வரம்பை அமைக்கவும்."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"நீங்கள் அமைத்துள்ள வரம்பை அடைந்ததும், மொபைல் டேட்டாவை மொபைல் முடக்கும்.\n\nடேட்டா உபயோகத்தை மொபைல் அளவிட்டாலும், உங்கள் தொலைத்தொடர்பு நிறுவனம் வேறுவிதமாக அளவிடலாம். எனவே, பாதுகாப்பான அளவில் வரம்பை அமைக்கவும்."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"பின்புல டேட்டா உபயோகத்தை வரம்பிடவா?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"பின்னணி மொபைல் டேட்டாவைக் கட்டுப்படுத்தினால், வைஃபையுடன் இணைக்கும் வரை சில பயன்பாடுகளும் சேவைகளும் வேலை செய்யாது."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"பின்னணி மொபைல் டேட்டாவைக் கட்டுப்படுத்தினால், வைஃபையுடன் இணைக்கும் வரை சில பயன்பாடுகளும் சேவைகளும் வேலை செய்யாது.\n\nஇதனால் இந்த டேப்லெட்டைப் பயன்படுத்தும் எல்லாப் பயனர்களும் பாதிக்கப்படுவார்கள்."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"பின்னணி மொபைல் டேட்டாவைக் கட்டுப்படுத்தினால், வைஃபையுடன் இணைக்கும் வரை சில பயன்பாடுகளும் சேவைகளும் வேலை செய்யாது.\n\nஇதனால் இந்த மொபைலைப் பயன்படுத்தும் எல்லாப் பயனர்களும் பாதிக்கப்படுவார்கள்."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"எச்சரிக்கை"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"வரம்பு"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"அகற்றப்பட்ட ஆப்ஸ்"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (பரிந்துரைக்கப்பட்டது)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS மெசேஜ்கள்"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"மொபைல் டேட்டா ஆஃப் செய்யப்பட்டிருந்தாலும் அனுப்பலாம் பெறலாம்"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"அழைப்புகளின் போது டேட்டாவைப் பயன்படுத்துதல்"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"அழைப்புகளின் போது மட்டும் இந்த சிம்மின் மொபைல் டேட்டாவைப் பயன்படுத்த அனுமதி"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"பணியிட சிம்"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ஆப்ஸ் &amp; உள்ளடக்க அணுகல்"</string>
     <string name="user_rename" msgid="8735940847878484249">"மறுபெயரிடுக"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"வைஃபை மற்றும் மொபைல் அமைப்புகளின் மாற்றத்தை அனுமதிக்கவும்"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"புளூடூத்"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"புளூடூத் இணைத்தல் மற்றும் அமைப்புகளின் மாற்றத்தை அனுமதி"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"மற்றொரு NFC சாதனத்தை <xliff:g id="DEVICE_NAME">%1$s</xliff:g> தொடும்போது தரவுப் பரிமாற்றத்தை அனுமதி"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"டேப்லெட்டானது வேறொரு சாதனத்தைத் தொடும்போது தரவுப் பரிமாற்றத்தை அனுமதி"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"வேறொரு சாதனத்தைத் தொடும்போது டேட்டா பரிமாற்றத்தை அனுமதி"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"இருப்பிடம்"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ஆப்ஸ் உங்கள் இருப்பிடத் தகவலைப் பயன்படுத்தலாம்"</string>
     <string name="wizard_back" msgid="8257697435061870191">"பின் செல்"</string>
     <string name="wizard_next" msgid="3884832431439072471">"அடுத்து"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"போர்டபிளுக்கு மாறு"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"வேறுவிதமாக ஃபார்மேட் செய்"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"சிம் கார்டுகள்"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"அறிவிப்புகளை அனுப்பும் ஒவ்வொரு ஆப்ஸுக்கும் அமைப்புகளை மாற்றலாம்"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"சாதனத்தில் காட்டப்படும் ஆப்ஸ்"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"இந்த ஆப்ஸ் மேம்படுத்தப்பட்ட அமைப்புகளை ஆதரிக்காது"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"கூடுதல் அமைப்புகள்"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"இந்த ஆப்ஸில் கூடுதல் அமைப்புகள் உள்ளன"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR உதவிச் சேவைகள்"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"நிறுவப்பட்ட ஆப்ஸ்களில் எதுவும் VR உதவிச் சேவைகளாக இயங்குவதற்காகக் கோரவில்லை"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g>ஐ அணுக VR சேவையை அனுமதிக்கவா?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"கடன் வழங்குநரால் முடக்கப்பட்டுள்ளது"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"பெற்றோர் ஒப்புதல் தேவை"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"இதைத் தொடங்க உங்கள் பெற்றோரிடம் மொபைலை ஒப்படைக்கவும்"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"கூடுதல் தகவல்களுக்கு உங்கள் IT நிர்வாகியைத் தொடர்புகொள்ளுங்கள்"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"மேலும் விவரங்கள்"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"உங்கள் நிர்வாகியால் அமைப்புகள், அனுமதிகள், கார்ப்பரேட் அணுகல், நெட்வொர்க் செயல்பாடு, சாதனத்தின் இருப்பிடத் தகவல் உட்பட உங்கள் பணி விவரத்துடன் தொடர்புடைய பயன்பாடுகளையும் தரவையும் கண்காணிக்கவும் நிர்வகிக்கவும் முடியும்."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"இயல்புநிலை முடக்கப்பட்டது தொடர்பான மாற்றங்கள்"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"ஆப்ஸ் எதுவுமில்லை"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"பிழைதிருத்தி ஆப்ஸில் மட்டுமே ஆப்ஸ் இணக்கத்தன்மை மாற்றங்களை மாற்ற முடியும். பிழைதிருத்தி ஆப்ஸை நிறுவி மீண்டும் முயலவும்."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"இந்த மொபைலில் அமைப்பு ஆதரிக்கப்படவில்லை"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"இந்த டேப்லெட்டில் அமைப்பு ஆதரிக்கப்படவில்லை"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"இந்தச் சாதனத்தில் அமைப்பு ஆதரிக்கப்படவில்லை"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"தற்போதைய பயனரால் அமைப்பை மாற்ற முடியாது"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"மற்றொரு அமைப்பைச் சார்ந்தது"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"அமைப்பை இப்போது பயன்படுத்த முடியாது"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"கணக்கு"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"சாதனத்தின் பெயர்"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"அடிப்படைத் தகவல்கள்"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"நெட்வொர்க்குகள் இல்லை."</string>
     <string name="network_query_error" msgid="6406348372070035274">"நெட்வொர்க்குகளைக் கண்டறிய முடியவில்லை. மீண்டும் முயலவும்."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(தடுக்கப்பட்டது)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"சிம் கார்டு இல்லை"</string>
     <string name="sim_card" msgid="6381158752066377709">"சிம்"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"சிம் இல்லை"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"ஏதுமில்லை"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"மாற்று"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"இணைக்கப்பட்டது"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"இணைப்பு இல்லை"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"மொபைல் டேட்டா தானியங்காக இணையாது"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"மொபைல் டேட்டாவை முடக்கவா?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"தவறான கடவுச்சொல்"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ஆடியோவைக் கேட்க, கீழுள்ள QR குறியீட்டை மையப்படுத்திக் காட்டுங்கள்"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR குறியீடு சரியான வடிவமைப்பில் இல்லை"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"மொபைல் தொகுப்பு ஆப்ஸ்"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"மொபைல் தொகுப்பு ஆப்ஸ்"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"மொபைல் தொகுப்பு ஆப்ஸின் தெளிவுத்திறன் தகவல்"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"விளம்பரங்கள் உள்ளன"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"டெவெலப்பர்(கள்) தகவல்கள்"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"தொடர்புத் தகவல்"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"விளக்கம்"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"தனியுரிமைக் கொள்கை"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"வகை"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"மொபைல் தொகுப்பு ஆப்ஸ்"</string>
 </resources>
