--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"เพิ่มระดับการบันทึกสแต็ก NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"บันทึกการแก้ไขข้อบกพร่องเกี่ยวกับเวนเดอร์แบบละเอียดของ NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"รวมบันทึกเวนเดอร์เพิ่มเติมเฉพาะอุปกรณ์ไว้ในรายงานข้อบกพร่อง ซึ่งอาจมีข้อมูลส่วนตัว"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"บันทึก Snoop ที่ไม่มีการกรองของ NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"บันทึกรายละเอียดของแพ็กเก็ต NFC ซึ่งอาจมีข้อมูลส่วนตัว"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"รีสตาร์ทอุปกรณ์ใช่ไหม"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"การบันทึกรายละเอียดของ NFC มีไว้เพื่อการพัฒนาเท่านั้น ข้อมูลเพิ่มเติมของ NFC จะรวมอยู่ในรายงานข้อบกพร่อง ซึ่งอาจมีข้อมูลส่วนตัว รีสตาร์ทอุปกรณ์เพื่อเปลี่ยนการตั้งค่านี้"</string>
@@ -1464,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"แชร์การเชื่อมต่ออินเทอร์เน็ตของโทรศัพท์ผ่านบลูทูธ"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"เชื่อมต่อผ่านอีเทอร์เน็ต"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"แชร์การเชื่อมต่ออินเทอร์เน็ตของโทรศัพท์ผ่านอีเทอร์เน็ต"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"ใช้ฮอตสปอตและการเชื่อมต่ออินเทอร์เน็ตผ่านมือถือเพื่อให้อุปกรณ์อื่นๆ ใช้อินเทอร์เน็ตจากการเชื่อมต่ออินเทอร์เน็ตมือถือได้ แอปยังสร้างฮอตสปอตเพื่อแชร์เนื้อหากับอุปกรณ์ที่อยู่ใกล้เคียงได้อีกด้วย"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"ใช้ฮอตสปอตและการเชื่อมต่ออินเทอร์เน็ตผ่านมือถือเพื่อ⁠ให้⁠อุ⁠ป⁠ก⁠ร⁠ณ์อื่นๆ ใช้อินเทอร์เน็ตจาก Wi-Fi หรือการเชื่อมต่ออินเทอร์เน็ตมือถือของคุณได้ แอปยังสร้างฮอตสปอตเพื่อแชร์เนื้อหากับอุปกรณ์ที่อยู่ใกล้เคียงได้อีกด้วย"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"ความช่วยเหลือ"</string>
@@ -2693,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"การจำกัดการใช้อินเทอร์เน็ต"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"แท็บเล็ตจะปิดอินเทอร์เน็ตมือถือเมื่อถึงขีดจำกัดที่คุณตั้งไว้\n\nเนื่องจากว่าปริมาณการใช้อินเทอร์เน็ตนั้นวัดโดยแท็บเล็ตของคุณ ผู้ให้บริการอาจมีวิธีบันทึกการใช้ที่แตกต่างออกไป ดังนั้น โปรดกำหนดขีดจำกัดอย่างระมัดระวัง"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"โทรศัพท์ของคุณจะปิดอินเทอร์เน็ตมือถือเมื่อถึงขีดจำกัดที่คุณตั้งไว้\n\nเนื่องจากว่าปริมาณการใช้อินเทอร์เน็ตนั้นวัดโดยโทรศัพท์ของคุณ ผู้ให้บริการอาจมีวิธีบันทึกการใช้ที่แตกต่างออกไป ดังนั้น โปรดกำหนดขีดจำกัดอย่างระมัดระวัง"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"ต้องการจำกัดอินเทอร์เน็ตที่ใช้งานอยู่เบื้องหลังหรือไม่"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"หากคุณจำกัดอินเทอร์เน็ตมือถือในพื้นหลัง แอปและบริการบางอย่างจะไม่ทำงานเว้นแต่คุณจะเชื่อมต่อ Wi-Fi"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"หากคุณจำกัดอินเทอร์เน็ตมือถือในพื้นหลัง แอปและบริการบางอย่างจะไม่ทำงานเว้นแต่คุณจะเชื่อมต่อ Wi-Fi\n\nการตั้งค่านี้ส่งผลต่อผู้ใช้แท็บเล็ตนี้ทุกราย"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"หากคุณจำกัดอินเทอร์เน็ตมือถือในพื้นหลัง แอปและบริการบางอย่างจะไม่ทำงานเว้นแต่คุณจะเชื่อมต่อ Wi-Fi\n\nการตั้งค่านี้ส่งผลต่อผู้ใช้โทรศัพท์นี้ทุกราย"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"คำเตือน"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ขีดจำกัด"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"แอปพลิเคชันที่นำออก"</string>
@@ -2938,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (แนะนำ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"ข้อความ MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ส่งและรับข้อความเมื่ออินเทอร์เน็ตมือถือปิดอยู่"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"อินเทอร์เน็ตมือถือระหว่างการโทร"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"อนุญาตให้ใช้เน็ตมือถือจากซิมนี้เฉพาะในระหว่างการโทร"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"ซิมที่ทำงาน"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"การเข้าถึงแอปและเนื้อหา"</string>
     <string name="user_rename" msgid="8735940847878484249">"เปลี่ยนชื่อ"</string>
@@ -2951,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"อนุญาตให้แก้ไขการตั้งค่า WiFi และมือถือ"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"บลูทูธ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"อนุญาตให้แก้ไขการจับคู่บลูทูธและการตั้งค่า"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"อนุญาตการแลกเปลี่ยนข้อมูลเมื่อ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> นี้แตะกับอุปกรณ์ NFC อื่น"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"อนุญาตให้มีการแลกเปลี่ยนข้อมูล เมื่อแตะแท็บเล็ตกับอุปกรณ์อื่น"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"อนุญาตให้มีการแลกเปลี่ยนข้อมูล เมื่อแตะโทรศัพท์กับอุปกรณ์อื่น"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"ตำแหน่ง"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ให้แอปพลิเคชันใช้ข้อมูลตำแหน่งของคุณ"</string>
     <string name="wizard_back" msgid="8257697435061870191">"ย้อนกลับ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"ถัดไป"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"เปลี่ยนเป็นแบบพกพา"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"ฟอร์แมตด้วยวิธีอื่น"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"ซิมการ์ด"</string>
@@ -3877,6 +3873,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ผู้ให้บริการเครดิตบล็อกไว้"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ต้องขอความยินยอมจากผู้ปกครอง"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ส่งโทรศัพท์ให้ผู้ปกครองเริ่มตั้งค่านี้"</string>
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"ส่งโทรศัพท์ให้ผู้ปกครองเพื่ออนุญาตให้เปลี่ยนแปลงการตั้งค่านี้"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"โปรดติดต่อผู้ดูแลระบบไอทีของคุณหากต้องการข้อมูลเพิ่มเติม"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"รายละเอียดเพิ่มเติม"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"ผู้ดูแลระบบสามารถตรวจสอบและจัดการแอปและข้อมูลที่เชื่อมโยงกับโปรไฟล์งานของคุณ ซึ่งรวมถึงการตั้งค่า สิทธิ์ การเข้าถึงขององค์กร กิจกรรมเครือข่าย และข้อมูลตำแหน่งของอุปกรณ์"</string>
@@ -4322,12 +4319,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"การเปลี่ยนแปลงที่ปิดใช้โดยค่าเริ่มต้น"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"ไม่มีแอป"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"จะแก้ไขการเปลี่ยนแปลงความเข้ากันได้ของแอปได้เฉพาะแอปที่แก้ไขข้อบกพร่องได้เท่านั้น ติดตั้งแอปที่แก้ไขข้อบกพร่องได้แล้วลองอีกครั้ง"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ไม่รองรับการตั้งค่าในโทรศัพท์นี้"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ไม่รองรับการตั้งค่าในแท็บเล็ตนี้"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ไม่รองรับการตั้งค่าในอุปกรณ์นี้"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"ผู้ใช้ปัจจุบันจะเปลี่ยนแปลงการตั้งค่าไม่ได้"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"ขึ้นอยู่กับการตั้งค่าอื่น"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"การตั้งค่าไม่พร้อมใช้งาน"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"บัญชี"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"ชื่ออุปกรณ์"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"ข้อมูลพื้นฐาน"</string>
@@ -4362,7 +4354,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"ไม่พบเครือข่าย"</string>
     <string name="network_query_error" msgid="6406348372070035274">"ไม่พบเครือข่าย โปรดลองอีกครั้ง"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(ห้ามใช้)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"ไม่มีซิมการ์ด"</string>
     <string name="sim_card" msgid="6381158752066377709">"ซิม"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"ไม่มีซิม"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"ไม่มี"</string>
@@ -4679,6 +4670,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"เปลี่ยน"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"เชื่อมต่อแล้ว"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ไม่มีการเชื่อมต่อ"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"อินเทอร์เน็ตมือถือจะไม่เชื่อมต่ออัตโนมัติ"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"ปิดอินเทอร์เน็ตมือถือไหม"</string>
@@ -4833,14 +4828,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"รหัสผ่านไม่ถูกต้อง"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ถือให้คิวอาร์โค้ดอยู่กลางช่องด้านล่างเพื่อเริ่มฟัง"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"คิวอาร์โค้ดมีรูปแบบไม่ถูกต้อง"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"App Bundle บนอุปกรณ์เคลื่อนที่"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"App Bundle บนอุปกรณ์เคลื่อนที่"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ข้อมูลความโปร่งใสของ App Bundle บนอุปกรณ์เคลื่อนที่"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"มีโฆษณา"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ข้อมูลจากนักพัฒนาแอป"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ข้อมูลติดต่อ"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"คำอธิบาย"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"นโยบายความเป็นส่วนตัว"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"หมวดหมู่"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"App Bundle บนอุปกรณ์เคลื่อนที่"</string>
 </resources>
