--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Pataasin ang antas ng pag-log ng stack ng NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Log ng pag-debug ng verbose vendor ng NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Isama ang mga karagdagang log ng vendor na partikular sa device sa mga ulat ng bug, na posibleng may pribadong impormasyon."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Log ng walang filter na pag-snoop ng NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"I-capture ang mga packet ng detalye ng NFC, na posibleng may pribdong impormasyon."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"I-restart ang Device?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Idinisenyo lang ang pag-log ng detalye ng NFC para sa pag-develop. Nagsasama ng karagdagang data ng NFC sa mga ulat ng bug, na posibleng may pribadong impormasyon. I-restart ang iyong device para baguhin ang setting na ito."</string>
@@ -1464,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Ibahagi ang koneksyon sa internet ng phone sa pamamagitan ng Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Pag-tether ng Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Ibahagi ang koneksyon sa internet ng telepono gamit ang Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Gamitin ang hotspot at pag-tether upang makapagbigay ng internet sa iba pang device sa pamamagitan ng iyong koneksyon ng mobile data. Maaari ding gumawa ang mga app ng hotspot upang magbahagi ng content sa mga kalapit na device."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Gamitin ang hotspot at pag-tether para magbigay ng internet sa iba pang device sa pamamagitan ng iyong koneksyon sa Wi‑Fi o mobile data. Puwede ring gumawa ng hotspot ang mga app para magbahagi ng content sa mga kalapit na device."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Tulong"</string>
@@ -2693,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Pag-limit sa paggamit ng data"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Io-off ng iyong tablet ang mobile data sa oras na maabot nito ang itinakda mong limitasyon.\n\nDahil sinusukat ng iyong tablet ang paggamit ng data, at maaaring mag-iba ang pagkalkula ng carrier mo sa paggamit, pag-isipang magtakda ng mababang limitasyon."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Io-off ng iyong telepono ang mobile data sa oras na maabot nito ang itinakda mong limitasyon.\n\nDahil sinusukat ng iyong telepono ang paggamit ng data, at maaaring mag-iba ang pagkalkula ng carrier mo sa paggamit, pag-isipang magtakda ng mababang limitasyon."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Paghigpitan ang data ng background?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Kung paghihigpitan mo ang mobile data sa background, maaaring hindi gumana ang ilang app at serbisyo maliban na lang kung nakakonekta ka sa Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Kung paghihigpitan mo ang mobile data sa background, maaaring hindi gumana ang ilang app at serbisyo maliban na lang kung nakakonekta ka sa Wi‑Fi.\n\nNakakaapekto ang setting na ito sa lahat ng user sa tablet na ito."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Kung paghihigpitan mo ang mobile data sa background, maaaring hindi gumana ang ilang app at serbisyo maliban na lang kung nakakonekta ka sa Wi‑Fi.\n\nNakakaapekto ang setting na ito sa lahat ng user sa teleponong ito."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"babala"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"limitasyon"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Mga inalis na app"</string>
@@ -2938,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (inirerekomenda)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mga mensaheng MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Magpadala at tumanggap kapag naka-off ang mobile data"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data habang nasa tawag"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Payagan ang SIM na ito na magamit para sa mobile data lang habang nasa tawag"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM sa Trabaho"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Access sa app at content"</string>
     <string name="user_rename" msgid="8735940847878484249">"I-RENAME"</string>
@@ -2951,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Payagan ang pagbago sa mga setting ng Wi‑Fi at Mobile"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Payagan ang pagbago sa mga pagpapares at setting ng Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Pahintulutan ang palitan ng data kapag dumikit ang <xliff:g id="DEVICE_NAME">%1$s</xliff:g> sa isa pang NFC device"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Payagan ang pagpapalitan ng data kapag dumikit ang tablet sa isa pang device"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Payagan ang pagpapalitan ng data kapag dumikit ang telepono sa isa pang device"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Lokasyon"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Hayaan ang apps na gamitin ang impormasyon ng iyong lokasyon"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Bumalik"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Susunod"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Lumipat sa portable"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"I-format sa ibang paraan"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Mga SIM card"</string>
@@ -3877,6 +3873,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Na-block ng iyong credit provider"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Kinakailangan ang magulang"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Ibigay ang telepono sa iyong magulang para simulan ang pag-set up dito"</string>
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Ibigay ang telepono sa iyong magulang para mabago ang setting na ito."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Para sa higit pang impormasyon, makipag-ugnayan sa iyong IT admin"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Higit pang mga detalye"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Masusubaybayan at mapamamahalaan ng iyong admin ang mga app at data na nauugnay sa iyong profile sa trabaho, kabilang ang mga setting, pahintulot, access ng kumpanya, aktibidad ng network, at impormasyon ng lokasyon ng device."</string>
@@ -4322,12 +4319,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Mga default na naka-disable na pagbabago"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Walang available app"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Puwede lang baguhin ang mga pagbabago sa compatibility ng app para sa mga nade-debug na app. Mag-install ng nade-debug na app at subukan ulit."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Hindi sinusuportahan ang setting sa teleponong ito"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Hindi sinusuportahan ang setting sa tablet na ito"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Hindi sinusuportahan ang setting sa device na ito"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Hindi mababago ng kasalukuyang user ang setting"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Nakadepende sa isa pang setting"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Hindi available ang setting"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Account"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Pangalan ng device"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Pangunahing impormasyon"</string>
@@ -4362,7 +4354,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Walang nakitang network."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Hindi makahanap ng mga network. Subukang muli."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(ipinagbabawal)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Walang SIM card"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Walang SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Wala"</string>
@@ -4679,6 +4670,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Baguhin"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Nakakonekta"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Walang koneksyon"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Hindi awtomatikong kokonekta ang mobile data"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"I-off ang mobile data?"</string>
@@ -4833,14 +4828,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Maling password"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Para simulang makinig, igitna ang QR code sa ibaba"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Hindi valid na format ang QR code"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mga mobile bundled app"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mga mobile bundled app"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Impormasyon sa transparency ng mga mobile bundled app"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"May mga ad"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Impormasyon ng (Mga) Developer"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Impormasyon sa Pakikipag-ugnayan"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Paglalarawan"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Patakaran sa Privacy"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategorya"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobile Bundled App"</string>
 </resources>
