--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -791,7 +791,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"提高 NFC 堆疊記錄等級"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC 詳細供應商偵錯記錄檔"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"在錯誤報告中納入其他裝置專屬供應商記錄，其中可能包含私人資訊。"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI 未篩選窺探記錄"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"擷取詳細 NFC 封包，其中可能包含私人資訊。"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"要重新啟動裝置嗎？"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"詳細 NFC 記錄僅適用於開發用途。錯誤報告中含有其他 NFC 資料，其中可能包含私人資訊。重新啟動裝置即可變更這項設定。"</string>
@@ -1175,8 +1176,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"試試不同的樣式、桌布和其他項目"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"螢幕保護程式"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"螢幕保護程式"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"就寢模式開啟時無法使用"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"使用螢幕保護程式"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"充電或安置於座架上時"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"充電時"</string>
@@ -1467,6 +1467,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"透過藍牙分享手機的網際網路連線"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"乙太網路共用"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"透過乙太網路分享手機的網際網路連線"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"使用無線基地台和網路共用功能，透過你的行動數據連線提供網際網路給其他裝置。應用程式也可以建立無線基地台來和鄰近的裝置分享內容。"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"使用無線基地台和網路共用功能，讓其他裝置能夠透過你的 Wi-Fi 或行動數據連線連上網際網路。應用程式也可以建立無線基地台，以便與鄰近的裝置分享內容。"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"說明"</string>
@@ -2696,10 +2698,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"限制數據用量"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"當行動數據用量達到你設定的上限時，平板電腦將關閉行動數據功能。\n\n由於數據用量是由平板電腦自動計算，而電信業者對用量的計算方式可能有所不同，因此建議你設定保守的上限值。"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"當行動數據用量達到你設定的上限時，手機將關閉行動數據功能。\n\n由於數據用量是由手機自動計算，而電信業者對用量的計算方式可能有所不同，因此建議你設定保守的上限值。"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"限制背景資料？"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"如果限制背景行動數據用量，部分應用程式和服務將無法正常運作 (除非你連上 Wi-Fi 網路)。"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"如果限制背景行動數據用量，部分應用程式和服務將無法正常運作 (除非你連上 Wi-Fi 網路)。\n\n這項設定會影響這部平板電腦的所有使用者。"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"如果限制背景行動數據用量，部分應用程式和服務將無法正常運作 (除非你連上 Wi-Fi 網路)。\n\n這項設定會影響這支手機的所有使用者。"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"警告"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"上限"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"移除的應用程式"</string>
@@ -2941,8 +2939,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (建議)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"多媒體訊息"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"行動數據關閉時仍可收發多媒體訊息"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"在通話期間使用行動數據"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"允許這張 SIM 卡僅在通話期間使用行動數據"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"啟用 SIM 卡"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"應用程式和內容存取權"</string>
     <string name="user_rename" msgid="8735940847878484249">"重新命名"</string>
@@ -2954,15 +2954,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"允許修改 Wi‑Fi 與行動網路設定"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"藍牙"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"允許修改藍牙配對與設定"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"允許這台 <xliff:g id="DEVICE_NAME">%1$s</xliff:g> 經由靠接與另一台 NFC 裝置傳輸資料"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"允許平板電腦與其他裝置接觸時交換資料"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"允許手機與其他裝置接觸時交換資料"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"位置"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"允許應用程式使用你的位置資訊"</string>
     <string name="wizard_back" msgid="8257697435061870191">"返回"</string>
     <string name="wizard_next" msgid="3884832431439072471">"下一步"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"切換為可攜式"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"以其他方式格式化"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM 卡"</string>
@@ -3414,10 +3409,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"分別為每個可傳送通知的應用程式變更通知設定"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"裝置上顯示的應用程式"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"這個應用程式不支援加強型設定"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"更多設定"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"你可以在應用程式中使用更多設定"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR 小幫手服務"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"沒有任何已安裝的應用程式要求以 VR 小幫手服務的形式執行。"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"要允許 <xliff:g id="SERVICE">%1$s</xliff:g> 存取 VR 服務嗎？"</string>
@@ -3882,6 +3875,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"信貸提供者已封鎖這項設定"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"必須由家長操作"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"如要開始設定這項功能，請將手機交給家長"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"詳情請洽 IT 管理員"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"其他詳細資訊"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"你的管理員可以監控及管理與你的工作資料夾相關聯的應用程式和資料，包括設定、權限、公司系統權限、網路活動，以及裝置的位置資訊。"</string>
@@ -4327,12 +4322,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"預設停用的應用程式有相容性異動"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"沒有可用的應用程式"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"你只能修改可偵錯應用程式的應用程式相容性變更。請安裝可進行偵錯的應用程式，然後再試一次。"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"這支手機不支援這項設定"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"這台平板電腦不支援這項設定"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"這個裝置不支援這項設定"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"目前的使用者無法變更設定"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"必須一併變更其他設定"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"無法變更設定"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"帳戶"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"裝置名稱"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"基本資訊"</string>
@@ -4367,7 +4357,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"找不到網路。"</string>
     <string name="network_query_error" msgid="6406348372070035274">"找不到網路，請再試一次。"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(已禁止)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"沒有 SIM 卡"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM 卡"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"沒有 SIM 卡"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"無"</string>
@@ -4684,6 +4673,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"變更"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"已連線"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"沒有網路連線"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"系統將不會自動使用行動數據連線"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"要關閉行動數據嗎？"</string>
@@ -4838,14 +4831,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"密碼錯誤"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"如要開始收聽，請將掃描器對準下方的 QR 圖碼"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR 圖碼格式無效"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"行動應用程式套件"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"行動應用程式套件"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"行動應用程式套件公開資訊"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"含廣告內容"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"開發人員資訊"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"聯絡資訊"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"說明"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"隱私權政策"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"類別"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"行動應用程式套件"</string>
 </resources>
