--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"የኤንኤፍሲ ቁልል የምዝግብ ማስታወሻ ደረጃን ይጨምሩ"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"የኤንኤፍሲ ብዙ ቃላት አቅራቢ ስህተት ማረሚያ ምዝግብ ማስታወሻ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"በሳንካ ሪፖርቶች ውስጥ የግል መረጃን ሊይዙ የሚችሉ ተጨማሪ መሣሪያ-ተኮር የአቅራቢ ምዝግብ ማስታወሻዎችን ያካትቱ።"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"የኤንኤፍሲ NCI ያልተጣራ ስለላ ምዝግብ ማስታወሻ"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"የግል መረጃን ሊይዙ የሚችሉ ዝርዝር የኤንኤፍሲ ጥቅሎችን ይቅረጹ።"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"መሣሪያ እንደገና ይጀምር?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ዝርዝር የኤንኤፍሲ ምዝግብ ማስታወሻ ለግንባታ ዓላማዎች ብቻ የታሰበ ነው። በሳንካ ሪፖርቶች ውስጥ የግል መረጃን ሊይዝ የሚችል ተጨማሪ የኤንኤፍሲ ውሂብ ተካትቷል። ይህን ቅንብር ለመለወጥ መሣሪያዎን እንደገና ያስጀምሩ።"</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"የተለያዩ ቅጦችን፣ ልጣፎችን እና ተጨማሪ ነገሮችን ይሞክሩ"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"የማያ ገጽ ማቆያ"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"የማያ ገጽ ማቆያ"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"የመኝታ ሰዓት ሁነታ ስለበራ የማይገኝ"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"የማያ ገጽ አዳኝን ይጠቀሙ"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ኃይል እየሞላ ወይም ተተክሎ ሳለ"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ባትሪ በመሙላት ላይ ሳለ"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"የስልክ በይነመረብ ግንኙነትን በብሉቱዝ በኩል አጋራ"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"የኢተርኔት ማስተሳሰር"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"የስልክ በይነመረብ ግንኙነትን በዩኤስቢ ኢተርኔት በኩል አጋራ"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"በእርስዎ የተንቀሳቃሽ ስልክ ውሂብ ግንኙነት በኩል በይነመረቡ ለሌሎች መሣሪያዎች ለማቅረብ የመገናኛ ነጥብን እና እንደ ሞደም መሰካትን ይጠቀሙ። መተግበሪያዎች በአቅራቢያ ላሉ መሣሪያዎች ይዘትን ለማጋራት መገናኛ ነጥብን ሊፈጥሩ ይችላሉ።"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"በእርስዎ Wi-Fi ወይም የተንቀሳቃሽ ስልክ ውሂብ ግንኙነት በኩል በይነመረቡ ለሌሎች መሣሪያዎች ለማቅረብ የመገናኛ ነጥብን እና እንደ ሞደም መሰካትን ይጠቀሙ። መተግበሪያዎች እንዲሁም ይዘቶችን በአቅራቢያ ላሉ መሣሪያዎች ለማጋራት መገናኛ ነጥብን መፍጠር ይችላሉ።"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"እገዛ"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"የውሂብ አጠቃቀም መወሰን"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"ጡባዊዎ አንዴ ያዘጋጁት የውሂብ ገደብ ላይ ሲደርስ የተንቀሳቃሽ ስልክ ውሂቡን ያጠፋዋል።\n\nየውሂብ አጠቃቀም የሚለካው በስልክዎ፣ እና የአገልግሎት አቅራቢዎ አጠቃቀም በተለየ መልኩ ሊቆጥር የሚችል እንደመሆኑ መጠን ቆጠብ ያለ ገደብ ማዘጋጀቱን ያስቡበት።"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"ስልክዎ አንዴ ያዘጋጁት የውሂብ ገደብ ላይ ሲደርስ የተንቀሳቃሽ ስልክ ውሂቡን ያጠፋዋል።\n\nየውሂብ አጠቃቀም የሚለካው በስልክዎ፣ እና የአገልግሎት አቅራቢዎ አጠቃቀም በተለየ መልኩ ሊቆጥር የሚችል እንደመሆኑ መጠን ቆጠብ ያለ ገደብ ማዘጋጀቱን ያስቡበት።"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"ዳራ ውሂብ አግድ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"የተንቀሳቃሽ ስልክ ውሂብ ጀርባን ከገደቡ ከWi-Fi ጋር ካልተገናኙ በስተቀር አንዳንድ መተግበሪያዎች እና አገልግሎቶች አይሠሩም።"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"የጀርባ ተንቀሳቃሽ ስልክ ውሂብ ከገደቡ አንዳንድ መተግበሪያዎች እና አገልግሎቶች ከWi-Fi አውታረ መረብ ጋር ካልተገናኙ በስተቀር አይሠሩም።\n\nይህ ቅንብር እዚህ ጡባዊ ላይ ያሉት ሁሉም ተጠቃሚዎች ይመለከታቸዋል።"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"የጀርባ ተንቀሳቃሽ ስልክ ውሂብ ከገደቡ አንዳንድ መተግበሪያዎች እና አገልግሎቶች ከWi-Fi ጋር ካልተገናኙ በስተቀር ድረስ አይሠሩም።\n\nይህ ቅንብር እዚህ ስልክ ላይ ያሉት ሁሉም ተጠቃሚዎች ይመለከታቸዋል።"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ማስጠንቀቂያ  "</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ወሰን"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"የተወገዱ መተግበሪያዎች"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (የሚመከር)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"የኤምኤምኤስ መልዕክቶች"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"የሞባይል ውሂብ ሲጠፋ ይላኩ እና ይቀበሉ"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"በጥሪዎች ወቅት ውሂብ"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"በስልክ ጥሪዎች ወቅት ለተንቀሳቃሽ ስልክ ውሂብ ብቻ ይህ ሲም ጥቅም ላይ እንዲውል ይፍቀዱ"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"የስራ ሲም"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"የመተግበሪያ እና የይዘት መዳረሻ"</string>
     <string name="user_rename" msgid="8735940847878484249">"ዳግም ሰይም"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"የWi‑Fi እና የተንቀሳቃሽ ስልክ ቅንብሮች መቀየርን ይፍቀዱ"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"ብሉቱዝ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"የብሉቱዝ ጥምረቶች እና ቅንብሮች መቀየርን ይፍቀዱ"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"ኤን ኤፍ ሲ"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ሌላ የNFC መሣሪያ ሲነካ የውሂብ ልውውጥ ፍቀድ"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"ጡባዊው ሌላ መሳሪያ ሲነካ የውሂብ ልውውጥ ይፍቀዱ"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"ስልኩ ሌላ መሳሪያ ሲነካ የውሂብ ልውውጥ ይፍቀዱ"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"አካባቢ"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"መተግበሪያዎች የአካባቢ መረጃዎትን እንዲጠቀሙ ይፍቀዱ"</string>
     <string name="wizard_back" msgid="8257697435061870191">"ተመለስ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"ቀጣይ"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"ወደ ተንቀሳቃሽ ቀይር"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"በሌላ መንገድ ቅርጸት ስራ"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"ሲም ካርዶች"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"ማሳወቂያውችን ለሚልክ ለእያንዳንዱ መተግበሪያ ቅንብሮችን ይለውጡ"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"በመሣሪያ ላይ የሚታዩ መተግበሪያዎች"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"ይህ መተግበሪያ የተሻሻሉ ቅንብሮችን አይደግፍም"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"ተጨማሪ ቅንብሮች"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"በዚህ መተግበሪያ ውስጥ ተጨማሪ ቅንብሮች ይገኛሉ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"የምናባዊ ዕውነታ አጋዥ አገልግሎቶች"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ምንም የተጫኑ መተግበሪያዎች እንደ የምናባዊ ዕውነታ አጋዥ አገልግሎቶች ሆነው እንዲሄዱ አልጠየቁም።"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"ለ<xliff:g id="SERVICE">%1$s</xliff:g> የምናባዊ ዕውነታ መዳረሻ ይፈቀድለት?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"በክሬዲት አቅራቢዎ ታግዷል"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ወላጅ ያስፈልጋል"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ይህን ማዋቀር ለመጀመር ስልኩን ለወላጅዎ ይስጡት"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ለተጨማሪ መረጃ የአይቲ አስተዳዳሪዎን ያነጋግሩ"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ተጨማሪ ዝርዝሮች"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"የእርስዎ አስተዳዳሪ ቅንብሮችን፣ ፈቃዶችን፣ የኮርፖሬት መዳረሻን፣ የአውታረ መረብ እንቅስቃሴን እና የመሣሪያዎ አካባቢያዊ መረጃን ጨምሮ ከእርስዎ የስራ መገለጫ ጋር የተጎዳኙ መተግበሪያዎችን እና ውሂብን መከታተል እና ማቀናበር ይችላል።"</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"ነባሪ የተሰናከሉ ለውጦች"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"ምንም መተግበሪያዎች አይገኙም"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"የመተግበሪያ ተኳኋኝነት ለውጦች ሊታረሙ ለሚችሉ መተግበሪያዎች ብቻ ነው ሊቀየሩ የሚችሉት። ሊታረም የሚችል መተግበሪያን ይጫኑ እና እንደገና ይሞክሩ"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ቅንብር በዚህ ስልክ ላይ አይደገፍም"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ቅንብር በዚህ ጡባዊ ላይ አይደገፍም"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"በዚህ መሣሪያ ላይ መልሶ ማጫወት አይደገፍም"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"ቅንብር አሁን ላይ ባለው ተጠቃሚ ሊለወጥ አይችልም"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"በሌላ ቅንብር ላይ ይመረኮዛል"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"ቅንብር አይገኝም"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"መለያ"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"የመሣሪያ ስም"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"መሠረታዊ መረጃ"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"ምንም አውታረመረብ አልተገኘም።"</string>
     <string name="network_query_error" msgid="6406348372070035274">"አውታረ መረቦችን ማግኘት አልተቻለም። እንደገና ይሞክሩ።"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(የተከለከለ)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"ምንም ሲም ካርድ የለም"</string>
     <string name="sim_card" msgid="6381158752066377709">"ሲም"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"ምንም SIM የለም"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"ምንም"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ቀይር"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"ተገናኝቷል"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ግንኙነት የለም"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"የተንቀሳቃሽ ስልክ ውሂብ በራስ-ሰር አይገናኝም"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"የተንቀሳቃሽ ስልክ ውሂብ ይጥፋ?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"የተሳሳተ የይለፍ ቃል"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ማዳመጥ ለመጀመር ከታች ያለውን QR ኮድ መሃል ያድርጉት"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR ኮድ ልክ የሆነ ቅርጸት አይደለም"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"የሞባይል ቅርቅብ መተግበሪያዎች"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"የሞባይል ቅርቅብ መተግበሪያዎች"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"የሞባይል ቅርቅብ መተግበሪያዎች ግልፅነት መረጃ"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ማስታወቂያዎችን ይዟል"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"የገንቢ(ዎች) መረጃ"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"የዕውቂያ መረጃ"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"መግለጫ"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"የግላዊነት መመሪያ"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ምድብ"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"የሞባይል ቅርቅብ መተግበሪያ"</string>
 </resources>
