--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC yığın qeydiyyat səviyyəsini artırın"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC təfsilatlı təchizatçı sazlama jurnalı"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Xəta hesabatlarına şəxsi məlumatları ehtiva edə biləcək təchizatçının cihaz haqqında əlavə qeydləri daxil edilsin."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI filtrsiz jurnalı"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Şəxsi məlumatı ehtiva edə bilən detallı NFC paketlərini çəkin."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Cihaz yenidən başladılsın?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detallı NFC qeydi yalnız inkişaf məqsədləri üçün nəzərdə tutulub. Əlavə NFC məlumatları şəxsi məlumatları ehtiva edə bilən baq hesabatlarına daxil edilir. Bu ayarı dəyişmək üçün cihazı yenidən başladın."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Fərqli üslub, divar kağızı və s. sınayın"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekran qoruyucu"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekran qoruyucu"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Yuxu vaxtı rejimi aktiv olduğu üçün əlçatan deyil"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ekran qoruyucusundan istifadə edin"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Şarj ərzində və ya dok-stansiyada"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Şarj ərzində"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Telefonun internet bağlantısını Bluetooth vasitəsilə paylaşın"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-modem"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Ethernet vasitəsilə telefonun internet bağlantısını paylaşın"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Digər cihazları mobil internetlə təmin etmək üçün hotspot və modem rejimini istifadə edin. Tətbiqlər kontent paylaşmaq üçün hotspot da yarada bilər."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Digər cihazları mobil internetlə təmin etmək üçün hotspot və modem rejimini istifadə edin. Tətbiqlər kontent paylaşmaq üçün hotspot da yarada bilər."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Yardım"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Trafikin limitlənməsi"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Ayarladığınız limitə çatan zaman planşet mobil datanı söndürəcək.\n\nData istifadəsi planşet tərəfindən ölçüldüyü və operatorun hesablaması fərqli ola bildiyi üçün limit ayarlamağınız məsləhət olunur."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Limitə çatandan sonra mobil internet söndürüləcək.\n\nLimit seçəndə operator statistikası ilə telefon statistikasının fərqlənə bildiyini nəzərə alın."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Fon data məhdudlaşdırılsın?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Arxa fon mobil datasını məhdudlaşdırsanız, bəzi tətbiqlər və xidmətlər Wi‑Fi\'a qoşulana qədər işləməyəcək."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Arxa fon mobil datasını məhdudlaşdırsanız, bəzi tətbiqlər və xidmətlər Wi‑Fi\'a qoşulana qədər işləməyəcək.\n\nBu ayar bu planşetdəki bütün istifadəçilərə təsir edir."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Arxa fon mobil datasını məhdudlaşdırsanız, bəzi tətbiqlər və xidmətlər Wi‑Fi\'a qoşulana qədər işləməyəcək.\n\nBu ayar bu telefondakı bütün istifadəçilərə təsir edir."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"xəbərdarlıq"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"limit"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Silinmiş tətbiqlər"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (məsləhətlidir)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS mesajları"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Mobil data deaktiv olduqda göndərin &amp; qəbul edin"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Zənglər zamanı data"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Bu SIM-in yalnız zənglər zamanı mobil data üçün istifadə edilməsinə icazə verin"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"İş SIM-i"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Tətbiq və məzmun girişi"</string>
     <string name="user_rename" msgid="8735940847878484249">"ADI DƏYİŞDİRİN"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi‑Fi modifikasiyasına və Mobil ayarlara icazə verin"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Bluetooth cütləşmələri və ayarları modifikasiyasına icazə verin"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> digər NFC cihazına toxunan zaman data mübadiləsinə icazə verin"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Planşet digər cihazla əlaqədə olduqda data mübadiləsinə icazə verin"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Telefon digər cihazla əlaqədə olduqda data mübadiləsinə icazə verin"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Məkan"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Tətbiqlərə yeriniz haqqında məlumatı istifadə etməyə icazə verin"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Geri"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Növbəti"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Portativ cihaza keçin"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Başqa yolla formatlayın"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kartlar"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Bildiriş göndərən hər tətbiq üçün bildiriş ayarlarını dəyişdirin"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Cihazda göstərilən tətbiqlər"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Bu tətbiq geniş ayarları dəstəkləmir"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Digər ayarlar"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Bu tətbiqdə başqa ayarlar da var"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR köməkçi xidmətləri"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Heç bir tətbiq VR köməkçi xidmətləri kimi çalışma sorğusu göndərməyib."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR xidmətinə <xliff:g id="SERVICE">%1$s</xliff:g> üçün girişə icazə verilsin?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Kredit təminatçınız tərəfindən bloklanıb"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Valideyn tələb olunur"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Bunu ayarlamağa başlamaq üçün telefonu valideyninizə verin"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Ətraflı məlumat üçün İT admini ilə əlaqə saxlayın"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Daha ətraflı"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Admin ayarlar, icazələr, korporativ giriş, şəbəkə fəaliyyəti və cihazın məkan məlumatı da daxil olmaqla bu iş profili ilə əlaqəli tətbiq və dataya nəzarət edə və idarə edə bilər."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Dəyişikliklər standart olaraq deaktivdir"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Heç bir tətbiq əlçatan deyil"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Yalnız sazlanmaya açıq tətbiqlərin uyğunluq parametrlərinə dəyişiklik mümkündür. Sazlana bilən tətbiq quraşdırıb təkrar cəhd edin."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Ayar bu telefonda dəstəklənmir"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Ayar bu planşetdə dəstəklənmir"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Ayar bu cihazda dəstəklənmir"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Cari istifadəçi ayarı dəyişə bilməz"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Digər ayardan aslıdır"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Ayar əlçatan deyil"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Hesab"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Cihaz adı"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Əsas məlumat"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Şəbəkə tapılmadı."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Şəbəkə tapılmadı. Yenidən cəhd edin."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(qadağandır)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM kart yoxdur"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM yoxdur"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Heç biri"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Dəyişin"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Qoşulub"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Bağlantı yoxdur"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobil data avtomatik qoşulmayacaq"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Mobil data deaktiv edilsin?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Yanlış parol"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Dinləməyə başlamaq üçün aşağıda QR kodu mərkəzə yerləşdirin"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kodu doğru formatda deyil"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobil paketlənmiş tətbiqlər"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobil paketlənmiş tətbiqlər"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobil paketlənmiş tətbiqlərin şəffaflıq məlumatı"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Reklamdan ibarətdir"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Tərtibatçı Məlumatı"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontakt məlumatı"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Təsvir"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Məxfilik Siyasəti"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kateqoriya"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobil Paketlənmiş Tətbiq"</string>
 </resources>
