--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -806,7 +806,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Povećajte nivo evidencije za NFC grupu"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC opširna evidencija prodavca o otklanjanju grešaka"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Uvrštava dodatne posebne evidencije prodavca za uređaje u izveštaje o greškama, koji mogu da sadrže privatne podatke."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI nefiltrirana snoop evidencija"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Snima NFC pakete sa detaljima, koji mogu da sadrže privatne podatke."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Želite da restartujete uređaj?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFC evidentiranje detalja je namenjeno samo u svrhe programiranja. Dodatni NFC podaci uvršteni su u izveštaje o greškama, koji mogu da sadrže privatne podatke. Restartujte uređaj da biste promenili ovo podešavanje."</string>
@@ -1193,8 +1194,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Probajte drugačije stilove, pozadine i još toga"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Čuvar ekrana"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"čuvar ekrana"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nedostupno je jer je noćni režim uključen"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Koristi čuvar ekrana"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Tokom punjenja ili na baznoj stanici"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Tokom punjenja"</string>
@@ -1486,6 +1486,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Deljenje internet veze telefona preko Bluetooth-a"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Privezivanje eterneta"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Deljenje internet veze telefona preko eterneta"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Koristite hotspot i privezivanje da biste obezbedili internet drugim uređajima pomoću veze za mobilne podatke. Aplikacije mogu da prave hotspotove i za deljenje sadržaja sa uređajima u blizini."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Koristite hotspot i privezivanje da biste omogućili internet na drugim uređajima pomoću WiFi veze ili veze za prenos podataka preko mobilnog operatera. Aplikacije mogu i da prave hotspotove za deljenje sadržaja sa uređajima u blizini."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Pomoć"</string>
@@ -2733,10 +2735,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Ograničavanje potrošnje podataka"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tablet će isključiti mobilne podatke čim dostigne ograničenje koje ste podesili.\n\nPošto potrošnju podataka meri tablet, a mobilni operater može drugačije da računa potrošnju, razmislite o tome da podesite niže ograničenje."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Telefon će isključiti mobilne podatke čim dostigne ograničenje koje ste podesili.\n\nPošto potrošnju podataka meri telefon, a mobilni operater može drugačije da računa potrošnju, razmislite o tome da podesite niže ograničenje."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Želite li da ograničite pozadinske podatke?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ako ograničite mobilne pozadinske podatke, neke aplikacije i usluge neće funkcionisati ako niste povezani sa WiFi-em."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ako ograničite mobilne pozadinske podatke, neke aplikacije i usluge neće funkcionisati ako niste povezani sa WiFi-em.\n\nOvo podešavanje utiče na sve korisnike na ovom tabletu."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ako ograničite mobilne pozadinske podatke, neke aplikacije i usluge neće funkcionisati ako niste povezani sa WiFi-em.\n\nOvo podešavanje utiče na sve korisnike na ovom telefonu."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"upoz."</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"ogran."</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Uklonjene aplikacije"</string>
@@ -2980,8 +2978,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (preporučeno)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS poruke"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Šaljite i primajte kada su mobilni podaci isključeni"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Podaci tokom poziva"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Dozvoli da se ova SIM kartica koristi samo za mobilne podatke tokom poziva"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM kartica za posao"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Pristup aplikacijama i sadržaju"</string>
     <string name="user_rename" msgid="8735940847878484249">"PREIMENUJ"</string>
@@ -2993,15 +2993,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Dozvolite izmenu Wi‑Fi podešavanja i podešavanja za mobilne uređaje"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Dozvolite izmene Bluetooth uparivanja i podešavanja"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Omogućava razmenu podataka kada ovaj <xliff:g id="DEVICE_NAME">%1$s</xliff:g> uređaj dodirne drugi NFC uređaj"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Dozvolite razmenu podataka kada tablet dodirne drugi uređaj"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Dozvolite razmenu podataka kada telefon dodirne drugi uređaj"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Lokacija"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Dozvolite da aplikacije koriste informacije o lokaciji"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Nazad"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Dalje"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Pređi na prenosiv uređaj"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatiraj na drugi način"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kartice"</string>
@@ -3456,10 +3451,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Promenite podešavanja za svaku aplikaciju koja šalje obaveštenja"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Aplikacije koje se prikazuju na uređaju"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Ova aplikacija ne podržava poboljšana podešavanja"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Još podešavanja"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Dostupno je još podešavanja u aplikaciji"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Usluge pomagača za virtuelnu realnost"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Nijedna instalirana aplikacija nije zahtevala da se pokrene kao usluga pomagača za virtuelnu realnost."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Želite li da dozvolite pristup usluzi virtuelne realnosti za <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3936,6 +3929,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Blokira dobavljač kredita"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Potreban je roditelj"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Daj telefon roditelju za početak podešavanja"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Obratite se IT administratoru za više informacija"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Još detalja"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administrator može da nadgleda aplikacije i podatke povezane sa poslovnim profilom, uključujući podešavanja, dozvole, korporativni pristup, aktivnosti na mreži i informacije o lokaciji uređaja, kao i da upravlja njima."</string>
@@ -4392,12 +4387,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Podrazumevane onemogućene promene"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Nema aplikacija"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Promene kompatibilnosti aplikacija mogu da se izmene samo za aplikacije sa otklonjivim greškama. Instalirajte aplikaciju sa otklonjivim greškama i probajte ponovo."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Podešavanje nije podržano na ovom telefonu"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Podešavanje nije podržano na ovom tabletu"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Podešavanje nije podržano na ovom uređaju"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Aktuelni korisnik ne može da promeni podešavanje"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Zavisi od drugog podešavanja"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Podešavanje je nedostupno"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Nalog"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Naziv uređaja"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Osnovne informacije"</string>
@@ -4432,7 +4422,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nije pronađena nijedna mreža."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Nismo uspeli da pronađemo mreže. Probajte ponovo."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(zabranjeno)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nema SIM kartice"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nema SIM kartice"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Nema"</string>
@@ -4750,6 +4739,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Promeni"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Povezano"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Veza nije uspostavljena"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Ne uspeva povezivanje preko mobilnih podataka"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Želite da onemogućite mobilne podatke?"</string>
@@ -4904,14 +4897,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Pogrešna lozinka"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Da biste počeli da slušate, centrirajte QR kôd ispod"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kôd nije u važećem formatu"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobilne aplikacije u paketu"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobilne aplikacije u paketu"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informacije o transparentnosti za mobilne aplikacije u paketu"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Sadrži oglase"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informacije o programerima"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontakt informacije"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Opis"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Politika privatnosti"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategorija"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobilna aplikacija u paketu"</string>
 </resources>
