--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -825,7 +825,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Павысіць узровень вядзення журналаў для стоса NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Дэтальны журнал адладкі ад пастаўшчыка NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Дадаваць у справаздачы пра памылкі дадатковыя журналы пастаўшчыка прылады (можа ўтрымлівацца прыватная інфармацыя)."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Журнал адсочвання NCI NFC без прымянення фільтраў"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Захоўваць пакеты падрабязных даных NFC, якія могуць утрымліваць прыватную інфармацыю."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Перазапусціць прыладу?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Падрабязнае вядзенне журналаў NFC прызначана толькі для мэт распрацоўкі. У справаздачы пра памылкі ўключаюцца дадатковыя даныя NFC, якія могуць утрымліваць прыватную інфармацыю. Перазапусціце прыладу, каб змяніць гэту наладу."</string>
@@ -1215,8 +1216,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Спрабуйце розныя стылі, шпалеры і іншае"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Экранная застаўка"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"застаўка"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Недаступна, бо ўключаны начны рэжым"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ужываць экранную застаўку"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Пакуль прылада зараджаецца ці падключана"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Падчас зарадкі"</string>
@@ -1509,6 +1509,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Абагуліць падключэнне да інтэрнэту тэлефона праз Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Мадэм Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Абагуліць інтэрнэт-падключэнне гэтага тэлефона праз Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Выкарыстоўвайце хот-спот і рэжым мадэма для падключэння да інтэрнэту іншых прылад праз мабільную перадачу даных. Праграмы таксама могуць ствараць хот-спот для абагульвання змесціва з прыладамі паблізу."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Для падключэння да інтэрнэту іншых прылад праз Wi-Fi ці мабільную перадачу даных выкарыстоўвайце хот-спот і рэжым мадэма. Для абагульвання змесціва з прыладамі паблізу праграмы таксама могуць ствараць хот-спот."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Даведка"</string>
@@ -2774,10 +2776,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Абмежаванне выкарыстання трафіка"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Калі ліміт, які вы задалі, будзе дасягнуты, планшэт выключыць мабільную перадачу даных.\n\nПаколькі выкарыстанне даных можа ўлічвацца вашым тэлефонам і вашым аператарам па-рознаму, мы рэкамендуем задаць больш ці менш нізкі ліміт."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Пасля дасягнення вызначанага ліміту трафіка тэлефон выключыць мабільную перадачу даных.\n\nПаколькі метады разліку трафіка вашым тэлефонам і вашым аператарам могуць адрознівацца, мы рэкамендуем задаць заніжаны ліміт."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Абмежаваць зыходныя даныя?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Калі вы абмяжоўваеце мабільную перадачу даных у фоне, некаторыя праграмы і сэрвісы не будуць працаваць, пакуль вы не падключыцеся да Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Калі вы абмяжоўваеце мабільную перадачу даных у фоне, некаторыя праграмы і сэрвісы не будуць працаваць, пакуль вы не падключыцеся да Wi‑Fi.\n\nГэта налада ўплывае на ўсіх карыстальнікаў гэтага планшэта."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Калі вы абмяжоўваеце мабільную перадачу даных у фоне, некаторыя праграмы і сэрвісы не будуць працаваць, пакуль вы не падключыцеся да Wi‑Fi.\n\nГэта налада ўплывае на ўсіх карыстальнікаў гэтага тэлефона."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g> "</font>\n<font size="12">"папярэджанне "</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ліміт"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Выдаленыя праграмы"</string>
@@ -3023,8 +3021,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (рэкамендуецца)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-паведамленні"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Адпраўляць і атрымліваць, калі мабільная перадача даных выключана"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Перадача даных падчас выклікаў"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Дазволіць выкарыстанне гэтай SIM-карты для мабільнай перадачы даных толькі падчас выклікаў"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Рабочая SIM-карта"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Доступ да дадаткаў і змесціва"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПЕРАЙМЕНАВАЦЬ"</string>
@@ -3036,15 +3036,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Дазволіць змяненне параметраў сетак Wi-Fi і мабільных сетак"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Дазволіць змяненне спалучэнняў і параметраў Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Дазволіць абмен данымі, калі гэта <xliff:g id="DEVICE_NAME">%1$s</xliff:g> дакранаецца да іншай прылады NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Дазволіць абмен данымі пры спалучэнні планшэта з іншымі прыладамі"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Дазволіць абмен данымі пры спалучэнні тэлефона з іншымі прыладамі"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Месцазнаходжанне"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Дазволіць прыкладанню выкарыстоўваць вашу інфармацыю аб месцазнаходжанні"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Назад"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Далей"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Перайсці на партатыўны"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Фармаціраваць па-іншаму"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-карты"</string>
@@ -3502,10 +3497,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Змяніць налады для ўсіх праграм, якія адпраўляюць апавяшчэнні"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Праграмы, якія паказваюцца на прыладзе"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Гэта праграма не падтрымлівае пашыраныя налады"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Дадатковыя налады"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Іншыя налады даступныя ўнутры гэтай праграмы"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Дапаможныя VR-сэрвісы"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Усталяваныя праграмы не запытвалі выканання ў якасці дапаможных VR-сэрвісаў."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Дазволіць сэрвісу віртуальнай рэальнасці (VR) доступ да <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3994,6 +3987,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Заблакіравана крэдыторам"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Патрабуецца дапамога бацькоў"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Каб наладзіць гэту функцыю, перадай тэлефон аднаму з бацькоў"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Па дадатковую інфармацыю звярніцеся да ІT-адміністратара"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Дадатковая інфармацыя"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"У вашага адміністратара ёсць магчымасць маніторынгу і адміністравання праграм і даных, звязаных з вашым працоўным профілем, у тым ліку налад, дазволаў, карпаратыўнага доступу, сеткавай актыўнасці і геаданых."</string>
@@ -4137,7 +4132,7 @@
     <string name="display_cutout_emulation_keywords" msgid="4506580703807358127">"выраз дысплея, выемка"</string>
     <string name="overlay_option_device_default" msgid="7986355499809313848">"Стандартная налада"</string>
     <string name="overlay_toast_failed_to_apply" msgid="4839587811338164960">"Не ўдалося ўжыць накладанне на экран"</string>
-    <string name="special_access" msgid="1767980727423395147">"Спецыяльны доступ"</string>
+    <string name="special_access" msgid="1767980727423395147">"Спецыяльны доступ для праграм"</string>
     <plurals name="special_access_summary" formatted="false" msgid="4995506406763570815">
       <item quantity="one"><xliff:g id="COUNT">%d</xliff:g> праграма можа выкарыстоўваць даныя без абмежаванняў</item>
       <item quantity="few"><xliff:g id="COUNT">%d</xliff:g> праграмы могуць выкарыстоўваць даныя без абмежаванняў</item>
@@ -4461,12 +4456,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Стандартныя адключаныя змяненні"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Праграмы недаступныя"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Змяненні ў сумяшчальнасці праграм могуць быць прыменены толькі да праграм з магчымасцю адладкі. Усталюйце такую праграму і паўтарыце спробу."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Налада не падтрымліваецца на гэтым тэлефоне"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Налада не падтрымліваецца на гэтым планшэце"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Налада не падтрымліваецца на гэтай прыладзе"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Гэты карыстальнік не можа змяніць наладу"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Залежыць ад іншай налады"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Налада недаступная"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Уліковы запіс"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Назва прылады"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Асноўныя звесткі"</string>
@@ -4501,7 +4491,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Сеткі не знойдзены."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Не ўдалося знайсці сеткі. Паўтарыце спробу."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(забаронена)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Няма SIM-карты"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Няма SIM-карты"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Няма"</string>
@@ -4820,6 +4809,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Змяніць"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Падключана"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Няма падключэння"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мабільная перадача даных не ўключаецца аўтаматычна"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Выключыць мабільную перадачу даных?"</string>
@@ -4974,14 +4967,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Няправільны пароль"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Каб пачаць праслухванне, памясціце ў цэнтр QR-код, які знаходзіцца ўнізе"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-код мае несапраўдны фармат"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мабільныя звязаныя праграмы"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мабільныя звязаныя праграмы"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Інфармацыя пра празрыстасць мабільных звязаных праграм"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Змяшчае рэкламу"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Інфармацыя ад распрацоўшчыка(ў)"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Кантактная інфармацыя"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Апісанне"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Палітыка прыватнасці"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Катэгорыя"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мабільная звязаная праграма"</string>
 </resources>
