--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Augmenta el nivell de registre de la pila de l\'NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Registre detallat de depuració del proveïdor de l\'NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Inclou altres registres de proveïdor específics del dispositiu als informes d\'errors, que poden contenir informació privada."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Registre d\'NCI de l\'NFC sense filtrar"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Captura els paquets detallats de l\'NFC, que poden contenir informació privada."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Vols reiniciar el dispositiu?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"El registre detallat de l\'NFC només està indicat per a activitats de desenvolupament. Les dades de l\'NFC addicionals estan incloses als informes d\'errors, que poden contenir informació privada. Reinicia el dispositiu per canviar aquesta configuració."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Prova diferents estils, fons de pantalla i més"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Estalvi de pantalla"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"estalvi de pantalla"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"No disponible; el mode d\'hora de dormir està activat"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Utilitza l\'estalvi de pantalla"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Mentre es carrega o està acoblat a la base"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Mentre es carrega"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Comparteix la connexió a Internet del telèfon per Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Compartició de xarxa per Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Comparteix la connexió a Internet del telèfon per Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Utilitza el punt d\'accés Wi-Fi i la compartició de xarxa per proporcionar Internet a altres dispositius mitjançant la teva connexió de dades mòbils. Les aplicacions també poden crear un punt d\'accés Wi-Fi per compartir contingut amb els dispositius que es trobin a prop."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Utilitza el punt d\'accés Wi‑Fi i la compartició de xarxa per proporcionar Internet a altres dispositius amb la teva connexió Wi‑Fi o de dades mòbils. Les aplicacions també poden crear un punt d\'accés Wi‑Fi per compartir contingut amb els dispositius propers."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Ajuda"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Limitació de l\'ús de dades"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Es desactivaran les dades mòbils de la tauleta quan s\'arribi al límit que has definit.\n\nCom que la tauleta mesura l\'ús de dades i és possible que l\'operador de telefonia mòbil en faci un recompte diferent, et recomanem que defineixis un límit prudent."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Es desactivaran les dades mòbils del telèfon quan s\'arribi al límit que has establert.\n\nCom que el telèfon mesura l\'ús de dades i és possible que l\'operador de telefonia mòbil en faci un recompte diferent, et recomanem que estableixis un límit prudent."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Vols restringir les dades en segon pla?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Si restringeixes les dades mòbils en segon pla, hi ha aplicacions i serveis que no funcionaran sense connexió Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Si restringeixes les dades mòbils en segon pla, hi ha aplicacions i serveis que no funcionaran sense connexió Wi‑Fi.\n\nAquesta configuració afecta tots els usuaris de la tauleta."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Si restringeixes les dades mòbils en segon pla, hi ha aplicacions i serveis que no funcionaran sense connexió Wi‑Fi.\n\nAquesta configuració afecta tots els usuaris del telèfon."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">" <xliff:g id="NUMBER">^1</xliff:g> "</font>" "<font size="9">" <xliff:g id="UNIT">^2</xliff:g> "</font>" \n "<font size="12">"avís"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"límit"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Aplicacions eliminades"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (opció recomanada)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Missatges MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Envia i rep missatges amb les dades mòbils desactivades"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Dades durant les trucades"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Permet que aquesta SIM s\'utilitzi per a dades mòbils només durant les trucades"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM de la feina"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Accés a contingut i a aplicacions"</string>
     <string name="user_rename" msgid="8735940847878484249">"CANVIA EL NOM"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Permet la modificació de la configuració Wi‑Fi i mòbil"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Permet la modificació de la sincronització i la configuració per Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Permet l\'intercanvi de dades quan aquest dispositiu <xliff:g id="DEVICE_NAME">%1$s</xliff:g> toqui un altre dispositiu amb NFC."</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Permet l\'intercanvi de dades quan la tauleta toqui un altre dispositiu"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Permet l\'intercanvi de dades quan el telèfon toqui un altre dispositiu"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Ubicació"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Permet que les aplicacions utilitzin la informació de la teva ubicació"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Enrere"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Següent"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Canvia a portàtil"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formata d\'una altra manera"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Targetes SIM"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Canvia la configuració de cada aplicació que envia notificacions"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Aplicacions que es mostren al dispositiu"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Aquesta aplicació no és compatible amb la configuració avançada"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Més opcions de configuració"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Hi ha més opcions de configuració disponibles en aquesta aplicació"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Serveis d\'ajuda per a RV"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Cap aplicació instal·lada no ha sol·licitat que s\'executi com un servei d\'ajuda per a RV."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Vols permetre que <xliff:g id="SERVICE">%1$s</xliff:g> accedeixi al servei RV?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Bloquejat per la teva entitat de crèdit"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Es necessita el pare o la mare"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Dona el telèfon als pares perquè comencin a configurar-lo"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Per a més informació, contacta amb el teu administrador de TI"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Més informació"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"L\'administrador pot supervisar i gestionar les aplicacions i les dades associades al teu perfil de treball, com ara la configuració, els permisos, l\'accés corporatiu, l\'activitat de xarxa i la informació d\'ubicació del dispositiu."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Canvis desactivats de manera predeterminada"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"No hi ha cap app disponible"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Els canvis en la compatibilitat de les aplicacions només poden modificar-se a les aplicacions depurables. Instal·la una aplicació depurable i torna-ho a provar."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"L\'opció de configuració no és compatible amb aquest telèfon"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"L\'opció de configuració no és compatible amb aquesta tauleta"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"L\'opció de configuració no és compatible amb aquest dispositiu"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"L\'usuari actual no pot canviar aquesta opció de configuració"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Depèn d\'una altra opció de configuració"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Opció de configuració no disponible"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Compte"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nom del dispositiu"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Informació bàsica"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"No s\'ha trobat cap xarxa."</string>
     <string name="network_query_error" msgid="6406348372070035274">"No s\'ha pogut trobar cap xarxa. Torna-ho a provar."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(prohibida)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"No hi ha cap SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"No hi ha cap SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Cap"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Canvia"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Connectat"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Sense connexió"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Les dades mòbils no es connectaran automàticament"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Vols desactivar les dades mòbils?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Contrasenya incorrecta"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Per començar a escoltar, centra el codi QR de més avall"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"El codi QR no té un format vàlid"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Paquet d\'aplicacions mòbils"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Paquet d\'aplicacions mòbils"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informació de transparència sobre el paquet d\'aplicacions mòbils"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Conté anuncis"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informació sobre els desenvolupadors"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Informació de contacte"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Descripció"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Política de privadesa"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Categoria"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Paquet d\'aplicació mòbil"</string>
 </resources>
