--- a/res/values-en-rAU/strings.xml
+++ b/res/values-en-rAU/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Increase NFC stack logging level"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC verbose vendor debug log"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Include additional device-specific vendor logs in bug reports, which may contain private information."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI unfiltered snoop log"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Capture detail NFC packets, which may contain private information."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Restart device?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detail NFC logging is intended for development purposes only. Additional NFC data is included in bug reports, which may contain private information. Restart your device to change this setting."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Try different styles, wallpapers and more"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Screen saver"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"screensaver"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Unavailable because bedtime mode is on"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Use screen saver"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"While charging or docked"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"While charging"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Share phone’s Internet connection via Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet tethering"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Share phone’s Internet connection via Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Use hotspot and tethering to provide Internet to other devices through your mobile data connection. Apps can also create a hotspot to share content with nearby devices."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Use hotspot and tethering to provide Internet to other devices through your Wi‑Fi or mobile data connection. Apps can also create a hotspot to share content with nearby devices."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Help"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Limiting data usage"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Your tablet will turn off mobile data once it reaches the limit you set.\n\nSince data usage is measured by your tablet, and your operator may account for usage differently, consider setting a conservative limit."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Your phone will turn off mobile data once it reaches the limit you set.\n\nSince data usage is measured by your phone, and your carrier may account for usage differently, consider setting a conservative limit."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Restrict background data?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"If you restrict background mobile data, some apps and services won’t work unless you’re connected to Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"If you restrict background mobile data, some apps and services won’t work unless you’re connected to Wi‑Fi.\n\nThis setting affects all users on this tablet."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"If you restrict background mobile data, some apps and services won’t work unless you’re connected to Wi‑Fi.\n\nThis setting affects all users on this phone."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"warning"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"limit"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Removed apps"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (recommended)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS messages"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Send and receive when mobile data is off"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data during calls"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Allow this SIM to be used for mobile data only during calls"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Work SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"App &amp; content access"</string>
     <string name="user_rename" msgid="8735940847878484249">"RENAME"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Allow modification of Wi‑Fi and Mobile settings"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Allow modification of Bluetooth pairings and settings"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Allow data exchange when this <xliff:g id="DEVICE_NAME">%1$s</xliff:g> touches another NFC device"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Allow data exchange when the tablet touches another device"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Allow data exchange when the phone touches another device"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Location"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Let apps use your location information"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Back"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Next"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Switch to portable"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Format another way"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM cards"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Change settings for each app that sends notifications"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Apps shown on device"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"This app doesn’t support enhanced settings"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"More settings"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"More settings are available inside this app"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR helper services"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"No installed apps have requested to be run as VR helper services."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Allow VR service access for <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Blocked by your credit provider"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Parent needed"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Hand the phone to your parent to start setting this up"</string>
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Hand the phone to your parent to allow this setting to be changed."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"For more info, contact your IT admin"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"More details"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Your admin can monitor and manage apps and data associated with your work profile, including settings, permissions, corporate access, network activity and the device\'s location information."</string>
@@ -4325,12 +4319,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Default disabled changes"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"No apps available"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"App compatibility changes can only be modified for debuggable apps. Install a debuggable app and try again."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Setting isn’t supported on this phone"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Setting isn’t supported on this tablet"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Setting isn’t supported on this device"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Setting can’t be changed by current user"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Depends on another setting"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Setting unavailable"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Account"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Device name"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Basic info"</string>
@@ -4365,7 +4354,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"No networks found."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Couldn’t find networks. Try again."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(forbidden)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"No SIM card"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"No SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"None"</string>
@@ -4682,6 +4670,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Change"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Connected"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"No connection"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobile data won\'t auto‑connect"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Turn off mobile data?"</string>
@@ -4836,14 +4828,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Wrong password"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"To start listening, centre the QR code below"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR code isn\'t a valid format"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobile bundled apps"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobile bundled apps"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobile bundled apps transparency info"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Contains ads"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Developer(s) information"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Contact information"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Description"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Privacy policy"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Category"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobile bundled app"</string>
 </resources>
