--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -791,7 +791,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Aumenta el nivel de acceso a la pila de NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Registro de depuración del proveedor de NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Incluye registros adicionales de proveedores de dispositivos específicos en los informes de errores, los cuales pueden contener información privada."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Registro NCI sin filtrar de NFC"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Capturar paquetes detallados de NFC, que podrían contener información privada."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"¿Quieres reiniciar el dispositivo?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"El registro detallado de NFC está destinado únicamente a fines de desarrollo. Además, se incluyen datos de NFC en los informes de errores, que podrían contener información privada. Reinicia el dispositivo para cambiar la configuración."</string>
@@ -1164,7 +1165,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Configuración del Modo hora de dormir"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Tiempo de espera de la pantalla"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"Después de <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> de inactividad"</string>
-    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"No establecida"</string>
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"No establecido"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Fondo de pantalla"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Fondo de pantalla y estilo"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Pantalla principal, pantalla de bloqueo"</string>
@@ -1175,8 +1176,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Prueba diferentes estilos, fondos de pantalla y mucho más"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Protector de pantalla"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"protector de pantalla"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"No disponible cuando se activa modo hora de dormir"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Usar protector de pantalla"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Mientras se carga o está conectado"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Mientras se carga"</string>
@@ -1467,6 +1467,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Compartir la conexión a Internet del teléfono mediante Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Conexión a Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Compartir la conexión a Internet del teléfono mediante Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Usa la función de hotspot y conexión mediante dispositivo portátil para brindar acceso a Internet a otros dispositivos mediante tu conexión de datos móviles. Las apps también pueden crear un hotspot para compartir contenido con dispositivos cercanos."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Usa un hotspot y una conexión mediante dispositivo móvil para brindar acceso a Internet a otros dispositivos a través de una conexión Wi-Fi o de datos móviles. Las apps también pueden crear un hotspot para compartir contenido con dispositivos cercanos."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Ayuda"</string>
@@ -2696,10 +2698,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Limitar el uso de datos"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"La tablet desactivará los datos móviles cuando alcance el límite especificado.\n\nRecuerda que los datos registrados por la tablet y el proveedor pueden ser diferentes. Trata de establecer un límite prudente."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"El teléfono desactivará los datos móviles cuando alcance el límite especificado.\n\nRecuerda que los datos registrados por el teléfono y el proveedor pueden ser diferentes. Trata de establecer un límite prudente."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"¿Restringir el uso de datos en segundo plano?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Si restringes los datos móviles en segundo plano, algunas apps y servicios no funcionarán a menos que te conectes a una red Wi-Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Si restringes los datos móviles en segundo plano, algunas apps y servicios no funcionarán a menos que te conectes a una red Wi-Fi.\n\nEsta configuración afecta a todos los usuarios de esta tablet."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Si restringes los datos móviles en segundo plano, algunas apps y servicios no funcionarán a menos que te conectes a una red Wi-Fi.\n\nEsta configuración afecta a todos los usuarios de este teléfono."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"advertencia"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"límite"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Aplicaciones eliminadas"</string>
@@ -2941,8 +2939,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (recomendado)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mensajes MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Enviar y recibir con los datos móviles desactivados"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Uso de datos durante llamadas"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Permitir el uso de esta SIM con datos móviles solo durante llamadas"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM de trabajo"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Acceso a aplicaciones y contenido"</string>
     <string name="user_rename" msgid="8735940847878484249">"CAMBIAR NOMBRE"</string>
@@ -2954,15 +2954,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Permitir modificar la configuración de la red Wi‑Fi y de la red de celulares"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Permitir modificar la sincronización y configuración de Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Permitir intercambio de datos cuando el dispositivo <xliff:g id="DEVICE_NAME">%1$s</xliff:g> toque otro dispositivo con NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Permitir el intercambio de datos cuando la tablet toque otro dispositivo"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Permitir el intercambio de datos cuando el teléfono toque otro dispositivo"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Ubicación"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Permitir que las aplicaciones usen la información de tu ubicación"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Atrás"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Siguiente"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Cambiar a portátil"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatear de otra manera"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Tarjetas SIM"</string>
@@ -3414,10 +3409,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Cambia la configuración de cada una de las apps que envían notificaciones"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Apps que se muestran en el dispositivo"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Esta app no admite opciones de configuración mejoradas"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Más parámetros de configuración"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Puedes encontrar más parámetros de configuración disponibles dentro de esta app"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Servicio de ayuda de RV"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Ninguna app instalada solicitó que se la ejecutara como servicio de ayuda de RV."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"¿Quieres permitir que el servicio de RV acceda a <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3882,6 +3875,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Opción bloqueada por tu proveedor de crédito"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Se requiere un padre o madre"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Dale el teléfono a tu madre o padre para iniciar la configuración"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Para obtener más información, comunícate con el administrador de TI"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Más detalles"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"El administrador puede controlar y administrar las apps y los datos asociados con tu perfil de trabajo, incluida la configuración, los permisos, el acceso corporativo, la actividad de la red y la información de la ubicación del dispositivo."</string>
@@ -4327,12 +4322,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Cambios inhabilitados de manera predeterminada"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"No hay apps disponibles"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Solo se pueden implementar cambios de compatibilidad para las apps depurables. Instala una app depurable y vuelve a intentarlo."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Este teléfono no admite esa opción de configuración"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Esta tablet no admite esa opción de configuración"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Este dispositivo no admite esa opción de configuración"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"El usuario actual no puede cambiar la configuración"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Depende de otra opción de configuración"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Configuración no disponible"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Cuenta"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nombre del dispositivo"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Información básica"</string>
@@ -4367,7 +4357,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"No se encontraron redes."</string>
     <string name="network_query_error" msgid="6406348372070035274">"No se encontraron redes. Vuelve a intentarlo."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(prohibida)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Sin tarjeta SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"No hay ninguna tarjeta SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"No hay información"</string>
@@ -4684,6 +4673,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Cambiar"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Conexión establecida"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Sin conexión"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"No se conectarán automáticamente los datos móviles"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"¿Quieres desactivar los datos móviles?"</string>
@@ -4838,14 +4831,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Contraseña incorrecta"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Para comenzar a escuchar, centra el código QR a continuación"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"El código QR no es un formato válido"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Apps empaquetadas para dispositivos móviles"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Apps empaquetadas para dispositivos móviles"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Información de transparencia sobre las apps empaquetadas para dispositivos móviles"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Contiene anuncios"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Información de los desarrolladores"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Información de contacto"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Descripción"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Política de Privacidad"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Categoría"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"App empaquetada para dispositivos móviles"</string>
 </resources>
