--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -791,7 +791,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Accroître le niveau de journalisation des piles NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Journaux de débogage NFC détaillé du fournisseur"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Incluez les journaux supplémentaires du fournisseur, spécifiques à l\'appareil, dans les rapports de bug. Ils peuvent contenir des informations privées."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Journaux de surveillance non filtrés NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Capturez des paquets de détails NFC pouvant contenir des informations privées."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Redémarrer l\'appareil ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"La journalisation des détails NFC est destinée exclusivement au développement. Des données NFC supplémentaires sont incluses dans les rapports de bug. Ils peuvent contenir des informations privées. Redémarrez votre appareil pour modifier ce paramètre."</string>
@@ -1175,8 +1176,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Essayez différents styles, fonds d\'écran, etc."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Économiseur d\'écran"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"économiseur d\'écran"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Indisponible, car Heure du coucher est activé"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Utiliser l\'économiseur d\'écran"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Lorsque l\'appareil est en charge ou connecté à une station d\'accueil"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Lorsque l\'appareil est en charge"</string>
@@ -1467,6 +1467,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Partager la connexion Internet du téléphone via le Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Partage via Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Partager la connexion Internet du téléphone via Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Utilisez un point d\'accès et le partage de connexion pour fournir un accès à Internet à d\'autres appareils via votre connexion de données mobiles. Les applications peuvent également créer un point d\'accès pour partager du contenu avec des appareils à proximité."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Utilisez un point d\'accès et le partage de connexion pour fournir un accès à Internet à d\'autres appareils via votre Wi-Fi ou votre connexion de données mobiles. Les applications peuvent également créer un point d\'accès pour partager du contenu avec des appareils à proximité."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Aide"</string>
@@ -2696,10 +2698,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Limitation de la conso des données"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Les données mobiles sont désactivées sur votre tablette lorsque la limite de consommation des données que vous avez définie est atteinte.\n\nLa consommation mesurée par votre tablette pouvant différer de celle mesurée par votre opérateur, nous vous recommandons de définir une limite stricte."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Votre téléphone désactivera les données mobiles lorsqu\'elles auront atteint la limite définie.\n\nLa consommation mesurée par votre téléphone pouvant différer de celle mesurée par votre opérateur, nous vous recommandons de définir une limite prudente."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Limiter les données en arrière-plan ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Si vous limitez la consommation des données mobiles en arrière-plan, certains services et applications ne fonctionneront que si vous êtes connecté au réseau Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Si vous limitez la consommation des données mobiles en arrière-plan, certains services et applications ne fonctionneront que si vous êtes connecté au réseau Wi‑Fi.\n\nCe paramètre affecte tous les utilisateurs de cette tablette."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Si vous limitez la consommation des données mobiles en arrière-plan, certains services et applications ne fonctionneront que si vous êtes connecté au réseau Wi‑Fi.\n\nCe paramètre affecte tous les utilisateurs de ce téléphone."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">" <xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"(avert.)"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"plafond"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Applications supprimées"</string>
@@ -2941,8 +2939,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (recommandé)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Envoyer et recevoir des MMS lorsque les données mobiles sont désactivées"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Données mobiles pendant les appels"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Autoriser l\'utilisation des données mobiles de cette carte SIM pendant les appels seulement"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Carte SIM professionnelle"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Accès aux applis et au contenu"</string>
     <string name="user_rename" msgid="8735940847878484249">"RENOMMER"</string>
@@ -2954,15 +2954,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Autoriser les modifications des paramètres du Wi‑Fi et des données mobiles"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Autoriser les modifications des associations et des paramètres Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Autoriser l\'échange de données lorsque cet appareil (<xliff:g id="DEVICE_NAME">%1$s</xliff:g>) touche un autre appareil NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Autoriser l\'échange de données lorsque la tablette est en contact avec un autre appareil"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Autoriser l\'échange de données lorsque le téléphone est en contact avec un autre appareil"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Localisation"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Autoriser les applications à utiliser vos données de localisation"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Retour"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Suivant"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Passer en portable"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formater autrement"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Cartes SIM"</string>
@@ -3414,10 +3409,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Modifier les paramètres pour chaque appli pouvant envoyer des notifications"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Applis affichées sur l\'appareil"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Cette appli n\'est pas compatible avec les paramètres avancés"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Autres paramètres"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"D\'autres paramètres sont disponibles dans l\'appli"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Services d\'assistance pour la réalité virtuelle"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Aucune des applis installées n\'a demandé à être exécutée en tant que service d\'assistance pour la réalité virtuelle"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Autoriser <xliff:g id="SERVICE">%1$s</xliff:g> à accéder au service de réalité virtuelle ?"</string>
@@ -3882,6 +3875,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Bloqué par votre fournisseur de crédit"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Parent requis"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Donne le téléphone à un parent pour lancer la configuration"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Pour en savoir plus, contactez votre administrateur informatique"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Plus d\'informations"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Votre administrateur peut contrôler et gérer les applications et les données associées à votre profil professionnel, y compris les paramètres, les autorisations, l\'accès aux contenus de l\'entreprise, l\'activité réseau et les informations de localisation de l\'appareil."</string>
@@ -4327,12 +4322,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Modifications désactivées par défaut"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Aucune appli dispo"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Vous ne pouvez modifier la compatibilité des applications que si celles-ci sont débogables. Installez une application débogable, puis réessayez."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Le paramètre n\'est pas disponible sur ce téléphone"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Le paramètre n\'est pas disponible sur cette tablette"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Le paramètre n\'est pas disponible sur cet appareil."</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Le paramètre ne peut pas être modifié par l\'utilisateur actuel"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Dépend d\'un autre paramètre"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Paramètre non disponible"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Compte"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nom de l\'appareil"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Infos générales"</string>
@@ -4367,7 +4357,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Aucun réseau trouvé."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Réseaux introuvables. Veuillez réessayer."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(interdit)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Pas de carte SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Aucune carte SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Aucune information"</string>
@@ -4684,6 +4673,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Modifier"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Connecté"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Aucune connexion"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Pas de connexion automatique des données mobiles"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Désactiver les données mobiles ?"</string>
@@ -4838,14 +4831,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Mot de passe incorrect"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Pour commencer à écouter, centrez le code QR ci-dessous"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Le format de code QR n\'est pas valide"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Applis mobiles intégrées"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Applis mobiles intégrées"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Infos sur la transparence des données des applis mobiles intégrées"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Contient des annonces"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informations fournies par le(s) développeur(s)"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Coordonnées"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Description"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Règles de confidentialité"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Catégorie"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Appli mobile intégrée"</string>
 </resources>
