--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC સ્ટૅકનું લૉગ ઇન કરવાનું લેવલ વધારો"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC શબ્દબહુલ વિક્રેતાનો ડિબગ લૉગ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"બગ રિપોર્ટમાં ડિવાઇસ-વિશિષ્ટ વિક્રેતાના વધારાના લૉગ શામેલ કરો, જેમાં ખાનગી માહિતી હોઈ શકે છે."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFCનો NCI સંબંધિત ફિલ્ટર કર્યા વિનાનો સ્નૂપ લૉગ"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"NFCના વિગતવાર પૅકેટ કૅપ્ચર કરો, જેમાં ખાનગી માહિતી હોઈ શકે છે."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"શું ડિવાઇસને ફરી શરૂ કરીએ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFCનું વિગતવાર લૉગ ઇન માત્ર ડેવલપમેન્ટના હેતુઓ માટે છે. બગ રિપોર્ટમાં વધારાનો NFC ડેટા શામેલ છે, જેમાં ખાનગી માહિતી હોઈ શકે છે. આ સેટિંગમાં ફેરફાર કરવા માટે, તમારા ડિવાઇસને ફરી શરૂ કરો."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"અલગ-અલગ શૈલીઓ, વૉલપેપર અને બીજું ઘણું અજમાવી જુઓ"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"સ્ક્રીન સેવર"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"સ્ક્રીનસેવર"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"ઉપલબ્ધ નથી, કારણ કે બેડટાઇમ મોડ ચાલુ છે"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"સ્ક્રીન સેવરનો ઉપયોગ કરો"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ચાર્જ થતું હોય અથવા ડૉક કરેલ હોય ત્યારે"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ચાર્જિંગ થતી વખતે"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ફોનનું ઇન્ટરનેટ કનેક્શન બ્લૂટૂથ મારફતે શેર કરો"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ઇથરનેટ ટિથરિંગ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ઇથરનેટ મારફતે ફોનનું ઇન્ટરનેટ કનેક્શન શેર કરો"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"તમારા મોબાઇલ ડેટા કનેક્શન મારફતે અન્ય ઉપકરણોને ઇન્ટરનેટ પૂરું પાડવા માટે હૉટસ્પૉટ અને ટિથરિંગનો ઉપયોગ કરો. નજીકના ઉપકરણો સાથે કન્ટેન્ટ શેર કરવા માટે ઍપ પણ હૉટસ્પૉટ બનાવી શકે છે."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"તમારા વાઇ-ફાઇ અથવા મોબાઇલ ડેટા કનેક્શન મારફત અન્ય ડિવાઇસને ઇન્ટરનેટ પૂરું પાડવા માટે હૉટસ્પૉટ અને ઇન્ટરનેટ શેર કરવાની સુવિધાનો ઉપયોગ કરો. ઍપ નજીકના ડિવાઇસ સાથે કન્ટેન્ટ શેર કરવા માટે પણ હૉટસ્પૉટ બનાવી શકે છે."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"સહાય"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ડેટા વપરાશને મર્યાદિત કરવો"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"એકવાર તમારો મોબાઇલ ડેટા તમે સેટ કરેલી મર્યાદા પર પહોંચી જાય, પછી તમારું ટૅબ્લેટ તેને બંધ કરી દેશે.\n\nડેટા ઉપયોગની ગણતરી તમારા ટૅબ્લેટ દ્વારા કરવામાં આવે છે અને તમારા કૅરિઅર ભિન્ન રીતે વપરાશની ગણતરી કરી શકે છે, તેથી અપરિવર્તનશીલ મર્યાદા સેટ કરવાનું વિચારો."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"એકવાર તમારો મોબાઇલ ડેટા તમે સેટ કરેલી મર્યાદા પર પહોંચી જાય, પછી તમારો ફોન તેને બંધ કરી દેશે.\n\nડેટા વપરાશની ગણતરી તમારા ફોન દ્વારા કરવામાં આવે છે અને તમારા કૅરિઅર ભિન્ન રીતે વપરાશની ગણતરી કરી શકે છે, તેથી અપરિવર્તનશીલ મર્યાદા સેટ કરવાનું વિચારો."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"બૅકગ્રાઉન્ડ ડેટાને નિયંત્રિત કરીએ?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"જો તમે બૅકગ્રાઉન્ડ મોબાઇલ ડેટાને મર્યાદિત કરશો, તો તમે જ્યાં સુધી વાઇ-ફાઇ સાથે કનેક્ટ નહીં થાઓ, ત્યાં સુધી કેટલીક ઍપ્લિકેશનો અને સેવાઓ કાર્ય નહીં કરે."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"જો તમે બૅકગ્રાઉન્ડ મોબાઇલ ડેટા મર્યાદિત કરશો, તો તમે જ્યાં સુધી વાઇ-ફાઇ સાથે કનેક્ટ નહીં થાઓ, ત્યાં સુધી કેટલીક ઍપ્લિકેશન અને સેવાઓ કાર્ય નહીં કરે.\n\nઆ સેટિંગ આ ટૅબ્લેટ પરના બધા વપરાશકર્તાઓને અસર કરે છે."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"જો તમે બૅકગ્રાઉન્ડ મોબાઇલ ડેટાને મર્યાદિત કરશો, તો તમે જ્યાં સુધી વાઇ-ફાઇ સાથે કનેક્ટ નહીં થાઓ, ત્યાં સુધી કેટલીક ઍપ્લિકેશનો અને સેવાઓ કાર્ય નહીં કરે.\n\nઆ સેટિંગ આ ફોન પરના બધા વપરાશકર્તાઓને અસર કરે છે."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ચેતવણી"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"મર્યાદા"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"દૂર કરેલી ઍપ્લિકેશનો"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ભલામણ કરેલ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS સંદેશા"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"મોબાઇલ ડેટા બંધ હોય ત્યારે પણ સંદેશ મોકલો અને પ્રાપ્ત કરો"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"કૉલ દરમ્યાન ડેટાનો વપરાશ"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"માત્ર કૉલ દરમ્યાન, મોબાઇલ ડેટા માટે આ સિમનો ઉપયોગ કરવાની મંજૂરી આપો"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"કાર્યાલય સિમ"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ઍપ્લિકેશન અને કન્ટેન્ટ ઍક્સેસ"</string>
     <string name="user_rename" msgid="8735940847878484249">"નામ બદલો"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"વાઇ-ફાઇ અને મોબાઇલ સેટિંગમાં ફેરફાર કરવાની મંજૂરી આપો"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"બ્લૂટૂથ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"બ્લૂટૂથ જોડીઓ અને સેટિંગ ફેરફાર કરવાની મંજૂરી આપો"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"જ્યારે આ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> બીજા NFC ઉપકરણને ટચ કરે ત્યારે ડેટા ફેરબદલીની મંજૂરી આપો"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"જ્યારે ટૅબ્લેટ બીજા ડિવાઇસને ટચ કરે ત્યારે ડેટા શેર કરવાની મંજૂરી આપો"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"જ્યારે ફોન બીજા ડિવાઇસને ટચ કરે ત્યારે ડેટા વિનિમયની મંજૂરી આપો"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"સ્થાન"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"એપ્લિકેશન્સને તમારી સ્થાન માહિતીનો ઉપયોગ કરવા દો"</string>
     <string name="wizard_back" msgid="8257697435061870191">"પાછળ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"આગલું"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"પોર્ટેબલ પર સ્વિચ કરો"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"કોઈ અન્ય રીતે ફૉર્મેટ કરો"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"સિમ કાર્ડ"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"નોટિફિકેશન મોકલતી હોય તે દરેક ઍપ માટે નોટિફિકેશનના સેટિંગ બદલો"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"ડિવાઇસ પર બતાવેલી ઍપ"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"આ ઍપ વધારાના સેટિંગને સપોર્ટ કરતી નથી"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"વધુ સેટિંગ"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"આ ઍપમાં વધુ સેટિંગ ઉપલબ્ધ છે"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR સહાયક સેવાઓ"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"કોઇ ઇન્સ્ટૉલ કરેલ ઍપએ VR સહાયક સેવાઓ તરીકે શરૂ કરવાની વિનંતી કરી નથી."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> માટે VR સેવા ઍક્સેસની મંજૂરી આપીએ?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"તમારા ક્રેડિટ પ્રદાતાએ બ્લૉક કર્યું છે"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"માતાપિતાની હાજરી જરૂરી છે"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"આ સેટઅપ કરવા માટે, આ ફોન તમારા માતાપિતાને આપો"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"વધુ માહિતી માટે, તમારા IT ઍડમિનનો સંપર્ક કરો"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"વધુ વિગતો"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"તમારા વ્યવસ્થાપક સેટિંગ, પરવાનગીઓ, કૉર્પોરેટ ઍક્સેસ, નેટવર્ક પ્રવૃત્તિ અને ડિવાઇસની સ્થાન માહિતી સહિત તમારી ઑફિસની પ્રોફાઇલ સાથે સંકળાયેલ ઍપ અને ડેટાને મૉનિટર અને મેનેજ કરી શકે છે."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"ડિફૉલ્ટ રીતે બંધ કરેલા ફેરફારો"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"કોઈ ઍપ ઉપલબ્ધ નથી"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ફક્ત ડિબગ કરી શકાય તેવી ઍપ માટે જ ઍપની સુસંગતતામાંના ફેરફારોમાં બદલાવ કરી શકાય છે. ડિબગ કરી શકાય તેવી ઍપ ઇન્સ્ટૉલ કરો અને ફરી પ્રયાસ કરો."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"આ ફોન પર સેટિંગ સમર્થિત નથી"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"આ ટૅબ્લેટ પર સેટિંગ સમર્થિત નથી"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"આ ઉપકરણ પર સેટિંગ સમર્થિત નથી"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"હાલના વપરાશકર્તા દ્વારા સેટિંગ બદલી શકાતી નથી"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"અન્ય સેટિંગ પર આધાર રાખે છે"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"સેટિંગ અનુપલબ્ધ છે"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"એકાઉન્ટ"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"ડિવાઇસનું નામ"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"મૂળભૂત માહિતી"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"કોઈ નેટવર્ક મળ્યું નથી."</string>
     <string name="network_query_error" msgid="6406348372070035274">"નેટવર્ક શોધી શક્યાં નથી. ફરી પ્રયાસ કરો."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(પ્રતિબંધિત)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"કોઈ સિમ કાર્ડ નથી"</string>
     <string name="sim_card" msgid="6381158752066377709">"સિમ કાર્ડ"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"કોઈ સિમ કાર્ડ નથી"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"કોઈ માહિતી નથી"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"બદલો"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"કનેક્ટ કરેલું"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"કોઈ કનેક્શન નથી"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"મોબાઇલ ડેટા ઑટોમૅટિક રીતે કનેક્ટ થશે નહીં"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"મોબાઇલ ડેટા બંધ કરીએ?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ખોટો પાસવર્ડ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"સાંભળવાનું શરૂ કરવા માટે, QR કોડને નીચે ફ્રેમની મધ્યમાં લાવો"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR કોડ માન્ય ફૉર્મેટમાં નથી"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"મોબાઇલમાં બંડલ કરેલી ઍપ"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"મોબાઇલમાં બંડલ કરેલી ઍપ"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"મોબાઇલમાં બંડલ કરેલી ઍપની ટ્રાન્સ્પરન્સીની માહિતી"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"જાહેરાતો ધરાવે છે"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ડેવલપરની માહિતી"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"સંપર્ક માહિતી"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"વર્ણન"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"પ્રાઇવસી પૉલિસી"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"કૅટેગરી"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"મોબાઇલમાં બંડલ કરેલી ઍપ"</string>
 </resources>
