--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Meningkatkan level logging stack NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Log debug vendor panjang NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Menyertakan log vendor khusus perangkat tambahan dalam laporan bug, yang mungkin berisi informasi pribadi."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Log snoop tanpa filter NCI NFC"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Rekam detail paket NFC, yang mungkin berisi informasi pribadi."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Mulai Ulang Perangkat?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detail logging NFC dimaksudkan hanya untuk tujuan pengembangan. Data NFC tambahan disertakan dalam laporan bug, yang mungkin berisi informasi pribadi. Mulai ulang perangkat untuk mengubah setelan ini."</string>
@@ -1173,10 +1174,9 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Coba wallpaper dan gaya yang berbeda, serta banyak lagi"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Screensaver"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"screensaver"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Tidak tersedia karena mode Waktu Tidur aktif"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Gunakan screensaver"</string>
-    <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Saat mengisi baterai atau dipasang ke dok"</string>
+    <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Saat mengisi baterai atau terpasang di dok"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Saat mengisi baterai"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Saat terpasang di dok"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Tidak pernah"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Bagikan koneksi internet ponsel melalui Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Tethering Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Bagikan koneksi internet ponsel melalui Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Gunakan hotspot dan tethering untuk menyediakan koneksi internet bagi perangkat lain melalui koneksi kuota seluler Anda. Aplikasi juga dapat membuat hotspot untuk berbagi konten dengan perangkat sekitar."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Gunakan hotspot dan tethering untuk menyediakan koneksi internet bagi perangkat lain melalui koneksi Wi‑Fi atau data seluler Anda. Aplikasi juga dapat membuat hotspot untuk berbagi konten dengan perangkat sekitar."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Bantuan"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Membatasi penggunaan data"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tablet akan menonaktifkan data seluler jika mencapai batas yang disetel.\n\nPenggunaan data ini diukur oleh ponsel dan dapat berbeda dari perhitungan data oleh operator, maka pertimbangkan untuk menyetel batas konservatif."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Ponsel akan menonaktifkan data seluler jika mencapai batas yang disetel.\n\nPenggunaan data ini diukur oleh ponsel dan dapat berbeda dari perhitungan data oleh operator, maka pertimbangkan untuk menyetel batas secara berhati-hati."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Batasi data latar belakang?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Jika Anda membatasi data seluler latar belakang, beberapa aplikasi dan layanan tidak akan bekerja kecuali Anda terhubung ke Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Jika Anda membatasi data seluler latar belakang, beberapa aplikasi dan layanan tidak akan bekerja kecuali Anda terhubung ke Wi‑Fi.\n\nSetelan ini memengaruhi semua pengguna di tablet ini."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Jika Anda membatasi data seluler latar belakang, beberapa aplikasi dan layanan tidak akan bekerja kecuali Anda terhubung ke Wi‑Fi.\n\nSetelan ini memengaruhi semua pengguna di ponsel ini."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"peringatan"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"batas"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Aplikasi dihapus"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (disarankan)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Pesan MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Kirim &amp; terima saat data seluler nonaktif"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data selama panggilan telepon"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Izinkan SIM ini digunakan hanya untuk koneksi internet seluler selama panggilan telepon"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM yang Bekerja"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Akses konten &amp; aplikasi"</string>
     <string name="user_rename" msgid="8735940847878484249">"GANTI NAMA"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Memungkinkan modifikasi setelan Wi‑Fi dan Seluler"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Memungkinkan modifikasi setelan dan penyandingan Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Izinkan pertukaran data saat <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ini menyentuh perangkat NFC lain"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Memungkinkan pertukaran data saat tablet bersentuhan dengan perangkat lain"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Mungkinkan pertukaran data saat ponsel bersentuhan dengan perangkat lain"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Lokasi"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Memungkinkan aplikasi menggunakan informasi lokasi Anda"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Kembali"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Berikutnya"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Beralih ke portabel"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Format dengan cara lain"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Kartu SIM"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Ubah setelan untuk setiap aplikasi yang mengirim notifikasi"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Aplikasi yang ditampilkan di perangkat"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Aplikasi ini tidak mendukung setelan yang ditingkatkan"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Setelan lainnya"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Setelan lainnya tersedia di dalam aplikasi ini"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Layanan bantuan VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Tidak ada aplikasi terinstal yang meminta dijalankan sebagai layanan bantuan VR"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Izinkan akses layanan VR untuk <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Diblokir oleh penyedia kredit Anda"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Diperlukan izin orang tua"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Serahkan ponsel ke orang tua untuk mulai menyiapkannya"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Untuk info lebih lanjut, hubungi admin IT Anda"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Detail selengkapnya"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Admin dapat memantau serta mengelola aplikasi dan data yang terkait dengan profil kerja, termasuk setelan, izin, akses perusahaan, aktivitas jaringan, dan informasi lokasi perangkat."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Perubahan nonaktif default"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Aplikasi tidak tersedia"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Perubahan kompatibilitas aplikasi hanya dapat diubah untuk aplikasi yang dapat di-debug. Instal aplikasi yang dapat di-debug dan coba lagi."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Setelan tidak didukung di ponsel ini"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Setelan tidak didukung di tablet ini"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Setelan tidak didukung di perangkat ini"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Setelan tidak dapat diubah oleh pengguna saat ini"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Bergantung pada setelan lain"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Setelan tidak tersedia"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Akun"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nama perangkat"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Info dasar"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Jaringan tidak ditemukan."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Tidak dapat menemukan jaringan. Coba lagi."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(terlarang)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Tidak ada kartu SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Tidak ada SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Tidak ada"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Ubah"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Terhubung"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Tidak ada koneksi"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Data seluler tidak akan terhubung otomatis"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Nonaktifkan data seluler?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Sandi salah"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Untuk mulai mendengarkan, pusatkan kode QR di bawah"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Format kode QR tidak valid"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Aplikasi seluler terpaket"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Aplikasi seluler terpaket"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Info transparansi aplikasi seluler terpaket"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Berisi iklan"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informasi Developer"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Informasi Kontak"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Deskripsi"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Kebijakan Privasi"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategori"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Aplikasi Seluler Terpaket"</string>
 </resources>
