--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Auka skráningarstig NFC-stafla"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC ítarleg villuleitarskrá söluaðila"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Taka með viðbótarannála söluaðila fyrir tiltekin tæki í villutilkynningum, sem gætu innihaldið lokaðar upplýsingar."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Ósíuð, ítarleg atburðaskrá NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Skrá ítarleg NFC-gögn sem kunna að innihalda lokaðar upplýsingar."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Endurræsa tæki?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Ítarleg NFC-skráning er aðeins ætluð í þróunartilgangi. Viðbótar NFC-gögn fylgja villutilkynningum sem kunna að innihalda lokaðar upplýsingar. Endurræstu tækið til að breyta þessari stillingu."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Prófaðu mismunandi stíla, veggfóður og fleira"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Skjávari"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"skjávari"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Ekki í boði þar sem kveikt er á svefntímastillingu"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Nota skjávara"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Við hleðslu eða í dokku"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Við hleðslu"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Deila nettengingu símans um Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-tjóðrun"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Deila nettengingu símans gegnum Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Notaðu heitan reit og tjóðrun til að tengja önnur tæki við internetið í gegnum farsímagagnatenginguna þína. Forrit geta einnig búið til heitan reit til að deila efni með nálægum tækjum."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Notaðu heitan reit og tjóðrun til að tengja önnur tæki við internetið í gegnum Wi-Fi eða farsímagagnatenginguna þína. Forrit geta einnig búið til heitan reit til að deila efni með nálægum tækjum."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Hjálp"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Takmörkun gagnanotkunar"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Spjaldtölvan mun slökkva á farsímagögnum þegar markinu sem þú hefur stillt er náð.\n\nÞar sem spjaldtölvan þín mælir gagnanotkun og símafyrirtækið gæti reiknað notkun á annan hátt skaltu íhuga að stilla hófleg mörk."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Síminn mun slökkva á farsímagögnum þegar markinu sem þú hefur stillt er náð.\n\nÞar sem síminn þinn mælir gagnanotkun og símafyrirtækið gæti reiknað notkun á annan hátt skaltu íhuga að stilla hófleg mörk."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Takmarka bakgrunnsgögn?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ef þú takmarkar bakgrunnsgögn í farsímakerfi virka sum forrit og þjónusta ekki nema þegar tengt er við Wi-Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ef þú takmarkar bakgrunnsgögn í farsímakerfi virka sum forrit og þjónusta ekki nema þegar tengt er við Wi-Fi.\n\nÞessi stilling á við alla notendur spjaldtölvunnar."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ef þú takmarkar bakgrunnsgögn í farsímakerfi virka sum forrit og þjónusta ekki nema þegar tengt er við Wi-Fi.\n\nÞessi stilling á við alla notendur símans."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"viðvörun"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"hámark"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Fjarlægð forrit"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ráðlagt)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-skilaboð"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Senda og sækja þegar slökkt er á farsímagögnum"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Gögn þegar símtal er í gangi"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Leyfa aðeins notkun þessa SIM-korts fyrir farsímagögn þegar símtal er í gangi"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM-kort fyrir vinnu"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Aðgangur að forritum og efni"</string>
     <string name="user_rename" msgid="8735940847878484249">"ENDURNEFNA"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Leyfa breytingar á stillingum Wi-Fi og farsímakerfa"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Leyfa breytingar á pörunum og stillingum Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Leyfa gagnaskipti þegar þetta <xliff:g id="DEVICE_NAME">%1$s</xliff:g> snertir annað NFC-tæki"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Leyfa gagnaflutning þegar spjaldtölvan snertir annað tæki"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Leyfa gagnaflutning þegar síminn snertir annað tæki"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Staðsetning"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Leyfa forritum að nota staðsetninguna þína"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Til baka"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Áfram"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Skipta yfir í færanlegt"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Sníða á annan hátt"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-kort"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Breyta stillingum fyrir hvert og eitt forrit sem sendir tilkynningar"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Forrit sem birtast í tæki"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Þetta forrit styður ekki endurbættar stillingar"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Fleiri stillingar"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Fleiri stillingar eru í boði í forritinu"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Hjálparþjónusta sýndarveruleika"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Engin uppsett forrit hafa óskað eftir að vera keyrð sem sýndarveruleikaþjónusta."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Leyfa sýndarveruleikaaðgang fyrir <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Útilokað af lánaþjónustunni þinni"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Foreldri þarft að aðstoða"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Réttu foreldri þínu símann til að hefja uppsetningu á þessu"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Hafðu samband við kerfisstjórann til að fá frekari upplýsingar"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Frekari upplýsingar"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Kerfisstjórinn getur fylgst með og stjórnað forritum og gögnum sem tengjast vinnusniðinu þínu, meðal annars stillingum, heimildum, fyrirtækjaaðgangi, netnotkun og staðsetningarupplýsingum tækisins."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Sjálfgefnar óvirkar breytingar"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Engin forrit í boði"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Aðeins er hægt að gera breytingar á samhæfi forrita fyrir forrit sem hægt er að villuleita. Settu upp forrit sem hægt er að villuleita og reyndu aftur."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Stillingin er ekki studd í þessum síma"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Stillingin er ekki studd í þessari spjaldtölvu"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Stillingin er ekki studd í þessu tæki"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Núverandi notandi getur ekki breytt stillingunni"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Hún er háð annarri stillingu"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Stillingin er ekki tiltæk"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Reikningur"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Heiti tækis"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Grunnupplýsingar"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Engin símkerfi fundust."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Ekkert símkerfi fannst. Reyndu aftur."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(bannað)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Ekkert SIM-kort"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Ekkert SIM-kort"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Ekkert"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Breyta"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Tengt"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Engin tenging"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Farsímagögn tengjast ekki sjálfkrafa"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Slökkva á farsímagögnum?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Rangt aðgangsorð"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Byrjaðu að hlusta með því að skanna QR-kóðann hér að neðan"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-kóði er ekki gilt snið"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Forrit í snjallforritapakka"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Forrit í snjallforritapakka"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Gagnsæisupplýsingar forrita í snjallforritapakka"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Inniheldur auglýsingar"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Upplýsingar um þróunaraðila"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Samskiptaupplýsingar"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Lýsing"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Persónuverndarstefna"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Flokkur"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Forrit í snjallforritapakka"</string>
 </resources>
