--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Aumenta livello di logging stack NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Log di debug di fornitori dettagliato NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Includi log aggiuntivi di fornitori relativi a un dispositivo specifico nelle segnalazioni di bug, che potrebbero contenere informazioni private."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Log di esame NCI NFC non filtrato"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Acquisisci pacchetti di dati NFC dettagliati, che potrebbero contenere informazioni private."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Vuoi riavviare il dispositivo?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"La registrazione di dati NFC dettagliati è a solo scopo di sviluppo. Vengono inclusi dati NFC aggiuntivi nelle segnalazioni di bug, che potrebbero contenere informazioni private. Riavvia il dispositivo per cambiare questa impostazione."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Prova diversi stili, sfondi e non solo"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Salvaschermo"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"salvaschermo"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Non disponibili perché la modalità Riposo è attiva"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Usa il salvaschermo"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Durante la ricarica o quando inserito nel dock"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Durante la ricarica"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Condividi la connessione a Internet del telefono tramite Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Tethering Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Condividi la connessione a Internet del telefono tramite Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Utilizza hotspot e tethering per consentire ad altri dispositivi di accedere a Internet tramite la tua connessione dati mobili. Le app possono, inoltre, creare un hotspot per condividere contenuti con i dispositivi vicini."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Utilizza hotspot e tethering per consentire ad altri dispositivi di accedere a Internet usando la tua connessione Wi-Fi o dati mobili. Le app possono inoltre creare un hotspot per condividere contenuti con i dispositivi nelle vicinanze."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Guida"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Limitazione utilizzo dati"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Il tablet disattiverà i dati mobili una volta raggiunto il limite impostato.\n\nPoiché l\'utilizzo dei dati viene misurato dal tablet e le misurazioni dell\'operatore potrebbero differire, è consigliabile stabilire un limite prudenziale."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Il telefono disattiverà i dati mobili una volta raggiunto il limite impostato.\n\nPoiché l\'utilizzo dei dati viene misurato dal telefono e le misurazioni dell\'operatore potrebbero differire, è consigliabile stabilire un limite prudenziale."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Limitare i dati in background?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Se limiti i dati mobili in background, alcuni servizi e app non funzioneranno senza connessione a una rete Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Se limiti i dati mobili in background, alcuni servizi e app non funzioneranno senza connessione a una rete Wi‑Fi.\n\nQuesta impostazione influisce su tutti gli utenti di questo tablet."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Se limiti i dati mobili in background, alcuni servizi e app non funzioneranno senza connessione a una rete Wi‑Fi.\n\nQuesta impostazione influisce su tutti gli utenti di questo telefono."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"Avviso"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"Limite"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Applicazioni rimosse"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (opzione consigliata)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Messaggi MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Invia e ricevi MMS quando i dati mobili non sono attivi"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Dati durante le chiamate"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Consenti l\'uso di questa SIM per i dati mobili solo durante le chiamate"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM di lavoro"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Accesso ad app e contenuti"</string>
     <string name="user_rename" msgid="8735940847878484249">"RINOMINA"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Consenti la modifica di impostazioni Wi‑Fi e rete mobile"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Consenti la modifica di impostazioni e accoppiamenti Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Consenti scambio dati quando questo <xliff:g id="DEVICE_NAME">%1$s</xliff:g> tocca un altro dispositivo NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Consenti lo scambio di dati quando il tablet tocca un altro dispositivo"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Consenti lo scambio di dati quando il telefono tocca un altro dispositivo"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Posizione"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Consenti alle app di utilizzare informazioni sulla tua posizione"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Indietro"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Avanti"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Switch to portable"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatta in un altro modo"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Schede SIM"</string>
@@ -3139,7 +3134,7 @@
     <string name="live_caption_summary" msgid="2898451867595161809">"Sottotitoli automatici"</string>
     <string name="spatial_audio_speaker" msgid="9145233652433523302">"Altoparlante telefono"</string>
     <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"Cuffie con cavo"</string>
-    <string name="spatial_audio_text" msgid="8201387855375146000">"L\'audio dei contenuti multimediali compatibili diventa più immersivo"</string>
+    <string name="spatial_audio_text" msgid="8201387855375146000">"L\'audio dei dispositivi multimediali compatibili diventa più immersivo"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"On/<xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"On/<xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> e <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="spatial_audio_footer_title" msgid="8775010547623606088">"Puoi anche attivare la funzionalità Audio spaziale per i dispositivi Bluetooth."</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Cambia le impostazioni di ogni app che invia notifiche"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"App mostrate sul dispositivo"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Questa app non supporta le impostazioni avanzate"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Altre impostazioni"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Altre impostazioni sono disponibili all\'interno di quest\'app"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Servizi helper VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Nessuna app installata ha richiesto di essere eseguita come servizio helper VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Consentire l\'accesso a <xliff:g id="SERVICE">%1$s</xliff:g> al servizio VR?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Impostazione bloccata dal fornitore di credito"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Occorre un genitore"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Passa il telefono a uno dei tuoi genitori per iniziare la configurazione"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Per ulteriori informazioni, contatta l\'amministratore IT"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Altri dettagli"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"L\'amministratore può monitorare e gestire le app e i dati associati al profilo di lavoro, inclusi accesso aziendale, impostazioni, autorizzazioni, attività di rete e informazioni sulla posizione del dispositivo."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Modifiche disattivate per impostazione predefinita"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Nessuna app disponibile"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Le modifiche alla compatibilità delle app possono essere cambiate solo per le app di cui è possibile eseguire il debug. Installa un\'app di cui è possibile eseguire il debug e riprova."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"L\'impostazione non è supportata su questo telefono"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"L\'impostazione non è supportata su questo tablet"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"L\'impostazione non è supportata su questo dispositivo"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"L\'utente corrente non può cambiare l\'impostazione"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Dipende da un\'altra impostazione"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Impostazione non disponibile"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Account"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nome dispositivo"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Informazioni di base"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nessuna rete trovata."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Impossibile trovare reti. Riprova."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(vietato)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nessuna scheda SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nessuna SIM rilevata"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Nessuna"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Modifica"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Connessione attiva"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Nessuna connessione"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"La rete mobile non si connetterà automaticamente"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Disattivare i dati mobili?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Password errata"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Per iniziare ad ascoltare, centra il codice QR qui sotto"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Il formato del codice QR non è valido"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"App in bundle mobile"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"App in bundle mobile"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informazioni sulla trasparenza delle app in bundle mobile"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Contiene annunci"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informazioni degli sviluppatori"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Dati di contatto"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Descrizione"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Norme sulla privacy"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Categoria"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"App in bundle mobile"</string>
 </resources>
