--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -827,7 +827,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"‏העלאת רמת הרישום של מקבץ NFC ביומן"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"‏יומן ניפוי באגים מפורט של ספקי NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"הוספת רישומי יומן של יצרנים למכשירים ספציפיים בדוחות על באגים. הדוחות האלה עשויים להכיל מידע פרטי."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"‏הפעלת Snoop Log של NFC NCI ללא סינון"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"‏תיעוד של פרטי חבילות NFC, שעשויות להכיל מידע פרטי."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"להפעיל את המכשיר מחדש?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"‏הרישום ביומן של פרטי NFC מיועד למטרות פיתוח בלבד. נתוני NFC נוספים נכללים בדוחות על באגים, שעשויים להכיל מידע פרטי. צריך להפעיל מחדש את המכשיר כדי לשנות את ההגדרה."</string>
@@ -1510,6 +1511,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"‏שיתוף האינטרנט של הטלפון דרך Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"שיתוף אינטרנט דרך אתרנט"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"שיתוף האינטרנט של הטלפון דרך אתרנט"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"‏בעזרת נקודה לשיתוף אינטרנט (hotspot) ושיתוף אינטרנט בין ניידים (tethering) אפשר לתת למכשירים אחרים להתחבר לאינטרנט דרך חבילת הגלישה שלך. יש גם אפליקציות ליצירת נקודת אינטרנט ולשיתוף תכנים בין מכשירים שנמצאים בקרבת מקום."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"‏נקודה לשיתוף אינטרנט (Hotspot) ושיתוף אינטרנט בין מכשירים (tethering) מאפשרים למכשירים אחרים להתחבר לאינטרנט דרך Wi-Fi או דרך חבילת הגלישה שלך. יש גם אפליקציות שמאפשרות ליצור נקודה לשיתוף אינטרנט ולשתף תכנים עם מכשירים קרובים."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"עזרה"</string>
@@ -2775,10 +2778,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"הגבלת השימוש בחבילת הגלישה"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"הטאבלט יכבה את חבילת הגלישה כאשר הוא יגיע למגבלה שהגדרת.\n\nמכיוון שעשויים להיות הבדלים בין השימוש בנתונים שנמדד על ידי המכשיר לבין השימוש שנמדד על ידי הספק, מומלץ להגדיר מגבלה סבירה."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"הטלפון יכבה את חבילת הגלישה כאשר הוא יגיע למגבלה שהגדרת.\n\nמכיוון שעשויים להיות הבדלים בין השימוש בחבילת הגלישה שנמדד על ידי המכשיר לבין השימוש שנמדד על ידי הספק, מומלץ להגדיר מגבלה סבירה."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"להגביל נתוני רקע?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"‏אם מגבילים את השימוש בחבילת הגלישה ברקע, אפליקציות ושירותים מסוימים לא יפעלו אלא אם מחוברים ל-Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"‏אם תגביל את השימוש בחבילת הגלישה ברקע, אפליקציות ושירותים מסוימים לא יפעלו אלא אם תהיה מחובר ל-Wi‑Fi.‏\n\nהגדרה זו משפיעה על כל המשתמשים בטאבלט."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"‏אם יוגבל השימוש בחבילת הגלישה ברקע, אפליקציות ושירותים מסוימים לא יפעלו אלא אם יהיה חיבור ל-Wi‑Fi.‏\n\nהגדרה זו משפיעה על כל המשתמשים בטלפון."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"אזהרה"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"מגבלה"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"אפליקציות שהוסרו"</string>
@@ -3024,8 +3023,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"‏LTE (מומלץ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"‏הודעות MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"שליחה וקבלה כשחבילת הגלישה מושבתת"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"נתונים במהלך שיחות"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"‏מתן הרשאה לשימוש ב-SIM הזה לצורך חבילת גלישה רק במהלך שיחות"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"‏SIM עבודה"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"גישה לאפליקציות ולתוכן"</string>
     <string name="user_rename" msgid="8735940847878484249">"שינוי שם"</string>
@@ -3037,15 +3038,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"‏לאפשר שינוי של הגדרות רשת Wi-Fi ורשת סלולרית"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"‏התרת שינויים של התאמות והגדרות Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"‏התרת חילופי נתונים כאשר <xliff:g id="DEVICE_NAME">%1$s</xliff:g> נוגע במכשיר אחר שפועל בו NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"התרת חילופי מידע כאשר הטאבלט נוגע במכשיר אחר"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"התרת חילופי מידע כאשר הטלפון נוגע במכשיר אחר"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"מיקום"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"התרה לאפליקציה להשתמש בנתוני המיקום שלך"</string>
     <string name="wizard_back" msgid="8257697435061870191">"הקודם"</string>
     <string name="wizard_next" msgid="3884832431439072471">"הבא"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"מעבר לאחסון הנייד"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"פירמוט בדרך אחרת"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"‏כרטיסי SIM"</string>
@@ -3993,6 +3989,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ההגדרה חסומה על ידי ספק האשראי"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"צריך להיעזר בהורה"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"צריך להעביר את הטלפון לאחד ההורים כדי להתחיל בתהליך ההגדרה של אמצעי הזיהוי"</string>
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"צריך להעביר את הטלפון להורה כדי לאשר את שינוי ההגדרה הזו."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"‏למידע נוסף, אפשר ליצור קשר עם מנהל ה-IT"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"פרטים נוספים"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"מנהל המכשיר יכול לפקח על אפליקציות ונתונים המשויכים לפרופיל העבודה שלך ולנהל אותם, כולל הגדרות, הרשאות, גישה ארגונית, פעילות הרשת ומידע על מיקום המכשיר."</string>
@@ -4460,12 +4457,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"השינויים מושבתים כברירת מחדל"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"אין אפליקציות זמינות"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ניתן לבצע שינויים בתאימות האפליקציה רק עבור אפליקציות שניתנות לניפוי באגים. יש להתקין אפליקציה שניתנת לניפוי באגים ולנסות שוב."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ההגדרה אינה נתמכת בטלפון זה"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ההגדרה אינה נתמכת בטאבלט זה"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ההגדרה אינה נתמכת במכשיר זה"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"המשתמש הנוכחי לא יכול לשנות את ההגדרה"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"תלויה בהגדרה אחרת"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"הגדרה לא זמינה"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"חשבון"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"שם המכשיר"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"מידע בסיסי"</string>
@@ -4500,7 +4492,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"לא נמצאו רשתות."</string>
     <string name="network_query_error" msgid="6406348372070035274">"לא נמצאו רשתות. אפשר לנסות שוב."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(אסור)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"‏אין כרטיס SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"‏אין כרטיס SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"‏אין מידע על רשת ה-Wi-Fi"</string>
@@ -4819,6 +4810,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"שינוי"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"מחובר"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"אין חיבור"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"אין חיבור אוטו\' לחבילת הגלישה"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"לכבות את חבילת הגלישה?"</string>
@@ -4973,14 +4968,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"סיסמה שגויה"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"‏כדי להתחיל בהאזנה, צריך להציב את קוד ה‑QR במרכז החלון שבהמשך"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"‏הפורמט של קוד ה‑QR לא תקין"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"אפליקציות בחבילה לנייד"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"אפליקציות בחבילה לנייד"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"מידע בנושא שקיפות של אפליקציות בחבילה לנייד"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"מכילה מודעות"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"פרטי המפתח"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"פרטים ליצירת קשר"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"תיאור"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"מדיניות הפרטיות"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"קטגוריה"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"אפליקציה בחבילה לנייד"</string>
 </resources>
