--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -795,7 +795,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC 스택 로깅 수준 높이기"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC 상세 공급업체 디버그 로그"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"버그 신고에 추가적인 기기별 공급업체 로그를 포함합니다. 여기에는 개인 정보가 포함될 수 있습니다."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI 필터링되지 않은 스누프 로그"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"세부 NFC 패킷을 캡처합니다. 여기에는 개인 정보가 포함될 수 있습니다."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"기기를 다시 시작하시겠습니까?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"세부 NFC 로깅은 개발용으로만 사용됩니다. 추가 NFC 데이터는 버그 신고에 포함되며, 여기에는 개인 정보가 포함될 수 있습니다. 이 설정을 변경하려면 기기를 다시 시작하세요."</string>
@@ -1179,8 +1180,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"다른 스타일, 배경화면 등 사용해 보기"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"화면 보호기"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"화면 보호기"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"취침 모드가 켜져 있으므로 사용할 수 없습니다."</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"화면 보호기 사용"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"충전 또는 도킹하는 동안"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"충전하는 동안"</string>
@@ -1471,6 +1471,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"블루투스를 통해 휴대전화의 인터넷 연결 공유"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"이더넷 테더링"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"이더넷을 통해 휴대전화의 인터넷 연결 공유"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"핫스팟 및 테더링을 사용하여 다른 기기에서 내 모바일 데이터 연결을 통해 인터넷을 사용할 수 있도록 합니다. 앱에서도 핫스팟을 만들어 주변 기기와 콘텐츠를 공유할 수 있습니다."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"핫스팟 및 테더링으로 다른 기기에서 내 Wi-Fi 또는 모바일 데이터 연결을 통해 인터넷을 사용할 수 있도록 합니다. 앱에서도 핫스팟을 만들어 주변 기기와 콘텐츠를 공유할 수 있습니다."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"고객센터"</string>
@@ -2700,10 +2702,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"데이터 사용 한도 설정"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"설정한 모바일 데이터 한도에 도달하면 태블릿에서 모바일 데이터를 사용 중지합니다.\n\n데이터 사용량은 태블릿에서 측정되며 이동통신사에서 사용량을 다르게 계산할 수 있으므로 한도를 낮게 설정해 보세요."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"설정한 모바일 데이터 한도에 도달하면 휴대전화에서 모바일 데이터를 사용 중지합니다.\n\n데이터 사용량은 휴대전화에서 측정되며 이동통신사에서 사용량을 다르게 계산할 수 있으므로 한도를 낮게 설정해 보세요."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"백그라운드 데이터 사용을 제한하시겠습니까?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"백그라운드 모바일 데이터를 제한하는 경우 Wi‑Fi에 연결되지 않으면 일부 앱과 서비스가 작동하지 않습니다."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"백그라운드 모바일 데이터를 제한하는 경우 Wi‑Fi에 연결되지 않으면 일부 앱과 서비스가 작동하지 않습니다.\n\n이 설정은 이 태블릿의 모든 사용자에게 영향을 미칩니다."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"백그라운드 모바일 데이터를 제한하는 경우 Wi‑Fi에 연결되지 않으면 일부 앱과 서비스가 작동하지 않습니다.\n\n이 설정은 이 휴대전화의 모든 사용자에게 영향을 미칩니다."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"(경고 한도)"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"(사용 한도)"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"삭제된 앱"</string>
@@ -2945,8 +2943,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE(권장)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS 메시지"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"모바일 데이터가 사용 중지되어 있을 때 전송 및 수신"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"통화 중 데이터 사용"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"통화 중에만 이 SIM을 통해 모바일 데이터를 사용하도록 허용합니다."</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"작업 SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"앱 및 콘텐츠 액세스"</string>
     <string name="user_rename" msgid="8735940847878484249">"이름 바꾸기"</string>
@@ -2958,15 +2958,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi‑Fi 및 모바일 설정을 수정하도록 허용"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"블루투스"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"블루투스 페어링 및 설정을 수정하도록 허용"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>이(가) 다른 NFC 기기를 터치하는 경우 데이터 교환을 허용합니다."</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"태블릿이 다른 기기와 접촉하면 데이터 교환 허용"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"휴대전화가 다른 기기와 접촉하면 데이터 교환 허용"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"위치"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"앱에서 위치 정보를 사용하도록 허용"</string>
     <string name="wizard_back" msgid="8257697435061870191">"뒤로"</string>
     <string name="wizard_next" msgid="3884832431439072471">"다음"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"휴대용으로 전환"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"다른 방법으로 포맷"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM 카드"</string>
@@ -3418,10 +3413,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"알림을 보내는 각 앱의 설정 변경"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"기기에 표시되는 앱"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"이 앱은 향상된 설정을 지원하지 않습니다."</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"기타 설정"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"앱 안에서 추가 설정을 볼 수 있습니다."</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR 도우미 서비스"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"설치된 앱 중에서 VR 도우미 서비스로 실행되도록 요청한 앱이 없습니다."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR 서비스가 <xliff:g id="SERVICE">%1$s</xliff:g>에 액세스하도록 허용하시겠습니까?"</string>
@@ -3886,6 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"신용 상품 제공업체에서 차단함"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"부모 동의 필요"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"설정을 시작하려면 휴대전화를 부모님에게 건네주세요."</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"자세한 내용은 IT 관리자에게 문의하세요"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"세부정보 더보기"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"관리자는 설정, 권한, 기업 액세스, 네트워크 활동, 기기의 위치 정보 등 직장 프로필과 연결된 데이터와 앱을 모니터링하고 관리할 수 있습니다."</string>
@@ -4331,12 +4326,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"기본적으로 사용 중지된 앱의 변경사항"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"사용 가능한 앱 없음"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"디버그 가능한 앱의 경우에만 앱 호환성 변경사항을 수정할 수 있습니다. 디버그 가능한 앱을 설치하고 다시 시도해 보세요."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"휴대전화에서 지원되지 않는 설정"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"태블릿에서 지원되지 않는 설정"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"기기에서 지원되지 않는 설정"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"현재 사용자가 변경할 수 없는 설정"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"다른 설정을 변경해야 함"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"설정을 사용할 수 없음"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"계정"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"기기 이름"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"기본 정보"</string>
@@ -4371,7 +4361,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"네트워크를 찾을 수 없습니다."</string>
     <string name="network_query_error" msgid="6406348372070035274">"네트워크를 찾지 못했습니다. 다시 시도해 주세요."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(금지됨)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM 카드 없음"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM 없음"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"없음"</string>
@@ -4688,6 +4677,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"변경"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"연결됨"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"연결되지 않음"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"모바일 데이터가 자동으로 연결되지 않음"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"모바일 데이터를 사용 중지하시겠습니까?"</string>
@@ -4842,14 +4835,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"잘못된 비밀번호"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"오디오를 들으려면 아래의 QR 코드가 가운데에 오도록 스캔하세요"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR 코드가 유효한 형식이 아닙니다."</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"모바일 번들 앱"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"모바일 번들 앱"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"모바일 번들 앱 투명성 정보"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"광고 포함"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"개발자 정보"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"연락처 정보"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"설명"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"개인정보처리방침"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"카테고리"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"모바일 번들 앱"</string>
 </resources>
