--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC топтомун жайгаштыруу деңгээлин жогорулатуу"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Мүчүлүштүктөрдү оңдоо үчүн NFC\'деги кепти дааналатууну жайгаштыруу"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Кызмат көрсөтүүчүнүн түзмөккө байланыштуу кошумча жазуулары мүчүлүштүк тууралуу кабарларга кошулат. Анда купуя маалымат камтылышы мүмкүн."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Чыпкаланбаган NFC NCI журналы"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Купуя маалымат камтылышы мүмкүн болгон NFC\'нин толук маалыматын тартып алыңыз."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Түзмөк өчүп күйсүнбү?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFC\'нин толук маалыматы менен кирүү иштеп чыгуу максатында гана колдонулат. NFC\'нин кошумча маалыматы мүчүлүштүк тууралуу кабарларга кошулат. Анда купуя маалымат камтылышы мүмкүн. Бул параметрди өзгөртүү үчүн түзмөгүңүздү өчүрүп күйгүзүңүз."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Ар кандай стилдерди, тушкагаздарды жана башкаларды көрүңүз"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Көшөгө"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"көшөгө"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Уйку режиминде иштебейт"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Көшөгөнү колдонуу"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Кубатталып жатканда же док-станцияга туташканда"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Кубатталып жатканда"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Телефондун Интернетин Bluetooth аркылуу бөлүшөсүз"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet модем режими"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Телефондогу Интернетти Ethernet аркылуу бөлүшөсүз"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Башка түзмөктөрдү мобилдик Интернетке туташтыруу үчүн байланыш түйүнүн же модем режимин колдонуңуз. Колдонмолор да жакын жердеги түзмөктөр менен мазмун бөлүшүү үчүн байланыш түйүнүн түзө алышат."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Башка түзмөктөрдү Wi‑Fi же мобилдик Интернетке туташтыруу үчүн байланыш түйүнүн же модем режимин колдонуңуз. Ошондой эле, колдонмолор жакын жердеги түзмөктөр менен кандайдыр бир нерселерди бөлүшүү үчүн байланыш түйүндөрүн түзө алышат."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Жардам"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Трафикти чектөө"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Белгиленген чекке жеткенде, планшетиңиз мобилдик Интернетти өчүрөт.\n\nПланшетиңиздин статистикасы менен байланыш операторунун статистикасы аздыр-көптүр айырмалангандыктан, чекти кабелтең коюңуз."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Белгиленген чекке жеткенде, телефонуңуз мобилдик Интернетти өчүрөт.\n\nТелефонуңуздун статистикасы менен байланыш операторунун статистикасы аздыр-көптүр айырмалангандыктан, чекти кабелтең коюңуз."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Фондук алмашууларга тыюу салынсынбы?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Фондук режимдеги мобилдик дайындарга чек коюлганда, айрым колдонмолор жана кызматтар Wi‑Fi\'га туташмайынча иштебейт."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Фондук режимдеги мобилдик дайындарга чек коюлганда, айрым колдонмолор жана кызматтар Wi‑Fi\'га туташмайынча иштебейт.\n\nБул жөндөө ушул планшеттеги бардык колдонуучуларга таасирин тийгизет."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Фондук режимдеги мобилдик дайындарга чек коюлганда, айрым колдонмолор жана кызматтар Wi‑Fi\'га туташмайынча иштебейт.\n\nБул жөндөө ушул телефондогу бардык колдонуучуларга таасирин тийгизет."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"эскертүү"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"чеги"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Алынып салынган колдонмолор"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (сунушталат)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS билдирүүлөр"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"MMS билдирүүлөрдү мобилдик Интернет өчүк кезде жөнөтүп, кабыл аласыз"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Чалуу учурундагы трафик"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Бул SIM карта чалуу учурунда мобилдик Интернетти пайдалануу үчүн гана колдонулат"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Жумуш SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Колдон жана мазмунду пайдал мүмкүнч"</string>
     <string name="user_rename" msgid="8735940847878484249">"АТ АЛМАШТЫРУУ"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi‑Fi жана мобилдик тууралоолорду өзгөртүүгө уруксат берүү"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Bluetooth жупташтырууларын жана орнотмолорун өзгөртүүгө жол берүү"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Бул <xliff:g id="DEVICE_NAME">%1$s</xliff:g> башка NFC түзмөгүнө тийгенде, дайындар менен алмашууга уруксат берүү"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Планшет башка түзмөккө тийгенде, берилиштерди алмашууга жол берүү"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Телефон башка түзмөккө тийгенде маалымат алмашат"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Жайгашуу"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Колдонмолорго сиздин жайгашуу маалыматтарыңызды колдонууга уруксат берүү"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Артка"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Кийинки"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Ташымага которулуу"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Башка жол менен форматтоо"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM карталар"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Билдирмелерди жөнөткөн колдонмолордун жөндөөлөрүн өзгөртөсүз"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Түзмөктө көрүнгөн колдонмолор"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Бул колдонмодо кеңири жөндөөлөр колдоого алынбайт"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Дагы параметрлер"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Бул колдонмодо кошумча параметрлер бар"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR көмөкчү кызматтары"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Орнотулган колдонмолор көмөкчү VR кызматы катары иштөөгө уруксат сураган жок."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR кызматына <xliff:g id="SERVICE">%1$s</xliff:g> кызматында иштөөгө уруксат берилсинби?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Насыя берүүчү тарабынан бөгөттөлдү"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ата-эненин макулдугу керек"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Муну жөндөп баштоо үчүн телефонду ата-энеңе бер"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Кеңири маалымат алуу үчүн IT администраторуңузга кайрылыңыз"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Көбүрөөк маалымат"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администратор жумуш профилиңизге байланыштуу колдонмолор менен маалыматтарды, анын ичинде жөндөөлөр, уруксаттар, корпоративдик кирүү мүмкүнчүлүгү, Интернеттеги аракеттери жана түзмөктүн жайгашкан жери тууралуу маалыматты көзөмөлдөй алат."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Демейки өчүрүлгөн өзгөртүүлөр"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Колдонмолор жок"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Шайкештик параметрлерин мүчүлүштүктөрүн оңдоого мүмкүн болгон колдонмолор үчүн гана өзгөртүүгө болот. Ушундай колдонмо орнотуп туруп, кайталап көрүңүз."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Жөндөө бул телефондо колдоого алынбайт"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Жөндөө бул планшетте колдоого алынбайт"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Жөндөө бул түзмөктө колдоого алынбайт"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Жөндөөнү учурдагы колдонуучу өзгөртө албайт"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Башка жөндөөгө көз каранды"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Жөндөө жеткиликсиз"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Аккаунт"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Түзмөктүн аталышы"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Негизги маалымат"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Эч тармак табылган жок."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Тармактар табылбай койду. Кайталап көрүңүз."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(тыюу салынган)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM-карта жок"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM-карта"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM-карта жок"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Жок"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Өзгөртүү"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Туташты"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Байланыш жок"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мобилдик Интернетке автоматтык түрдө туташпайт"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Мобилдик трафик өчүрүлсүнбү?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Сырсөз туура эмес"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Угуп баштоо үчүн QR кодун борборго жайгаштырыңыз"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR кодунун форматы жараксыз"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мобилдик түзмөккө алдын ала орнотулган колдонмолор"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мобилдик түзмөккө алдын ала орнотулган колдонмолор"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Мобилдик түзмөккө алдын ала орнотулган колдонмолордун тунуктугу жөнүндө маалымат"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Жарнамалар бар"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Иштеп чыгуучунун(-лардын) маалыматы"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Байланыш маалыматы"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Учкай маалымат"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Купуялык саясаты"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категория"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мобилдик түзмөккө алдын ала орнотулган колдонмо"</string>
 </resources>
