--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -823,7 +823,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Padidinti NFC dėklo įrašymo į žurnalą lygį"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC daugiažodžių paslaugų teikėjo derinimo žurnalas"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Į pranešimus apie riktus įtraukiami papildomi konkretaus įrenginio paslaugų teikėjo žurnalai, kuriuose gali būti privačios informacijos."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI nefiltruotas šnipinėjimo žurnalas"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Užfiksuojami išsamūs NFC paketai, kuriuose gali būti privačios informacijos."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Paleisti įrenginį iš naujo?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Išsamių NFC duomenų įrašymas gali būti naudojamas tik kuriant produktą. Į pranešimus apie riktus įtraukiama papildomų NFC duomenų, kuriuose gali būti privačios informacijos. Jei norite pakeisti šį nustatymą, paleiskite įrenginį iš naujo."</string>
@@ -1213,8 +1214,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Išbandykite skirtingus stilius, ekrano fonus ir kt."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekrano užsklanda"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekrano užsklanda"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nepasiekiama dėl įjungto laiko eiti miegoti režimo"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ekrano užsklandos naudojimas"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Įkraunat ar prijungus prie doko"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Įkraunant"</string>
@@ -1507,6 +1507,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Bendrinti telefono interneto ryšį per „Bluetooth“"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Eterneto susiejimas"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Bendrinkite telefono interneto ryšį eternetu"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Naudodami viešosios interneto prieigos tašką ir įrenginį kaip modemą galite teikti internetą kitiems įrenginiams per mobiliojo ryšio duomenų tinklą. Be to, programos gali sukurti viešosios interneto prieigos tašką ir bendrinti turinį su netoliese esančiais įrenginiais."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Naudodami viešosios interneto prieigos tašką ir įrenginį kaip modemą galite teikti internetą kitiems įrenginiams „Wi-Fi“ arba mobiliųjų duomenų ryšiu. Be to, programos gali sukurti viešosios interneto prieigos tašką ir bendrinti turinį su netoliese esančiais įrenginiais."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Pagalba"</string>
@@ -2772,10 +2774,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Duomenų naudojimo ribojimas"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Pasiekus nustatytą apribojimą planšetiniame kompiuteryje bus išjungti mobiliojo ryšio duomenys.\n\nKadangi sunaudoti duomenys skaičiuojami pagal planšetinį kompiuterį ir operatorius gali apskaičiuoti kitaip, apsvarstykite galimybę nustatyti mažesnį apribojimą."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Pasiekus nustatytą apribojimą telefone bus išjungti mobiliojo ryšio duomenys.\n\nKadangi sunaudoti duomenys skaičiuojami pagal telefoną ir operatorius gali apskaičiuoti kitaip, apsvarstykite galimybę nustatyti mažesnį apribojimą."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Apriboti foninius duomenis?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Jei apribosite mobiliojo ryšio foninius duomenis, kai kurios programos ir paslaugos neveiks, nebent prisijungsite prie „Wi-Fi“ tinklo."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Jei apribosite mobiliojo ryšio foninius duomenis, kai kurios programos ir paslaugos neveiks, nebent prisijungsite prie „Wi-Fi“ tinklo.\n\nŠis nustatymas paveiks visus šio planšetinio kompiuterio naudotojus."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Jei apribosite mobiliojo ryšio foninius duomenis, kai kurios programos ir paslaugos neveiks, nebent prisijungsite prie „Wi-Fi“ tinklo.\n\nŠis nustatymas paveiks visus šio telefono naudotojus."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"įspėjimas"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"apribojimas"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Pašalintos programos"</string>
@@ -3021,8 +3019,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (rekomenduojama)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS pranešimai"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Siųsti ir gauti, kai mobiliojo ryšio duomenys išjungti"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Duomenų naudojimas skambinant"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Leisti šią SIM naudoti mobiliojo ryšio duomenis tik skambinant"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Darbo SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Prieiga prie programų ir turinio"</string>
     <string name="user_rename" msgid="8735940847878484249">"PERVARDYTI"</string>
@@ -3034,15 +3034,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Leisti keisti „Wi‑Fi“ ir mobiliojo ryšio nustatymus"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Leisti keisti „Bluetooth“ susiejimą ir nustatymus"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"ALR"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Leisti keistis duomenimis prilietus šį „<xliff:g id="DEVICE_NAME">%1$s</xliff:g>“ prie kito ALR įrenginio"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Leisti keistis duomenimis, kai planšetinis kompiuteris aptinka kitą įrenginį"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Leisti keistis duomenimis, kai telefonas aptinka kitą įrenginį"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Vietovė"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Leisti programoms naudoti vietovės informaciją"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Atgal"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Kitas"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Perjungti į nešioj. saug."</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatuoti kitu būdu"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kortelės"</string>
@@ -3500,10 +3495,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Pakeiskite kiekvienos pranešimus siunčiančios programos nustatymus"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Įrenginyje rodomos programos"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Ši programa nepalaiko išplėstinių nustatymų"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Daugiau nustatymų"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Daugiau nustatymų pasiekiama šioje programoje"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Pagalbinės virtualiosios realybės paslaugos"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Nėra įdiegtų programų, kurios pateikė užklausą būti vykdomos kaip pagalbinės virtualiosios realybės paslaugos."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Leisti „<xliff:g id="SERVICE">%1$s</xliff:g>“ pasiekti virtualiosios realybės paslaugą?"</string>
@@ -3992,6 +3985,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Užblokavo kredito kortelės teikėjas"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Reikalingas vienas iš tėvų"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Perduokite telefoną vienam iš tėvų, kad būtų pradėta sąranka"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Jei reikia daugiau informacijos, susisiekite su IT administratoriumi"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Daugiau išsamios informacijos"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratorius gali stebėti ir tvarkyti su jūsų darbo profiliu susietas programas ir duomenis, įskaitant nustatymus, leidimus, prieigą prie įmonės duomenų, tinklo veiklą ir įrenginio vietovės informaciją."</string>
@@ -4459,12 +4454,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Numatytieji išjungti pakeitimai"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Programų nėra"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Galima keisti tik derinamų programų suderinamumą. Įdiekite derinamą programą ir bandykite dar kartą."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Šiame telefone nustatymas nepalaikomas"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Šiame planšetiniame kompiuteryje nustatymas nepalaikomas"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Šiame įrenginyje nustatymas nepalaikomas"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Dabartinis naudotojas negali keisti nustatymo"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Priklauso nuo kito nustatymo"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Nustatymas negalimas"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Paskyra"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Įrenginio pavadinimas"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Pagrindinė informacija"</string>
@@ -4499,7 +4489,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nerasta jokių tinklų."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Nepavyko rasti tinklų. Bandykite dar kartą."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(uždrausta)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nėra SIM kortelės"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nėra SIM kortelės"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Nėra"</string>
@@ -4818,6 +4807,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Pakeisti"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Prisijungta"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Nėra ryšio"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Naud. mob. r. duomenis nebus autom. prisijungiama"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Išjungti mobiliojo ryšio duomenis?"</string>
@@ -4972,14 +4965,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Netinkamas slaptažodis"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Jei norite pradėti klausyti, nustatykite toliau pateiktą QR kodą per vidurį"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kodas netinkamo formato"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Į rinkinį įtrauktos programos mobiliesiems"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Į rinkinį įtrauktos programos mobiliesiems"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Į rinkinį įtrauktų programų mobiliesiems skaidrumo informacija"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Yra skelbimų"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Kūrėjo (-ų) informacija"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktinė informacija"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Aprašas"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Privatumo politika"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategorija"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Į rinkinį įtraukta programa mobiliesiems"</string>
 </resources>
