--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -806,7 +806,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Palielināt NFC steka reģistrēšanas līmeni"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Detalizēti NFC nodrošinātāju atkļūdošanas žurnāli"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Iekļaut kļūdu pārskatos konkrētas ierīces papildu nodrošinātāju žurnālus, kuros var būt ietverta privāta informācija."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI nefiltrētas uzskaites žurnāli"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Tvert detalizētu NFC datu paketes, kurās var būt ietverta privāta informācija."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Vai restartēt ierīci?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detalizētu NFC datu reģistrēšana ir paredzēta tikai ar izstrādi saistītiem nolūkiem. Papildu NFC dati tiek iekļauti kļūdu pārskatos, un tajos var būt ietverta privāta informācija. Lai mainītu šo iestatījumu, restartējiet ierīci."</string>
@@ -1193,8 +1194,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Izmēģiniet dažādus stilus, fona tapetes utt."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekrānsaudzētājs"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekrānsaudzētājs"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nav pieejams, jo ir ieslēgts naktsmiera režīms"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Izmantot ekrānsaudzētāju"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Uzlādes vai dokošanas laikā"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Uzlādes laikā"</string>
@@ -1486,6 +1486,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Koplietojiet tālruņa interneta savienojumu, izmantojot Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet piesaiste"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Koplietojiet tālruņa interneta savienojumu, izmantojot tīklu Ethernet."</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Izmantojiet tīklāju un piesaisti, lai varētu lietot internetu citās ierīcēs, izveidojot mobilo datu savienojumu. Lietotnes var arī izveidot tīklāju satura kopīgošanai ar tuvumā esošajām ierīcēm."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Izmantojot tīklāju un piesaisti, jūsu ierīces Wi-Fi vai mobilo datu savienojums var nodrošināt interneta savienojumu citām ierīcēm. Lietotnes var arī izveidot tīklāju satura kopīgošanai ar tuvumā esošajām ierīcēm."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Palīdzība"</string>
@@ -2733,10 +2735,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Datu izmantošanas ierobežošana"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Kad planšetdatorā būs sasniegts jūsu iestatītais ierobežojums, mobilie dati tiks izslēgti.\n\nTā kā datu lietojums tiek noteikts planšetdatorā un jūsu mobilo sakaru operators var citādi uzskaitīt datu lietojumu, ieteicams iestatīt pārdomātu ierobežojumu."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Kad tālrunī būs sasniegts jūsu iestatītais ierobežojums, mobilie dati tiks izslēgti.\n\nTā kā datu lietojums tiek noteikts tālrunī un jūsu mobilo sakaru operators var citādi uzskaitīt datu lietojumu, ieteicams iestatīt pārdomātu ierobežojumu."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Vai ierobežot fona datus?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ierobežojot mobilos fona datus, dažas lietotnes un pakalpojumi nedarbosies, ja nebūs savienojuma ar Wi-Fi tīklu."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ierobežojot mobilos fona datus, dažas lietotnes un pakalpojumi nedarbosies, ja nebūs savienojuma ar Wi-Fi tīklu.\n\nŠis iestatījums ietekmē visus šī planšetdatora lietotājus."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ierobežojot mobilos fona datus, dažas lietotnes un pakalpojumi nedarbosies, ja nebūs savienojuma ar Wi-Fi tīklu.\n\nŠis iestatījums ietekmē visus šī tālruņa lietotājus."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"brīdinājums"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"ierobežojums"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Noņemtās lietotnes"</string>
@@ -2980,8 +2978,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ieteicams)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Multiziņas"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Sūtīt un saņemt multiziņas, kad ir izslēgti mobilie dati"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Datu izmantošana zvanu laikā"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Atļaut izmantot šo SIM karti mobilo datu nodrošināšanai tikai zvanu laikā"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Darba SIM karte"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Piekļuve lietotnēm un saturam"</string>
     <string name="user_rename" msgid="8735940847878484249">"PĀRDĒVĒT"</string>
@@ -2993,15 +2993,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Atļaut Wi‑Fi un mobilā tīkla iestatījumu pārveidošanu"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Atļaut Bluetooth savienošanas pārī un iestatījumu pārveidošanu"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Atļauj datu apmaiņu, kad šī ierīce <xliff:g id="DEVICE_NAME">%1$s</xliff:g> pieskaras citai NFC ierīcei."</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Atļaut datu apmaiņu, kad planšetdators saskaras ar citu ierīci"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Atļaut datu apmaiņu, kad tālrunis saskaras ar citu ierīci"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Atrašanās vieta"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Atļaut lietotnēs izmantot informāciju par atrašanās vietu"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Atpakaļ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Tālāk"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Mainīt uz pārnēsājamo"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatēt citā veidā"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kartes"</string>
@@ -3456,10 +3451,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Varat mainīt iestatījumus katrai lietotnei, kas sūta paziņojumus."</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Ierīcē parādītās lietotnes"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Šajā lietotnē netiek atbalstīti izvērsti iestatījumi."</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Citi iestatījumi"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Lietotnē ir pieejami citi iestatījumi"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR palīga pakalpojumi"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Nevienai instalētajai lietotnei nav pieprasīta palaišana kā VR palīga pakalpojumam."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Vai atļaut VR pakalpojumam piekļūt pakalpojumam <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3936,6 +3929,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Bloķējis jūsu kredīta nodrošinātājs"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Nepieciešama vecāku palīdzība"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Iedodiet tālruni vienam no vecākiem, lai sāktu iestatīšanu."</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Lai iegūtu plašāku informāciju, sazinieties ar savu IT administratoru."</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Plašāka informācija"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administrators var pārraudzīt un pārvaldīt ar jūsu darba profilu saistītās lietotnes un datus, tostarp iestatījumus, atļaujas, korporatīvo piekļuvi, darbības tīklā un informāciju par ierīces atrašanās vietu."</string>
@@ -4392,12 +4387,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Pēc noklusējuma atspējotās izmaiņas"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Nav lietotņu"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Lietotņu saderības izmaiņas var pārveidot tikai atkļūdojamām lietotnēm. Instalējiet atkļūdojamu lietotni un mēģiniet vēlreiz."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Iestatīšana šajā tālrunī netiek atbalstīta."</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Iestatīšana šajā planšetdatorā netiek atbalstīta."</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Iestatīšana šajā ierīcē netiek atbalstīta."</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Pašreizējais lietotājs nevar mainīt iestatījumu."</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Atkarīgs no cita iestatījuma"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Iestatījums nav pieejams."</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Konts"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Ierīces nosaukums"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Pamatinformācija"</string>
@@ -4432,7 +4422,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Netika atrasts neviens tīkls."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Neizdevās atrast tīklus. Mēģiniet vēlreiz."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(aizliegts)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nav SIM kartes"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM karte"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nav SIM kartes"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Nav"</string>
@@ -4750,6 +4739,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Mainīt"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Ir izveidots savienojums"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Nav savienojuma"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobilo datu savienojums netiks veidots automātiski"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Vai izslēgt mobilos datus?"</string>
@@ -4904,14 +4897,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Nepareiza parole"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Lai sāktu klausīties, centrējiet tālāk norādīto kvadrātkodu."</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Kvadrātkoda formāts nav derīgs."</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Iebūvētas mobilās lietotnes"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Iebūvētas mobilās lietotnes"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Iebūvēto mobilo lietotņu pārredzamības informācija"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Ietver reklāmas"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Izstrādātāju informācija"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktinformācija"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Apraksts"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Konfidencialitātes politika"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategorija"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Iebūvēta mobilā lietotne"</string>
 </resources>
