--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC стекийн логийн түвшнийг нэмэгдүүлэх"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC нуршсан дэлгэрэнгүй байдлын нийлүүлэгчийн дебагийн лог"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Төхөөрөмж заасан нийлүүлэгчийн нэмэлт логийг алдааны мэдээнд багтаах бөгөөд энэ нь хувийн мэдээлэл агуулж байж магадгүй."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI-н шүүгээгүй снүүп лог"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Нарийвчилсан NFC-н пакетыг авах бөгөөд энэ нь хувийн мэдээлэл агуулж байж магадгүй."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Төхөөрөмжийг дахин эхлүүлэх үү?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Нарийвчилсан NFC лог нь зөвхөн хөгжүүлэлтийн зориулалттай. Нэмэлт NFC өгөгдлийг алдааны мэдээнд багтаасан бөгөөд энэ нь хувийн мэдээлэл агуулж байж магадгүй. Энэ тохиргоог өөрчлөхийн тулд төхөөрөмжөө дахин эхлүүлнэ үү."</string>
@@ -1464,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Утасны интернэт холболтыг Bluetooth-р хуваалцах"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet модем болгох"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Утасны интернэт холболтыг Ethernet-р хуваалцах"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Мобайл дата холболтоороо бусад төхөөрөмжид интернет холболт цацахын тулд сүлжээний цэг, модем болгохыг ашиглана уу. Апп ойролцоох төхөөрөмжид агуулга хуваалцахын тулд сүлжээний цэг үүсгэх боломжтой."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Wi-Fi эсвэл мобайл дата холболтоороо бусад төхөөрөмжид интернэт цацахын тулд сүлжээний цэг болон модем болгохыг ашиглана уу. Түүнчлэн, аппууд ойролцоох төхөөрөмжүүдтэй контент хуваалцахын тулд сүлжээний цэг үүсгэх боломжтой."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Тусламж"</string>
@@ -2693,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Дата ашиглалтыг хязгаарлаж байна"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Таны тохируулсан хязгаарт хүрмэгц таны таблет мобайл датаг унтраах болно.\n\nДата ашиглалтыг таны таблетаар хэмждэг тул таны оператор компани ашиглалтыг өөрөөр тооцож болзошгүй. Та хязгаарыг илүү багаар тогтооно уу."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Таны тохируулсан хязгаарт хүрмэгц таны утас мобайл датаг унтраах болно.\n\nДата ашиглалтыг таны утсаар хэмждэг тул таны оператор компани ашиглалтыг өөрөөр тооцож болзошгүй. Та хязгаарыг илүү багаар тогтооно уу."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Далд датаг хязгаарлах уу?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Хэрэв та арын мобайл датаг хязгаарласан бол таныг Wi-Fi-д холбогдох хүртэл зарим апп, үйлчилгээ ажиллахгүй."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Хэрэв та арын мобайл датаг хязгаарласан бол таныг Wi-Fi-д холбогдох хүртэл зарим апп, үйлчилгээ ажиллахгүй.\n\nЭнэ тохиргоо энэ таблетын бүх хэрэглэгчид нөлөөлнө."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Хэрэв та арын мобайл датаг хязгаарласан бол таныг Wi-Fi-д холбогдох хүртэл зарим апп, үйлчилгээ ажиллахгүй.\n\nЭнэ тохиргоо энэ утасны бүх хэрэглэгчид нөлөөлнө."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"анхааруулга"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"хязгаар"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Арилгасан апп-ууд"</string>
@@ -2938,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (зөвлөмж болгосон)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Мультимедиа мессеж"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Мобайл дата унтраалттай үед илгээх болон хүлээн авах"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Дуудлагын үеийн дата"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Энэ SIM-г зөвхөн дуудлагын үеэр мобайл датад ашиглахыг зөвшөөрөх"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Ажлын SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Апп &amp; контентэд хандах"</string>
     <string name="user_rename" msgid="8735940847878484249">"НЭР ӨӨРЧЛӨХ"</string>
@@ -2951,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi‑Fi болон Мобайл тохиргоог өөрчлөхийг зөвшөөрөх"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Bluetooth хослуулах болон тохиргоог өөрчлөхийг зөвшөөрөх"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Энэ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> өөр NFC төхөөрөмжид хүрсэн үед дата солилцохыг зөвшөөрөх"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Таблет өөр төхөөрөмжид хүрэх үед өгөгдөл солилцохыг зөвшөөрөх"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Утас өөр төхөөрөмжид хүрэх үед өгөгдөл солилцохыг зөвшөөрөх"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Байршил"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Өөрийн байршилын мэдээллийг апп-уудад ашиглуулна уу"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Буцах"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Дараагийн"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Зөөврийнх рүү сэлгэх"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Өөр аргаар форматлах"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM карт"</string>
@@ -3877,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Таны кредит олгогчоос блоклосон"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Эцэг эх шаардлагатай"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Үүнийг тохируулж эхлэхийн тулд утсыг эцэг эхдээ өгнө үү"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Дэлгэрэнгүй мэдээлэл авах бол IT админтайгаа холбогдоно уу"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Илүү дэлгэрэнгүй"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Тохиргоо, зөвшөөрөл, байгууллагын хандалт, сүлжээний үйл ажиллагаа болон төхөөрөмжийн байршлын мэдээлэл зэрэг таны ажлын профайлтай холбоотой апп, өгөгдлийг таны админ удирдаж, хянах боломжтой."</string>
@@ -4322,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Өгөгдмөл тохиргоогоор идэвхгүй болгосон өөрчлөлт"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Боломжтой апп алга"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Аппын тохирох өөрчлөлтийг зөвхөн дебаг хийх боломжтой аппуудад хийх боломжтой. Дебаг хийх боломжтой аппыг суулгаад, дахин оролдож үзнэ үү."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Энэ утсанд тохиргоог дэмждэггүй"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Энэ таблетад тохиргоог дэмждэггүй"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Энэ төхөөрөмжид тохиргоог дэмждэггүй"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Одоогийн хэрэглэгч тохиргоог өөрчлөх боломжгүй"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Өөр тохиргооноос шалтгаална"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Тохиргоо боломжгүй"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Бүртгэл"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Төхөөрөмжийн нэр"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Үндсэн мэдээлэл"</string>
@@ -4362,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Сүлжээ олдсонгүй."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Сүлжээ олдсонгүй. Дахин оролдоно уу."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(хориглосон)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM карт алга"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM алга"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Байхгүй"</string>
@@ -4679,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Өөрчлөх"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Холбогдсон"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Холболт алга"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мобайл дата автоматаар холбогдохгүй"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Мобайл датаг унтраах уу?"</string>
@@ -4833,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Нууц үг буруу байна"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Сонсож эхлэхийн тулд доорх QR кодыг голлуулаарай"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR код буруу форматтай байна"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мобайлын багцалсан аппууд"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мобайлын багцалсан аппууд"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Мобайлын багцалсан аппуудын ил тод байдлын мэдээлэл"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Зар агуулсан"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Хөгжүүлэгчийн мэдээлэл"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Холбоо барих мэдээлэл"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Тайлбар"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Нууцлалын бодлого"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Ангилал"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мобайлын багцалсан апп"</string>
 </resources>
