--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Øk loggføringsnivå for NFC-stabel"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Feilsøkingslogg med høyt detaljnivå for leverandører for NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Inkluder flere enhetsspesifikke leverandørlogger i feilrapporter. Disse kan inneholde privat informasjon."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Ufiltrert NCI-overføringslogg for NFC"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Fang opp detaljerte NFC-pakker. Disse kan inneholde privat informasjon."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Vil du starte enheten på nytt?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detaljert NFC-loggføring er bare beregnet på utviklingsformål. Det inkluderes ekstra NFC-data i feilrapporter. Dette kan omfatte privat informasjon. Hvis du vil endre denne innstillingen, må du starte enheten på nytt."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Prøv forskjellige stiler, bakgrunner med mer"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Skjermsparer"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"skjermsparer"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Utilgjengelig fordi sengetidsmodus er på"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Bruk skjermsparer"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Når enheten lades / er i dokken"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Når enheten lades"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Del telefonens internettilkobling via Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-internettdeling"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Del telefonens internettilkobling via Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Bruk wifi-sone og internettdeling for å gi andre enheter tilgang til internett via mobildataforbindelsen din. Apper kan også opprette en wifi-sone for å dele innhold med enheter i nærheten."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Bruk Wifi-soner og internettdeling for å gi andre enheter internettilgang via Wifi- eller mobildatatilkoblingen din. Du kan også bruke apper til å opprette Wifi-soner for å dele innhold med enheter i nærheten."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Hjelp"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Begrensning av databruk"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Nettbrettet slår av mobildata når det har nådd grensen du har angitt.\n\nSiden databruken måles av nettbrettet, og operatøren din kan beregne bruken annerledes, kan det være lurt å angi en konservativ grense."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Mobildata slås av når du har brukt mengden du har angitt som grense.\n\nSiden databruken måles av telefonen og operatøren din kan beregne bruken annerledes, kan det være lurt å angi en lav grense."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Vil du begrense bruken av bakgrunnsdata?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Hvis du begrenser mobildatabruk i bakgrunnen, er det enkelte apper og tjenester som ikke fungerer med mindre du er tilkoblet wifi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Hvis du begrenser mobildatabruk i bakgrunnen, er det enkelte apper og tjenester som ikke fungerer med mindre du er tilkoblet wifi.\n\nDenne innstillingen påvirker alle brukerne på dette nettbrettet."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Hvis du begrenser mobildatabruk i bakgrunnen, er det enkelte apper og tjenester som ikke fungerer med mindre du er tilkoblet wifi.\n\nDenne innstillingen påvirker alle brukerne på denne telefonen."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"advarsel"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"grense"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Fjernede apper"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (anbefales)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-meldinger"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Send og motta når mobildata er av"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data i løpet av samtaler"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Tillat at dette SIM-kortet brukes til mobildata, men bare i løpet av samtaler"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Jobb-SIM-kort"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"App- og innholdstilgang"</string>
     <string name="user_rename" msgid="8735940847878484249">"GI NYTT NAVN"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Tillat endring av Wifi- og mobilinnstillinger"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Tillat endring av Blutetooth-tilkoblinger og -innstillinger"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Tillat utveksling av data når <xliff:g id="DEVICE_NAME">%1$s</xliff:g> berører en annen NFC-enhet"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Tillat datautveksling når nettbrettet berører en annen enhet"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Tillat utveksling av data når telefonen berører en annen enhet"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Posisjon"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Lar apper bruke posisjonsinformasjon"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Tilbake"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Neste"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Bytt til bærbar"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formater på en annen måte"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-kort"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Endre innstillinger for hver app som sender varsler"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Apper som vises på enheten"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Denne appen støtter ikke utvidete innstillinger"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Flere innstillinger"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Flere innstillinger er tilgjengelige i denne appen"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Hjelpetjenester for VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Ingen av de installerte appene har bedt om å bli kjørt som hjelpetjeneste for VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Vil du tillate tjenestetilgang for VR for <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Blokkert av kredittleverandøren din"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Forelder kreves"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Gi telefonen til forelderen din for å starte konfigureringen av dette"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Hvis du trenger mer informasjon, bør du kontakte IT-administratoren din"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Mer informasjon"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratoren kan overvåke og administrere apper og data som er tilknyttet jobbprofilen din, inkludert innstillinger, tillatelser, bedriftstilgang, nettverksaktivitet og enhetens posisjonsinformasjon."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Endringer som er deaktivert som standard"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Ingen tilgj. apper"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Endringer av appkompatibilitet kan bare modifiseres for feilsøkbare apper. Installer en feilsøkbar app og prøv igjen."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Innstillingen støttes ikke på denne telefonen"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Innstillingen støttes ikke på dette nettbrettet"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Innstillingen støttes ikke på denne enheten"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Innstillingen kan ikke endres av den nåværende brukeren"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Er avhengig av en annen innstilling"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Innstillingen er utilgjengelig"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Konto"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Enhetsnavn"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Grunnleggende info"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Fant ingen nettverk."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Fant ingen nettverk. Prøv på nytt."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(forbudt)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM-kortet mangler"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM-kort"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Uten SIM-kort"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Ingen"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Endre"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Tilkoblet"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Ingen tilkobling"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobildata kobler ikke til automatisk"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Vil du slå av mobildata?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Feil passord"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"For å begynne å lytte, midtstill QR-koden nedenfor"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-koden er ikke i et gyldig format"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Apper som følger med mobilen"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Apper som følger med mobilen"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Åpenhetsinformasjon om apper som følger med mobilen"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Inneholder annonser"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Utviklerinformasjon"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktinformasjon"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Beskrivelse"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Personvernregler"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategori"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"App som følger med mobilen"</string>
 </resources>
