--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -823,7 +823,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Zwiększ poziom rejestrowania stosów NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Dziennik debugowania szczegółowości NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Dołączaj do raportów o błędach dodatkowe dane dostawcy dotyczące konkretnego urządzenia, które mogą zawierać informacje prywatne."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Dziennik snoop niefiltrowanych danych NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Zapisuj szczegółowe pakiety NFC, które mogą zawierać informacje prywatne."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Uruchomić urządzenie ponownie?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Szczegółowe logowanie NFC jest przeznaczone tylko dla programistów. Dodatkowe dane NFC są dołączane do raportów o błędach i mogą zawierać informacje prywatne. Uruchom urządzenie ponownie, aby zmienić to ustawienie."</string>
@@ -1213,8 +1214,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Wypróbuj różne style, tapety i inne elementy"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Wygaszacz ekranu"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"wygaszacz ekranu"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Niedostępne, ponieważ włączony jest tryb snu"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Używaj wygaszacza ekranu"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Podczas ładowania lub po zadokowaniu"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Podczas ładowania"</string>
@@ -1507,6 +1507,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Udostępniaj połączenie telefonu z internetem przez Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Tethering przez Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Udostępniaj połączenie telefonu z internetem przez Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Funkcje hotspotu i tetheringu pozwalają zapewnić połączenie z internetem innym urządzeniom z wykorzystaniem komórkowego połączenia do transmisji danych. Aplikacje mogą też utworzyć hotspot, by udostępniać treści urządzeniom w pobliżu."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Funkcje hotspotu i tetheringu pozwalają zapewnić połączenie z internetem innym urządzeniom za pomocą Wi-Fi lub komórkowego połączenia transmisji danych. Aplikacje mogą też utworzyć hotspot, by udostępniać treści urządzeniom w pobliżu."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Pomoc"</string>
@@ -2772,10 +2774,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Ograniczanie użycia danych"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Po osiągnięciu ustawionego przez Ciebie limitu tablet wyłączy mobilną transmisję danych.\n\nTablet może obliczać ilość przesłanych danych inaczej niż operator sieci komórkowej, więc pomyśl o ustawieniu niższego, bezpiecznego limitu."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Po osiągnięciu ustawionego przez Ciebie limitu telefon wyłączy mobilną transmisję danych.\n\nTelefon może obliczać ilość przesłanych danych inaczej niż operator sieci komórkowej, więc pomyśl o ustawieniu niższego, bezpiecznego limitu."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Ograniczyć dane w tle?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Jeśli ograniczysz mobilną transmisję danych w tle, niektóre aplikacje i usługi będą działać tylko przy połączeniu z Wi‑Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Jeśli ograniczysz mobilną transmisję danych w tle, niektóre aplikacje i usługi będą działać tylko przy połączeniu z Wi‑Fi.\n\nTo ustawienie obowiązuje u wszystkich użytkowników tego tabletu."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Jeśli ograniczysz mobilną transmisję danych w tle, niektóre aplikacje i usługi będą działać tylko przy połączeniu z Wi‑Fi.\n\nTo ustawienie obowiązuje u wszystkich użytkowników tego telefonu."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"Alert:"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"limit"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Usunięte aplikacje"</string>
@@ -3021,8 +3019,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (zalecana)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-y"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Wysyłaj i odbieraj MMS-y, gdy mobilna transmisja danych jest wyłączona"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Transmisja danych podczas rozmów"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Zezwól na używanie tej karty SIM do mobilnej transmisji danych tylko podczas rozmów"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Karta SIM (praca)"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Dostęp do aplikacji i treści"</string>
     <string name="user_rename" msgid="8735940847878484249">"ZMIEŃ NAZWĘ"</string>
@@ -3034,15 +3034,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Zezwalaj na modyfikowanie ustawień sieci Wi‑Fi i komórkowej"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Zezwalaj na modyfikowanie parowań i ustawień Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"Komunikacja NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Zezwalaj na wymianę danych po zbliżeniu urządzenia <xliff:g id="DEVICE_NAME">%1$s</xliff:g> do innego z funkcją komunikacji NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Zezwalaj na wymianę danych, gdy tablet dotyka innego urządzenia"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Zezwalaj na wymianę danych, gdy telefon dotyka innego urządzenia"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Lokalizacja"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Zezwalaj aplikacji na korzystanie z informacji o lokalizacji"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Wróć"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Dalej"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Przełącz na przenośną"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Sformatuj inaczej"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Karty SIM"</string>
@@ -3500,10 +3495,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Zmień ustawienia poszczególnych aplikacji, które wysyłają powiadomienia"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Aplikacje pokazywane na urządzeniu"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Ta aplikacja nie obsługuje ustawień zaawansowanych"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Więcej ustawień"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Więcej ustawień znajdziesz w tej aplikacji"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Usługi pomocnicze rzeczywistości wirtualnej"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Żadne zainstalowane aplikacje nie prosiły o uruchomienie w trybie usług pomocniczych rzeczywistości wirtualnej."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Zezwalasz usłudze <xliff:g id="SERVICE">%1$s</xliff:g> na dostęp do usługi rzeczywistości wirtualnej?"</string>
@@ -3992,6 +3985,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Funkcja zablokowana przez operatora kredytu"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Potrzebny jest rodzic"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Przekaż telefon rodzicowi, by rozpoczął konfigurację"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Aby uzyskać więcej informacji, skontaktuj się z administratorem IT"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Więcej szczegółów"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administrator może monitorować aplikacje i dane powiązane z Twoim profilem służbowym (w tym ustawienia, uprawnienia, firmowe uprawnienia dostępu, aktywność w sieci i informacje o lokalizacji urządzenia) oraz nimi zarządzać."</string>
@@ -4459,12 +4454,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Zmiany domyślnie zablokowanych"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Brak aplikacji"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Kompatybilność aplikacji można zmieniać tylko w aplikacjach z możliwością debugowania. Zainstaluj aplikację z możliwością debugowania i spróbuj ponownie."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Ustawienie nieobsługiwane przez ten telefon"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Ustawienie nieobsługiwane przez ten tablet"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Ustawienie nieobsługiwane przez to urządzenie"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Tego ustawienia nie może zmienić bieżący użytkownik"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Zależy od innego ustawienia"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Ustawienie niedostępne"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Konto"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nazwa urządzenia"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Podstawowe informacje"</string>
@@ -4499,7 +4489,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nie znaleziono sieci."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Nie udało się znaleźć sieci. Spróbuj ponownie."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(dostęp zabroniony)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Brak karty SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"Karta SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Brak karty SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Brak"</string>
@@ -4818,6 +4807,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Zmień"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Połączono"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Brak połączenia"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Transmisja danych nie połączy się automatycznie"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Wyłączyć mobilną transmisję danych?"</string>
@@ -4972,14 +4965,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Nieprawidłowe hasło"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Aby odsłuchać, wyśrodkuj kod QR poniżej"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Nieprawidłowy format kodu QR"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Aplikacje mobilne łączone"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Aplikacje mobilne łączone"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informacje o przejrzystości aplikacji mobilnych łączonych"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Zawiera reklamy"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informacje o deweloperze"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Informacje kontaktowe"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Opis"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Polityka prywatności"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategoria"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Aplikacja mobilna łączona"</string>
 </resources>
