--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Aumente o nível de registo de pilha NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Registo verboso de depuração de fornecedores de NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Inclua registos adicionais de fornecedores específicos de dispositivos em relatórios de erros, que podem conter informações privadas."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Registo de monitorização não filtrado NCI de NFC"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Capte pacotes de NFC detalhados, que podem conter informações privadas."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Reiniciar o dispositivo?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"O registo detalhado de NFC destina-se apenas a fins de programação. Os dados de NFC são incluídos em relatórios de erros, que podem conter informações privadas. Reinicie o seu dispositivo para alterar esta definição."</string>
@@ -1464,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Partilhar a ligação à Internet do telemóvel por Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ligação Ethernet via telemóvel"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Partilhar a ligação à Internet do telemóvel através de Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Utilize uma zona Wi-Fi e uma ligação via telemóvel para disponibilizar Internet a outros dispositivos através da sua ligação móvel de dados. As aplicações podem igualmente criar uma zona Wi-Fi para partilhar conteúdo com dispositivos próximos."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Use uma zona Wi-Fi e uma ligação (à Internet) via telemóvel para disponibilizar Internet a outros dispositivos através de Wi-Fi ou da sua ligação móvel de dados. As apps também podem criar uma zona Wi-Fi para partilhar conteúdo com dispositivos próximos."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Ajuda"</string>
@@ -2693,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Limitar utilização de dados"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"O tablet desativa os dados móveis quando alcança o limite que definir.\n\nUma vez que a utilização de dados é medida pelo tablet e o seu operador pode calcular a utilização de forma diferente, considere definir um limite de precaução."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"O telemóvel desativa os dados móveis quando alcança o limite definido.\n\nUma vez que a utilização de dados é medida pelo telemóvel e o seu operador pode calcular a utilização de forma diferente, considere definir um limite de precaução."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Restringir dados em segundo plano?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Se restringir os dados móveis de segundo plano, algumas aplicações e serviços não funcionarão, exceto se estiver ligado a uma rede Wi-Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Se restringir os dados móveis de segundo plano, algumas aplicações e serviços não funcionarão, exceto se estiver ligado a uma rede Wi-Fi.\n\nEsta definição afeta todos os utilizadores neste tablet."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Se restringir os dados móveis de segundo plano, algumas aplicações e serviços não funcionarão, exceto se estiver ligado a uma rede Wi-Fi.\n\nEsta definição afeta todos os utilizadores neste telemóvel."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"aviso"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"limite"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Apps removidas"</string>
@@ -2938,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (recomendado)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mensagens MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Enviar e receber quando os dados móveis estão desativados"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Dados durante chamadas"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Permitir a utilização deste SIM para dados móveis apenas durante as chamadas"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM de trabalho"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Acesso às aplicações e ao conteúdo"</string>
     <string name="user_rename" msgid="8735940847878484249">"MUDAR NOME"</string>
@@ -2951,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Permitir a modificação de definições de Wi-Fi e de Rede de Telemóvel"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Permitir a modificação de sincronizações e definições de Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Permitir troca de dados quando este <xliff:g id="DEVICE_NAME">%1$s</xliff:g> toca noutro dispositivo NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Permitir a troca de dados quando o tablet toca noutro dispositivo"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Permitir a troca de dados quando o telemóvel toca noutro dispositivo"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Localização"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Permitir que as apps utilizem as informações de localização"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Anterior"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Seguinte"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Mudar para portátil"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatar de outra forma"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Cartões SIM"</string>
@@ -3877,6 +3873,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Bloqueado pelo seu fornecedor de crédito"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"São necessários os pais"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Entrega o telemóvel aos teus pais para começarem a configurar esta definição"</string>
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Entrega o telemóvel a um adulto responsável para autorizar a alteração desta definição."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Para mais informações, contacte a pessoa com a função de administração de TI"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Mais detalhes"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"O gestor pode monitorizar e gerir as aplicações e os dados associados ao seu perfil de trabalho, incluindo as definições, as autorizações, o acesso empresarial, a atividade da rede e as informações de localização do dispositivo."</string>
@@ -4322,12 +4319,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Alterações desativadas predefinidas"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Sem apps disponíveis"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"As alterações de compatibilidade das apps apenas podem ser modificadas para apps depuráveis. Instale uma app depurável e tente novamente."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"A definição não é suportada neste telemóvel."</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"A definição não é suportada neste tablet."</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"A definição não é suportada neste dispositivo."</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"O utilizador atual não pode alterar a definição."</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Esta definição depende de outra."</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Definição indisponível."</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Conta"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Nome do dispositivo"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Informações básicas"</string>
@@ -4362,7 +4354,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Nenhuma rede encontrada."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Não foi possível encontrar qualquer rede. Tente novamente."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(proibida)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Nenhum cartão SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Nenhum cartão SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Nenhum"</string>
@@ -4679,6 +4670,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Alterar"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Ligado"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Sem ligação"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Sem ligação automática com dados móveis"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Desativar os dados móveis?"</string>
@@ -4833,14 +4828,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Palavra-passe incorreta"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Para começar a ouvir, centre o código QR abaixo"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"O código QR não é um formato válido"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Apps para dispositivos móveis agrupadas"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Apps para dispositivos móveis agrupadas"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informações de transparência de apps para dispositivos móveis agrupadas"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Contém anúncios"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informações dos programadores"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Informações de contacto"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Descrição"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Política de privacidade"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Categoria"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"App para dispositivos móveis agrupada"</string>
 </resources>
