--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC අට්ටි ලොග මට්ටම වැඩි කරන්න"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC වාචික විකුණුම්කරු නිදොස් කිරීමේ ලොගය"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"පෞද්ගලික තොරතුරු අඩංගු විය හැකි, දෝෂ වාර්තා තුළ අතිරේක උපාංග-විශේෂිත විකුණුම් ලොග ඇතුළත් කරන්න."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI පෙරීම නොකළ ස්නූප් ලොගය"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"පෞද්ගලික තොරතුරු අඩංගු විය හැකි, විස්තර NFC පැකට් ග්‍රහණය කරන්න."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"උපාංගය යළි අරඹන්න ද?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"විස්තර NFC ලොග් කිරීම සංවර්ධන අරමුණු සඳහා පමණක් අදහස් කරයි. පෞද්ගලික තොරතුරු අඩංගු විය හැකි, දෝෂ වාර්තාවල අතිරේක NFC දත්ත ඇතුළත් වේ. මෙම සැකසීම වෙනස් කිරීමට ඔබේ උපාංගය යළි අරඹන්න."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"වෙනත් මෝස්තර, වෝල්පේපර, සහ තවත් ඒවා උත්සාහ කරන්න"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"තිර සුරැකුම"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"තිර සුරැකුම"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"නිදන කාල ප්‍රකාරය ක්‍රියාත්මක නිසා ලබා ගත නොහැක"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"තිර සුරැකුම භාවිත කරන්න"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ආරෝපණය හෝ ඩොක් කර ඇති විට"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ආරෝපණය වන අතරතුර"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"බ්ලූටූත් හරහා දුරකථනයේ අන්තර්ජාල සබැඳුම බෙදා ගන්න"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ඊතර්නෙට් ටෙදරින්"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ඊතර්නෙට් හරහා දුරකථනයේ අන්තර්ජාල සබැඳුම බෙදා ගන්න"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"ඔබගේ ජංගම දත්ත සබැඳුම හරහා වෙනත් උපාංග සඳහා අන්තර්ජාලය සැපයීමට හොට්ස්පොට් හා ටෙදරින් භාවිත කරන්න. යෙදුම් අවට උපාංග සමග අන්තර්ගතය බෙදා ගැනීමට හොට්ස්පොට් එකක්ද සෑදිය හැකිය."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"ඔබේ Wi-Fi හෝ ජංගම දත්ත සම්බන්ධතාව හරහා අනෙක් උපාංගවලට අන්තර්ජාලය ලබා දීමට හොට්ස්පොට් සහ ටෙදරින් භාවිත කරන්න. අවට උපාංග සමඟ අන්තර්ගත බෙදා ගැනීමට හොට්ස්පොට් එකක් තැනීමට ද යෙදුම්වලට හැකිය."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"උදවු"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"දත්ත භාවිතය සීමා කරමින්"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"ජංගම දත්ත ඔබ සැකසූ සීමාවට ළඟා වූ විට ඔබගේ ටැබ්ලටය එය ක්‍රියාවිරහිත කරයි.\n\nඔබගේ දුරකථනයෙන් දත්ත භාවිතය ගණනය කරණු ලැබේ සහ භාවිතය වෙනස් වීම සඳහා ඔබගේ වාහක ගිණුම, මධ්‍යස්ථ සීමාවක් සැකසීමට සලකන්න."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"ජංගම දත්ත ඔබ සැකසූ සීමාවට ළඟා වූ විට ඔබගේ දුරකථනය එය ක්‍රියාවිරහිත කරයි.\n\nඔබගේ දුරකථනයෙන් දත්ත භාවිතය ගණනය කරණු ලැබේ සහ භාවිතය වෙනස් වීම සඳහා ඔබගේ වාහක ගිණුම, මධ්‍යස්ථ සීමාවක් සැකසීමට සලකන්න."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"පසුබිම් දත්ත සිමා කරනවද?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"ඔබ පසුබිම් ජංගම දත්ත සිමා කළහොත්, ඔබ Wi-Fi වෙත සම්බන්ධ වී නොමැති නම් සමහර යෙදුම් සහ සේවා ක්‍රියා නොකරනු ඇත."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"ඔබ පසුබිම් ජංගම දත්ත සීමා කරයි නම්, සමහර යෙදුම් සහ සේවා ඔබ Wi-Fi වෙත සම්බන්ධ වී ඇතිනම් මිස ක්‍රියා නොකරනු ඇත.\n\nමෙම සැකසීම ටැබ්ලට පරිගණකයේ සියලු පරිශීලකයින්ට බලපානු ඇත."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"ඔබ පසුබිම් ජංගම දත්ත සීමා කරයි නම්, සමහර යෙදුම් සහ සේවා ඔබ Wi-Fi වෙත සම්බන්ධ වී ඇතිනම් මිස ක්‍රියා නොකරනු ඇත.\n\nමෙම සැකසීම දුරකථනයේ සියලු පරිශීලකයින්ට බලපානු ඇත."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"අනතුරු ඇඟවීම"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"සීමාව"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"ඉවත් කළ යෙදුම්"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (නිර්දෙශිත)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS පණිවිඩ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ජංගම දත්ත ක්‍රියා විරහිත විට යවන්න සහ ලබන්න"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"ඇමතුම් සමයේ දත්ත"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"ජංගම දත්ත පමණක් වන ඇමතුම් සඳහා මෙම SIM භාවිතයට ඉඩ දෙන්න"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"වැඩ කරන SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"යෙදුම සහ අන්තර්ගත ප්‍රවේශය"</string>
     <string name="user_rename" msgid="8735940847878484249">"නැවත නම් කරන්න"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi-Fi සහ ජංගම සැකසීම් වෙනස් කිරීමට ඉඩ දෙන්න"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"බ්ලූටූත්"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"බ්ලූටූත් යුගල කිරීම් සහ සැකසීම් වල වෙනස් කිරීම් වෙත ඉඩ දෙන්න"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"මෙම <xliff:g id="DEVICE_NAME">%1$s</xliff:g> වෙනත් NFC උපාංගයක් ස්පර්ශ කිරීමෙන් දත්ත මාරු කිරීමට ඉඩ දෙන්න"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"ටැබ්ලටය වෙනත් උපාංගයක් ස්පර්ශ කළ විට දත්ත හුවමාරුවට අවසර දෙන්න"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"දුරකථනය වෙනත් උපාංගයක් ස්පර්ශ කළ විට දත්ත හුවමාරුවට අවසර දෙන්න"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"ස්ථානය"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ඔබගේ යෙදුම් වලට ස්ථාන තොරතුරු භාවිතා කිරීමට අවස්තාව දෙන්න"</string>
     <string name="wizard_back" msgid="8257697435061870191">"ආපසු"</string>
     <string name="wizard_next" msgid="3884832431439072471">"මීලඟ"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"ගෙන යා හැකි වෙත මාරු වන්න"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"වෙන ක්‍රමයට ෆෝමැට් කරන්න"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM කාඩ් පත්"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"දැනුම්දීම් එවන එක් එක් යෙදුම සඳහා සැකසීම් වෙනස් කරන්න"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"උපාංගයෙහි පෙන්වන යෙදුම්"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"මෙම යෙදුම වැඩිදියුණු කළ සැකසීම් සඳහා සහාය නොදක්වයි"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"තව සැකසීම්"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"මෙම යෙදුම තුළ තවත් සැකසීම් තිබේ"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR උදවුකරු සේවා"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ස්ථාපිත යෙදුම් කිසිවක් VR උදවුකරු සේවා ලෙස ධාවනය කිරීමට ඉල්ලා නැත."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> සඳහා VR සේවා ප්‍රවේශය ඉඩ දෙන්නද?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ඔබගේ ණය සැපයුම්කරු විසින් අවහිර කරන ලදි."</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"මාපියකු අවශ්‍යයි"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"මෙය පිහිටුවීම ආරම්භ කිරීම සඳහා දුරකථනය ඔබගේ මාපියන්ගෙන් කෙනෙකුට භාර දෙන්න"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"වැඩි විස්තර සඳහා, ඔබේ IT පරිපාලක අමතන්න"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"වැඩි විස්තර"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"සැකසීම්, අවසර, සංස්ථාපිත ප්‍රවේශය, ජාල ක්‍රියාකාරකම, සහ උපාංගයේ ස්ථාන තොරතුරු ඇතුළුව, ඔබේ කාර්යාල පැතිකඩ සමඟ සම්බන්ධිත යෙදුම් සහ දත්ත නිරීක්ෂණය කිරීමට සහ කළමනාකරණය කිරීමට ඔබේ පරිපාලකට හැකිය."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"පෙරනිමි අබල කළ වෙනස් කිරීම්"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"ලද හැකි යෙදුම් නැත"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"යෙදුම් ගැළපෙන බවේ වෙනස් කිරීම් නිදොස් කළ හැකි යෙදුම් සඳහා පමණක් වෙනස් කළ හැකිය. නිදොස් කළ හැකි යෙදුමක් ස්ථාපනය කර නැවත උත්සාහ කරන්න."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"මෙම දුරකථනය සැකසීමට සහාය නොදක්වයි"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"මෙම ටැබ්ලට් උපාංගය සැකසීමට සහාය නොදක්වයි."</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"මෙම උපාංගය සැකසීමට සහාය නොදක්වයි"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"වත්මන් පරිශීලකයාට සැකසීම් වෙනස් කළ නොහැකිය"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"වෙනත් සැකසීමක් මත රඳා පවතී"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"සැකසීම ලබා ගත නොහැකිය"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"ගිණුම"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"උපාංගයේ නම"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"මූලික තතු"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"ජාලයක් හමු නොවීය."</string>
     <string name="network_query_error" msgid="6406348372070035274">"ජාල සොයා ගත නොහැකි විය. නැවත උත්සාහ කරන්න."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(තහනම්)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM කාඩ්පතක් නැත"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM නැත"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"කිසිවක් නැත"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"වෙනස් කරන්න"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"සම්බන්ධයි"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"සම්බන්ධතාවයක් නැත"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ජංගම දත්ත ස්වංක්‍රියව සම්බන්ධ නොවනු ඇත"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"ජංගම දත්ත ක්‍රියාවිරහිත කරන්නද?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"වැරදි මුරපදයකි"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"සවන් දීම ආරම්භ කිරීමට, පහත QR කේතය මධ්‍යගත කරන්න"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR කේතය වලංගු ආකෘතියක් නොවේ"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ජංගම පොදි යෙදුම්"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ජංගම පොදි යෙදුම්"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ජංගම පොදි යෙදුම් පාරදෘෂ්‍යතාවයේ තතු"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"වෙළඳ දැන්වීම් අඩංගුයි"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"සංවර්ධක තොරතුරු"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"සම්බන්ධතා තොරතුරු"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"විස්තරය"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"රහස්‍යතා ප්‍රතිපත්තිය"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ප්‍රවර්ගය"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ජංගම පොදි යෙදුම"</string>
 </resources>
