--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -806,7 +806,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Повећајте ниво евиденције за NFC групу"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC опширна евиденција продавца о отклањању грешака"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Уврштава додатне посебне евиденције продавца за уређаје у извештаје о грешкама, који могу да садрже приватне податке."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI нефилтрирана snoop евиденција"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Снима NFC пакете са детаљима, који могу да садрже приватне податке."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Желите да рестартујете уређај?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFC евидентирање детаља је намењено само у сврхе програмирања. Додатни NFC подаци уврштени су у извештаје о грешкама, који могу да садрже приватне податке. Рестартујте уређај да бисте променили ово подешавање."</string>
@@ -1193,8 +1194,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Пробајте другачије стилове, позадине и још тога"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Чувар екрана"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"чувар екрана"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Недоступно је јер је ноћни режим укључен"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Користи чувар екрана"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Током пуњења или на базној станици"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Током пуњења"</string>
@@ -1486,6 +1486,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Дељење интернет везе телефона преко Bluetooth-а"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Привезивање етернета"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Дељење интернет везе телефона преко етернета"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Користите хотспот и привезивање да бисте обезбедили интернет другим уређајима помоћу везе за мобилне податке. Апликације могу да праве хотспотове и за дељење садржаја са уређајима у близини."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Користите хотспот и привезивање да бисте омогућили интернет на другим уређајима помоћу WiFi везе или везе за пренос података преко мобилног оператера. Апликације могу и да праве хотспотове за дељење садржаја са уређајима у близини."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Помоћ"</string>
@@ -2733,10 +2735,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Ограничавање потрошње података"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Таблет ће искључити мобилне податке чим достигне ограничење које сте подесили.\n\nПошто потрошњу података мери таблет, а мобилни оператер може другачије да рачуна потрошњу, размислите о томе да подесите ниже ограничење."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Телефон ће искључити мобилне податке чим достигне ограничење које сте подесили.\n\nПошто потрошњу података мери телефон, а мобилни оператер може другачије да рачуна потрошњу, размислите о томе да подесите ниже ограничење."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Желите ли да ограничите позадинске податке?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ако ограничите мобилне позадинске податке, неке апликације и услуге неће функционисати ако нисте повезани са WiFi-ем."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ако ограничите мобилне позадинске податке, неке апликације и услуге неће функционисати ако нисте повезани са WiFi-ем.\n\nОво подешавање утиче на све кориснике на овом таблету."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ако ограничите мобилне позадинске податке, неке апликације и услуге неће функционисати ако нисте повезани са WiFi-ем.\n\nОво подешавање утиче на све кориснике на овом телефону."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"упоз."</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"огран."</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Уклоњене апликације"</string>
@@ -2980,8 +2978,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (препоручено)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS поруке"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Шаљите и примајте када су мобилни подаци искључени"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Подаци током позива"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Дозволи да се ова SIM картица користи само за мобилне податке током позива"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM картица за посао"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Приступ апликацијама и садржају"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПРЕИМЕНУЈ"</string>
@@ -2993,15 +2993,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Дозволите измену Wi‑Fi подешавања и подешавања за мобилне уређаје"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Дозволите измене Bluetooth упаривања и подешавања"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Омогућава размену података када овај <xliff:g id="DEVICE_NAME">%1$s</xliff:g> уређај додирне други NFC уређај"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Дозволите размену података када таблет додирне други уређај"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Дозволите размену података када телефон додирне други уређај"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Локација"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Дозволите да апликације користе информације о локацији"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Назад"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Даље"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Пређи на преносив уређај"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Форматирај на други начин"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM картице"</string>
@@ -3456,10 +3451,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Промените подешавања за сваку апликацију која шаље обавештења"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Апликације које се приказују на уређају"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Ова апликација не подржава побољшана подешавања"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Још подешавања"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Доступно је још подешавања у апликацији"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Услуге помагача за виртуелну реалност"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Ниједна инсталирана апликација није захтевала да се покрене као услуга помагача за виртуелну реалност."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Желите ли да дозволите приступ услузи виртуелне реалности за <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3936,6 +3929,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Блокира добављач кредита"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Потребан је родитељ"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Дај телефон родитељу за почетак подешавања"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Обратите се ИТ администратору за више информација"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Још детаља"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администратор може да надгледа апликације и податке повезане са пословним профилом, укључујући подешавања, дозволе, корпоративни приступ, активности на мрежи и информације о локацији уређаја, као и да управља њима."</string>
@@ -4392,12 +4387,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Подразумеване онемогућене промене"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Нема апликација"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Промене компатибилности апликација могу да се измене само за апликације са отклоњивим грешкама. Инсталирајте апликацију са отклоњивим грешкама и пробајте поново."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Подешавање није подржано на овом телефону"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Подешавање није подржано на овом таблету"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Подешавање није подржано на овом уређају"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Актуелни корисник не може да промени подешавање"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Зависи од другог подешавања"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Подешавање је недоступно"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Налог"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Назив уређаја"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Основне информације"</string>
@@ -4432,7 +4422,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Није пронађена ниједна мрежа."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Нисмо успели да пронађемо мреже. Пробајте поново."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(забрањено)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Нема SIM картице"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Нема SIM картице"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Нема"</string>
@@ -4750,6 +4739,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Промени"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Повезано"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Веза није успостављена"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Не успева повезивање преко мобилних података"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Желите да онемогућите мобилне податке?"</string>
@@ -4904,14 +4897,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Погрешна лозинка"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Да бисте почели да слушате, центрирајте QR кôд испод"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR кôд није у важећем формату"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мобилне апликације у пакету"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мобилне апликације у пакету"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Информације о транспарентности за мобилне апликације у пакету"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Садржи огласе"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Информације о програмерима"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Контакт информације"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Опис"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Политика приватности"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категорија"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мобилна апликација у пакету"</string>
 </resources>
