--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Öka loggningsnivå för NFC-stack"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Verbose-logg för NFC för leverantörens felsökning"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Ta med ytterligare enhetsspecifika leverantörsloggar i felrapporterna, vilka kan innehålla privata uppgifter."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Ofiltrerad NFC NCI-snoop logg"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Samla detaljerade NFC-paket, vilka kan innehålla privata uppgifter."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Vill du starta om enheten?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detaljerad NFC-loggning är endast avsedd för utvecklingssyfte. Ytterligare NFC-data ingår i felrapporterna, vilka kan innehålla privata uppgifter. Starta om enheten för att ändra den här inställningen."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Testa olika format, bakgrunder med mera"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Skärmsläckare"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"skärmsläckare"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Inte tillgängligt eftersom läggdagsläget är på"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Använd skärmsläckare"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Vid laddning eller dockning"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Vid laddning"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Dela telefonens internetanslutning via Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-internetdelning"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Dela telefonens internetanslutning via Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Med hjälp av surfzoner och internetdelning kan andra enheter anslutas till internet via mobildataanslutningen. Surfzoner kan också skapas i appar för att dela innehåll med enheter i närheten."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Med hjälp av surfzoner och internetdelning kan andra enheter anslutas till internet via den här enhetens wifi- eller mobildataanslutning. Surfzoner kan även skapas i appar för att dela innehåll med enheter i närheten."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Hjälp"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Begränsa dataanvändningen"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"När mobildatan når den gräns du har angett inaktiveras den av surfplattan.\n\nVi föreslår att du anger en något lägre gräns eftersom dataanvändningen mäts med din surfplatta och din leverantör kan mäta användningen på ett annat sätt."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"När mobildatan når den gräns du har angett inaktiveras den av telefonen.\n\nVi föreslår att du anger en något lägre gräns eftersom dataanvändningen mäts med din telefon och din leverantör kan mäta användningen på ett annat sätt."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Vill du begränsa bakgrundsdata?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Om du begränsar mobildatan i bakgrunden fungerar vissa appar och tjänster endast när du är ansluten till ett wifi-nätverk."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Om du begränsar mobildatan i bakgrunden fungerar vissa appar och tjänster endast när du är ansluten till ett wifi-nätverk.\n\nAlla användare på den här surfplattan påverkas av inställningen."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Om du begränsar mobildatan i bakgrunden fungerar vissa appar och tjänster endast när du är ansluten till ett wifi-nätverk.\n\nAlla användare på den här mobilen påverkas av inställningen."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"varning"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"gräns"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Borttagna appar"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (rekommenderas)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mms"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Skicka och ta emot när mobildata är inaktiverat"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Mobildata under samtal"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Tillåt att det här SIM-kortet används för mobildata endast under samtal"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Jobb-SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Åtkomst till appar och innehåll"</string>
     <string name="user_rename" msgid="8735940847878484249">"BYT NAMN"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Tillåt ändring av inställningar för wifi-och mobilt"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Tillåt ändring av Bluetooth-kopplingar och -inställningar"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Tillåt datautbyte när denna <xliff:g id="DEVICE_NAME">%1$s</xliff:g> rör vid en annan NFC-enhet"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Tillåt datautbyte när surfplattan vidrör en annan enhet"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Tillåt datautbyte när mobilen vidrör en annan enhet"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Plats"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Tillåt att appar använder din platsinformation"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Föregående"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Nästa"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Byt till bärbart"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatera på annat sätt"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-kort"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Ändra inställningarna för appar som skickar aviseringar"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Appar som visas på enheten"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Den här appen har inte stöd för avancerade inställningar"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Fler inställningar"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Fler inställningar är tillgängliga i appen"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Hjälptjänster för VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Inga installerade appar har begärt att få köras som hjälptjänster för VR."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Vill du tillåta att tjänsten för VR får tillgång till <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Blockerad av långivaren"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Förälder behövs"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Ge telefonen till en förälder som kan börja konfigurera detta"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Kontakta IT-administratören för mer information"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Mer information"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratören kan övervaka och hantera appar och data som är kopplade till den här jobbprofilen, bland annat inställningar, behörigheter, företagsåtkomst, nätverksaktivitet och enhetens platsuppgifter."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Ändringar som är inaktiverade som standard"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Det finns inga appar"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Kompabilitetsändringar för appar kan endast modifieras för felsökningsbara appar. Installera en felsökningsbar app och försök igen."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Inställningen stöds inte på den här mobilen"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Inställningen stöds inte på den här surfplattan"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Inställningen stöds inte på den här enheten"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Inställningen kan inte ändras av den nuvarande användaren"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Beroende av en annan inställning"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Inställningen är inte tillgänglig"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Konto"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Enhetens namn"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Basinformation"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Inga nätverk hittades."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Det gick inte att hitta nätverk. Försök igen."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(förbjudet)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Inget SIM-kort"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Inget SIM-kort"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Inget"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Ändra"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Ansluten"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Ingen anslutning"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Du ansluts inte till mobildata automatiskt"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Vill du inaktivera mobildata?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Fel lösenord"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Centrera QR-koden nedan om du vill börja lyssna"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-kodens format är ogiltigt"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Appar som ingår med telefonen"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Appar som ingår med telefonen"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Insynsinformation om appar som ingår med telefonen"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Innehåller annonser"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Utvecklarinformation"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktuppgifter"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Beskrivning"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Integritetspolicy"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategori"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"App som ingår med telefonen"</string>
 </resources>
