--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Ongeza kiwango cha kuweka kumbukumbu ya rafu za NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Kumbukumbu ya kina ya utatuzi ya mtoa huduma"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Jumuisha kumbukumbu za ziada za mtoa huduma mahususi kwa kifaa katika ripoti za hitilafu ambazo huenda zikawa na taarifa ya faragha."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Kumbukumbu dukizi isiyochujwa ya NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Nasa vifurushi vya maelezo vya NFC ambavyo huenda vikawa na taarifa ya faragha."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Ungependa kuzima kisha uwashe kifaa?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Uwekaji maelezo ya kumbukumbu ya NFC ni kwa madhumuni ya usanidi pekee. Vilevile data ya NFC inajumuishwa katika ripoti za hitilafu ambazo huenda zikawa na taarifa ya faragha. Zima kisha uwashe kifaa chako ili ubadili mipangilio hii."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Jaribu miundo, mandhari tofauti na zaidi"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Taswira ya skrini"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"taswira ya skrini"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Haipatikani kwa sababu umewasha hali ya wakati umelala"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Tumia taswira ya skrini"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Wakati imeunganishwa na kifaa kingine au inapochaji"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Inapochaji"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Shiriki muunganisho wa intaneti ya simu kupitia Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Sambaza mtandao kwa Ethaneti"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Shiriki muunganisho wa intaneti ya simu kupitia Ethaneti"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Tumia mtandao pepe na kipengele cha kusambaza mtandao ili ushiriki intaneti na vifaa vingine kupitia muunganisho wa data wa simu za mkononi. Programu pia zinaweza kuunda mtandao pepe ili kushiriki maudhui na vifaa vilivyo karibu."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Tumia mtandaopepe na huduma ya kusambaza mtandao ili uvisambazie vifaa vingine intaneti kupitia muunganisho wa data wa simu au Wi-Fi. Programu pia zinaweza kuunda mtandaopepe ili kushiriki maudhui na vifaa vilivyo karibu."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Usaidizi"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Kupunguza matumizi ya data"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Kompyuta kibao yako itazima data ya mtandao wa simu pindi itakapofikia kikomo cha matumizi ulichoweka.\n\nKwa kuwa kompyuta kibao yako ndiyo huwa inapima matumizi ya data, na kampuni inayokupa huduma za mtandao huenda ikahesabu matumizi kwa njia tofauti, unashauriwa kuweka kikomo cha wastani."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Simu yako itazima data ya mtandao wa simu pindi itakapofikia kikomo cha matumizi ya data ulichoweka. \n\nKwa kuwa simu yako ndiyo huwa inapima matumizi ya data, na kampuni inayokupa huduma za mtandao huenda ikahesabu matumizi kwa njia tofauti, unashauriwa kuweka kikomo cha wastani."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Zuia data ya mandhari nyuma?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Ukidhibiti matumizi ya chini chini ya data ya mitandao ya simu, baadhi ya programu na huduma hazitafanya kazi mpaka uunganishe kwenye Wi-Fi tena."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Ukidhibiti matumizi ya chini chini ya data ya mtandao wa simu, baadhi ya programu na huduma hazitafanya kazi mpaka uunganishe kwenye Wi-Fi.\n\nMipangilio hii itaathiri watumiaji wote wa kompyuta kibao hii."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Ukidhibiti matumizi ya chini chini ya data ya mitandao ya simu, baadhi ya programu na huduma hazitafanya kazi mpaka uunganishe kwenye Wi-Fi.\n\nMipangilio hii itaathiri watumiaji wote wa simu hii."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"Onyo la "</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"Upeo "</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Programu zilizoondolewa"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (inapendekezwa)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Ujumbe wa MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Kutuma na kupokea wakati data ya mtandao wa simu imezimwa"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Data wakati wa mazungumzo ya simu"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Ruhusu SIM hii itumike kwa ajili ya data ya mtandao wa simu wakati tu kuna mazungumzo ya simu"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM ya Kazi"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Ufikiaji wa programu na maudhui"</string>
     <string name="user_rename" msgid="8735940847878484249">"BADILISHA JINA"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Ruhusu marekebisho ya mipangilio ya Wi‑Fi na Vifaa vya Mkononi"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Ruhusu marekebisho ya mipangilio na uoanishaji wa Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Ruhusu ubadilishanaji wa data <xliff:g id="DEVICE_NAME">%1$s</xliff:g> inapogusa kifaa kingine chenye NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Ruhusu ubadilishaji wa data kompyuta ndogo inapogusa kifaa kingine"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Ruhusu ubadilishaji wa data simu inapogusa kifaa kingine"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Eneo"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Ruhusu programu zitumie maelezo yako ya eneo"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Nyuma"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Endelea"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Badili utumie hifadhi inayohamishika"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Andaa diski kwa njia nyingine"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kadi"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Badilisha mipangilio ya kila programu inayotuma arifa"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Programu zinazoonyeshwa kwenye kifaa"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Programu hii haitumii mipangilio iliyoboreshwa"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Mipangilio zaidi"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Mipangilio zaidi inapatikana ndani ya programu hii"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Huduma za kisaidizi cha Uhalisia Pepe"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Hakuna programu zilizosakinishwa ambazo zinaweza kutekeleza huduma za kisaidizi cha Uhalisia Pepe."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Ungependa kuruhusu huduma za Uhalisia Pepe katika <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Imezuiwa na kampuni iliyokuuzia kifaa kwa mkopo"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Mzazi anahitajika"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Mpe mzazi wako simu ili kuanza kuweka mipangilio hii"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Ili upate maelezo zaidi, wasiliana na Msimamizi wako wa TEHAMA"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Maelezo zaidi"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Msimamizi wako anaweza kufuatilia na kudhibiti programu na data zinazohusiana na wasifu wako wa kazini, ikiwa ni pamoja na mipangilio, ruhusa, ufikiaji wa shirika, shughuli za mtandao na maelezo ya mahali kilipo kifaa."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Mabadiliko chaguomsingi yaliyozimwa"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Hamna programu"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Mabadiliko ya uoanifu wa programu yanaweza tu kubadilishwa kwa ajili ya programu zinazoweza kutatuliwa. Sakinisha programu inayoweza kutatuliwa na ujaribu tena."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Mipangilio hii haitumiki katika simu hii"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Mipangilio hii haitumiki katika kompyuta kibao hii"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Mipangilio hii haitumiki katika kifaa hiki"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Mtumiaji wa sasa hawezi kubadilisha mipangilio hii"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Inategemea mipangilio mingine"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Mipangilio haipatikani"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Akaunti"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Jina la kifaa"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Maelezo ya msingi"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Hakuna mitandao iliyopatikana."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Imeshindwa kupata mitandao. Jaribu tena."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(hairuhusiwi)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Hakuna SIM kadi"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Hakuna SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Hamna"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Badilisha"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Imeunganishwa"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Hakuna muunganisho"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Data ya simu haitaunganishwa kiotomatiki"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Ungependa kuzima data ya mtandao wa simu?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Nenosiri si sahihi"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Ili uanze kusikiliza, weka katikati msimbo wa QR ulio hapa chini"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Msimbo wa QR si muundo sahihi"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Programu zilizojumuishwa kwenye kifaa cha mkononi"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Programu zilizojumuishwa kwenye kifaa cha mkononi"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Maelezo ya uwazi ya programu zilizojumuishwa kwenye kifaa cha mkononi"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Ina matangazo"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Maelezo ya Wasanidi Programu"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Maelezo ya Mawasiliano"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Maelezo"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Sera ya Faragha"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Aina"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Programu Iliyojumuishwa kwenye Kifaa cha Mkononi"</string>
 </resources>
