--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC స్ట్యాక్ లాగింగ్ స్థాయిని పెంచండి"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC వెర్బోస్ విక్రేత డీబగ్ లాగ్"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"బగ్‌రిపోర్ట్‌లలో అదనపు పరికర-నిర్దిష్ట విక్రేత లాగ్‌లను చేర్చండి, ఇది ప్రైవేట్ సమాచారాన్ని కలిగి ఉండవచ్చు."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"ఫిల్టర్ చేయని NFC NCI స్నూప్ లాగ్"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"ప్రైవేట్ సమాచారాన్ని కలిగి ఉండే NFC ప్యాకెట్ల వివరాలను క్యాప్చర్ చేయండి."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"పరికరాన్ని రీస్టార్ట్ చేయాలా?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"వివరణాత్మక NFC లాగింగ్ డెవలప్ చేసే ప్రయోజనాల కోసం మాత్రమే ఉద్దేశించబడింది. బగ్ రిపోర్ట్‌లలో అదనపు NFC డేటా చేర్చబడింది, ఇందులో ప్రైవేట్ సమాచారం ఉండవచ్చు. ఈ సెట్టింగ్‌ని మార్చడానికి మీ పరికరాన్ని రీస్టార్ట్ చేయండి."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"వివిధ శైలులు, వాల్‌పేపర్‌లు, మరిన్నింటిని ప్రయత్నించండి"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"స్క్రీన్ సేవర్"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"స్క్రీన్ సేవర్"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"బెడ్ టైమ్ మోడ్ ఆన్‌లో ఉండడం వల్ల అందుబాటులో లేదు"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"స్క్రీన్ సేవర్‌ను ఉపయోగించండి"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ఛార్జ్ చేసేటప్పుడు లేదా డాక్ చేసినప్పుడు"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ఛార్జింగ్‌లో ఉన్నప్పుడు"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ఫోన్ యొక్క ఇంటర్నెట్ కనెక్షన్‌ని బ్లూటూత్ ద్వారా షేర్ చేయండి"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ఈథర్‌నెట్ టెథరింగ్"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ఈథర్‌నెట్ ద్వారా ఫోన్ ఇంటర్నెట్ కనెక్షన్‌ను షేర్ చేయండి"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"మీ మొబైల్ డేటా కనెక్షన్ ద్వారా ఇతర పరికరాలకు ఇంటర్నెట్‌ని అందించడం కోసం హాట్‌స్పాట్ మరియు టెథెరింగ్‌ని ఉపయోగించండి. ఇంకా, యాప్‌లు సమీప పరికరాలతో కంటెంట్‌ని షేర్ చేయడం కోసం హాట్‌స్పాట్‌ని క్రియేట్ చేయవచ్చు."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"మీ Wi‑Fi లేదా మొబైల్ డేటా కనెక్షన్ ద్వారా ఇతర పరికరాలకు ఇంటర్నెట్‌ను అందించడం కోసం హాట్‌స్పాట్ అలాగే టెథరింగ్‌ను ఉపయోగించండి. సమీప పరికరాలతో కంటెంట్‌ను షేర్ చేయడం కోసం యాప్‌లు కూడా హాట్‌స్పాట్‌ను క్రియేట్ చేయవచ్చు."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"సహాయం"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"డేటా వినియోగాన్ని పరిమితం చేయడం"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"మీరు సెట్ చేసిన పరిమితిని చేరుకున్న తర్వాత మీ టాబ్లెట్‌లో మొబైల్ డేటా ఆఫ్ చేయబడుతుంది.\n\nడేటా వినియోగాన్ని మీ టాబ్లెట్ ఒక పద్ధతిలో గణిస్తే, అదే వినియోగ పరిమాణాన్ని మీ క్యారియర్ వేరే పద్ధతిలో గణించవచ్చు, కనుక కనిష్ట పరిమితిని సెట్ చేయడం మంచిది."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"మీరు సెట్ చేసిన పరిమితిని చేరుకున్న తర్వాత మీ ఫోన్‌లో మొబైల్ డేటా ఆఫ్ చేయబడుతుంది.\n\nడేటా వినియోగాన్ని మీ ఫోన్ ఒక పద్ధతిలో గణిస్తే, అదే వినియోగ పరిమాణాన్ని మీ క్యారియర్ వేరే పద్ధతిలో గణించవచ్చు. కాబ‌ట్టి క‌నిష్ఠ‌ పరిమితిని సెట్ చేయడం మంచిది."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"నేపథ్య డేటాను పరిమితం చేయాలా?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"మీరు నేపథ్య మొబైల్ డేటాను నియంత్రిస్తే, Wi‑Fiకి కనెక్ట్ చేయకుంటే కొన్ని యాప్‌లు మరియు సేవలు పని చేయవు."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"మీరు నేపథ్య మొబైల్ డేటాను నియంత్రిస్తే, Wi‑Fiకి కనెక్ట్ చేయకుంటే కొన్ని యాప్‌లు మరియు సేవలు పని చేయవు.\n\nఈ సెట్టింగ్ ఈ టాబ్లెట్‌లోని వినియోగదారులందరిపై ప్రభావం చూపుతుంది."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"మీరు నేపథ్య మొబైల్ డేటాను నియంత్రిస్తే, Wi‑Fiకి కనెక్ట్ చేయకుంటే కొన్ని యాప్‌లు మరియు సేవలు పని చేయవు.\n\nఈ సెట్టింగ్ ఈ ఫోన్‌లోని వినియోగదారులందరిపై ప్రభావం చూపుతుంది."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"హెచ్చరిక"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"పరిమితి"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"తీసివేయబడిన యాప్‌లు"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (సిఫార్సు చేయబడింది)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS మెసేజ్‌లు"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"మొబైల్ డేటా ఆఫ్‌లో ఉన్నప్పుడు పంపుతుంది &amp; అందుకుంటుంది"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"కాల్స్ మాట్లాడే సమయంలో ఉపయోగించే డేటా"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"కేవలం కాల్స్ మాట్లాడే సమయంలో మొబైల్ డేటాను ఉపయోగించడానికి ఈ SIMను అనుమతించండి"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"కార్యాలయ సిమ్"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"యాప్ &amp; కంటెంట్ యాక్సెస్"</string>
     <string name="user_rename" msgid="8735940847878484249">"పేరు మార్చండి"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi‑Fi మరియు మొబైల్ సెట్టింగ్‌ల ఎడిట్‌ను అనుమతించండి"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"బ్లూటూత్"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"బ్లూటూత్ జతలు మరియు సెట్టింగ్‌ల యొక్క ఎడిట్‌ను అనుమతించండి"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"ఈ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> మరో NFC పరికరాన్ని తాకినప్పుడు డేటా మార్పిడి అనుమతించండి"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"టాబ్లెట్ మరో పరికరాన్ని తాకినప్పుడు డేటా మార్పిడిని అనుమతించండి"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"ఫోన్ మరో పరికరాన్ని తాకినప్పుడు డేటా మార్పిడిని అనుమతించండి"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"లొకేషన్"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"మీ లొకేషన్ సమాచారాన్ని ఉపయోగించడానికి యాప్‌లను అనుమతించండి"</string>
     <string name="wizard_back" msgid="8257697435061870191">"వెనుకకు"</string>
     <string name="wizard_next" msgid="3884832431439072471">"తర్వాత"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"పోర్టబుల్‌కు స్విచ్ చేయి"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"మరొక విధంగా ఫార్మాట్ చేయి"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"సిమ్ కార్డులు"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"నోటిఫికేషన్‌లు పంపే ప్రతి యాప్ కోసం సెట్టింగ్‌లను మార్చండి"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"పరికరంలో కనిపించే యాప్‌లు"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"మెరుగుపరిచిన సెట్టింగ్‌లను ఈ యాప్ సపోర్ట్ చేయదు"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"మరిన్ని సెట్టింగ్‌లు"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"ఈ యాప్‌లో మరిన్ని సెట్టింగ్‌లు అందుబాటులో ఉన్నాయి"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR సహాయక సర్వీసులు"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ఇన్‌స్టాల్ చేసిన యాప్‌లేవీ వాటిని VR సహాయక సేవలుగా రన్ చేయాల్సిందిగా రిక్వెస్ట్ చేయలేదు."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> కోసం VR సేవ యాక్సెస్‌ను అనుమతించాలా?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"మీ క్రెడిట్ ప్రొవైడర్ ద్వారా బ్లాక్ చేయబడింది"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"తల్లి/తండ్రి అవసరం"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"దీనిని సెటప్ చేయడం ప్రారంభించడానికి ఫోన్‌ను మీ తల్లి/తండ్రికి అప్పగించండి"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"మరింత సమాచారం కోసం, మీ IT అడ్మిన్‌ను కాంటాక్ట్ చేయండి"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"మరిన్ని వివరాలు"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"సెట్టింగ్‌లు, అనుమతులు, కార్పొరేట్ యాక్సెస్, నెట్‌వర్క్ యాక్టివిటీ మరియు డివైజ్ యొక్క లొకేషన్ సమాచారంతో పాటు మీ కార్యాలయ ప్రొఫైల్‌కి అనుబంధితంగా ఉన్న యాప్‌లు మరియు డేటాను మీ అడ్మిన్ పర్యవేక్షించగలరు, మేనేజ్ చేయగలరు ."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"ఆటోమేటిక్‌గా డిజేబుల్‌ చేయబడిన మార్పులు"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"యాప్‌లు ఏవీ లేవు"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"డీబగ్ చేయగల యాప్‌లకు మాత్రమే యాప్ అనుకూలత మార్పులు సవరించబడతాయి. డీబగ్ చేయగల యాప్‌ను ఇన్‌స్టాల్ చేసి మళ్లీ ట్రై చేయండి."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ఈ ఫోన్‌లో సెట్టింగ్‌కి మద్దతు లేదు"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ఈ టాబ్లెట్‌లో సెట్టింగ్‌కి మద్దతు లేదు"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ఈ పరికరంలో సెట్టింగ్‌కి మద్దతు లేదు"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"సెట్టింగ్‌ని ప్రస్తుత వినియోగదారు మార్చడం సాధ్యం కాదు"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"మరో సెట్టింగ్‌పై ఆధారపడి ఉంటుంది"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"సెట్టింగ్ అందుబాటులో లేదు"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"ఖాతా"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"పరికరం పేరు"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"ప్రాథమిక సమాచారం"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"నెట్‌వర్క్‌లు కనుగొనబడలేదు."</string>
     <string name="network_query_error" msgid="6406348372070035274">"నెట్‌వర్క్‌లను కనుగొనడం సాధ్యపడలేదు. మళ్లీ ప్రయత్నించండి."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(నిషేధించబడింది)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM కార్డ్ లేదు"</string>
     <string name="sim_card" msgid="6381158752066377709">"సిమ్"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"సిమ్ లేదు"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"ఏదీ కాదు"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"మార్చండి"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"కనెక్ట్ చేయబడింది"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"కనెక్షన్ లేదు"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"మొబైల్ డేటా ఆటోమెటిక్‌గా కనెక్ట్ అవ్వదు"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"మొబైల్ డేటాను ఆఫ్ చేయాలా?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"పాస్‌వర్డ్ తప్పు"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"వినడం ప్రారంభించడానికి, కింద ఉన్న QR కోడ్‌ను మధ్యలో ఉంచండి"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR కోడ్ చెల్లుబాటు అయ్యే ఫార్మాట్‌లో లేదు"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"మొబైల్ బండిల్ యాప్‌లు"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"మొబైల్ బండిల్ యాప్‌లు"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"మొబైల్ బండిల్ చేయబడిన యాప్‌ల పారదర్శకత సమాచారం"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"యాడ్‌లను కలిగి ఉంది"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"డెవలపర్(లు) సమాచారం"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"కాంటాక్ట్ సమాచారం"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"వివరణ"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"గోప్యతా పాలసీ"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"కేటగిరీ"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"మొబైల్ బండిల్ యాప్"</string>
 </resources>
