--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC yığını günlük kaydı seviyesini artırın"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC ayrıntılı satıcı hata ayıklama günlüğü"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Hata raporlarına cihaza özgü ek satıcı günlükleri ekleyin. Bu günlükler gizli bilgiler içerebilir."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI filtresiz araştırma günlüğü"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Özel bilgiler içerebilen ayrıntılı NFC paketlerini yakalayın."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Cihaz Yeniden Başlatılsın mı?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Ayrıntılı NFC günlük kaydı, yalnızca geliştirme amaçlıdır. Hata raporlarında, özel bilgiler içerebilen ek NFC verileri yer alır. Bu ayarı değiştirmek için cihazınızı yeniden başlatın."</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Farklı stiller, duvar kağıtları ve daha fazlasını deneyin"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekran koruyucu"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekran koruyucu"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Uyku vakti modu açık olduğundan kullanılamıyor"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ekran koruyucu kullan"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Şarj olurken veya yuvadayken"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Şarj olurken"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Telefonun internet bağlantısını Bluetooth üzerinden paylaşın"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet tethering"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Telefonun internet bağlantısını Ethernet üzerinden paylaşın"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Mobil veri bağlantınızdan başka cihazlara internet bağlantısı sağlamak için hotspot ve tethering\'i kullanın. Yakınlardaki cihazlarla içerik paylaşmak için uygulamalar da hotspot oluşturabilir."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Kablosuz veya mobil veri bağlantınızdan başka cihazlara internet bağlantısı sağlamak için hotspot ve tethering\'i kullanın. Yakınlardaki cihazlarla içerik paylaşmak için uygulamalar da hotspot oluşturabilir."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Yardım"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Veri kullanımını sınırlama"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Tabletiniz ayarladığınız sınıra ulaştığında, mobil veriyi kapatır.\n\nVeri kullanımı tabletiniz tarafından ölçülür ve operatörünüz kullanımı farklı bir şekilde hesaplayabilir. Bu nedenle, risk almadan güvenli bir sınır ayarlayın."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Telefonunuz ayarladığınız sınıra ulaştığında mobil veriyi kapatır.\n\nVeri kullanımı telefonunuz tarafından ölçülür ve operatörünüz kullanımı farklı bir şekilde hesaplayabilir. Bu nedenle, risk almadan güvenli bir sınır ayarlayın."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Arka plan verileri kısıtlansın mı?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Arka plan mobil veri kullanımını kısıtlarsanız kablosuz ağa bağlanmadığınız sürece bazı uygulamalar ve hizmetler çalışmaz."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Arka plan mobil veri kullanımını kısıtlarsanız kablosuz ağa bağlanmadığınız sürece bazı uygulamalar ve hizmetler çalışmaz.\n\nBu ayar, bu tabletteki tüm kullanıcıları etkiler."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Arka plan mobil veri kullanımını kısıtlarsanız kablosuz ağa bağlanmadığınız sürece bazı uygulamalar ve hizmetler çalışmaz.\n\nBu ayar, bu telefondaki tüm kullanıcıları etkiler."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"uyarısı"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"sınır"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Kaldırılan uygulamalar"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (önerilir)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS mesajları"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Mobil veri kapalıyken mesaj gönderip alın"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Arama sırasında veri kullanımı"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Bu SIM, mobil veri için yalnızca telefon araması sırasında kullanılabilsin"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"İş SIM\'i"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Uygulama ve içerik erişimi"</string>
     <string name="user_rename" msgid="8735940847878484249">"ADI DEĞİŞTİR"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Kablosuz ve Mobil ayarlarını değiştirmeye izin ver"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Bluetooth eşlemelerini ve ayarlarını değiştirmeye izin ver"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Bu <xliff:g id="DEVICE_NAME">%1$s</xliff:g>, başka bir NFC cihazına dokunduğunda veri alışverişi yapmalarına izin verin"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Tablet başka cihaza dokunduğunda veri alışverişine izin ver"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Telefon başka cihaza dokunduğunda veri alışverişine izin ver"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Konum"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Uygulamanın konum bilgilerimi kullanmasına izin ver"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Geri"</string>
     <string name="wizard_next" msgid="3884832431439072471">"İleri"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Taşınabilire geçiş yap"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Başka şekilde biçimlendir"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kartlar"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Bildirim gönderen her uygulamanın ayarlarını değiştirin"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Cihazda gösterilen uygulamalar"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Bu uygulama, gelişmiş ayarları desteklemiyor"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Diğer ayarlar"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Bu uygulamada daha fazla ayar mevcut"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR yardımcı hizmetleri"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Yüklü hiçbir uygulama VR yardımcı hizmetleri olarak çalışma isteğinde bulunmadı."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"<xliff:g id="SERVICE">%1$s</xliff:g> için VR hizmetine erişim izni verilsin mi?"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Sözleşmeli cihaz sağlayıcız tarafından engellendi"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ebeveyn izni gerekiyor"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Bunu ayarlamaya başlamak için telefonu annenize veya babanıza verin"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Daha fazla bilgi için BT yöneticinizle iletişime geçin"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Diğer ayrıntılar"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Yöneticiniz ayarlar, izinler, kurumsal erişim, ağ etkinliği ve cihazın konum bilgileri dahil iş profilinizle ilişkilendirilen uygulamaları ve verileri izleyip yönetebilir."</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Varsayılan olarak devre dışı değişiklikler"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Mevcut uygulama yok"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Uygulama uyumluluğuyla ilgili değişiklikler sadece hata ayıklaması yapılabilecek uygulamalar için değiştirilebilir. Hata ayıklaması yapılabilecek bir uygulama yükleyip tekrar deneyin"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Ayar bu telefonda desteklenmiyor"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Ayar bu tablette desteklenmiyor"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Ayar bu cihazda desteklenmiyor"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Ayar geçerli kullanıcı tarafından değiştirilemez"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Bu ayar başka bir ayara bağlı"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Ayar kullanılamıyor"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Hesap"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Cihaz adı"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Temel bilgiler"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Hiçbir ağ bulunamadı."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Ağ bulunamadı. Tekrar deneyin."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(yasak)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM kart yok"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM kart yok"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Yok"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Değiştir"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Bağlı"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Bağlantı yok"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobil veri otomatik olarak bağlanmıyor"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Mobil veri kapatılsın mı?"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Yanlış şifre"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Dinlemeye başlamak için aşağıdaki QR kodunu ortalayın"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kodu geçerli bir biçim değil"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobil paket uygulamalar"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobil paket uygulamalar"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobil paket uygulamalarla ilgili şeffaflık bilgileri"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Reklam içerir"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Geliştirici Bilgileri"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"İletişim Bilgileri"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Açıklama"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Gizlilik Politikası"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategori"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobil Paket Uygulama"</string>
 </resources>
