--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -827,7 +827,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Підвищити рівень реєстрації в журналі стеку NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Детальний журнал налагодження для постачальника NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Додаткові журнали постачальників для певних пристроїв включатимуться у звіти про помилки, які можуть містити приватну інформацію."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Нефільтрований журнал інтерфейсу NFC NCI"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Реєструватимуться детальні пакети даних NFC, які можуть містити приватну інформацію."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Перезапустити пристрій?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Ведення детальних журналів NFC призначене лише для розробки. Додаткові дані NFC включаються у звіти про помилки, які можуть містити приватну інформацію. Щоб змінити це налаштування, перезапустіть пристрій."</string>
@@ -1217,8 +1218,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Спробуйте інші стилі, фонові малюнки тощо"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Заставка"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"заставка"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Недоступно в нічному режимі"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Використовувати заставку"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Під час заряджання чи в док-станції"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Під час заряджання"</string>
@@ -1511,6 +1511,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Надавати доступ до Інтернету через телефон за допомогою Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-модем"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Надавати доступ до Інтернету через телефон за допомогою Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Надавайте іншим пристроям доступ до Інтернету через мобільне передавання даних за допомогою точки доступу та телефона в режимі модема. Додатки також можуть створювати точку доступу, щоб ділитися вмістом із пристроями поруч."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Надавайте іншим пристроям доступ до Інтернету через Wi-Fi або мобільне передавання даних за допомогою точки доступу й режиму модема. Додатки також можуть створювати точку доступу, щоб ділитися контентом із пристроями поруч."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Довідка"</string>
@@ -2776,10 +2778,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Обмежити використання трафіку"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Планшет вимкне мобільний трафік, коли буде досягнено вказаного ліміту.\n\nОскільки методи обліку використання трафіку телефона й оператора можуть відрізнятися, радимо встановити занижений ліміт."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Телефон вимкне мобільний трафік, коли буде досягнено вказаного ліміту.\n\nОскільки методи обліку використання трафіку телефона й оператора можуть відрізнятися, радимо встановити занижений ліміт."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Обмежити використання фонових даних?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Якщо обмежити мобільний трафік у фоновому режимі, деякі додатки та служби працюватимуть лише під час з’єднання з Wi-Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Якщо обмежити мобільний трафік у фоновому режимі, деякі додатки та служби працюватимуть лише під час з’єднання з Wi-Fi.\n\nЦе налаштування використовується для всіх користувачів цього планшета."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Якщо обмежити мобільний трафік у фоновому режимі, деякі додатки та служби працюватимуть лише під час з’єднання з Wi-Fi.\n\nЦе налаштування використовується для всіх користувачів цього телефона."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"Попередження"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"Ліміт"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Видалені програми"</string>
@@ -3025,8 +3023,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (рекомендовано)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-повідомлення"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Надсилати й отримувати, коли вимкнено мобільний трафік"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Передавання даних під час викликів"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Використовувати цю SIM-карту для мобільного передавання даних лише під час викликів"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Робоча SIM-карта"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Доступ до додатків і вмісту"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПЕРЕЙМЕНУВАТИ"</string>
@@ -3038,15 +3038,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Дозволити вносити зміни в налаштування Wi‑Fi і мобільних мереж"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Дозволити вносити зміни в створення пари та налаштування Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Дозволити обмін даними, коли пристрій <xliff:g id="DEVICE_NAME">%1$s</xliff:g> торкнеться іншого пристрою з NFC"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Дозволити обмін даними, коли планшетний ПК торкнеться іншого пристрою"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Дозволити обмін даними, коли телефон торкнеться іншого пристрою"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Місцезнаходження"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Дозволити програмам використовувати дані про місцезнаходження"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Назад"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Далі"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Як портативне сховище"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Форматувати по-іншому"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM-карти"</string>
@@ -3504,10 +3499,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Змінюйте налаштування для кожного додатка, що надсилає сповіщення"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Додатки, показані на пристрої"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Цей додаток не підтримує розширені налаштування"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Інші налаштування"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Інші налаштування доступні в цьому додатку"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Допоміжні VR-сервіси"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Установлені додатки не запитували доступу для роботи в режимі допоміжних VR-сервісів."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Надати VR-сервісу доступ до сервісу <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3996,6 +3989,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Налаштування заблокував кредитор"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Потрібна згода батьків"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Щоб розпочати налаштування, передай телефон комусь із батьків"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Щоб дізнатися більше, зверніться до системного адміністратора"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Докладніше"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Адміністратор може відстежувати та контролювати додатки й дані, пов’язані з вашим робочим профілем, зокрема налаштування, дозволи, корпоративний доступ, активність у мережі чи інформацію про місцезнаходження пристрою."</string>
@@ -4463,12 +4458,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Зміни, вимкнені за умовчанням"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Немає додатків"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Налаштування сумісності можна змінювати лише для налагоджуваних додатків. Установіть налагоджуваний додаток і спробуйте ще раз."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Налаштування не підтримується на цьому телефоні"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Налаштування не підтримується на цьому планшеті"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Налаштування не підтримується на цьому пристрої"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Поточний користувач не може змінити налаштування"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Залежить від іншого налаштування"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Налаштування недоступне"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Обліковий запис"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Назва пристрою"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Основна інформація"</string>
@@ -4503,7 +4493,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Мереж не знайдено"</string>
     <string name="network_query_error" msgid="6406348372070035274">"Не вдалося знайти мережу. Повторіть спробу."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(заборонено)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Немає SIM-карти"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM-карта"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Немає SIM-карти"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Не вказано"</string>
@@ -4822,6 +4811,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Змінити"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Підключено"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Немає з\'єднання"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мобільний Інтернет не підключатиметься автоматично"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Вимкнути мобільний трафік?"</string>
@@ -4976,14 +4969,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Неправильний пароль"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Щоб почати слухати аудіо, наведіть камеру на QR-код нижче"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Недійсний формат QR-коду"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мобільні додатки у форматі набору App Bundle"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мобільні додатки у форматі набору App Bundle"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Інформація щодо прозорості коду мобільних додатків у форматі набору App Bundle"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Містить рекламу"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Інформація про розробників"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Контактна інформація"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Опис"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Політика конфіденційності"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категорія"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мобільний додаток у форматі набору App Bundle"</string>
 </resources>
