--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -789,7 +789,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"‏NFC انبار کا لاگ ان لیول بڑھائیں"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"‏NFC وربوس وینڈر ڈیبگ لاگ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"اضافی آلے کے مخصوص وینڈر لاگز کو بگ رپورٹس میں شامل کریں جن میں نجی معلومات شامل ہو سکتی ہیں۔"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"‏NFC NCI کا غیر فلٹر شدہ اسنوپ لاگ"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"‏تفصیلی NFC پیکٹس کیپچر کریں جن میں نجی معلومات شامل ہو سکتی ہیں۔"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"آلہ ری اسٹارٹ کریں؟"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"‏تفصیلی NFC لاگنگ صرف ترقیاتی مقاصد کے لیے ہے۔ اضافی NFC ڈیٹا بگ رپورٹس میں شامل ہے جس میں نجی معلومات شامل ہو سکتی ہیں۔ اس ترتیب کو تبدیل کرنے کے لیے اپنا آلہ ری اسٹارٹ کریں۔"</string>
@@ -1173,8 +1174,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"مختلف اسٹائل، وال پیپرز، اور مزید بہت کچھ آزمائیں"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"اسکرین سیور"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"اسکرین سیور"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"دستیاب نہیں ہے کیونکہ بیڈ ٹائم موڈ آن ہے"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"اسکرین سیور کا استعمال کریں"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ڈاک سے منسلک یا چارج ہونے کے دوران"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"چارج ہوتے وقت"</string>
@@ -1465,6 +1465,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"بلوٹوتھ کے ذریعے فون کے انٹرنیٹ کنکشن کا اشتراک کریں"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ایتھرنیٹ ٹیدرنگ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"‏Ethernet ایتھرنیٹ کے ذریعے فون کے انٹرنیٹ کنیکشن کا اشتراک کریں"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"اپنے موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کیلئے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کیلئے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"‏اپنے Wi‑Fi یا موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کے لیے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کے لیے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"مدد"</string>
@@ -2694,10 +2696,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"ڈیٹا کا استعمال محدود کرنا"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"آپ کا ٹیبلیٹ آپ کی مقرر کردہ حد کو پہنچ جانے پر موبائل ڈیٹا کو آف کردے گا۔\n\nچونکہ ڈیٹا کے استعمال کی پیمائش آپ کے ٹیبلیٹ کے ذریعے کی جاتی ہے اور آپ کا کیریئر استعمال کا حساب مختلف طریقے سے کرسکتا ہے لہذا ایک محتاط حد مقرر کرنے پر غور کریں۔"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"آپ کا فون آپ کی مقرر کردہ حد کو پہنچ جانے پر موبائل ڈیٹا کو آف کردے گا۔\n\nچونکہ ڈیٹا کے استعمال کی پیمائش آپ کے فون کے ذریعے کی جاتی ہے اور آپ کا کیریئر استعمال کا حساب مختلف طریقے سے کرسکتا ہے لہذا ایک محتاط حد مقرر کرنے پر غور کریں۔"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"پس منظر ڈیٹا محدود کریں؟"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"‏اگر آپ پس منظر کا موبائل ڈیٹا محدود کرتے ہیں تو کچھ ایپس اور سروسز اس وقت تک کام نہیں کریں گی جب تک آپ Wi‑Fi سے منسلک نہ ہوں۔"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"‏اگر آپ پس منظر کا موبائل ڈیٹا محدود کرتے ہیں تو کچھ ایپس اور سروسز اس وقت تک کام نہیں کریں گی جب تک آپ Wi‑Fi سے منسلک نہ ہوں۔\n\nیہ ترتیب اس ٹیبلیٹ پر موجود سبھی صارفین کو متاثر کرتی ہے۔"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"‏اگر آپ پس منظر کا موبائل ڈیٹا محدود کرتے ہیں تو کچھ ایپس اور سروسز اس وقت تک کام نہیں کریں گی جب تک آپ Wi‑Fi سے منسلک نہ ہوں۔\n\nیہ ترتیب اس فون پر موجود سبھی صارفین کو متاثر کرتی ہے۔"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"وارننگ"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"حد"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"ہٹائی گئی ایپس"</string>
@@ -2867,7 +2865,7 @@
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"دستیاب ایپس انسٹال کریں"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"کنٹیکٹ لیس ادائیگیاں"</string>
     <string name="nfc_default_payment_settings_title" msgid="2150504446774382261">"ڈیفالٹ ادائیگی ایپ"</string>
-    <string name="nfc_default_payment_footer" msgid="978535088340021360">"ادائیگیوں کی ایپ کا استعمال کرتے ہوئے ادائیگی کرنے کے لیے، اپنے آلے کے پچھلے حصے کو ادائیگی ٹرمنل پر رکھیں"</string>
+    <string name="nfc_default_payment_footer" msgid="978535088340021360">"ادائیگیوں کی ایپ استعمال کرتے ہوئے ادائیگی کرنے کیلئے اپنے آلے کے پچھلے حصے کو پیمنٹ ٹرمنل پر رکھیں"</string>
     <string name="nfc_more_details" msgid="1700713533074275233">"مزید جانیں"</string>
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"ڈیفالٹ ادائیگی ایپ کے طور پر ورک ایپ کو سیٹ کریں؟"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"ورک ایپ کا استعمال کرتے ہوئے ادائیگی کرنے کے لیے:"</string>
@@ -2939,8 +2937,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"‏LTE (تجویز کردہ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"‏MMS پیغامات"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"موبائل ڈیٹا آف ہونے پر بھیجیں اور وصول کریں"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"کالز کے دوران ڈیٹا"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"‏صرف کالز کے دوران موبائل ڈیٹا کے لیے اس SIM کے استعمال کی اجازت دیں"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"‏دفتر کا SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ایپ اور مواد تک رسائی"</string>
     <string name="user_rename" msgid="8735940847878484249">"نام تبدیل کریں"</string>
@@ -2952,15 +2952,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"‏Wi‑Fi اور موبائل ترتیبات میں ترمیم کی اجازت دیں"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"بلوٹوتھ"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"بلوٹوتھ کا جوڑا بنانے اور ترتیبات میں ترمیم کی اجازت دیں"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"‏دوسرے NFC آلہ سے اس <xliff:g id="DEVICE_NAME">%1$s</xliff:g> کے ٹچ ہونے پر ڈیٹا کے تبادلہ کی اجازت دیں"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"ٹیبلٹ دوسرے آلہ سے ٹچ ہونے پر ڈیٹا کے تبادلے کی اجازت دیں"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"فون دوسرے آلہ سے ٹچ ہونے پر ڈیٹا کے تبادلے کی اجازت دیں"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"مقام"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"ایپس کو اپنے مقام کی معلومات کا استعمال کرنے دیں"</string>
     <string name="wizard_back" msgid="8257697435061870191">"واپس جائیں"</string>
     <string name="wizard_next" msgid="3884832431439072471">"اگلا"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"پورٹیبل پر سوئچ کریں"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"کسی اور طرح فارمیٹ کریں"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"‏SIM کارڈز"</string>
@@ -3412,10 +3407,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"اطلاعات بھیجنے والی ہر ایپ کی ترتیبات تبدیل کریں"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"آلے پر دکھائی دینے والی ایپس"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"یہ ایپ بہتر کردہ ترتیبات کو سپورٹ نہیں کرتی ہے"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"مزید ترتیبات"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"اس ایپ کے اندر مزید ترتیبات دستیاب ہیں"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"‏VR مددگار سروسز"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"‏کسی انسٹال کردہ ایپ نے VR مددگار سروسز کے طور پر چلائے جانے کی درخواست نہیں کی ہے۔"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"‏<xliff:g id="SERVICE">%1$s</xliff:g> کیلئے VR سروس کی رسائی کی اجازت دیں؟"</string>
@@ -3880,6 +3873,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"آپ کے کریڈٹ فراہم کنندہ نے مسدود کیا ہے"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"والد/والدہ درکار ہیں"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"اس کا سیٹ اپ شروع کرنے کیلئے فون کو اپنے والدین کے حوالے کریں"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"‏مزید معلومات کے لیے، اپنے IT منتظم سے رابطہ کریں"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"مزید تفصیلات"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"آپ کا منتظم آپ کے دفتری پروفائل سے وابستہ ایپس اور ڈیٹا، بشمول ترتیبات، اجازتیں، کارپوریٹ رسائی، نیٹ ورک کی سرگرمی اور آلہ کے مقام کی معلومات مانیٹر اور منظم کر سکتا ہے۔"</string>
@@ -4325,12 +4320,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"غیر فعال کردہ ڈیفالٹ تبدیلیاں"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"کوئی ایپ دستیاب نہیں"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"ایپ کی موافقت کی تبدیلیاں صرف قابل ڈیبگ اپپس کے لیے ہی ترمیم کی جا سکتی ہیں۔ قابل ڈیبگ ایپ انسٹال کریں اور دوبارہ کوشش کریں۔"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"ترتیب اس فون پر تعاون یافتہ نہیں ہے"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"ترتیب اس ٹیبلیٹ پر تعاون یافتہ نہیں ہے"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"ترتیب اس آلے پر تعاون یافتہ نہیں ہے"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"موجودہ صارف ترتیب کو تبدیل نہیں کر سکتا"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"دوسری ترتیب پر منحصر ہے"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"ترتیب غیر دستیاب ہے"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"اکاؤنٹ"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"آلے کا نام"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"بنیادی معلومات"</string>
@@ -4365,7 +4355,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"کوئی نیٹ ورک نہیں ملا۔"</string>
     <string name="network_query_error" msgid="6406348372070035274">"نیٹ ورکس نہیں مل سکے۔ دوبارہ کوشش کریں۔"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(ممنوع)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"‏کوئی SIM کارڈ نہیں ہے"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"‏کوئی SIM نہیں ہے"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"کوئی نہیں"</string>
@@ -4682,6 +4671,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"تبدیل کریں"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"منسلک ہے"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"کوئی کنکشن نہیں"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"موبائل ڈیٹا خودکار طور پر منسلک نہیں ہوگا"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"موبائل ڈیٹا آف کریں؟"</string>
@@ -4836,14 +4829,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"غلط پاس ورڈ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"‏سننا شروع کرنے کے لیے، نیچے کے QR کوڈ کو سینٹر میں رکھیں"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"‏QR کوڈ درست فارمیٹ نہیں ہے"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"موبائل بنڈل کردہ ایپس"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"موبائل بنڈل کردہ ایپس"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"موبائل بنڈل کردہ ایپس کی شفافیت کی معلومات"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"اشتہارات پر مشتمل ہے"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ڈویلپر (ڈویلپرز) کی معلومات"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"رابطہ کی معلومات"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"تفصیل"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"رازداری کی پالیسی"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"زمرہ"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"موبائل بنڈل کردہ ایپ"</string>
 </resources>
