--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -795,7 +795,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Nfc steklarini jurnalga yozish darajasini oshirish"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC taʼminotchisining batafsil debag jurnali"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Xatoliklar hisobotiga shaxsiy maʼlumotlari bor qurilmaga aloqador taʼminotchining qoʻshimcha yozuvlari kiradi."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI filtrlanmagan translatsiyasi jurnali"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Shaxsiy maʼlumotlar bor NFC paketlarining tafsilotlarini yozib olish."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Qurilma qayta ishga tushirilsinmi?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Tafsilotli NFC jurnali faqat ishlab chiqish maqsadlari uchun moʻljallangan. Qoʻshimcha NFC maʼlumotlari shaxsiy maʼlumotlar bor xato hisobotlariga kiritilgan. Bu sozlamani oʻzgartirish uchun qurilmangizni qayta ishga tushiring."</string>
@@ -1179,8 +1180,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Boshqa uslub va fon rasmlaridan foydalaning."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekran lavhasi"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekran lavhasi"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Uyqu vaqti rejimi yoniqligi sababli ishlamaydi"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ekran lavhasidan foydalanish"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Quvvat yoki dok-stansiya"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Quvvat olayotganda"</string>
@@ -1471,6 +1471,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Telefondagi internetni Bluetooth orqali tarqatish"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet modem rejimi"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Telefondagi internetni Ethernet orqali tarqatish"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Boshqa qurilmalarga mobil internetni tarqatish uchun hotspot va modem rejimidan foydalaning. Ilovalar ham yaqin-atrofdagi qurilmalarga kontent ulashish uchun hotspot yarata oladi."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Boshqa qurilmalarga Wi-Fi yoki mobil internet orqali internetni tarqatish uchun hotspot va modem rejimlaridan foydalaning. Ilovalar ham yaqin-atrofdagi qurilmalarga kontent ulashish uchun hotspot yarata oladi."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Yordam"</string>
@@ -2700,10 +2702,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Trafik sarfini cheklash"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Siz o‘rnatgan cheklovga yetib kelgach, planshetingizdagi mobil internet o‘chadi.\n\nBunda, internetdan foydalanish miqdori telefoningiz tomonidan hisoblangani uchun aloqa operatoringizning hisob-kitoblari undan farq qilishi mumkin. Shuning uchun, cheklov qo‘yishda zaxira miqdorini ham e’tiborga oling."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Siz o‘rnatgan cheklovga yetib kelgach, telefoningizdagi mobil internet o‘chadi.\n\nBunda, internetdan foydalanish miqdori telefoningiz tomonidan hisoblangani uchun aloqa operatoringizning hisob-kitoblari undan farq qilishi mumkin. Shuning uchun, cheklov qo‘yishda zaxira miqdorini ham e’tiborga oling."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Fondagi internetni cheklash"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Agar orqa fonda mobil internetdan foydalanishni cheklab qo‘ysangiz, ba’zi ilova va xizmatlar Wi-Fi tarmog‘iga ulanmaguningizcha ishlamaydi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Agar orqa fonda mobil internetdan foydalanishni cheklab qo‘ysangiz, ba’zi ilova va xizmatlar Wi-Fi tarmog‘iga ulanmaguningizcha ishlamaydi.\n\nUshbu sozlama mazkur planshetdagi barcha foydalanuvchilarga ta’sir qiladi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Agar orqa fonda mobil internetdan foydalanishni cheklab qo‘ysangiz, ba’zi ilova va xizmatlar Wi-Fi tarmog‘iga ulanmaguningizcha ishlamaydi.\n\nUshbu sozlama mazkur telefondagi barcha foydalanuvchilarga ta’sir qiladi."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="12">"Ogohlantirish"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="12">"Cheklov"</font>\n<font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"O‘chirilgan ilovalar"</string>
@@ -2945,8 +2943,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (tavsiya etiladi)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS xabarlar"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Mobil internet oʻchiqligida MMS xabarlaridan foydalanish"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Chaqiruv vaqtida internet"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Bu SIM kartadan faqat chaqiruvlar vaqtida mobil internet uchun foydalanish"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"Ishchi SIM karta"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Ilovalar va kontentga kirish"</string>
     <string name="user_rename" msgid="8735940847878484249">"QAYTA NOMLASH"</string>
@@ -2958,15 +2958,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Wi‑Fi va uyali tarmoq sozlamalarini o‘zgartirishga ruxsat berish"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Bluetooth aloqasi va sozlamalarini o‘zgartirishga ruxsat berilsinmi?"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> qurilmasi boshqa NFC qurilmaga tekkizilganda axborot almashinuviga ruxsat berish"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Planshet boshqa qurilmaga tekkizilganda axborot almashinuviga ruxsat berish"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Telefon boshqa qurilmaga tekkizilganda axborot almashinuviga ruxsat berish"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Joylashuv"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Ilovalarga joylashuvingiz ma‘lumotidan foydalanishga ruxsat berish"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Orqaga"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Keyingisi"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Ixchamlashtirish"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Boshqa usulda formatlash"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM kartalar"</string>
@@ -3418,10 +3413,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Bildirishnomalar yuboruvchi har bir ilova uchun sozlamalarni oʻzgartirish"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Qurilmada chiqadigan ilovalar"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Bu ilovada kengaytirilgan sozlamalar ishlamaydi"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Boshqa sozlamalar"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Boshqa sozlamalar bu ilova ichida joylashgan"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Yordamchi VR xizmatlar"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Hech qanday ilova yordamchi VR xizmatlar sifatida ishga tushirilishiga ruxsat so‘ramagan."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR xizmatiga “<xliff:g id="SERVICE">%1$s</xliff:g>” xizmatidan foydalanishga ruxsat berilsinmi?"</string>
@@ -3886,6 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Kredit idorangiz tomonidan bloklandi"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ota-ona zarur"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Buni sozlash uchun telefonni ota-onangizga bering"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Batafsil axborot olish uchun administratoringizga murojaat qiling"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Qo‘shimcha tafsilotlar"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratoringiz ishchi profilingiz bilan bog‘liq ilova va ma’lumotlarni, jumladan, sozlamalar, ruxsatnomalar, korporativ kirish huquqi, tarmoqdagi faollik va qurilmaning joylashuvi haqidagi ma’lumotlarni kuzatishi va boshqarishi mumkin."</string>
@@ -4331,12 +4326,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Standart yoqilmagan oʻzgartirishlar"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Mos ilova topilmadi"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Ilova mosligini faqat nosozliklari aniqlanadigan ilovalarda oʻzgartirish mumkin. Nosozliklari aniqlanadigan ilovani oʻrnating va qayta urining."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Parametr bu telefonda ishlamaydi"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Parametr bu planshetda ishlamaydi"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Parametr bu qurilmada ishlamaydi"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Joriy foydalanuvchi parametrni o‘zgartira olmaydi"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Bu sozlama boshqa parametrlarga bog‘liq"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Parametr mavjud emas"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Hisob"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Qurilma nomi"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Asosiy axborot"</string>
@@ -4371,7 +4361,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Birorta ham tarmoq topilmadi."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Hech qanday tarmoq topilmadi. Qaytadan urining."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(taqiqlangan)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"SIM karta solinmagan"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"SIM kartasiz"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Hech qanday"</string>
@@ -4688,6 +4677,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Oʻzgarish"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Ulandi"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Internetga ulanmagansiz"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobil internet avtomatik ulanmaydi"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Mobil internet uzilsinmi?"</string>
@@ -4842,14 +4835,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Parol xato"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Tinglashni boshlash uchun quyidagi QR kodni markazga joylang"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR xato formatda"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobil terma ilovalar"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobil terma ilovalar"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobil terma ilovalar shaffofligi axboroti"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Ichida reklama bor"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Dasturchi axboroti"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontakt axboroti"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Tavsif"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Maxfiylik siyosati"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Turkum"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobil terma ilova"</string>
 </resources>
