--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -795,7 +795,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Tăng cấp độ ghi nhật ký của ngăn xếp NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Nhật ký gỡ lỗi chi tiết của nhà cung cấp về NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Đưa nhật ký bổ sung dành riêng cho thiết bị của nhà cung cấp vào báo cáo lỗi. Nhật ký này có thể chứa thông tin riêng tư."</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"Nhật ký theo dõi chưa lọc của NCI về NFC"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Thu thập các gói dữ liệu chi tiết về NFC. Gói dữ liệu này có thể chứa thông tin riêng tư."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Khởi động lại thiết bị?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Chế độ ghi nhật ký chi tiết về Giao tiếp phạm vi gần (NFC) chỉ dành cho mục đích phát triển. Dữ liệu bổ sung về NFC sẽ được đưa vào báo cáo lỗi. Dữ liệu này có thể chứa thông tin riêng tư. Hãy khởi động lại thiết bị để thay đổi chế độ cài đặt này."</string>
@@ -1179,8 +1180,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Thử nhiều kiểu, hình nền và các tùy chọn khác"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Trình bảo vệ màn hình"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"trình bảo vệ màn hình"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Không dùng được vì chế độ giờ đi ngủ đang bật"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Sử dụng trình bảo vệ màn hình"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Khi sạc hoặc gắn vào đế sạc"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Trong khi sạc"</string>
@@ -1471,6 +1471,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Chia sẻ kết nối Internet của điện thoại qua Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Chia sẻ Internet qua Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Chia sẻ kết nối Internet của điện thoại qua Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Sử dụng tính năng điểm phát sóng và chia sẻ Internet để cho phép các thiết bị khác kết nối với Internet thông qua dữ liệu di động của bạn. Các ứng dụng cũng có thể tạo điểm phát sóng để chia sẻ nội dung với thiết bị ở gần."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Dùng tính năng điểm phát sóng và chia sẻ Internet để cho phép các thiết bị khác kết nối với Internet thông qua dữ liệu di động hoặc Wi-Fi của bạn. Các ứng dụng cũng có thể tạo điểm phát sóng để chia sẻ nội dung với thiết bị ở gần."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Trợ giúp"</string>
@@ -2700,10 +2702,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"Giới hạn mức sử dụng dữ liệu"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"Máy tính bảng của bạn sẽ tắt dữ liệu di động khi đạt đến giới hạn bạn đặt.\n\nDo việc sử dụng dữ liệu được máy tính bảng của bạn tính và nhà cung cấp dịch vụ có thể tính mức sử dụng khác nhau nên hãy xem xét việc đặt giới hạn vừa phải."</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"Điện thoại sẽ tắt dữ liệu di động khi đạt đến hạn mức mà bạn đã đặt.\n\nMức sử dụng dữ liệu do điện thoại tính toán, nhà mạng có thể có cách tính khác. Vì vậy, hãy cân nhắc đặt hạn mức dữ liệu ở mức hợp lý."</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"Giới hạn dữ liệu nền?"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"Nếu bạn hạn chế dữ liệu di động nền thì một số ứng dụng và dịch vụ sẽ không hoạt động trừ khi bạn kết nối với Wi-Fi."</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"Nếu bạn hạn chế dữ liệu di động nền thì một số ứng dụng và dịch vụ sẽ không hoạt động trừ khi bạn kết nối với Wi‑Fi.\n\nCài đặt này ảnh hưởng đến tất cả người dùng trên máy tính bảng này."</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"Nếu bạn hạn chế dữ liệu di động nền thì một số ứng dụng và dịch vụ sẽ không hoạt động trừ khi bạn kết nối với Wi‑Fi.\n\nCài đặt này ảnh hưởng đến tất cả người dùng trên điện thoại này."</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"cảnh báo"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"giới hạn"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"Ứng dụng đã xóa"</string>
@@ -2945,8 +2943,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (khuyên dùng)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Tin nhắn MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Gửi và nhận khi dữ liệu di động đã tắt"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"Dữ liệu trong lúc gọi"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"Chỉ cho phép dùng SIM này cho dữ liệu di động trong lúc gọi"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"SIM công việc"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Quyền truy cập nội dung và ứng dụng"</string>
     <string name="user_rename" msgid="8735940847878484249">"ĐỔI TÊN"</string>
@@ -2958,15 +2958,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"Cho phép sửa đổi cài đặt Di động và Wi‑Fi"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"Bluetooth"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"Cho phép sửa đổi cài đặt và ghép nối Bluetooth"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"Cho phép trao đổi dữ liệu khi <xliff:g id="DEVICE_NAME">%1$s</xliff:g> này kết nối với thiết bị NFC khác"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"Cho phép trao đổi dữ liệu khi máy tính bảng chạm vào thiết bị khác"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"Cho phép trao đổi dữ liệu khi điện thoại chạm vào thiết bị khác"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"Vị trí"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Cho phép ứng dụng sử dụng thông tin vị trí của bạn"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Quay lại"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Tiếp theo"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"Chuyển sang định dạng di động"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"Định dạng theo cách khác"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"Thẻ SIM"</string>
@@ -3418,10 +3413,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Thay đổi chế độ cài đặt cho từng ứng dụng gửi thông báo"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Ứng dụng hiển thị trên thiết bị"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Ứng dụng này không hỗ trợ chế độ cài đặt nâng cao"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Chế độ cài đặt khác"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Các chế độ cài đặt khác có sẵn trong ứng dụng này"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"Dịch vụ trình trợ giúp thực tế ảo"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Không có ứng dụng đã cài đặt nào yêu cầu được chạy dưới dạng dịch vụ trình trợ giúp thực tế ảo."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"Cho phép quyền truy cập dịch vụ VR đối với <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3886,6 +3879,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Đã bị nhà cung cấp dịch vụ tín dụng của bạn chặn"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Cần có sự đồng ý của cha mẹ"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Hãy đưa điện thoại cho cha mẹ bạn để họ bắt đầu thiết lập phương thức này"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Để biết thêm thông tin, hãy liên hệ với quản trị viên CNTT của bạn"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Thông tin chi tiết khác"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Quản trị viên của bạn có thể giám sát và quản lý các ứng dụng cũng như dữ liệu được liên kết với hồ sơ công việc của bạn, bao gồm cài đặt, quyền, quyền truy cập vào dữ liệu công ty, hoạt động mạng và thông tin vị trí của thiết bị."</string>
@@ -4331,12 +4326,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"Các thay đổi bị tắt theo mặc định"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"Không có ứng dụng"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"Bạn chỉ có thể sửa đổi các thay đổi về khả năng tương thích của ứng dụng đối với các ứng dụng có thể gỡ lỗi. Hãy cài đặt một ứng dụng có thể gỡ lỗi rồi thử lại."</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"Điện thoại này không hỗ trợ cài đặt"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"Máy tính bảng này không hỗ trợ cài đặt"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"Thiết bị này không hỗ trợ cài đặt."</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"Người dùng hiện tại không thể thay đổi cài đặt"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"Phụ thuộc vào một cài đặt khác"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"Cài đặt không hoạt động"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"Tài khoản"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"Tên thiết bị"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"Thông tin cơ bản"</string>
@@ -4371,7 +4361,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"Không tìm thấy mạng nào."</string>
     <string name="network_query_error" msgid="6406348372070035274">"Không tìm thấy mạng. Hãy thử lại."</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(cấm)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"Không có thẻ SIM"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"Không có SIM"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"Không có"</string>
@@ -4688,6 +4677,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Thay đổi"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Đã kết nối"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Không có kết nối"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Dữ liệu di động sẽ không tự động kết nối"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Tắt dữ liệu di động?"</string>
@@ -4842,14 +4835,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Mật khẩu sai"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Để bắt đầu nghe, căn sao cho mã QR dưới nằm chính giữa"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Định dạng của mã QR không hợp lệ"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Ứng dụng di động dạng gói"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Ứng dụng di động dạng gói"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Thông tin về tính minh bạch của ứng dụng di động dạng gói"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Có quảng cáo"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Thông tin về nhà phát triển"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Thông tin liên hệ"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Nội dung mô tả"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Chính sách quyền riêng tư"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Danh mục"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Ứng dụng di động dạng gói"</string>
 </resources>
