--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -791,7 +791,8 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"提高 NFC 堆疊記錄等級"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC 詳細供應商偵錯記錄"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"在錯誤報告中包括其他裝置專屬供應商記錄，其中可能包含私人資料。"</string>
-    <string name="nfc_snoop_log_title" msgid="1072690687525472163">"NFC NCI 未篩選窺探記錄"</string>
+    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
+    <skip />
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"擷取詳細 NFC 封包，其中可能包含私人資料。"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"要重新啟動裝置嗎？"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"詳細 NFC 記錄僅適用於開發用途。錯誤報告中包括有其他 NFC 資料，其中可能包含私人資料。重新啟動裝置即可變更此設定。"</string>
@@ -1175,8 +1176,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"嘗試其他樣式和桌布等"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"螢幕保護程式"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"螢幕保護程式"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"睡眠模式開啟時無法使用"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"使用螢幕保護程式"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"充電或放上插座時"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"充電時"</string>
@@ -1467,6 +1467,8 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"透過藍牙分享手機的互聯網連線"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"以太網網絡共享"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"透過以太網分享手機的互聯網連線"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"使用熱點和網絡共享功能，透過您的流動數據連線提供互聯網服務給其他裝置。應用程式可以建立熱點，與附近的裝置分享內容。"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"使用熱點和網絡共享功能，讓其他裝置透過 Wi‑Fi 或流動數據連接到互聯網。應用程式亦可以建立熱點，與附近的裝置分享內容。"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"說明"</string>
@@ -2696,10 +2698,6 @@
     <string name="data_usage_limit_dialog_title" msgid="2053134451707801439">"限制數據用量"</string>
     <string name="data_usage_limit_dialog_mobile" product="tablet" msgid="6000062970083379466">"平板電腦的流動數據用量一達到設定的上限，便會關閉流動數據功能。\n\n由於此數據用量由您的平板電腦計算，而流動網絡供應商的用量計算方式可能不同，因此建議您設定較保守的上限。"</string>
     <string name="data_usage_limit_dialog_mobile" product="default" msgid="4942895670789168024">"手機的流動數據用量一達到設定的上限，便會關閉流動數據功能。\n\n由於此數據用量由您的手機計算，而流動網絡供應商的用量計算方式可能不同，因此建議您設定較保守的上限。"</string>
-    <string name="data_usage_restrict_background_title" msgid="2745551538820692821">"限制背景資料？"</string>
-    <string name="data_usage_restrict_background" msgid="1893102079135282794">"如果您限制背景流動數據用量，部分應用程式和服務必須在連線至 Wi-Fi 後才能運作。"</string>
-    <string name="data_usage_restrict_background_multiuser" product="tablet" msgid="5588623586867665419">"如果您限制背景流動數據用量，部分應用程式和服務必須在連線至 Wi-Fi 後才能運作。\n\n此設定會影響這部平板電腦的所有使用者。"</string>
-    <string name="data_usage_restrict_background_multiuser" product="default" msgid="6402714504088590463">"如果您限制背景流動數據用量，部分應用程式和服務必須在連線至 Wi-Fi 後才能運作。\n\n此設定會影響這部手機的所有使用者。"</string>
     <string name="data_usage_sweep_warning" msgid="2072854703184614828"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font>" "<font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"警告"</font></string>
     <string name="data_usage_sweep_limit" msgid="6947019190890086284"><font size="18">"<xliff:g id="NUMBER">^1</xliff:g>"</font><font size="9">"<xliff:g id="UNIT">^2</xliff:g>"</font>\n<font size="12">"限制"</font></string>
     <string name="data_usage_uninstalled_apps" msgid="9065885396147675694">"已移除的應用程式"</string>
@@ -2941,8 +2939,10 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (建議)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS 訊息"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"停用流動數據時收發短訊"</string>
-    <string name="data_during_calls_title" msgid="3940276893360429144">"通話時使用數據"</string>
-    <string name="data_during_calls_summary" msgid="2289050189544214759">"允許使用此 SIM 卡的流動數據 (只在通話時)"</string>
+    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
+    <skip />
+    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
+    <skip />
     <string name="work_sim_title" msgid="8999872928646924429">"啟用 SIM 卡"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"應用程式和內容存取權"</string>
     <string name="user_rename" msgid="8735940847878484249">"重新命名"</string>
@@ -2954,15 +2954,10 @@
     <string name="restriction_wifi_config_summary" msgid="920419010472168694">"允許修改 Wi‑Fi 和流動網絡設定"</string>
     <string name="restriction_bluetooth_config_title" msgid="220586273589093821">"藍牙"</string>
     <string name="restriction_bluetooth_config_summary" msgid="7558879931011271603">"允許修改藍牙配對和設定"</string>
-    <string name="restriction_nfc_enable_title" msgid="525512312298242911">"NFC"</string>
-    <string name="restriction_nfc_enable_summary_config" msgid="8065688740509581028">"允許這部 <xliff:g id="DEVICE_NAME">%1$s</xliff:g> 透過與另一部 NFC 裝置輕觸來傳輸數據"</string>
-    <string name="restriction_nfc_enable_summary" product="tablet" msgid="6397567147629410131">"允許平板電腦在與其他裝置接觸時交換資料"</string>
-    <string name="restriction_nfc_enable_summary" product="default" msgid="3331800894734678808">"允許手機在與其他裝置接觸時交換資料"</string>
     <string name="restriction_location_enable_title" msgid="4872281754836538066">"位置"</string>
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"允許應用程式使用您的位置資訊"</string>
     <string name="wizard_back" msgid="8257697435061870191">"返回"</string>
     <string name="wizard_next" msgid="3884832431439072471">"下一步"</string>
-    <string name="wizard_back_portable" msgid="5315939180781404882">"切換至外置儲存空間"</string>
     <string name="wizard_back_adoptable" msgid="1447814356855134183">"以其他方式格式化"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_settings_title" msgid="8392862852842113531">"SIM 卡"</string>
@@ -3414,10 +3409,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"分別為每個可傳送通知的應用程式變更設定"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"裝置上顯示的應用程式"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"此應用程式不支援進階設定"</string>
-    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
-    <skip />
-    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
-    <skip />
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"更多設定"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"您可在應用程式中使用更多設定"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR 助手服務"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"沒有已安裝的應用程式要求提供 VR 助手服務。"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"允許 VR 服務存取 <xliff:g id="SERVICE">%1$s</xliff:g> 嗎？"</string>
@@ -3882,6 +3875,8 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"已被您的信貸提供者封鎖"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"必須取得家長同意"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"必須將手機交給家長以開始進行這項設定"</string>
+    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
+    <skip />
     <string name="default_admin_support_msg" msgid="8816296554831532033">"如需瞭解詳情，請聯絡 IT 管理員"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"更多詳細資料"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"您的管理員可以監控及管理與工作設定檔相關的應用程式和資料，包括設定、權限、公司存取權、網絡活動，以及裝置的位置資料。"</string>
@@ -4327,12 +4322,7 @@
     <string name="platform_compat_default_disabled_title" msgid="3975847180953793602">"預設為已停用的變更"</string>
     <string name="platform_compat_dialog_title_no_apps" msgid="4387656000745989506">"沒有可用的應用程式"</string>
     <string name="platform_compat_dialog_text_no_apps" msgid="5715226015751055812">"您只能修改 debuggable 應用程式的兼容性。請安裝 debuggable 應用程式，然後再試。"</string>
-    <string name="unsupported_setting_summary" product="default" msgid="1085229417771470172">"此手機不支援這項設定"</string>
-    <string name="unsupported_setting_summary" product="tablet" msgid="7402414129786489664">"此平板電腦不支援這項設定"</string>
-    <string name="unsupported_setting_summary" product="device" msgid="3422953459122926833">"此裝置不支援這項設定"</string>
-    <string name="disabled_for_user_setting_summary" msgid="9096036019081828639">"目前的使用者無法變更設定"</string>
     <string name="disabled_dependent_setting_summary" msgid="4508635725315852504">"必須一併變更其他設定"</string>
-    <string name="unknown_unavailability_setting_summary" msgid="9060213910510360231">"無法變更設定"</string>
     <string name="my_device_info_account_preference_title" msgid="9197139254007133175">"帳戶"</string>
     <string name="my_device_info_device_name_preference_title" msgid="8053298498727237971">"裝置名稱"</string>
     <string name="my_device_info_basic_info_category_title" msgid="381963187269356548">"基本資料"</string>
@@ -4367,7 +4357,6 @@
     <string name="empty_networks_list" msgid="6519489879480673428">"找不到網絡。"</string>
     <string name="network_query_error" msgid="6406348372070035274">"找不到網絡，請再試一次。"</string>
     <string name="forbidden_network" msgid="7404863971282262991">"(禁止)"</string>
-    <string name="no_sim_card" msgid="1497407489810953863">"沒有 SIM 卡"</string>
     <string name="sim_card" msgid="6381158752066377709">"SIM 卡"</string>
     <string name="wifi_no_sim_card" msgid="7144290066491585672">"沒有 SIM 卡"</string>
     <string name="wifi_no_related_sim_card" msgid="3568255415415630510">"無"</string>
@@ -4684,6 +4673,10 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"變更"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"已連線"</string>
+    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
+    <skip />
+    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
+    <skip />
     <string name="mobile_data_no_connection" msgid="905897142426974030">"沒有連線"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"不會使用流動數據自動連線"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"要關閉流動數據嗎？"</string>
@@ -4838,14 +4831,4 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"密碼錯誤"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"如要開始收聽，請將掃瞄器對準下方的 QR 碼"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR 碼格式無效"</string>
-    <string name="mobile_bundled_apps" msgid="2489314376883098549">"流動組合應用程式"</string>
-    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"流動組合應用程式"</string>
-    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"流動組合應用程式透明度政策資料"</string>
-    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"包含廣告"</string>
-    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"開發人員資料"</string>
-    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"聯絡資料"</string>
-    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"說明"</string>
-    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"私隱權政策"</string>
-    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"類別"</string>
-    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"流動組合應用程式"</string>
 </resources>
